--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "إذا تم عرض \"02\"، تخطي هذه الخطوة.\nإذا تم عرض \"0\"، فانقر فوق مفتاح التبريد/التجميد المكثف لتمكين Wi-Fi على الجهاز.\nستعرض الشاشة الرقم \"01\" لفترة وجيزة وتتغير إلى \"02\" تلقائيًا.",
     "cooling_config_wifi_step3": "انتقل باستخدام مفاتيح الأسهم وحدد \"S\".\nقم بتأكيد \"S\" بالضغط على مفتاح التبريد/التجميد المكثف.\nسيبدأ مفتاح التبريد/التجميد المكثف في الوميض. شبكة الجهاز مفتوحة الآن للاتصال لمدة 3 دقائق.",
     "cooling_config_wifi_step1_pair": "اضبط الجهاز على ظروف التشغيل العادية. انقر مع الاستمرار على رمز Wi-Fi لمدة 3 ثوانٍ حتى تسمع صوت تنبيه. سيبدأ رمز Wi-Fi في الوميض وسيظهر \"05\". لقد دخلت إلى قائمة اتصال الشبكة.",
-    "cooling_config_wifi_step2_pair": "انتقل باستخدام مفاتيح الأسهم وحدد \"P\".\nقم بتأكيد \"P\" بالضغط على مفتاح التبريد/التجميد المكثف.\nسيبدأ مفتاح التبريد/التجميد المكثف في الوميض. شبكة الجهاز مفتوحة الآن للاقتران لمدة 5 دقائق.",
+    "cooling_config_wifi_step2_pair": "انتقل باستخدام مفاتيح الأسهم واختر \"P\". أكِّد \"P\" بالضغط على مفتاح التبريد/التجميد المكثف. سيبدأ مفتاح التبريد/التجميد المكثف في الوميض. شبكة الجهاز مفتوحة الآن للإقران لمدة 3 دقائق. انقر فوق \"التالي\" للمتابعة.",
     "dw_config_wifi_step1": "قم بتشغيل الجهاز. انتقل باستخدام مفاتيح الأسهم إلى الإعدادات. اضغط على أيقونة القائمة للدخول إلى الإعدادات.",
     "dw_config_wifi_step2": "في قائمة الإعدادات، ابحث عن NETWORK وأكد باستخدام مفتاح القائمة للدخول.",
     "dw_config_wifi_step3": "انتقل إلى \"تنشيط SoftAP\" وقم بالتأكيد باستخدام مفتاح القائمة. شبكة هذا الجهاز مفتوحة الآن للاتصال بها لمدة 5 دقائق.\nانقر فوق Next للمتابعة.",
@@ -3415,6 +3415,7 @@
     "use_humidity": "استخدم صندوق الرطوبة لتنظيم الرطوبة",
     "same_day": "في نفس اليوم",
     "w_temp_set": "ما هي درجة الحرارة التي يجب ضبطها؟",
+    "asko": "أسكو",
     "eco_meter": "مقياس البيئة",
     "asko_eco_meter_desc": "## هو مؤشر ذكي مفيد لتحديد تأثيرك البيئي بناءً على البرنامج المختار والخيارات الإضافية عندما يتعلق الأمر باستهلاك الطاقة والمياه والمنظفات.",
     "wm86_autodose_desc": "بدلاً من التسبب في مشاكل، دع الغسالة تقيس الجرعة الصحيحة من المنظف. تقيس غسالاتنا ذات نظام الجرعة التلقائية المنظف مقابل حمولة الغسيل ومستوى الأوساخ وعسر الماء ونوع البرنامج ودرجة الحرارة. الجرعة المثالية دائمًا ولا مزيد من الجرعة الزائدة. هنا يمكنك ضبط إعداداتك الافتراضية للجرعة التلقائية.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "لا يوجد تسخين مسبق",
     "CL_DV_OV_fast_preheat_desc": "التسخين المسبق السريع هو أسرع طريقة لتسخين الفرن مسبقًا. يستغرق الأمر حوالي 7 دقائق.",
     "CL_DV_OV_preheat_desc": "التسخين المسبق هو أفضل طريقة لتسخين الفرن مسبقًا مع مراعاة نوع الطبق. يستغرق الأمر حوالي 10 دقائق.",
-    "CL_DV_OV_no_preheat_desc": "ليس من الضروري دائمًا تسخين الفرن مسبقًا. على سبيل المثال لإعادة تسخين بعض الأطعمة."
+    "CL_DV_OV_no_preheat_desc": "ليس من الضروري دائمًا تسخين الفرن مسبقًا. على سبيل المثال لإعادة تسخين بعض الأطعمة.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "إن تمكين الملاحة الذكية للطاقة قد يقلل من استهلاك الطاقة، ولكنه قد يؤدي أيضًا إلى إبطاء سرعة التبريد.",
+    "CL_DV_RF_ice_maker_mode": "وضع صانع الثلج",
+    "CL_CF_SD_smart_delay": "تأخير ذكي",
+    "CL_CF_SD_settings_subtitle": "سوف يستخدم الجهاز ساعات الذروة عند استخدام وضع التأخير.",
+    "CL_CF_SD_add_zone": "إضافة منطقة",
+    "CL_CF_SD_new_tariff_zone": "مناطق التعرفة الجديدة ##",
+    "CL_CF_SD_add_tariff": "إضافة التعرفة",
+    "CL_CF_SD_duplicate": "ينسخ",
+    "CL_CF_SD_delete_zone": "حذف المنطقة ",
+    "CL_CF_SD_tariff_zones_n": "مناطق التعرفة ##",
+    "CL_CF_SD_tariff_n": "التعرفة ##",
+    "CL_CF_SD_price": "سعر",
+    "CL_CF_SD_off_peak_delay": "تأخير خارج أوقات الذروة",
+    "CL_CF_SD_delay_subtitle": "سوف يستخدم الجهاز ساعات الذروة عند استخدام وضع التأخير.\n في حالة استخدام تركيبة مع End، يتم تطبيق شرط مسبق.",
+    "CL_CF_SD_off_peak_delay_not_set": "لم يتم تحديد التأخير خارج أوقات الذروة",
+    "CL_CF_SD_to_start_desc": "للبدء في استخدام الوظيفة، يجب عليك إعدادها في الإعدادات.",
+    "CL_CF_SD_best": "أفضل",
+    "CL_CF_SD_delete_title": "هل أنت متأكد أنك تريد حذف ##؟",
+    "CL_DV_OV_number_of_trays": "عدد الصواني",
+    "CL_DV_OV_baking_trays": "صواني الخبز",
+    "CL_DV_OV_1_tray": "1 صينية",
+    "CL_DV_OV_2_trays": "2 صينية",
+    "CL_DV_OV_multi_tray": "صينية متعددة",
+    "CL_DV_OV_multi": "متعدد",
+    "CL_DV_RF_ice_off": "إزالة الجليد",
+    "CL_DV_RF_ion_preservation": "هاي نانو",
+    "CL_DV_RF_ai_energy": "الذكاء الاصطناعي لتوفير الطاقة",
+    "CL_DV_RF_adaptive_temperature": "التكيف الذاتي",
+    "CL_DV_RF_normal_ice_making": "صناعة الثلج العادي",
+    "CL_DV_RF_quick_ice_making": "صنع الثلج بسرعة",
+    "CL_DV_OV_extra_auto_programs": "برامج السيارات",
+    "CL_DV_OV_extra_auto_programs_desc": "مجموعة من البرامج التلقائية المحددة مسبقًا. تساعدك البرامج التلقائية على الحصول على أفضل نتيجة لنوع الطعام أو الطبق المحدد.",
+    "CL_DV_OV_extra_browning_programs": "برامج براوننج",
+    "CL_DV_OV_extra_browning_programs_desc": "استخدم برامج تحمير الطعام المصممة خصيصًا. اضبط مستوى التحمير الذي تريده كنتيجة لطبقك.",
+    "CL_DV_OV_extra_cleaning": "تنظيف",
+    "CL_DV_OV_extra_cleaning_desc": "برامج التنظيف خطوة بخطوة وإرشادات حول كيفية الحفاظ على الفرن الخاص بك في حالة مثالية.",
+    "CL_DV_OV_extra_stage_cooking": "الطبخ المسرحي",
+    "CL_DV_OV_extra_stage_cooking_desc": "إنشاء برامج طبخ مخصصة، باستخدام ما يصل إلى 5 مراحل مختلفة.",
+    "CL_DV_OV_extra_defrost_desc": "مجموعة من البرامج المحددة مسبقًا لتذويب الأطعمة بشكل صحيح لضمان الجودة بعد تجميدها.",
+    "CL_DV_OV_extra_warming_desc": "أعد تسخين الأطعمة المطبوخة مسبقًا باستخدام برامج الفرن المحددة مسبقًا. يحافظ على أقصى قدر من النكهة والملمس.",
+    "CL_DV_OV_extra_non_food": "غير غذائي",
+    "CL_DV_OV_extra_non_food_desc": "قم بتسخين الأطباق أو الأحجار الساخنة أو تعقيم الزجاجات باستخدام برامج خاصة.",
+    "CL_DV_OV_extra_preserving_desc": "يساعد حفظ الطعام على جعله يدوم لفترة أطول مع الحفاظ على قيمته الغذائية وملمسه ونكهته.",
+    "CL_DV_OV_extra_fast_cool": "تبريد سريع",
+    "CL_DV_OV_extra_fast_cool_desc": "يقوم بتبريد الفرن بأسرع ما يمكن بعد الانتهاء من الخبز أو يمكن استخدامه لمواصلة تحضير الأطعمة الأخرى بسرعة.",
+    "CL_DV_OV_extra_celsius_grill_plate": "لوحة شواء سيلسيوس",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "مجموعة من برامج الفرن المعدة مسبقًا خصيصًا للخبز باستخدام لوحة الشواء Celsius.",
+    "CL_DV_OV_explore_all_extra": "استكشف جميع الإضافات",
+    "CL_DV_OV_extras": "إضافات",
+    "CL_CF_CS_midi_hih_setup_1": "قم بتشغيل الجهاز.",
+    "CL_CF_CS_midi_hih_setup_2": "اضغط مع الاستمرار على أيقونة Wi-Fi لمدة 5 ثوانٍ تقريبًا حتى يظهر \"CSt\".",
+    "CL_CF_CS_midi_hih_setup_3": "الآن أصبح الجهاز جاهزًا للاتصال لمدة 5 دقائق.\n انقر فوق التالي للمتابعة.",
+    "CL_CF_CS_midi_hih_pair_2": "اضغط مع الاستمرار على أيقونة Wi-Fi لمدة 8 ثوانٍ تقريبًا حتى يظهر \"PAr\".",
+    "CL_CF_CS_midi_hih_pair_3": "الآن أصبح الجهاز جاهزًا للإقران لمدة 3 دقائق.\n انقر فوق التالي للمتابعة.",
+    "ac_dimmer_air_des": "قم بإيقاف تشغيل LED لتجنب إزعاج ضوء LED لراحتك في الليل",
+    "e_verify_code": "أدخل رمز التحقق",
+    "CL_CF_CS_td76_and_wm86_pair_4": "شبكة الجهاز مفتوحة الآن للاتصال لمدة 3 دقائق.\n انقر فوق التالي للمتابعة.",
+    "CL_DV_OV_24_set_language": "ضبط اللغة",
+    "CL_DV_OV_24_time_date": "الوقت - التاريخ",
+    "CL_CF_CS_dw005_cs_step1": "تأكد من تفعيل البلوتوث على هاتفك. ثم قم بتشغيل جهازك واضغط على زر الإعدادات.",
+    "CL_CF_CS_dw005_cs_step2": "انتقل إلى \"الإعدادات المتقدمة\" بالضغط على أزرار الأسهم. اضغط على زر الإعدادات للدخول.",
+    "CL_CF_CS_dw005_cs_step3": "قم بإدخال رمز PIN بالضغط على تسلسل الأزرار التالي: I، II، I، III.",
+    "CL_CF_CS_dw005_cs_step4": "في قائمة \"الإعدادات المتقدمة\"، انتقل إلى \"WiFi\" واضغط على زر الإعدادات للدخول. داخل قائمة \"WiFi\"، تأكد من تمكين WiFi. إذا لم يكن كذلك، فاضغط على زر الإعدادات لتمكينه.",
+    "CL_CF_CS_dw005_cs_step5": "أثناء وجودك في قائمة \"WiFi\"، انتقل إلى \"إعداد الاتصال\" واضغط على زر الإعدادات للتنشيط. ",
+    "CL_CF_CS_dw005_cs_step6": "شبكة الجهاز مفتوحة الآن للاتصال لمدة 5 دقائق.\n انقر فوق التالي للمتابعة.",
+    "CL_CF_CS_dw005_pair_step1": "تأكد من تفعيل البلوتوث على هاتفك. ثم قم بتشغيل جهازك واضغط على زر الإعدادات.",
+    "CL_CF_CS_dw005_pair_step2": "انتقل إلى \"الإعدادات المتقدمة\" بالضغط على أزرار الأسهم. اضغط على زر الإعدادات للدخول.",
+    "CL_CF_CS_dw005_pair_step3": "قم بإدخال رمز PIN بالضغط على تسلسل الأزرار التالي: I، II، I، III.",
+    "CL_CF_CS_dw005_pair_step4": "في قائمة \"الإعدادات المتقدمة\"، انتقل إلى قائمة \"WiFi\" واضغط على زر الإعدادات للدخول. ثم انتقل إلى \"إضافة جهاز\" واضغط على زر الإعدادات للتفعيل.",
+    "CL_CF_CS_dw005_pair_step5": "شبكة الجهاز مفتوحة الآن لإضافة جهاز لمدة 3 دقائق.\n انقر فوق التالي للمتابعة.",
+    "CL_DV_DW_save_date_invalid": "لا يمكن أن يكون الشهر النهائي أصغر من الشهر الأولي!",
+    "CL_DV_OV_send_to_devices": "إرسال إلى الأجهزة"
 }
