--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "За да активирате Wi-Fi на уреда, докоснете бутона\nинтензивно охлаждане или замразяване. Дисплеят\nскоро ще покаже \"01\" и ще се промени на\n\"02\" автоматично.\nWi-Fi е готова за свързване.",
     "cooling_config_wifi_step3": "Придвижете се с бутоните със стрелки, за да изберете \"S\".\nПотвърдете \"S”, като докоснете бутона за интензивно\nохлаждане или замразяване.\nБутонът за интензивното охлаждане или замразяване започва\nда мига; мрежата на този уред е\nсега отворена за свързване в продължение на 3 минути.\nКликнете върху СЛЕДВАЩА, за да продължите.",
     "cooling_config_wifi_step1_pair": "Настройте уреда на нормална работа.\nДокоснете иконата Wi-Fi за приблизително 3\nсекунди.\nСимволът Wi-Fi започва да мига и на дисплея се появява '0'\n. Вие сте влезли в менюто за мрежова\nвръзка.",
-    "cooling_config_wifi_step2_pair": "Придвижете се с бутоните със стрелки, за да изберете 'P'.\nПотвърдете 'P', като докоснете бутона за интензивно\nохлаждане или замразяване.\nБутонът за интензивното охлаждане или замразяване започва\nда мига; мрежата на този уред е\nсега отворена за свързване в продължение на 5 минути.\nКликнете върху СЛЕДВАЩА, за да продължите.",
+    "cooling_config_wifi_step2_pair": "Навигирайте с клавишите със стрелки и изберете \"P\". Потвърдете „P“, като докоснете бутона за интензивно охлаждане/замразяване. Бутонът за интензивно охлаждане/замразяване ще започне да мига. Мрежата на устройството вече е отворена за сдвояване за 3 минути. Щракнете върху НАПРЕД, за да продължите.",
     "dw_config_wifi_step1": "Включете уреда. Навигирайте с бутоните със стрелки\n за настройките. Натиснете иконата МЕНЮ, за да въведете\nнастройките.",
     "dw_config_wifi_step2": "В менюто с настройките намерете МРЕЖА и\nпотвърдете с бутона за менюто, за да влезете.",
     "dw_config_wifi_step3": "Навигирайте до \"Select SoftAP\" и потвърдете\nс бутона за менюто. Мрежата на този уред\nвече е отворена за свързване в продължение на 2\nминути.\nКликнете върху СЛЕДВАЩА, за да продължите.",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "Долна половина",
     "STR_PROG_UPPER": "Горна половина",
     "STR_PROG_ANTI_ODOUR": "Против миризма",
-    "STR_PROG_SANI": "САНИ",
-    "STR_PROG_SANI_QUICK": "SANI Quick",
+    "STR_PROG_SANI": "Сани",
+    "STR_PROG_SANI_QUICK": "Сани Куик",
     "air_energy_hint": "Забележка: Функцията за статистика на консумацията на енергия е валидна само за климатик моно тип, но не и за климатик с мулти тип.",
     "now": "Сега",
     "washer_atag_delay_start_in": "Измиването се забави. Започва в",
@@ -3415,6 +3415,7 @@
     "use_humidity": "Използвайте кутия за влажност, за да регулирате влажността",
     "same_day": "Същия ден",
     "w_temp_set": "Каква температура да се зададе?",
+    "asko": "АСКО",
     "eco_meter": "Екометър",
     "asko_eco_meter_desc": "## е полезен интелигентен индикатор за определяне на вашето въздействие върху околната среда въз основа на избрана програма и допълнителни опции, когато става въпрос за консумация на енергия, вода и перилен препарат.",
     "wm86_autodose_desc": "Вместо да се борите, оставете пералната машина да измерва точно правилната доза перилен препарат. Нашите перални машини със система за автоматично дозиране измерват перилния препарат спрямо пране, ниво на замърсяване, твърдост на водата, тип програма и температура. Винаги перфектна дозировка и без повече предозиране. Тук можете да коригирате настройките си по подразбиране за автоматична доза.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Без предварително загряване",
     "CL_DV_OV_fast_preheat_desc": "Бързото предварително загряване е най-бързият начин за предварително загряване на вашата фурна. Отнема приблизително 7 минути.",
     "CL_DV_OV_preheat_desc": "Предварителното загряване е най-добрият начин за предварително загряване на вашата фурна предвид ястието. Отнема приблизително 10 минути.",
-    "CL_DV_OV_no_preheat_desc": "Не винаги е необходимо предварително загряване на фурната. Например за претопляне на определени храни."
+    "CL_DV_OV_no_preheat_desc": "Не винаги е необходимо предварително загряване на фурната. Например за претопляне на определени храни.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Активирането на AI Energy Navigation може да намали консумацията на енергия, но също така може да забави скоростта на охлаждане.",
+    "CL_DV_RF_ice_maker_mode": "Режим ледогенератор",
+    "CL_CF_SD_smart_delay": "Интелигентно забавяне",
+    "CL_CF_SD_settings_subtitle": "Уредът ще използва часове извън пиковите часове, когато използва режим на забавяне.",
+    "CL_CF_SD_add_zone": "Добавяне на зона",
+    "CL_CF_SD_new_tariff_zone": "Нови тарифни зони ##",
+    "CL_CF_SD_add_tariff": "Добавяне на тарифа",
+    "CL_CF_SD_duplicate": "Дубликат",
+    "CL_CF_SD_delete_zone": "Изтриване на зона ",
+    "CL_CF_SD_tariff_zones_n": "Тарифни зони ##",
+    "CL_CF_SD_tariff_n": "Тарифа ##",
+    "CL_CF_SD_price": "Цена",
+    "CL_CF_SD_off_peak_delay": "Закъснение извън пиковите часове",
+    "CL_CF_SD_delay_subtitle": "Уредът ще използва извън пиковите часове, когато използва режим на забавяне.\n Ако използвате комбинация с End at се прилага предварително условие.",
+    "CL_CF_SD_off_peak_delay_not_set": "Закъснението извън пиковите часове не е зададено",
+    "CL_CF_SD_to_start_desc": "За да започнете да използвате функцията, трябва да я настроите в настройките.",
+    "CL_CF_SD_best": "Най-доброто",
+    "CL_CF_SD_delete_title": "Сигурни ли сте, че искате да изтриете ##?",
+    "CL_DV_OV_number_of_trays": "Брой тави",
+    "CL_DV_OV_baking_trays": "ТАВИ ЗА ПЕЧЕНЕ",
+    "CL_DV_OV_1_tray": "1 тава",
+    "CL_DV_OV_2_trays": "2 тави",
+    "CL_DV_OV_multi_tray": "Мултитава",
+    "CL_DV_OV_multi": "Мулти",
+    "CL_DV_RF_ice_off": "Лед ИЗКЛ",
+    "CL_DV_RF_ion_preservation": "HI-NANO",
+    "CL_DV_RF_ai_energy": "AI Енергоспестяване",
+    "CL_DV_RF_adaptive_temperature": "Самоадаптиране",
+    "CL_DV_RF_normal_ice_making": "Обикновено правене на лед",
+    "CL_DV_RF_quick_ice_making": "Бързо приготвяне на лед",
+    "CL_DV_OV_extra_auto_programs": "Автоматични програми",
+    "CL_DV_OV_extra_auto_programs_desc": "Набор от предварително дефинирани автоматични програми. Автоматичните програми ви помагат да получите най-добрия резултат за избрания вид храна или ястие.",
+    "CL_DV_OV_extra_browning_programs": "Програми за браунинг",
+    "CL_DV_OV_extra_browning_programs_desc": "Използвайте специално разработени програми за печене. Задайте желаното ниво на запичане, което желаете като резултат за вашето ястие.",
+    "CL_DV_OV_extra_cleaning": "Почистване",
+    "CL_DV_OV_extra_cleaning_desc": "Програми за почистване стъпка по стъпка и инструкции как да поддържате фурната си в оптимално състояние.",
+    "CL_DV_OV_extra_stage_cooking": "Етапно готвене",
+    "CL_DV_OV_extra_stage_cooking_desc": "Създайте персонализирани програми за готвене, като използвате до 5 различни етапа.",
+    "CL_DV_OV_extra_defrost_desc": "Набор от предварително дефинирани програми за правилно размразяване на храни, за да се гарантира качеството им, след като са били замразени.",
+    "CL_DV_OV_extra_warming_desc": "Затопляйте предварително приготвени храни, като използвате предварително зададените програми на фурната. Запазва максимален вкус и текстура.",
+    "CL_DV_OV_extra_non_food": "Нехранителни",
+    "CL_DV_OV_extra_non_food_desc": "Загрейте вашите чинии, горещи камъни или стерилизирайте бутилки със специални програми.",
+    "CL_DV_OV_extra_preserving_desc": "Консервирането на храната помага храната ви да издържи по-дълго, като същевременно запазва хранителната стойност, текстурата и вкуса.",
+    "CL_DV_OV_extra_fast_cool": "Бързо охлаждане",
+    "CL_DV_OV_extra_fast_cool_desc": "Охлажда фурната възможно най-бързо след приключване на печенето или може да се използва за бързо продължаване на друго приготвяне на храна.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Целзий Грил Плоча",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Набор от предварително дефинирани програми на фурната специално за печене с грил плоча Celsius.",
+    "CL_DV_OV_explore_all_extra": "РАЗГЛЕДАЙТЕ ВСИЧКИ ЕКСТРА",
+    "CL_DV_OV_extras": "Екстри",
+    "CL_CF_CS_midi_hih_setup_1": "Включете устройството.",
+    "CL_CF_CS_midi_hih_setup_2": "Докоснете и задръжте иконата на Wi-Fi за приблизително 5 секунди, докато се появи „CSt“.",
+    "CL_CF_CS_midi_hih_setup_3": "Сега устройството е готово за свързване за 5 минути.\n Щракнете върху НАПРЕД, за да продължите.",
+    "CL_CF_CS_midi_hih_pair_2": "Докоснете и задръжте иконата Wi-Fi за приблизително 8 секунди, докато се появи „PAr“.",
+    "CL_CF_CS_midi_hih_pair_3": "Устройството вече е готово за сдвояване за 3 минути.\n Щракнете върху НАПРЕД, за да продължите.",
+    "ac_dimmer_air_des": "Изключете светодиода, за да избегнете LED светлината да пречи на почивката ви през нощта",
+    "e_verify_code": "Въведете код за потвърждение",
+    "CL_CF_CS_td76_and_wm86_pair_4": "Мрежата на устройството вече е отворена за връзка за 3 минути.\n Щракнете върху НАПРЕД, за да продължите.",
+    "CL_DV_OV_24_set_language": "Задайте език",
+    "CL_DV_OV_24_time_date": "Час - Дата",
+    "CL_CF_CS_dw005_cs_step1": "Уверете се, че вашият Bluetooth е активиран на телефона ви. След това включете уреда и докоснете бутона за настройки.",
+    "CL_CF_CS_dw005_cs_step2": "Отидете до „Разширени настройки“, като натиснете бутоните със стрелки. Натиснете бутона за настройки, за да влезете.",
+    "CL_CF_CS_dw005_cs_step3": "Въведете ПИН кода, като натиснете следната последователност от бутони: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "В менюто „Разширени настройки“ отидете на „WiFi“ и натиснете бутона за настройки, за да влезете. В менюто „Wifi“ се уверете, че WiFi е активиран. Ако не, натиснете бутона за настройки, за да активирате.",
+    "CL_CF_CS_dw005_cs_step5": "Докато все още сте в менюто „WiFi“, отидете на „Настройка на връзката“ и натиснете бутона за настройки, за да активирате. ",
+    "CL_CF_CS_dw005_cs_step6": "Мрежата на устройството вече е отворена за връзка за 5 минути.\n Щракнете върху НАПРЕД, за да продължите.",
+    "CL_CF_CS_dw005_pair_step1": "Уверете се, че вашият Bluetooth е активиран на телефона ви. След това включете уреда и докоснете бутона за настройки.",
+    "CL_CF_CS_dw005_pair_step2": "Отидете до „Разширени настройки“, като натиснете бутоните със стрелки. Натиснете бутона за настройки, за да влезете.",
+    "CL_CF_CS_dw005_pair_step3": "Въведете ПИН кода, като натиснете следната последователност от бутони: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "В менюто „Разширени настройки“ отидете на менюто „WiFi“ и натиснете бутона за настройки, за да влезете. След това отидете на „Добавяне на устройство“ и натиснете бутона за настройки, за да активирате.",
+    "CL_CF_CS_dw005_pair_step5": "Мрежата на устройството вече е отворена за добавяне на устройство за 3 минути.\n Щракнете върху НАПРЕД, за да продължите.",
+    "CL_DV_DW_save_date_invalid": "Крайният месец не може да бъде по-малък от началния!",
+    "CL_DV_OV_send_to_devices": "ИЗПРАТИ ДО УСТРОЙСТВА"
 }
