--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -579,7 +579,7 @@
     "Service": "Service",
     "Production": "Produktion",
     "Running": "Kører",
-    "Paused": "Pause",
+    "Paused": "Pauset",
     "water_hardness": "Vandets hårdhed",
     "sound_level": "LYDNIVEAU",
     "auto_door_opening": "Autodøråbning",
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "For at aktivere Wi-Fi på apparatet skal du trykke på den\nintensive køle- eller frysetast.\nDisplayet vil kort blive vist'01'og ændres\n'02'automatisk.\nWi-Fi er klar til tilslutning.",
     "cooling_config_wifi_step3": "Naviger med piletasterne og vælg \"S\".\nBekræft \"S\" ved at trykke på tasten intensiv køling/frysning.\nTasten for intensiv køling/frysning begynder at blinke. Enhedens netværk er nu åbent for tilslutning i 3 minutter.",
     "cooling_config_wifi_step1_pair": "Sæt apparatet til normal drift.\nTryk på Wi-Fi-ikonet i ca. tre\nsekunder.\nWi-Fi-symbolet begynder at blinke og'0'\nvises på displayet. Du gik ind i\nnetværksforbindelsesmenuen.",
-    "cooling_config_wifi_step2_pair": "Naviger med piletasterne for at vælge'P'.\nBekræft'P'ved at røre ved den intensive\nkøle- eller frysetast.\nDen intensive køle- eller frysetast begynder\nat\nblinke.\nKlik på NÆSTE for at fortsætte.",
+    "cooling_config_wifi_step2_pair": "Naviger med piletasterne og vælg \"P\". Bekræft \"P\" ved at trykke på tasten intensiv køling/frysning. Tasten for intensiv køling/frysning begynder at blinke. Enhedens netværk er nu åbent for parring i 3 minutter. Klik på NÆSTE for at fortsætte.",
     "dw_config_wifi_step1": "TÆND apparatet. Naviger med\npiletasterne til indstillinger. Tryk på MENU-ikonet for at komme ind i\nindstillingerne.",
     "dw_config_wifi_step2": "Find NETVÆRK i indstillingsmenuen, og\nbekræft med menutasten at komme ind.",
     "dw_config_wifi_step3": "Gå til\"Select SoftAP\", og bekræft\nmed menutasten. Dette apparats netværk\ner nu åbent for oprettelse af forbindelse i to\nminutter.\nKlik å NÆSTE for at fortsætte.",
@@ -1042,7 +1042,7 @@
     "dry": "Tørring",
     "level": "Niveau",
     "detergent": "Vaskepulver",
-    "softener": "Blødgøringsmiddel",
+    "softener": "Skyllemiddel",
     "pause": "PAUSE",
     "shut_down": "SLUK",
     "wash_machine_will_be_shut_down": "Apparatet vil blive lukket ned.",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "Halv vask,nede",
     "STR_PROG_UPPER": "Halv vask,oppe",
     "STR_PROG_ANTI_ODOUR": "Anti-lugt",
-    "STR_PROG_SANI": "SANI",
-    "STR_PROG_SANI_QUICK": "SANI hurtig",
+    "STR_PROG_SANI": "Sani",
+    "STR_PROG_SANI_QUICK": "Sani Quick",
     "air_energy_hint": "Bemærk: Funktionen til statistik for strømforbrug er kun gyldig for mono-type klimaanlæg, men ikke for multi-type klimaanlæg.",
     "now": "Nu",
     "washer_atag_delay_start_in": "Vask forsinket. Start ind",
@@ -3415,6 +3415,7 @@
     "use_humidity": "Brug fugtboks til at regulere fugtigheden",
     "same_day": "Samme dag",
     "w_temp_set": "Hvilken temperatur skal indstilles?",
+    "asko": "ASKO",
     "eco_meter": "Økomåler",
     "asko_eco_meter_desc": "## er en nyttig smart indikator til at bestemme din miljøpåvirkning baseret på det valgte program og ekstra muligheder, når det kommer til energi-, vand- og rengøringsmiddelforbrug.",
     "wm86_autodose_desc": "I stedet for at gøre det til en kamp, ​​lad vaskemaskinen måle præcis den rigtige dosering af vaskemiddel. Vores vaskemaskiner med Auto Dose system måler vaskemidlet mod vaskemængde, snavsniveau, vandhårdhed, programtype og temperatur. Altid perfekt dosering og ikke mere overdosering. Her kan du justere dine standardindstillinger for Auto Dose.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Ingen forvarmning",
     "CL_DV_OV_fast_preheat_desc": "Hurtig forvarmning er den hurtigste måde at forvarme din ovn på. Det tager cirka 7 minutter.",
     "CL_DV_OV_preheat_desc": "Forvarmning er den bedste måde at forvarme din ovn på i betragtning af retten. Det tager cirka 10 minutter.",
-    "CL_DV_OV_no_preheat_desc": "Det er ikke altid nødvendigt at forvarme din ovn. For eksempel til genopvarmning af visse fødevarer."
+    "CL_DV_OV_no_preheat_desc": "Det er ikke altid nødvendigt at forvarme din ovn. For eksempel til genopvarmning af visse fødevarer.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Aktivering af AI Energy Navigation kan reducere energiforbruget, men det kan også sænke kølehastigheden.",
+    "CL_DV_RF_ice_maker_mode": "Ismaskine-tilstand",
+    "CL_CF_SD_smart_delay": "Smart Delay",
+    "CL_CF_SD_settings_subtitle": "Apparatet vil bruge åbningstider, når der bruges forsinkelsestilstand.",
+    "CL_CF_SD_add_zone": "Tilføj zone",
+    "CL_CF_SD_new_tariff_zone": "Nye tarifzoner ##",
+    "CL_CF_SD_add_tariff": "Tilføj takst",
+    "CL_CF_SD_duplicate": "Duplikere",
+    "CL_CF_SD_delete_zone": "Slet zone ",
+    "CL_CF_SD_tariff_zones_n": "Tarifzoner ##",
+    "CL_CF_SD_tariff_n": "Takst ##",
+    "CL_CF_SD_price": "Pris",
+    "CL_CF_SD_off_peak_delay": "Off-peak forsinkelse",
+    "CL_CF_SD_delay_subtitle": "Apparatet vil bruge åbningstider, når der bruges forsinkelsestilstand.\n Hvis du bruger en kombination med End, anvendes en forudsætning.",
+    "CL_CF_SD_off_peak_delay_not_set": "Off-peak forsinkelse ikke indstillet",
+    "CL_CF_SD_to_start_desc": "For at begynde at bruge funktionen skal du konfigurere den i indstillingerne.",
+    "CL_CF_SD_best": "Bedst",
+    "CL_CF_SD_delete_title": "Er du sikker på, at du vil slette ##?",
+    "CL_DV_OV_number_of_trays": "Antal bakker",
+    "CL_DV_OV_baking_trays": "BAGEPLADER",
+    "CL_DV_OV_1_tray": "1 bakke",
+    "CL_DV_OV_2_trays": "2 bakker",
+    "CL_DV_OV_multi_tray": "Multibakke",
+    "CL_DV_OV_multi": "Multi",
+    "CL_DV_RF_ice_off": "Is FRA",
+    "CL_DV_RF_ion_preservation": "HI-NANO",
+    "CL_DV_RF_ai_energy": "AI energibesparende",
+    "CL_DV_RF_adaptive_temperature": "Selvtilpasning",
+    "CL_DV_RF_normal_ice_making": "Almindelig isfremstilling",
+    "CL_DV_RF_quick_ice_making": "Hurtig isfremstilling",
+    "CL_DV_OV_extra_auto_programs": "Auto programmer",
+    "CL_DV_OV_extra_auto_programs_desc": "Et sæt foruddefinerede automatiske programmer. Automatiske programmer hjælper dig med at få det bedste resultat for den valgte type mad eller ret.",
+    "CL_DV_OV_extra_browning_programs": "Browning programmer",
+    "CL_DV_OV_extra_browning_programs_desc": "Brug specialudviklede bruningsprogrammer. Indstil det ønskede bruningsniveau, du ønsker som resultat for din ret.",
+    "CL_DV_OV_extra_cleaning": "Rensning",
+    "CL_DV_OV_extra_cleaning_desc": "Trin-for-trin rengøringsprogrammer og instruktioner til, hvordan du holder din ovn i optimal stand.",
+    "CL_DV_OV_extra_stage_cooking": "Scenisk madlavning",
+    "CL_DV_OV_extra_stage_cooking_desc": "Opret brugerdefinerede madlavningsprogrammer ved hjælp af op til 5 forskellige trin.",
+    "CL_DV_OV_extra_defrost_desc": "Et sæt foruddefinerede programmer til korrekt optøning af fødevarer for at sikre kvaliteten, efter at den er blevet frosset.",
+    "CL_DV_OV_extra_warming_desc": "Genopvarm tidligere tilberedte fødevarer ved hjælp af de foruddefinerede ovnprogrammer. Bevarer maksimal smag og tekstur.",
+    "CL_DV_OV_extra_non_food": "Ikke mad",
+    "CL_DV_OV_extra_non_food_desc": "Varm dine tallerkener, varme sten eller steriliser flasker med specielle programmer.",
+    "CL_DV_OV_extra_preserving_desc": "Konservering af mad hjælper med at få din mad til at holde længere, samtidig med at næringsværdi, tekstur og smag bevares.",
+    "CL_DV_OV_extra_fast_cool": "Hurtigt køligt",
+    "CL_DV_OV_extra_fast_cool_desc": "Køler ovnen ned så hurtigt som muligt, efter at bagningen er færdig, eller kan bruges til hurtigt at fortsætte anden madlavning.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Celsius grillplade",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Et sæt foruddefinerede ovnprogrammer specielt til bagning med Celsius Grillpladen.",
+    "CL_DV_OV_explore_all_extra": "UDFORSK ALLE EKSTRA",
+    "CL_DV_OV_extras": "Ekstra'er",
+    "CL_CF_CS_midi_hih_setup_1": "Tænd for enheden.",
+    "CL_CF_CS_midi_hih_setup_2": "Tryk og hold på Wi-Fi-ikonet i cirka 5 sekunder, indtil \"CSt\" vises.",
+    "CL_CF_CS_midi_hih_setup_3": "Enheden er nu klar til tilslutning i 5 minutter.\n Klik på NÆSTE for at fortsætte.",
+    "CL_CF_CS_midi_hih_pair_2": "Tryk og hold på Wi-Fi-ikonet i cirka 8 sekunder, indtil \"PAr\" vises.",
+    "CL_CF_CS_midi_hih_pair_3": "Enheden er nu klar til parring i 3 minutter.\n Klik på NÆSTE for at fortsætte.",
+    "ac_dimmer_air_des": "Sluk LED'en for at undgå, at LED-lyset forstyrrer din hvile om natten",
+    "e_verify_code": "Indtast bekræftelseskode",
+    "CL_CF_CS_td76_and_wm86_pair_4": "Enhedens netværk er nu åbent for tilslutning i 3 minutter.\n Klik på NÆSTE for at fortsætte.",
+    "CL_DV_OV_24_set_language": "Indstil sprog",
+    "CL_DV_OV_24_time_date": "Tid - Dato",
+    "CL_CF_CS_dw005_cs_step1": "Sørg for, at din Bluetooth er aktiveret på din telefon. Tænd derefter dit apparat, og tryk på knappen Indstillinger.",
+    "CL_CF_CS_dw005_cs_step2": "Naviger til \"Avancerede indstillinger\" ved at trykke på piletasterne. Tryk på indstillingsknappen for at komme ind.",
+    "CL_CF_CS_dw005_cs_step3": "Indtast PIN-koden ved at trykke på følgende sekvens af knapper: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "I menuen \"Avancerede indstillinger\" skal du gå til \"WiFi\" og trykke på indstillingsknappen for at komme ind. Inde i \"Wifi\"-menuen skal du sørge for, at WiFi er aktiveret. Hvis ikke, tryk på indstillingsknappen for at aktivere.",
+    "CL_CF_CS_dw005_cs_step5": "Mens du stadig er i \"WiFi\"-menuen, skal du gå til \"Connection setup\" og trykke på indstillingsknappen for at aktivere. ",
+    "CL_CF_CS_dw005_cs_step6": "Enhedens netværk er nu åbent for tilslutning i 5 minutter.\n Klik på NÆSTE for at fortsætte.",
+    "CL_CF_CS_dw005_pair_step1": "Sørg for, at din Bluetooth er aktiveret på din telefon. Tænd derefter dit apparat, og tryk på knappen Indstillinger.",
+    "CL_CF_CS_dw005_pair_step2": "Naviger til \"Avancerede indstillinger\" ved at trykke på piletasterne. Tryk på indstillingsknappen for at komme ind.",
+    "CL_CF_CS_dw005_pair_step3": "Indtast PIN-koden ved at trykke på følgende sekvens af knapper: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "I menuen \"Avancerede indstillinger\" skal du gå til menuen \"WiFi\" og trykke på indstillingsknappen for at komme ind. Gå derefter til \"Tilføj enhed\", og tryk på indstillingsknappen for at aktivere.",
+    "CL_CF_CS_dw005_pair_step5": "Enhedsnetværket er nu åbent for tilføjelse af enhed i 3 minutter.\n Klik på NÆSTE for at fortsætte.",
+    "CL_DV_DW_save_date_invalid": "Slutmåned kan ikke være mindre end startmåned!",
+    "CL_DV_OV_send_to_devices": "SEND TIL ENHEDER"
 }
