--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "Um Wi-Fi am Gerät zu aktivieren, berühren Sie die\nTaste für intensives Kühlen oder Einfrieren. Das\nDisplay zeigt kurz '01' und wechselt automatisch zu\n'02'.\nWi-Fi ist bereit für die Verbindung.",
     "cooling_config_wifi_step3": "Navigieren Sie mit den Pfeiltasten, um 'S' auszuwählen.\nBestätigen Sie 'S' durch Berühren der Intensivkühl- oder Gefriertaste.\nDie Intensivkühl- oder Gefriertaste beginnt\nzu blinken; das Netzwerk dieser Appliance\nist jetzt für 3 Minuten zum Herstellen einer Verbindung geöffnet.\nKlicken Sie auf WEITER, um fortzufahren.",
     "cooling_config_wifi_step1_pair": "Versetzen Sie das Gerät in den Normalbetrieb.\nBerühren Sie das Wi-Fi-Symbol für ca. 3\nSekunden.\nDas Wi-Fi-Symbol beginnt zu blinken und '0'\nerscheint im Display. Sie haben das\n Netzwerkverbindungsmenü aufgerufen.",
-    "cooling_config_wifi_step2_pair": "Navigieren Sie mit den Pfeiltasten, um 'P' auszuwählen.\nBestätigen Sie 'P' durch Berühren der Intensivkühl- oder Gefriertaste.\nDie Intensivkühl- oder Gefriertaste beginnt\nzu blinken; das Netzwerk dieser Appliance\nist jetzt für 5 Minuten zum Herstellen einer Verbindung geöffnet.\nKlicken Sie auf WEITER, um fortzufahren.",
+    "cooling_config_wifi_step2_pair": "Navigieren Sie mit den Pfeiltasten und wählen Sie „P“. Bestätigen Sie „P“ durch Antippen der Intensivkühl-/Gefriertaste. Die Intensivkühl-/Gefriertaste beginnt zu blinken. Das Gerätenetzwerk ist nun für 3 Minuten zum Koppeln geöffnet. Klicken Sie auf WEITER, um fortzufahren.",
     "dw_config_wifi_step1": "Schalten Sie das Gerät EIN. Navigieren Sie mit den Pfeiltasten\nzu den Einstellungen. Drücken Sie das MENU-Symbol, um\ndie Einstellungen einzugeben.",
     "dw_config_wifi_step2": "Suchen Sie im Einstellungsmenü nach NETZWERK und\nbestätigen Sie mit der Menütaste zum Aufrufen.",
     "dw_config_wifi_step3": "Navigieren Sie zu \"SoftAP auswählen\" und bestätigen\nmit der Menütaste. Das Netzwerk dieser\n Appliance ist nun für 2\nMinuten zum Verbinden geöffnet.\nKlicken Sie auf NEXT, um fortzufahren.",
@@ -1041,8 +1041,8 @@
     "time_save": "Zeit sparen",
     "dry": "Trocken",
     "level": "eben",
-    "detergent": "Reinigungsmittelmittel",
-    "softener": "Weichmacher",
+    "detergent": "Waschmittel",
+    "softener": "Weichspüler",
     "pause": "PAUSE",
     "shut_down": "STILLLEGEN",
     "wash_machine_will_be_shut_down": "Das Gerät wird aufhören zu funktionieren.",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "Unterkorb",
     "STR_PROG_UPPER": "Oberkorb",
     "STR_PROG_ANTI_ODOUR": "Anti-Geruch",
-    "STR_PROG_SANI": "Desinfektion",
-    "STR_PROG_SANI_QUICK": "Kurz-Desinfektion",
+    "STR_PROG_SANI": "Sani",
+    "STR_PROG_SANI_QUICK": "Sani Quick",
     "air_energy_hint": "Notiz: Die Stromverbrauchsstatistikfunktion gilt nur für Klimaanlagen vom Typ Mono, nicht jedoch für Klimaanlagen vom Typ Multi.",
     "now": "Jetzt",
     "washer_atag_delay_start_in": "Waschen verzögert. Starten in",
@@ -3415,6 +3415,7 @@
     "use_humidity": "Verwenden Sie eine Feuchtigkeitsbox, um die Luftfeuchtigkeit zu regulieren",
     "same_day": "Am selben Tag",
     "w_temp_set": "Welche Temperatur soll eingestellt werden?",
+    "asko": "ASKO",
     "eco_meter": "Öko-Messgerät",
     "asko_eco_meter_desc": "## ist ein hilfreicher intelligenter Indikator zur Ermittlung Ihrer Umweltbelastung anhand des gewählten Programms und zusätzlicher Optionen in Bezug auf Energieverbrauch, Wasser- und Waschmittelverbrauch.",
     "wm86_autodose_desc": "Lassen Sie die Waschmaschine die richtige Waschmittelmenge genau dosieren, anstatt sich damit herumzuschlagen. Unsere Waschmaschinen mit Auto Dose-System dosieren das Waschmittel anhand von Waschladung, Verschmutzungsgrad, Wasserhärte, Programmtyp und Temperatur. Immer die perfekte Dosierung und keine Überdosierung mehr. Hier können Sie Ihre Standardeinstellungen für Auto Dose anpassen.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Kein Vorheizen",
     "CL_DV_OV_fast_preheat_desc": "Die schnelle Vorheizfunktion ist die schnellste Methode, Ihren Backofen vorzuheizen. Sie dauert etwa 7 Minuten.",
     "CL_DV_OV_preheat_desc": "Je nach Gericht ist Vorheizen die beste Methode, Ihren Backofen vorzuheizen. Dies dauert ungefähr 10 Minuten.",
-    "CL_DV_OV_no_preheat_desc": "Es ist nicht immer nötig, den Backofen vorzuheizen. Beispielsweise zum Aufwärmen bestimmter Lebensmittel."
+    "CL_DV_OV_no_preheat_desc": "Es ist nicht immer nötig, den Backofen vorzuheizen. Beispielsweise zum Aufwärmen bestimmter Lebensmittel.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Durch die Aktivierung der AI Energy Navigation kann der Energieverbrauch gesenkt, jedoch auch die Kühlgeschwindigkeit verringert werden.",
+    "CL_DV_RF_ice_maker_mode": "Eiswürfelbereiter-Modus",
+    "CL_CF_SD_smart_delay": "Intelligente Verzögerung",
+    "CL_CF_SD_settings_subtitle": "Bei Verwendung des Verzögerungsmodus nutzt das Gerät die Nebenzeiten.",
+    "CL_CF_SD_add_zone": "Zone hinzufügen",
+    "CL_CF_SD_new_tariff_zone": "Neue Tarifzonen ##",
+    "CL_CF_SD_add_tariff": "Tarif hinzufügen",
+    "CL_CF_SD_duplicate": "Duplikat",
+    "CL_CF_SD_delete_zone": "Zone löschen ",
+    "CL_CF_SD_tariff_zones_n": "Tarifzonen ##",
+    "CL_CF_SD_tariff_n": "Tarif ##",
+    "CL_CF_SD_price": "Preis",
+    "CL_CF_SD_off_peak_delay": "Verzögerung außerhalb der Hauptverkehrszeiten",
+    "CL_CF_SD_delay_subtitle": "Bei Verwendung des Verzögerungsmodus nutzt das Gerät die Nebenzeiten.\n Bei Verwendung einer Kombination mit „Ende“ wird eine Vorbedingung angewendet.",
+    "CL_CF_SD_off_peak_delay_not_set": "Verzögerung außerhalb der Spitzenzeiten nicht eingestellt",
+    "CL_CF_SD_to_start_desc": "Um die Funktion zu verwenden, müssen Sie sie in den Einstellungen einrichten.",
+    "CL_CF_SD_best": "Am besten",
+    "CL_CF_SD_delete_title": "Möchten Sie ## wirklich löschen?",
+    "CL_DV_OV_number_of_trays": "Anzahl der Fächer",
+    "CL_DV_OV_baking_trays": "BACKBLECHE",
+    "CL_DV_OV_1_tray": "1 Tablett",
+    "CL_DV_OV_2_trays": "2 Tabletts",
+    "CL_DV_OV_multi_tray": "Mehrfachfach",
+    "CL_DV_OV_multi": "Mehrfarbig",
+    "CL_DV_RF_ice_off": "Eis AUS",
+    "CL_DV_RF_ion_preservation": "HI-NANO",
+    "CL_DV_RF_ai_energy": "Energiesparen mit KI",
+    "CL_DV_RF_adaptive_temperature": "Selbstanpassung",
+    "CL_DV_RF_normal_ice_making": "Normale Eisherstellung",
+    "CL_DV_RF_quick_ice_making": "Schnelle Eisherstellung",
+    "CL_DV_OV_extra_auto_programs": "Autoprogramme",
+    "CL_DV_OV_extra_auto_programs_desc": "Eine Reihe vordefinierter automatischer Programme. Automatische Programme helfen Ihnen, das beste Ergebnis für die ausgewählte Lebensmittelart oder das ausgewählte Gericht zu erzielen.",
+    "CL_DV_OV_extra_browning_programs": "Bräunungsprogramme",
+    "CL_DV_OV_extra_browning_programs_desc": "Nutzen Sie speziell entwickelte Bräunungsprogramme. Stellen Sie den gewünschten Bräunungsgrad ein, den Sie als Ergebnis für Ihr Gericht wünschen.",
+    "CL_DV_OV_extra_cleaning": "Reinigung",
+    "CL_DV_OV_extra_cleaning_desc": "Schritt-für-Schritt-Reinigungsprogramme und Anleitungen, wie Sie Ihren Ofen in optimalem Zustand halten.",
+    "CL_DV_OV_extra_stage_cooking": "Bühnenkochen",
+    "CL_DV_OV_extra_stage_cooking_desc": "Erstellen Sie individuelle Kochprogramme mit bis zu 5 verschiedenen Stufen.",
+    "CL_DV_OV_extra_defrost_desc": "Eine Reihe vordefinierter Programme zum korrekten Auftauen von Lebensmitteln, um die Qualität nach dem Einfrieren sicherzustellen.",
+    "CL_DV_OV_extra_warming_desc": "Erwärmen Sie bereits gekochte Speisen mit den vordefinierten Ofenprogrammen. Bewahren Sie das Maximum an Geschmack und Konsistenz.",
+    "CL_DV_OV_extra_non_food": "Nicht-Lebensmittel",
+    "CL_DV_OV_extra_non_food_desc": "Wärmen Sie Ihre Teller vor, verwenden Sie heiße Steine oder sterilisieren Sie Fläschchen mit speziellen Programmen.",
+    "CL_DV_OV_extra_preserving_desc": "Durch die Konservierung von Lebensmitteln halten diese länger und behalten gleichzeitig Nährwert, Konsistenz und Geschmack.",
+    "CL_DV_OV_extra_fast_cool": "Schnelle Abkühlung",
+    "CL_DV_OV_extra_fast_cool_desc": "Kühlt den Backofen nach dem Backen schnellstmöglich ab oder kann zum schnellen Fortsetzen anderer Lebensmittelzubereitungen verwendet werden.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Celsius Grillplatte",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Eine Reihe vordefinierter Ofenprogramme speziell zum Backen mit der Celsius Grillplatte.",
+    "CL_DV_OV_explore_all_extra": "ENTDECKEN SIE ALLE EXTRAS",
+    "CL_DV_OV_extras": "Extras",
+    "CL_CF_CS_midi_hih_setup_1": "Schalten Sie das Gerät ein.",
+    "CL_CF_CS_midi_hih_setup_2": "Tippen Sie auf das WLAN-Symbol und halten Sie es etwa 5 Sekunden lang gedrückt, bis „CSt“ angezeigt wird.",
+    "CL_CF_CS_midi_hih_setup_3": "Das Gerät ist nun für 5 Minuten verbindungsbereit.\n Klicken Sie auf WEITER, um fortzufahren.",
+    "CL_CF_CS_midi_hih_pair_2": "Tippen Sie auf das WLAN-Symbol und halten Sie es etwa 8 Sekunden lang gedrückt, bis „PAr“ angezeigt wird.",
+    "CL_CF_CS_midi_hih_pair_3": "Das Gerät ist nun für 3 Minuten zum Pairing bereit.\n Klicken Sie auf WEITER, um fortzufahren.",
+    "ac_dimmer_air_des": "Schalten Sie die LED aus, um zu vermeiden, dass das LED-Licht Ihre Nachtruhe stört",
+    "e_verify_code": "Bestätigungscode eingeben",
+    "CL_CF_CS_td76_and_wm86_pair_4": "Das Gerätenetzwerk ist nun 3 Minuten lang für Verbindungen geöffnet.\n Klicken Sie auf WEITER, um fortzufahren.",
+    "CL_DV_OV_24_set_language": "Sprache festlegen",
+    "CL_DV_OV_24_time_date": "Uhrzeit - Datum",
+    "CL_CF_CS_dw005_cs_step1": "Stellen Sie sicher, dass Bluetooth auf Ihrem Telefon aktiviert ist. Schalten Sie dann Ihr Gerät ein und tippen Sie auf die Schaltfläche „Einstellungen“.",
+    "CL_CF_CS_dw005_cs_step2": "Navigieren Sie mit den Pfeiltasten zu „Erweiterte Einstellungen“. Drücken Sie die Einstellungstaste, um die Einstellungen aufzurufen.",
+    "CL_CF_CS_dw005_cs_step3": "Geben Sie den PIN-Code durch Drücken der folgenden Tastenfolge ein: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "Gehen Sie im Menü „Erweiterte Einstellungen“ zu „WLAN“ und drücken Sie die Einstellungstaste, um es zu öffnen. Stellen Sie im Menü „WLAN“ sicher, dass WLAN aktiviert ist. Wenn nicht, drücken Sie die Einstellungstaste, um es zu aktivieren.",
+    "CL_CF_CS_dw005_cs_step5": "Gehen Sie noch im Menü „WLAN“ zu „Verbindungsaufbau“ und drücken Sie zur Aktivierung die Einstellungstaste. ",
+    "CL_CF_CS_dw005_cs_step6": "Das Gerätenetzwerk ist nun 5 Minuten lang für Verbindungen geöffnet.\n Klicken Sie auf WEITER, um fortzufahren.",
+    "CL_CF_CS_dw005_pair_step1": "Stellen Sie sicher, dass Bluetooth auf Ihrem Telefon aktiviert ist. Schalten Sie dann Ihr Gerät ein und tippen Sie auf die Schaltfläche „Einstellungen“.",
+    "CL_CF_CS_dw005_pair_step2": "Navigieren Sie mit den Pfeiltasten zu „Erweiterte Einstellungen“. Drücken Sie die Einstellungstaste, um die Einstellungen aufzurufen.",
+    "CL_CF_CS_dw005_pair_step3": "Geben Sie den PIN-Code durch Drücken der folgenden Tastenfolge ein: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "Gehen Sie im Menü „Erweiterte Einstellungen“ zum Menü „WLAN“ und drücken Sie die Einstellungstaste, um es aufzurufen. Gehen Sie dann zu „Gerät hinzufügen“ und drücken Sie zur Aktivierung die Einstellungstaste.",
+    "CL_CF_CS_dw005_pair_step5": "Das Gerätenetzwerk ist jetzt 3 Minuten lang zum Hinzufügen von Geräten geöffnet.\n Klicken Sie auf WEITER, um fortzufahren.",
+    "CL_DV_DW_save_date_invalid": "Der Endmonat kann nicht kleiner sein als der Startmonat!",
+    "CL_DV_OV_send_to_devices": "AN GERÄTE SENDEN"
 }
