--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "Para habilitar el Wi-Fi en el dispositivo, toque la tecla de\nenfriamiento intensivo o congelación. La\npantalla mostrará brevemente '01' y cambiará a\n'02' automáticamente.\nEl Wi-Fi está listo para conectarse.",
     "cooling_config_wifi_step3": "Navegue con las teclas de flecha para elegir 'S'.\nConfirme 'S' tocando la tecla de\nenfriamiento intensivo o congelación.\nLa tecla de enfriamiento intensivo o congelación comenzará a\nparpadear; la red de este dispositivo está\nahora abierta para conectarse, durante 3 minutos.\nHaga clic en SIGUIENTE para continuar.",
     "cooling_config_wifi_step1_pair": "Configure el dispositivo para el funcionamiento normal.\nToque el ícono de Wi-Fi durante aproximadamente 3\nsegundos.\nEl símbolo de Wi-Fi comenzará a parpadear y aparecerá '0'\nen la pantalla. Ha ingresado al menú de\nconexión de red.",
-    "cooling_config_wifi_step2_pair": "Navegue con las teclas de flecha para elegir 'P'.\nConfirme 'P' tocando la tecla de\nenfriamiento intensivo o congelación.\nLa tecla de enfriamiento intensivo o congelación comenzará a\nparpadear; la red de este dispositivo está\nahora abierta para conectarse, durante 5 minutos.\nHaga clic en SIGUIENTE para continuar.",
+    "cooling_config_wifi_step2_pair": "Navega con las teclas de flecha y selecciona \"P\". Confirma \"P\" tocando la tecla de enfriamiento/congelación intensivos. La tecla de enfriamiento/congelación intensivos comenzará a parpadear. La red del dispositivo ahora está abierta para el emparejamiento durante 3 minutos. Haz clic en SIGUIENTE para continuar.",
     "dw_config_wifi_step1": "Encienda el aparato. Navegue con las teclas de flecha\nhacia la configuración. Presione el ícono de MENÚ para ingresar\na la configuración.",
     "dw_config_wifi_step2": "En el menú de configuración, busque RED y\nconfirme con la tecla de menú para ingresar.",
     "dw_config_wifi_step3": "Navegue hasta \"Seleccionar SoftAP\" y confirme\ncon la tecla de menú. La red de este\ndispositivo está ahora abierta para conectarse durante 5\nminutos.\nHaga clic en SIGUIENTE para continuar.",
@@ -800,7 +800,7 @@
     "device_status_drying": "Secando",
     "device_status_air": "Aire",
     "device_status_program_end": "Final del programa",
-    "device_status_delay": "En progreso",
+    "device_status_delay": "Retardo",
     "wm_power_off_tips": "Encienda la lavadora",
     "wm_finish_at": "Termina a las",
     "wm_detergent_empty": "No hay detergente, ¿quiere continuar con el proceso?",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "Mitad inferior",
     "STR_PROG_UPPER": "Mitad superior",
     "STR_PROG_ANTI_ODOUR": "Anti-olor",
-    "STR_PROG_SANI": "SANI",
-    "STR_PROG_SANI_QUICK": "SANI Quick",
+    "STR_PROG_SANI": "Sani",
+    "STR_PROG_SANI_QUICK": "Sani Rápido",
     "air_energy_hint": "Nota: La función de estadísticas de consumo de energía solo es válida para acondicionadores de aire de tipo mono, pero no para acondicionadores de aire de tipo múltiple.",
     "now": "Ahora",
     "washer_atag_delay_start_in": "Lavado retrasado. Inicio en",
@@ -3415,6 +3415,7 @@
     "use_humidity": "Utilice una caja de humedad para regular la humedad.",
     "same_day": "El mismo día",
     "w_temp_set": "¿Qué temperatura ajustar?",
+    "asko": "ASKO",
     "eco_meter": "Medidor ecológico",
     "asko_eco_meter_desc": "## es un indicador inteligente útil para determinar su impacto ambiental según el programa elegido y opciones adicionales en lo que respecta al consumo de energía, agua y detergente.",
     "wm86_autodose_desc": "En lugar de complicarse la vida, deje que la lavadora mida exactamente la dosis correcta de detergente. Nuestras lavadoras con sistema Auto Dose miden el detergente en función de la carga de lavado, el nivel de suciedad, la dureza del agua, el tipo de programa y la temperatura. Siempre la dosis perfecta y se acabaron las sobredosificaciones. Aquí puede ajustar la configuración predeterminada para Auto Dose.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Sin precalentamiento",
     "CL_DV_OV_fast_preheat_desc": "El precalentamiento rápido es la forma más rápida de precalentar el horno. Tarda aproximadamente 7 minutos.",
     "CL_DV_OV_preheat_desc": "Precalentar es la mejor manera de precalentar el horno teniendo en cuenta el plato. Tarda aproximadamente 10 minutos.",
-    "CL_DV_OV_no_preheat_desc": "No siempre es necesario precalentar el horno, por ejemplo, para recalentar determinados alimentos."
+    "CL_DV_OV_no_preheat_desc": "No siempre es necesario precalentar el horno, por ejemplo, para recalentar determinados alimentos.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Habilitar la navegación energética con inteligencia artificial puede reducir el consumo de energía, pero también puede disminuir la velocidad de enfriamiento.",
+    "CL_DV_RF_ice_maker_mode": "Modo de fabricación de hielo",
+    "CL_CF_SD_smart_delay": "Retraso inteligente",
+    "CL_CF_SD_settings_subtitle": "El aparato utilizará las horas de menor consumo cuando utilice el modo de retardo.",
+    "CL_CF_SD_add_zone": "Agregar zona",
+    "CL_CF_SD_new_tariff_zone": "Nuevas zonas tarifarias ##",
+    "CL_CF_SD_add_tariff": "Añadir tarifa",
+    "CL_CF_SD_duplicate": "Duplicado",
+    "CL_CF_SD_delete_zone": "Eliminar zona ",
+    "CL_CF_SD_tariff_zones_n": "Zonas arancelarias ##",
+    "CL_CF_SD_tariff_n": "Tarifa ##",
+    "CL_CF_SD_price": "Precio",
+    "CL_CF_SD_off_peak_delay": "Retraso fuera de horas punta",
+    "CL_CF_SD_delay_subtitle": "El aparato utilizará las horas de menor consumo cuando utilice el modo de retardo.\n Si se utiliza una combinación con Fin, se aplica una condición previa.",
+    "CL_CF_SD_off_peak_delay_not_set": "Retardo fuera de horas punta no establecido",
+    "CL_CF_SD_to_start_desc": "Para comenzar a utilizar la función es necesario configurarla en los ajustes.",
+    "CL_CF_SD_best": "Mejor",
+    "CL_CF_SD_delete_title": "¿Estás seguro que deseas eliminar ##?",
+    "CL_DV_OV_number_of_trays": "Número de bandejas",
+    "CL_DV_OV_baking_trays": "BANDEJAS PARA HORNEAR",
+    "CL_DV_OV_1_tray": "1 bandeja",
+    "CL_DV_OV_2_trays": "2 bandejas",
+    "CL_DV_OV_multi_tray": "Bandeja múltiple",
+    "CL_DV_OV_multi": "Multi",
+    "CL_DV_RF_ice_off": "Hielo apagado",
+    "CL_DV_RF_ion_preservation": "Hola nano",
+    "CL_DV_RF_ai_energy": "Ahorro de energía con IA",
+    "CL_DV_RF_adaptive_temperature": "Autoadaptación",
+    "CL_DV_RF_normal_ice_making": "Fabricación de hielo normal",
+    "CL_DV_RF_quick_ice_making": "Fabricación rápida de hielo",
+    "CL_DV_OV_extra_auto_programs": "Programas automáticos",
+    "CL_DV_OV_extra_auto_programs_desc": "Un conjunto de programas automáticos predefinidos. Los programas automáticos le ayudan a obtener el mejor resultado para el tipo de comida o plato seleccionado.",
+    "CL_DV_OV_extra_browning_programs": "Programas de Browning",
+    "CL_DV_OV_extra_browning_programs_desc": "Utilice programas de dorado especialmente desarrollados. Establezca el nivel de dorado que desea para su plato.",
+    "CL_DV_OV_extra_cleaning": "Limpieza",
+    "CL_DV_OV_extra_cleaning_desc": "Programas de limpieza paso a paso e instrucciones sobre cómo mantener su horno en óptimas condiciones.",
+    "CL_DV_OV_extra_stage_cooking": "Cocina escénica",
+    "CL_DV_OV_extra_stage_cooking_desc": "Crea programas de cocción personalizados, utilizando hasta 5 etapas diferentes.",
+    "CL_DV_OV_extra_defrost_desc": "Un conjunto de programas predefinidos para descongelar correctamente los alimentos para garantizar la calidad después de su congelación.",
+    "CL_DV_OV_extra_warming_desc": "Recalienta alimentos ya cocinados utilizando los programas predefinidos del horno. Mantiene el máximo sabor y textura.",
+    "CL_DV_OV_extra_non_food": "No comida",
+    "CL_DV_OV_extra_non_food_desc": "Calienta tus platos, piedras calientes o esteriliza biberones con programas especiales.",
+    "CL_DV_OV_extra_preserving_desc": "Conservar los alimentos ayuda a que éstos duren más tiempo manteniendo el valor nutricional, la textura y el sabor.",
+    "CL_DV_OV_extra_fast_cool": "Enfriamiento rápido",
+    "CL_DV_OV_extra_fast_cool_desc": "Enfría el horno lo más rápido posible una vez finalizada la cocción o puede usarse para continuar rápidamente con la preparación de otros alimentos.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Placa de parrilla Celsius",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Un conjunto de programas de horno predefinidos específicamente para hornear con la placa de parrilla Celsius.",
+    "CL_DV_OV_explore_all_extra": "EXPLORA TODOS LOS EXTRA",
+    "CL_DV_OV_extras": "Extras",
+    "CL_CF_CS_midi_hih_setup_1": "Encienda el dispositivo.",
+    "CL_CF_CS_midi_hih_setup_2": "Mantenga presionado el ícono de Wi-Fi durante aproximadamente 5 segundos hasta que aparezca \"CSt\".",
+    "CL_CF_CS_midi_hih_setup_3": "El dispositivo ahora está listo para conectarse durante 5 minutos.\n Haga clic en SIGUIENTE para continuar.",
+    "CL_CF_CS_midi_hih_pair_2": "Mantenga presionado el ícono de Wi-Fi durante aproximadamente 8 segundos hasta que aparezca \"PAr\".",
+    "CL_CF_CS_midi_hih_pair_3": "El dispositivo ahora está listo para emparejarse durante 3 minutos.\n Haga clic en SIGUIENTE para continuar.",
+    "ac_dimmer_air_des": "Apaga el LED para evitar que la luz LED perturbe tu descanso nocturno.",
+    "e_verify_code": "Introduzca el código de verificación",
+    "CL_CF_CS_td76_and_wm86_pair_4": "La red del dispositivo ahora está abierta para la conexión durante 3 minutos.\n Haga clic en SIGUIENTE para continuar.",
+    "CL_DV_OV_24_set_language": "Establecer idioma",
+    "CL_DV_OV_24_time_date": "Hora - Fecha",
+    "CL_CF_CS_dw005_cs_step1": "Asegúrate de que el Bluetooth esté activado en tu teléfono. Luego, enciende el dispositivo y pulsa el botón de configuración.",
+    "CL_CF_CS_dw005_cs_step2": "Navegue hasta “Configuración avanzada” presionando los botones de flecha. Presione el botón de configuración para ingresar.",
+    "CL_CF_CS_dw005_cs_step3": "Introduzca el código PIN presionando la siguiente secuencia de botones: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "En el menú “Configuración avanzada” ve a “WiFi” y presiona el botón de configuración para ingresar. Dentro del menú “Wifi” asegúrate de que el WiFi esté habilitado. Si no lo está, presiona el botón de configuración para habilitarlo.",
+    "CL_CF_CS_dw005_cs_step5": "Estando todavía en el menú “WiFi”, vaya a “Configuración de conexión” y presione el botón de configuración para activar. ",
+    "CL_CF_CS_dw005_cs_step6": "La red del dispositivo ahora está abierta para la conexión durante 5 minutos.\n Haga clic en SIGUIENTE para continuar.",
+    "CL_CF_CS_dw005_pair_step1": "Asegúrate de que el Bluetooth esté activado en tu teléfono. Luego, enciende el dispositivo y pulsa el botón de configuración.",
+    "CL_CF_CS_dw005_pair_step2": "Navegue hasta “Configuración avanzada” presionando los botones de flecha. Presione el botón de configuración para ingresar.",
+    "CL_CF_CS_dw005_pair_step3": "Introduzca el código PIN presionando la siguiente secuencia de botones: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "En el menú “Configuración avanzada” vaya al menú “WiFi” y presione el botón de configuración para ingresar. Luego vaya a “Agregar dispositivo” y presione el botón de configuración para activar.",
+    "CL_CF_CS_dw005_pair_step5": "La red del dispositivo ahora está abierta para agregar dispositivos durante 3 minutos.\n Haga clic en SIGUIENTE para continuar.",
+    "CL_DV_DW_save_date_invalid": "¡El mes final no puede ser menor que el mes inicial!",
+    "CL_DV_OV_send_to_devices": "ENVIAR A DISPOSITIVOS"
 }
