--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "برای فعال کردن Wi-Fi در دستگاه، کلید منجمد‌سازی یا سرمایش شدید را لمس کنید. نمایشگر به‌زودی «01» را نشان خواهد داد و به‌طور خودکار به «02» تغییر می‌کند. Wi-Fi آماده اتصال است.",
     "cooling_config_wifi_step3": "با کلیدهای جهت دار حرکت کنید و \"S\" را انتخاب کنید.\n\"S\" را با ضربه زدن روی کلید خنک کننده/انجماد شدید تأیید کنید.\nکلید خنک کننده/انجماد شدید شروع به چشمک زدن می کند. شبکه دستگاه اکنون به مدت 3 دقیقه برای اتصال باز است.",
     "cooling_config_wifi_step1_pair": "دستگاه را روی عملکرد عادی تنظیم کنید. نماد Wi-Fi را به مدت تقریباً 3 ثانیه لمس کنید. نماد Wi-Fi شروع به چشمک زدن می‌کند و «0» در نمایشگر نمایان می‌شود. وارد منوی اتصال شبکه شدید.",
-    "cooling_config_wifi_step2_pair": "برای انتخاب «P»، با کلیدهای پیکان پیمایش کنید. با لمس کلید منجمد‌سازی یا سرمایش شدید، «P» را تأیید کنید. کلید منجمد‌سازی یا سرمایش شدید شروع به چشمک زدن می‌کند، اکنون شبکه این دستگاه برای اتصال به مدت 5 دقیقه باز است. برای ادامه، روی «بعدی» کلیک کنید.",
+    "cooling_config_wifi_step2_pair": "با کلیدهای جهت دار حرکت کنید و \"P\" را انتخاب کنید. \"P\" را با ضربه زدن روی کلید خنک کننده/انجماد شدید تأیید کنید. کلید خنک کننده/انجماد شدید شروع به چشمک زدن می کند. شبکه دستگاه اکنون برای جفت شدن به مدت 3 دقیقه باز است. برای ادامه روی NEXT کلیک کنید.",
     "dw_config_wifi_step1": "دستگاه را روشن کنید. برای تنظیمات، با کلید‌های پیکان پیمایش کنید. برای ورود به تنظیمات، نماد «منو» را فشار دهید.",
     "dw_config_wifi_step2": "برای ورود، در منوی تنظیمات، «شبکه» را پیدا و با کلید منو تأیید کنید.",
     "dw_config_wifi_step3": "برای «انتخاب SoftAP» پیمایش کنید و آن را با کلید منو تأیید نمایید. اکنون شبکه این دستگاه برای اتصال به مدت 2 دقیقه باز است. برای ادامه، روی «بعدی» کلیک کنید.",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "نیمه پایین",
     "STR_PROG_UPPER": "نیمه بالا",
     "STR_PROG_ANTI_ODOUR": "ضد بو",
-    "STR_PROG_SANI": "بهداشتی",
-    "STR_PROG_SANI_QUICK": "بهداشتی سریع",
+    "STR_PROG_SANI": "سانی",
+    "STR_PROG_SANI_QUICK": "سانی کوئیک",
     "air_energy_hint": "توجه: عملکرد آمار مصرف برق فقط برای دستگاه تهویه هوای تک ‌کاربری معتبر است و برای دستگاه تهویه هوای چند کاربری دارای اعتبار نیست.",
     "now": "حال حاضر",
     "washer_atag_delay_start_in": "شستشو به تأخیر افتاد. شروع در",
@@ -3415,6 +3415,7 @@
     "use_humidity": "از جعبه رطوبت برای تنظیم رطوبت استفاده کنید",
     "same_day": "همان روز",
     "w_temp_set": "چه دمایی تنظیم شود",
+    "asko": "ASKO",
     "eco_meter": "اکو متر",
     "asko_eco_meter_desc": "## یک شاخص هوشمند مفید برای تعیین تأثیرات زیست محیطی شما بر اساس برنامه انتخابی و گزینه های اضافی در مورد مصرف انرژی، آب و مواد شوینده است.",
     "wm86_autodose_desc": "اجازه دهید ماشین لباسشویی به جای اینکه درگیر مبارزه باشد، دوز مناسب مواد شوینده را اندازه گیری کند. ماشین‌های لباسشویی ما با سیستم Auto Dose، مواد شوینده را در برابر بار شستشو، سطح کثیفی، سختی آب، نوع برنامه و دما اندازه‌گیری می‌کنند. همیشه دوز کامل و بدون مصرف بیش از حد. در اینجا می توانید تنظیمات پیش فرض خود را برای دوز خودکار تنظیم کنید.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "بدون پیش گرم",
     "CL_DV_OV_fast_preheat_desc": "پیش گرم کردن سریع سریع ترین راه برای گرم کردن فر است. تقریباً 7 دقیقه طول می کشد.",
     "CL_DV_OV_preheat_desc": "با توجه به ظرف، بهترین راه برای گرم کردن فر از قبل گرم کردن است. تقریباً 10 دقیقه طول می کشد.",
-    "CL_DV_OV_no_preheat_desc": "همیشه لازم نیست فر خود را از قبل گرم کنید. به عنوان مثال برای گرم کردن مجدد برخی غذاها."
+    "CL_DV_OV_no_preheat_desc": "همیشه لازم نیست فر خود را از قبل گرم کنید. به عنوان مثال برای گرم کردن مجدد برخی غذاها.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "فعال کردن AI Energy Navigation می تواند مصرف انرژی را کاهش دهد، اما می تواند سرعت خنک کننده را نیز کاهش دهد.",
+    "CL_DV_RF_ice_maker_mode": "حالت یخ ساز",
+    "CL_CF_SD_smart_delay": "تاخیر هوشمند",
+    "CL_CF_SD_settings_subtitle": "هنگام استفاده از حالت تأخیر، دستگاه از ساعات کم مصرف استفاده خواهد کرد.",
+    "CL_CF_SD_add_zone": "اضافه کردن منطقه",
+    "CL_CF_SD_new_tariff_zone": "مناطق تعرفه ای جدید ##",
+    "CL_CF_SD_add_tariff": "اضافه کردن تعرفه",
+    "CL_CF_SD_duplicate": "تکراری",
+    "CL_CF_SD_delete_zone": "حذف منطقه ",
+    "CL_CF_SD_tariff_zones_n": "مناطق تعرفه ای ##",
+    "CL_CF_SD_tariff_n": "تعرفه ##",
+    "CL_CF_SD_price": "قیمت",
+    "CL_CF_SD_off_peak_delay": "تاخیر خارج از پیک",
+    "CL_CF_SD_delay_subtitle": "هنگام استفاده از حالت تأخیر، دستگاه از ساعات کم مصرف استفاده خواهد کرد.\n اگر استفاده از ترکیبی با پایان در یک پیش شرط اعمال می شود.",
+    "CL_CF_SD_off_peak_delay_not_set": "تاخیر خارج از اوج تنظیم نشده است",
+    "CL_CF_SD_to_start_desc": "برای شروع استفاده از عملکرد باید آن را در تنظیمات تنظیم کنید.",
+    "CL_CF_SD_best": "بهترین",
+    "CL_CF_SD_delete_title": "آیا مطمئن هستید که می خواهید ## را حذف کنید؟",
+    "CL_DV_OV_number_of_trays": "تعداد سینی",
+    "CL_DV_OV_baking_trays": "سینی های پخت",
+    "CL_DV_OV_1_tray": "1 سینی",
+    "CL_DV_OV_2_trays": "2 سینی",
+    "CL_DV_OV_multi_tray": "چند سینی",
+    "CL_DV_OV_multi": "چند",
+    "CL_DV_RF_ice_off": "یخ خاموش",
+    "CL_DV_RF_ion_preservation": "HI-NANO",
+    "CL_DV_RF_ai_energy": "هوش مصنوعی صرفه جویی در انرژی",
+    "CL_DV_RF_adaptive_temperature": "خود سازگاری",
+    "CL_DV_RF_normal_ice_making": "یخ سازی معمولی",
+    "CL_DV_RF_quick_ice_making": "یخ سازی سریع",
+    "CL_DV_OV_extra_auto_programs": "برنامه های خودکار",
+    "CL_DV_OV_extra_auto_programs_desc": "مجموعه ای از برنامه های خودکار از پیش تعریف شده. برنامه های خودکار به شما کمک می کند تا بهترین نتیجه را برای نوع غذا یا ظرف انتخابی داشته باشید.",
+    "CL_DV_OV_extra_browning_programs": "برنامه های براونینگ",
+    "CL_DV_OV_extra_browning_programs_desc": "از برنامه‌های قهوه‌ای شدن ویژه توسعه‌یافته استفاده کنید. سطح قهوه ای دلخواه را به عنوان نتیجه برای ظرف خود تنظیم کنید.",
+    "CL_DV_OV_extra_cleaning": "تمیز کردن",
+    "CL_DV_OV_extra_cleaning_desc": "برنامه های گام به گام تمیز کردن و دستورالعمل های نحوه نگهداری فر خود را در شرایط مطلوب.",
+    "CL_DV_OV_extra_stage_cooking": "مرحله آشپزی",
+    "CL_DV_OV_extra_stage_cooking_desc": "برنامه های آشپزی سفارشی را با استفاده از حداکثر 5 مرحله مختلف ایجاد کنید.",
+    "CL_DV_OV_extra_defrost_desc": "مجموعه ای از برنامه های از پیش تعریف شده برای یخ زدایی صحیح غذاها برای اطمینان از کیفیت آنها پس از انجماد.",
+    "CL_DV_OV_extra_warming_desc": "با استفاده از برنامه های از پیش تعریف شده فر، غذاهایی که از قبل پخته شده اند را دوباره گرم کنید. حداکثر طعم و بافت را حفظ می کند.",
+    "CL_DV_OV_extra_non_food": "غیر خوراکی",
+    "CL_DV_OV_extra_non_food_desc": "بشقاب ها، سنگ های داغ یا بطری های خود را با برنامه های ویژه استریل کنید.",
+    "CL_DV_OV_extra_preserving_desc": "حفظ مواد غذایی به ماندگاری بیشتر غذا کمک می کند و در عین حال ارزش غذایی، بافت و طعم را حفظ می کند.",
+    "CL_DV_OV_extra_fast_cool": "سریع خنک",
+    "CL_DV_OV_extra_fast_cool_desc": "پس از اتمام پخت، فر را در سریع ترین زمان ممکن خنک می کند یا می تواند برای ادامه سریع سایر مواد غذایی مورد استفاده قرار گیرد.",
+    "CL_DV_OV_extra_celsius_grill_plate": "صفحه گریل سلسیوس",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "مجموعه ای از برنامه های از پیش تعریف شده فر مخصوص پخت با صفحه گریل سلسیوس.",
+    "CL_DV_OV_explore_all_extra": "همه موارد اضافی را کاوش کنید",
+    "CL_DV_OV_extras": "اضافی",
+    "CL_CF_CS_midi_hih_setup_1": "دستگاه را روشن کنید.",
+    "CL_CF_CS_midi_hih_setup_2": "روی نماد Wi-Fi ضربه بزنید و حدود 5 ثانیه نگه دارید تا \"CSt\" ظاهر شود.",
+    "CL_CF_CS_midi_hih_setup_3": "اکنون دستگاه به مدت 5 دقیقه برای اتصال آماده است.\n برای ادامه روی NEXT کلیک کنید.",
+    "CL_CF_CS_midi_hih_pair_2": "روی نماد Wi-Fi ضربه بزنید و حدود 8 ثانیه نگه دارید تا \"PAR\" ظاهر شود.",
+    "CL_CF_CS_midi_hih_pair_3": "اکنون دستگاه به مدت 3 دقیقه برای جفت شدن آماده است.\n برای ادامه روی NEXT کلیک کنید.",
+    "ac_dimmer_air_des": "LED را خاموش کنید تا نور LED در شب استراحت شما را مختل نکند",
+    "e_verify_code": "کد تایید را وارد کنید",
+    "CL_CF_CS_td76_and_wm86_pair_4": "شبکه دستگاه اکنون به مدت 3 دقیقه برای اتصال باز است.\n برای ادامه روی NEXT کلیک کنید.",
+    "CL_DV_OV_24_set_language": "تنظیم زبان",
+    "CL_DV_OV_24_time_date": "زمان - تاریخ",
+    "CL_CF_CS_dw005_cs_step1": "اطمینان حاصل کنید که بلوتوث شما در گوشی شما فعال است. سپس دستگاه خود را روشن کنید و روی دکمه تنظیمات ضربه بزنید.",
+    "CL_CF_CS_dw005_cs_step2": "با فشار دادن دکمه های پیکان به \"تنظیمات پیشرفته\" بروید. دکمه تنظیمات را فشار دهید تا وارد شوید.",
+    "CL_CF_CS_dw005_cs_step3": "کد پین را با فشار دادن دنباله دکمه های زیر وارد کنید: I، II، I، III.",
+    "CL_CF_CS_dw005_cs_step4": "در منوی \"تنظیمات پیشرفته\" به \"WiFi\" بروید و دکمه تنظیمات را فشار دهید تا وارد شوید. در داخل منوی \"Wifi\" مطمئن شوید که WiFi فعال است. اگر نه، دکمه تنظیمات را فشار دهید تا فعال شود.",
+    "CL_CF_CS_dw005_cs_step5": "در حالی که هنوز در منوی \"WiFi\" هستید، به \"تنظیمات اتصال\" بروید و دکمه تنظیمات را فشار دهید تا فعال شود. ",
+    "CL_CF_CS_dw005_cs_step6": "شبکه دستگاه اکنون به مدت 5 دقیقه برای اتصال باز است.\n برای ادامه روی NEXT کلیک کنید.",
+    "CL_CF_CS_dw005_pair_step1": "اطمینان حاصل کنید که بلوتوث شما در گوشی شما فعال است. سپس دستگاه خود را روشن کنید و روی دکمه تنظیمات ضربه بزنید.",
+    "CL_CF_CS_dw005_pair_step2": "با فشار دادن دکمه های پیکان به \"تنظیمات پیشرفته\" بروید. دکمه تنظیمات را فشار دهید تا وارد شوید.",
+    "CL_CF_CS_dw005_pair_step3": "کد پین را با فشار دادن دنباله دکمه های زیر وارد کنید: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "در منوی \"تنظیمات پیشرفته\" به منوی \"WiFi\" بروید و دکمه تنظیمات را فشار دهید تا وارد شوید. سپس به «افزودن دستگاه» بروید و دکمه تنظیمات را فشار دهید تا فعال شود.",
+    "CL_CF_CS_dw005_pair_step5": "شبکه دستگاه اکنون برای افزودن دستگاه به مدت 3 دقیقه باز است.\n برای ادامه روی NEXT کلیک کنید.",
+    "CL_DV_DW_save_date_invalid": "ماه پایانی نمی تواند کوچکتر از ماه شروع باشد!",
+    "CL_DV_OV_send_to_devices": "ارسال به دستگاه ها"
 }
