--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "Ottaaksesi Wi-Fin käyttöön laitteessa paina\ntehojäähdytys- tai jäädytyspainiketta. Näytölle\ntulee pian näkyviin'01'ja se muuttuu\n'02'automaattisesti.\nWi-Fi on valmis yhteyden muodostamista varten.",
     "cooling_config_wifi_step3": "Siirry nuolipainikkeilla valitaksesi'S'.\nVahvista'S'painamalla tehojäähdytys- tai\njäädytyspainiketta.\nTehojäähdytys- tai -jäädytyspainike alkaa\nvilkkua; tämän laitteen verkko on\nnyt avoinna yhteyden muodostamista varten 3 minuutin ajan.\nKlikkaa SEURAAVA jatkaaksesi.",
     "cooling_config_wifi_step1_pair": "Aseta laite normaaliin tilaan.\nPaina Wi-Fi-kuvaketta noin 3\nsekunnin ajan.\nWi-Fi-kuvake alkaa vilkkua ja'0'\nilmestyy näytölle. Siirryit\nverkkoyhteysvalikkoon.",
-    "cooling_config_wifi_step2_pair": "Siirry nuolipainikkeilla valitaksesi'P'.\nVahvista'P'painamalla tehojäähdytys- tai\njäädytyspainiketta.\nTehojäähdytys- tai -jäädytyspainike alkaa\nvilkkua; tämän laitteen verkko on\nnyt avoinna yhteyden muodostamista varten 5 minuutin ajan.\nKlikkaa SEURAAVA jatkaaksesi.",
+    "cooling_config_wifi_step2_pair": "Navigoi nuolinäppäimillä ja valitse \"P\". Vahvista \"P\" napauttamalla tehojäähdytys/jäädytyspainiketta. Intensiivisen jäähdytyksen/pakastuksen painike alkaa vilkkua. Laiteverkko on nyt avoinna pariliitoksen muodostamista varten 3 minuutin ajan. Napsauta SEURAAVA jatkaaksesi.",
     "dw_config_wifi_step1": "Kytke laite päälle. Siirry asetuksiin\nnuolipainikkeilla. Paina valikkokuvaketta siirtyäksesi\nasetuksiin.",
     "dw_config_wifi_step2": "Etsi asetusvalikosta kohta VERKKO ja\nvahvista valinta valikkopainikkeella.",
     "dw_config_wifi_step3": "Siirry kohtaan\"Select SoftAP\"ja vahvista\nvalikkopainikkeella. Tämän laitteen\nverkko on nyt avoinna yhteyden muodostamista varten 5\nminuutin ajan.\nPaina SEURAAVA jatkaaksesi.",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "Alakori",
     "STR_PROG_UPPER": "Yläkori",
     "STR_PROG_ANTI_ODOUR": "Hajunpoisto",
-    "STR_PROG_SANI": "SANI",
-    "STR_PROG_SANI_QUICK": "SANI Pika",
+    "STR_PROG_SANI": "Sani",
+    "STR_PROG_SANI_QUICK": "Sani Quick",
     "air_energy_hint": "Huomautus: Virrankulutustilastotoiminto koskee vain monotyyppistä ilmastointilaitetta, mutta ei monityyppistä ilmastointilaitetta.",
     "now": "Nyt",
     "washer_atag_delay_start_in": "Pesu viivästyy. Aloita sisään",
@@ -3415,6 +3415,7 @@
     "use_humidity": "Käytä kosteuslaatikkoa kosteuden säätämiseen",
     "same_day": "Samana päivänä",
     "w_temp_set": "Minkä lämpötila asettaa?",
+    "asko": "ASKO",
     "eco_meter": "Eco mittari",
     "asko_eco_meter_desc": "## on hyödyllinen älykäs osoitin, jonka avulla voit määrittää ympäristövaikutuksesi valitun ohjelman ja lisävaihtoehtojen perusteella energian, veden ja pesuaineen kulutuksen osalta.",
     "wm86_autodose_desc": "Sen sijaan, että joutuisit kamppailemaan, anna pesukoneen mitata täsmälleen oikea pesuaineannos. Auto Dose -järjestelmällä varustetut pesukoneemme mittaavat pesuaineen pesumäärän, likaisuuden, veden kovuuden, ohjelmatyypin ja lämpötilan mukaan. Aina täydellinen annostus eikä enää yliannostusta. Täällä voit säätää oletusasetuksiasi automaattiselle annokselle.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Ei esilämmitystä",
     "CL_DV_OV_fast_preheat_desc": "Nopea esilämmitys on nopein tapa esilämmittää uuni. Se kestää noin 7 minuuttia.",
     "CL_DV_OV_preheat_desc": "Esikuumennus on paras tapa esilämmittää uuni astian kannalta. Se kestää noin 10 minuuttia.",
-    "CL_DV_OV_no_preheat_desc": "Aina ei tarvitse esilämmittää uunia. Esimerkiksi tiettyjen ruokien lämmittämiseen."
+    "CL_DV_OV_no_preheat_desc": "Aina ei tarvitse esilämmittää uunia. Esimerkiksi tiettyjen ruokien lämmittämiseen.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "AI Energy Navigationin käyttöönotto voi vähentää energiankulutusta, mutta se voi myös hidastaa jäähdytysnopeutta.",
+    "CL_DV_RF_ice_maker_mode": "Jääpalakonetila",
+    "CL_CF_SD_smart_delay": "Älykäs viive",
+    "CL_CF_SD_settings_subtitle": "Laite käyttää ruuhka-aikoja käytettäessä viivetilaa.",
+    "CL_CF_SD_add_zone": "Lisää vyöhyke",
+    "CL_CF_SD_new_tariff_zone": "Uudet tariffialueet ##",
+    "CL_CF_SD_add_tariff": "Lisää tariffi",
+    "CL_CF_SD_duplicate": "Kopioi",
+    "CL_CF_SD_delete_zone": "Poista vyöhyke ",
+    "CL_CF_SD_tariff_zones_n": "Tariffivyöhykkeet ##",
+    "CL_CF_SD_tariff_n": "Tariffi ##",
+    "CL_CF_SD_price": "Hinta",
+    "CL_CF_SD_off_peak_delay": "Viive ruuhkan ulkopuolella",
+    "CL_CF_SD_delay_subtitle": "Laite käyttää ruuhka-aikoja käytettäessä viivetilaa.\n Jos käytetään yhdistelmää End kanssa ennakkoehto.",
+    "CL_CF_SD_off_peak_delay_not_set": "Huippuajan viivettä ei ole asetettu",
+    "CL_CF_SD_to_start_desc": "Aloitaksesi toiminnon käyttö sinun on määritettävä se asetuksista.",
+    "CL_CF_SD_best": "Parhaat",
+    "CL_CF_SD_delete_title": "Haluatko varmasti poistaa ##?",
+    "CL_DV_OV_number_of_trays": "Lokeroiden lukumäärä",
+    "CL_DV_OV_baking_trays": "LEIPVUOTTEET",
+    "CL_DV_OV_1_tray": "1 alusta",
+    "CL_DV_OV_2_trays": "2 alustaa",
+    "CL_DV_OV_multi_tray": "Monipuolinen lokero",
+    "CL_DV_OV_multi": "Multi",
+    "CL_DV_RF_ice_off": "Ice OFF",
+    "CL_DV_RF_ion_preservation": "HI-NANO",
+    "CL_DV_RF_ai_energy": "AI Energiaa säästävä",
+    "CL_DV_RF_adaptive_temperature": "Itsesopeutuminen",
+    "CL_DV_RF_normal_ice_making": "Tavallinen jäänteko",
+    "CL_DV_RF_quick_ice_making": "Nopea jäänteko",
+    "CL_DV_OV_extra_auto_programs": "Automaattiset ohjelmat",
+    "CL_DV_OV_extra_auto_programs_desc": "Joukko ennalta määritettyjä automaattisia ohjelmia. Automaattiset ohjelmat auttavat sinua saamaan parhaan tuloksen valitulle ruoalle tai ruoalle.",
+    "CL_DV_OV_extra_browning_programs": "Browning ohjelmat",
+    "CL_DV_OV_extra_browning_programs_desc": "Käytä erityisesti kehitettyjä ruskistusohjelmia. Aseta haluamasi ruskistusaste annoksellesi.",
+    "CL_DV_OV_extra_cleaning": "Puhdistus",
+    "CL_DV_OV_extra_cleaning_desc": "Vaiheittaiset puhdistusohjelmat ja ohjeet uunin pitämiseen optimaalisessa kunnossa.",
+    "CL_DV_OV_extra_stage_cooking": "Lavakeittiö",
+    "CL_DV_OV_extra_stage_cooking_desc": "Luo mukautettuja kypsennysohjelmia käyttämällä jopa 5 eri vaihetta.",
+    "CL_DV_OV_extra_defrost_desc": "Joukko ennalta määritettyjä ohjelmia ruokien sulattamiseksi oikein laadun varmistamiseksi pakastamisen jälkeen.",
+    "CL_DV_OV_extra_warming_desc": "Lämmitä aiemmin kypsennetyt ruoat ennalta määritettyjen uuniohjelmien avulla. Säilyttää maksimaalisen maun ja koostumuksen.",
+    "CL_DV_OV_extra_non_food": "Ei ruokaa",
+    "CL_DV_OV_extra_non_food_desc": "Lämmitä lautaset, kuumat kivet tai steriloi pullot erikoisohjelmilla.",
+    "CL_DV_OV_extra_preserving_desc": "Ruoan säilöntä auttaa pitämään ruoasta pidempään säilyttäen samalla ravintoarvon, rakenteen ja maun.",
+    "CL_DV_OV_extra_fast_cool": "Nopeasti jäähtyä",
+    "CL_DV_OV_extra_fast_cool_desc": "Jäähtyy uuni mahdollisimman nopeasti paistamisen päätyttyä tai sitä voidaan käyttää muun ruoanvalmistuksen nopeaan jatkamiseen.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Celsius-grillilevy",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Sarja valmiita uuniohjelmia erityisesti Celsius-grillilevyllä leivontaan.",
+    "CL_DV_OV_explore_all_extra": "TUTUSTU KAIKKIIN LISÄVARUSTEET",
+    "CL_DV_OV_extras": "Ylimääräiset",
+    "CL_CF_CS_midi_hih_setup_1": "Kytke laite päälle.",
+    "CL_CF_CS_midi_hih_setup_2": "Napauta ja pidä Wi-Fi-kuvaketta noin 5 sekunnin ajan, kunnes \"CSt\" tulee näkyviin.",
+    "CL_CF_CS_midi_hih_setup_3": "Laite on nyt valmis yhdistettäväksi 5 minuuttia.\n Napsauta SEURAAVA jatkaaksesi.",
+    "CL_CF_CS_midi_hih_pair_2": "Napauta ja pidä Wi-Fi-kuvaketta noin 8 sekunnin ajan, kunnes \"PAr\" tulee näkyviin.",
+    "CL_CF_CS_midi_hih_pair_3": "Laite on nyt valmis pariliitoksen muodostamiseen 3 minuutin ajan.\n Napsauta SEURAAVA jatkaaksesi.",
+    "ac_dimmer_air_des": "Sammuta LED, jotta LED-valo ei häiritse lepoa yöllä",
+    "e_verify_code": "Anna vahvistuskoodi",
+    "CL_CF_CS_td76_and_wm86_pair_4": "Laiteverkko on nyt avoinna yhteyden muodostamista varten 3 minuuttia.\n Napsauta SEURAAVA jatkaaksesi.",
+    "CL_DV_OV_24_set_language": "Aseta kieli",
+    "CL_DV_OV_24_time_date": "Aika - päivämäärä",
+    "CL_CF_CS_dw005_cs_step1": "Varmista, että Bluetooth on aktivoitu puhelimessasi. Kytke sitten laite päälle ja napauta asetuspainiketta.",
+    "CL_CF_CS_dw005_cs_step2": "Siirry kohtaan \"Lisäasetukset\" painamalla nuolipainikkeita. Paina asetuspainiketta päästäksesi sisään.",
+    "CL_CF_CS_dw005_cs_step3": "Syötä PIN-koodi painamalla seuraavaa näppäinsarjaa: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "Siirry \"Lisäasetukset\" -valikossa kohtaan \"WiFi\" ja paina asetuspainiketta päästäksesi sisään. Varmista \"Wifi\"-valikon sisällä, että WiFi on käytössä. Jos ei, ota käyttöön painamalla asetuspainiketta.",
+    "CL_CF_CS_dw005_cs_step5": "Kun olet edelleen \"WiFi\"-valikossa, siirry kohtaan \"Yhteyden asetukset\" ja paina asetuspainiketta aktivoidaksesi. ",
+    "CL_CF_CS_dw005_cs_step6": "Laiteverkko on nyt avoinna yhteyden muodostamista varten 5 minuutin ajan.\n Napsauta SEURAAVA jatkaaksesi.",
+    "CL_CF_CS_dw005_pair_step1": "Varmista, että Bluetooth on aktivoitu puhelimessasi. Kytke sitten laite päälle ja napauta asetuspainiketta.",
+    "CL_CF_CS_dw005_pair_step2": "Siirry kohtaan \"Lisäasetukset\" painamalla nuolipainikkeita. Paina asetuspainiketta päästäksesi sisään.",
+    "CL_CF_CS_dw005_pair_step3": "Syötä PIN-koodi painamalla seuraavaa näppäinsarjaa: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "Siirry \"Lisäasetukset\" -valikossa \"WiFi\" -valikkoon ja paina asetuspainiketta päästäksesi sisään. Siirry sitten kohtaan \"Lisää laite\" ja paina asetuspainiketta aktivoidaksesi.",
+    "CL_CF_CS_dw005_pair_step5": "Laiteverkko on nyt avoinna laitteen lisäämistä varten 3 minuutin ajan.\n Napsauta SEURAAVA jatkaaksesi.",
+    "CL_DV_DW_save_date_invalid": "Loppukuukausi ei voi olla pienempi kuin aloituskuukausi!",
+    "CL_DV_OV_send_to_devices": "LÄHETÄ LAITTEILLE"
 }
