--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "Pour activer le W-iFi sur l’appareil, appuyez sur la touche de refroidissement intensif\nou la touche de congélation. L’écran\ns’affiche brièvement'01'et change à\n'02'automatiquement.\nLe Wi-Fi est prêt pour la connexion.",
     "cooling_config_wifi_step3": "Naviguez avec les touches fléchées pour choisir'S'.\nConfirmez'S'en appuyant sur la touche de refroidissement\nintensif ou de congélation.\nLa touche de refroidissement intensif ou de congélation commence\nà clignoter ; le réseau de cet appareil est\nmaintenant ouvert pour se connecter, pendant 3 minutes.\nCliquez sur SUIVANT pour continuer.",
     "cooling_config_wifi_step1_pair": "Réglez l’appareil sur un fonctionnement normal.\nAppuyez sur l’icône Wi-Fi pendant environ 3\nsecondes.\nLe symbole Wi-Fi commence à clignoter et'0'\napparaît dans l’affichage. Vous avez accédé au menu de connexion au réseau\n.",
-    "cooling_config_wifi_step2_pair": "Naviguez avec les touches fléchées pour choisir'P'.\nConfirmez'P'en appuyant sur la touche de refroidissement\nintensif ou de congélation.\nLa touche de refroidissement intensif ou de congélation commence\nà clignoter ; le réseau de cet appareil est\nmaintenant ouvert pour se connecter, pendant 5 minutes.\nCliquez sur SUIVANT pour continuer.",
+    "cooling_config_wifi_step2_pair": "Naviguez avec les touches fléchées et sélectionnez « P ». Confirmez « P » en appuyant sur la touche de refroidissement/congélation intensive. La touche de refroidissement/congélation intensive commencera à clignoter. Le réseau de l'appareil est maintenant ouvert pour l'appairage pendant 3 minutes. Cliquez sur SUIVANT pour continuer.",
     "dw_config_wifi_step1": "Mettez l’appareil en marche. Naviguez avec les touches\nfléchées jusqu’aux réglages. Appuyez sur l’icône MENU pour accéder aux réglages\n.",
     "dw_config_wifi_step2": "Dans le menu des réglages, trouvez RÉSEAU et\nconfirmez avec la touche Menu pour accéder.",
     "dw_config_wifi_step3": "Accédez à\"Select SoftAP\"et confirmer\navec la touche Menu. Le réseau de cet appareil\nest maintenant ouvert pour se connecter, pendant 5\nminutes.\nCliquez sur SUIVANT pour continuer.",
@@ -1041,7 +1041,7 @@
     "time_save": "Gain de temps",
     "dry": "Sec",
     "level": "niveau",
-    "detergent": "Détergent",
+    "detergent": "Lessive",
     "softener": "Adoucisseur",
     "pause": "PAUSE",
     "shut_down": "FERMER",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "1/2 charge Bas",
     "STR_PROG_UPPER": "1/2 charge Haut",
     "STR_PROG_ANTI_ODOUR": "Anti-odeur",
-    "STR_PROG_SANI": "SANI",
-    "STR_PROG_SANI_QUICK": "SANI rapide",
+    "STR_PROG_SANI": "Sani",
+    "STR_PROG_SANI_QUICK": "Sani Rapide",
     "air_energy_hint": "Remarque : La fonction de statistiques de consommation d'énergie n'est valide que pour les climatiseurs de type mono, mais pas pour les climatiseurs de type multiple.",
     "now": "Maintenant",
     "washer_atag_delay_start_in": "Lavage retardé. Commencez dans",
@@ -2518,7 +2518,7 @@
     "wcc_lock": "Verrouillage",
     "wcc_door_alarm": "Alarme de porte",
     "confirm_access": "CONFIRMER L'ACCÈS",
-    "delete_account_email_code_tips": "Nous avons envoyé un e-mail avec un code de vérification à %s. \\Veuillez saisir le code de vérification figurant dans l'e-mail pour confirmer l'accès. \\Le code reçu est valable pendant 10 minutes.",
+    "delete_account_email_code_tips": "Nous avons envoyé un e-mail avec un code de vérification à %s. Veuillez saisir le code de vérification figurant dans l'e-mail pour confirmer l'accès. Le code reçu est valable pendant 10 minutes.",
     "resend_code": "Renvoyer le code",
     "manuals_oven_name": "Four et cuisinière",
     "manuals_rf_name": "Réfrigérateur et congélateur",
@@ -3415,6 +3415,7 @@
     "use_humidity": "Utiliser une boîte à humidité pour réguler l'humidité",
     "same_day": "Le même jour",
     "w_temp_set": "Quelle température dois-je régler?",
+    "asko": "ASKO",
     "eco_meter": "Écomètre",
     "asko_eco_meter_desc": "## est un indicateur intelligent utile pour déterminer votre impact environnemental en fonction du programme choisi et des options supplémentaires en matière de consommation d'énergie, d'eau et de détergent.",
     "wm86_autodose_desc": "Au lieu de vous battre pour obtenir le dosage exact de lessive, laissez la machine à laver mesurer le dosage exact de lessive. Nos machines à laver avec système Auto Dose mesurent le dosage de lessive en fonction de la charge de lavage, du degré de saleté, de la dureté de l'eau, du type de programme et de la température. Un dosage toujours parfait et plus de surdosage. Vous pouvez ici ajuster vos paramètres par défaut pour Auto Dose.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Pas de préchauffage",
     "CL_DV_OV_fast_preheat_desc": "Le préchauffage rapide est le moyen le plus rapide de préchauffer votre four. Il prend environ 7 minutes.",
     "CL_DV_OV_preheat_desc": "Le préchauffage est la meilleure façon de préchauffer votre four en fonction du plat. Cela prend environ 10 minutes.",
-    "CL_DV_OV_no_preheat_desc": "Il n'est pas toujours nécessaire de préchauffer votre four. Par exemple pour réchauffer certains aliments."
+    "CL_DV_OV_no_preheat_desc": "Il n'est pas toujours nécessaire de préchauffer votre four. Par exemple pour réchauffer certains aliments.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "L'activation de la navigation énergétique IA peut réduire la consommation d'énergie, mais elle peut également ralentir la vitesse de refroidissement.",
+    "CL_DV_RF_ice_maker_mode": "Mode machine à glaçons",
+    "CL_CF_SD_smart_delay": "Délai intelligent",
+    "CL_CF_SD_settings_subtitle": "L'appareil utilisera les heures creuses lors de l'utilisation du mode différé.",
+    "CL_CF_SD_add_zone": "Ajouter une zone",
+    "CL_CF_SD_new_tariff_zone": "Nouvelles zones tarifaires ##",
+    "CL_CF_SD_add_tariff": "Ajouter un tarif",
+    "CL_CF_SD_duplicate": "Double",
+    "CL_CF_SD_delete_zone": "Supprimer la zone ",
+    "CL_CF_SD_tariff_zones_n": "Zones tarifaires ##",
+    "CL_CF_SD_tariff_n": "Tarif ##",
+    "CL_CF_SD_price": "Prix",
+    "CL_CF_SD_off_peak_delay": "Retard en dehors des heures de pointe",
+    "CL_CF_SD_delay_subtitle": "L'appareil utilisera les heures creuses lors de l'utilisation du mode différé.\n Si une combinaison avec Fin est utilisée, une condition préalable est appliquée.",
+    "CL_CF_SD_off_peak_delay_not_set": "Délai hors pointe non défini",
+    "CL_CF_SD_to_start_desc": "Pour commencer à utiliser la fonction, vous devez la configurer dans les paramètres.",
+    "CL_CF_SD_best": "Meilleur",
+    "CL_CF_SD_delete_title": "Êtes-vous sûr de vouloir supprimer ## ?",
+    "CL_DV_OV_number_of_trays": "Nombre de plateaux",
+    "CL_DV_OV_baking_trays": "PLAQUES DE CUISSON",
+    "CL_DV_OV_1_tray": "1 plateau",
+    "CL_DV_OV_2_trays": "2 plateaux",
+    "CL_DV_OV_multi_tray": "Plateau multiple",
+    "CL_DV_OV_multi": "Multi",
+    "CL_DV_RF_ice_off": "Glace OFF",
+    "CL_DV_RF_ion_preservation": "HI-NANO",
+    "CL_DV_RF_ai_energy": "Économie d'énergie grâce à l'IA",
+    "CL_DV_RF_adaptive_temperature": "Auto-adaptation",
+    "CL_DV_RF_normal_ice_making": "Fabrication de glace ordinaire",
+    "CL_DV_RF_quick_ice_making": "Fabrication rapide de glace",
+    "CL_DV_OV_extra_auto_programs": "Programmes automatiques",
+    "CL_DV_OV_extra_auto_programs_desc": "Un ensemble de programmes automatiques prédéfinis. Les programmes automatiques vous aident à obtenir le meilleur résultat pour le type d'aliment ou de plat sélectionné.",
+    "CL_DV_OV_extra_browning_programs": "Programmes Browning",
+    "CL_DV_OV_extra_browning_programs_desc": "Utilisez des programmes de brunissage spécialement conçus. Réglez le degré de brunissage souhaité pour votre plat.",
+    "CL_DV_OV_extra_cleaning": "Nettoyage",
+    "CL_DV_OV_extra_cleaning_desc": "Programmes de nettoyage étape par étape et instructions pour maintenir votre four dans des conditions optimales.",
+    "CL_DV_OV_extra_stage_cooking": "Cuisine de scène",
+    "CL_DV_OV_extra_stage_cooking_desc": "Créez des programmes de cuisson personnalisés, utilisant jusqu'à 5 étapes différentes.",
+    "CL_DV_OV_extra_defrost_desc": "Un ensemble de programmes prédéfinis pour décongeler correctement les aliments afin d'en garantir la qualité après leur congélation.",
+    "CL_DV_OV_extra_warming_desc": "Réchauffez les aliments déjà cuits grâce aux programmes de cuisson prédéfinis. Conservez un maximum de saveur et de texture.",
+    "CL_DV_OV_extra_non_food": "Non alimentaire",
+    "CL_DV_OV_extra_non_food_desc": "Réchauffez vos assiettes, pierres chaudes ou stérilisez vos biberons grâce à des programmes spéciaux.",
+    "CL_DV_OV_extra_preserving_desc": "La conservation des aliments permet de les conserver plus longtemps tout en préservant leur valeur nutritionnelle, leur texture et leur saveur.",
+    "CL_DV_OV_extra_fast_cool": "Refroidissement rapide",
+    "CL_DV_OV_extra_fast_cool_desc": "Refroidit le four le plus rapidement possible une fois la cuisson terminée ou peut être utilisé pour continuer rapidement d'autres préparations alimentaires.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Plaque de gril Celsius",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Un ensemble de programmes de four prédéfinis spécifiquement pour la cuisson avec la plaque de gril Celsius.",
+    "CL_DV_OV_explore_all_extra": "EXPLOREZ TOUS LES EXTRA",
+    "CL_DV_OV_extras": "Suppléments",
+    "CL_CF_CS_midi_hih_setup_1": "Allumez l'appareil.",
+    "CL_CF_CS_midi_hih_setup_2": "Appuyez et maintenez l'icône Wi-Fi pendant environ 5 secondes jusqu'à ce que « CSt » apparaisse.",
+    "CL_CF_CS_midi_hih_setup_3": "L'appareil est maintenant prêt à être connecté pendant 5 minutes.\n Cliquez sur SUIVANT pour continuer.",
+    "CL_CF_CS_midi_hih_pair_2": "Appuyez et maintenez l'icône Wi-Fi pendant environ 8 secondes jusqu'à ce que « PAr » apparaisse.",
+    "CL_CF_CS_midi_hih_pair_3": "L'appareil est maintenant prêt à être couplé pendant 3 minutes.\n Cliquez sur SUIVANT pour continuer.",
+    "ac_dimmer_air_des": "Éteignez la LED pour éviter que la lumière LED ne perturbe votre repos la nuit",
+    "e_verify_code": "Entrez le code de vérification",
+    "CL_CF_CS_td76_and_wm86_pair_4": "Le réseau de l'appareil est désormais ouvert à la connexion pendant 3 minutes.\n Cliquez sur SUIVANT pour continuer.",
+    "CL_DV_OV_24_set_language": "Définir la langue",
+    "CL_DV_OV_24_time_date": "Heure - Date",
+    "CL_CF_CS_dw005_cs_step1": "Assurez-vous que votre Bluetooth est activé sur votre téléphone. Allumez ensuite votre appareil et appuyez sur le bouton Paramètres.",
+    "CL_CF_CS_dw005_cs_step2": "Accédez aux « Paramètres avancés » en appuyant sur les boutons fléchés. Appuyez sur le bouton Paramètres pour accéder.",
+    "CL_CF_CS_dw005_cs_step3": "Entrez le code PIN en appuyant sur la séquence de boutons suivante : I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "Dans le menu « Paramètres avancés », allez dans « WiFi » et appuyez sur le bouton Paramètres pour entrer. Dans le menu « WiFi », assurez-vous que le WiFi est activé. Si ce n’est pas le cas, appuyez sur le bouton Paramètres pour l’activer.",
+    "CL_CF_CS_dw005_cs_step5": "Toujours dans le menu « WiFi », allez dans « Configuration de la connexion » et appuyez sur le bouton Paramètres pour activer. ",
+    "CL_CF_CS_dw005_cs_step6": "Le réseau de l'appareil est désormais ouvert à la connexion pendant 5 minutes.\n Cliquez sur SUIVANT pour continuer.",
+    "CL_CF_CS_dw005_pair_step1": "Assurez-vous que votre Bluetooth est activé sur votre téléphone. Allumez ensuite votre appareil et appuyez sur le bouton Paramètres.",
+    "CL_CF_CS_dw005_pair_step2": "Accédez aux « Paramètres avancés » en appuyant sur les boutons fléchés. Appuyez sur le bouton Paramètres pour accéder.",
+    "CL_CF_CS_dw005_pair_step3": "Entrez le code PIN en appuyant sur la séquence de boutons suivante : I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "Dans le menu « Paramètres avancés », accédez au menu « WiFi » et appuyez sur le bouton Paramètres pour y accéder. Accédez ensuite à « Ajouter un appareil » et appuyez sur le bouton Paramètres pour l'activer.",
+    "CL_CF_CS_dw005_pair_step5": "Le réseau de l'appareil est désormais ouvert pour l'ajout d'appareils pendant 3 minutes.\n Cliquez sur SUIVANT pour continuer.",
+    "CL_DV_DW_save_date_invalid": "Le mois de fin ne peut pas être plus petit que le mois de début !",
+    "CL_DV_OV_send_to_devices": "ENVOYER AUX APPAREILS"
 }
