--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "אם \"02\" מוצג, דלג על שלב זה.\nאם \"0\" מוצג, הקש על מקש הקירור/הקפאה האינטנסיבי כדי להפעיל Wi-Fi במכשיר.\nהתצוגה תציג לזמן קצר \"01\" ותשנה ל-\"02\" באופן אוטומטי.",
     "cooling_config_wifi_step3": "נווט עם מקשי החצים ובחר \"S\".\nאשר \"S\" על ידי הקשה על מקש קירור/הקפאה אינטנסיבי.\nמקש הקירור/הקפאה האינטנסיבי יתחיל להבהב. רשת המכשיר פתוחה כעת לחיבור למשך 3 דקות.",
     "cooling_config_wifi_step1_pair": "הגדר את המכשיר לתנאי הפעלה רגילים. הקש והחזק את סמל ה-Wi-Fi למשך 3 שניות עד שתשמע צפצוף. סמל ה-Wi-Fi יתחיל להבהב, ויופיע \"05\". נכנסת לתפריט חיבור הרשת.",
-    "cooling_config_wifi_step2_pair": "נווט עם מקשי החצים ובחר \"P\".\nאשר את \"P\" על ידי הקשה על מקש קירור/הקפאה אינטנסיבי.\nמקש הקירור/הקפאה האינטנסיבי יתחיל להבהב. רשת המכשירים פתוחה כעת להתאמה למשך 5 דקות.",
+    "cooling_config_wifi_step2_pair": "נווט עם מקשי החצים ובחר \"P\". אשר את \"P\" על ידי הקשה על מקש קירור/הקפאה אינטנסיבי. מקש הקירור/הקפאה האינטנסיבי יתחיל להבהב. רשת המכשירים פתוחה כעת להתאמה למשך 3 דקות. לחץ על NEXT כדי להמשיך.",
     "dw_config_wifi_step1": "הפעל את המכשיר. נווט עם מקשי החצים להגדרות. לחץ על סמל MENU כדי להיכנס להגדרות.",
     "dw_config_wifi_step2": "בתפריט ההגדרות מצא את רשת ואשר באמצעות מקש התפריט כדי להיכנס.",
     "dw_config_wifi_step3": "נווט אל \"הפעל את SoftAP\" ואשר באמצעות מקש התפריט. הרשת של מכשיר זה פתוחה כעת לחיבור אליה, למשך 5 דקות.\nלחץ על NEXT כדי להמשיך.",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "חצי תחתון",
     "STR_PROG_UPPER": "בחצי העליון",
     "STR_PROG_ANTI_ODOUR": "אנטי ריח",
-    "STR_PROG_SANI": "SANI",
-    "STR_PROG_SANI_QUICK": "SANI מהיר",
+    "STR_PROG_SANI": "סאני",
+    "STR_PROG_SANI_QUICK": "סאני קוויק",
     "air_energy_hint": "הערה: הפונקציה הסטטיסטית של צריכת החשמל תקפה רק עבור מזגן מסוג Mono, אך לא עבור מזגן Multi-type.",
     "now": "עַכשָׁיו",
     "washer_atag_delay_start_in": "הכביסה מתעכבת. מתחיל ב",
@@ -3415,6 +3415,7 @@
     "use_humidity": "השתמש בתיבת לחות כדי לווסת הלחות",
     "same_day": "באותו היום",
     "w_temp_set": "איזו טמפרטורה להגדיר?",
+    "asko": "ASKO",
     "eco_meter": "אקו מטר",
     "asko_eco_meter_desc": "## הוא אינדיקטור חכם מועיל לקביעת ההשפעה הסביבתית שלך בהתבסס על התוכנית שנבחרה ואפשרויות נוספות בכל הנוגע לצריכת אנרגיה, מים וחומרי ניקוי.",
     "wm86_autodose_desc": "במקום לעשות את זה למאבק תן למכונת הכביסה למדוד בדיוק את המינון הנכון של חומר ניקוי. מכונות הכביסה שלנו עם מערכת מינון אוטומטי מודדות את חומר הניקוי מול עומס הכביסה, רמת הלכלוך, קשיות המים, סוג התוכנית והטמפרטורה. תמיד מינון מושלם ולא עוד מינון יתר. כאן תוכל להתאים את הגדרות ברירת המחדל שלך עבור מינון אוטומטי.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "אין חימום מוקדם",
     "CL_DV_OV_fast_preheat_desc": "חימום מהיר הוא הדרך המהירה ביותר לחמם מראש את התנור שלך. זה לוקח בערך 7 דקות.",
     "CL_DV_OV_preheat_desc": "חימום מוקדם הוא הדרך הטובה ביותר לחמם מראש את התנור בהתחשב במנה. זה לוקח בערך 10 דקות.",
-    "CL_DV_OV_no_preheat_desc": "לא תמיד יש צורך לחמם את התנור מראש. למשל לחימום מאכלים מסוימים."
+    "CL_DV_OV_no_preheat_desc": "לא תמיד יש צורך לחמם את התנור מראש. למשל לחימום מאכלים מסוימים.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "הפעלת ניווט באנרגיה בינה מלאכותית יכולה להפחית את צריכת האנרגיה, אך היא גם יכולה להאט את מהירות הקירור.",
+    "CL_DV_RF_ice_maker_mode": "מצב מייצר קרח",
+    "CL_CF_SD_smart_delay": "השהיה חכמה",
+    "CL_CF_SD_settings_subtitle": "המכשיר ישתמש בשעות מחוץ לשיא בעת שימוש במצב השהייה.",
+    "CL_CF_SD_add_zone": "הוסף אזור",
+    "CL_CF_SD_new_tariff_zone": "אזורי תעריפים חדשים ##",
+    "CL_CF_SD_add_tariff": "הוסף תעריף",
+    "CL_CF_SD_duplicate": "לְשַׁכְפֵּל",
+    "CL_CF_SD_delete_zone": "מחק אזור ",
+    "CL_CF_SD_tariff_zones_n": "אזורי תעריף ##",
+    "CL_CF_SD_tariff_n": "תעריף ##",
+    "CL_CF_SD_price": "מְחִיר",
+    "CL_CF_SD_off_peak_delay": "עיכוב מחוץ לשיא",
+    "CL_CF_SD_delay_subtitle": "המכשיר ישתמש בשעות לא שיא בעת שימוש במצב השהייה.\n אם משתמשים בשילוב עם End בתנאי מוקדם מוחל.",
+    "CL_CF_SD_off_peak_delay_not_set": "השהיה מחוץ לשיא לא מוגדר",
+    "CL_CF_SD_to_start_desc": "כדי להתחיל להשתמש בפונקציה עליך להגדיר אותה בהגדרות.",
+    "CL_CF_SD_best": "טוֹב בִּיוֹתֵר",
+    "CL_CF_SD_delete_title": "האם אתה בטוח שברצונך למחוק את ##?",
+    "CL_DV_OV_number_of_trays": "מספר מגשים",
+    "CL_DV_OV_baking_trays": "מגשי אפייה",
+    "CL_DV_OV_1_tray": "1 מגש",
+    "CL_DV_OV_2_trays": "2 מגשים",
+    "CL_DV_OV_multi_tray": "מגש רב",
+    "CL_DV_OV_multi": "רַב",
+    "CL_DV_RF_ice_off": "קרח כבוי",
+    "CL_DV_RF_ion_preservation": "היי-ננו",
+    "CL_DV_RF_ai_energy": "AI חיסכון באנרגיה",
+    "CL_DV_RF_adaptive_temperature": "הסתגלות עצמית",
+    "CL_DV_RF_normal_ice_making": "ייצור קרח רגיל",
+    "CL_DV_RF_quick_ice_making": "הכנת קרח מהירה",
+    "CL_DV_OV_extra_auto_programs": "תוכניות אוטומטיות",
+    "CL_DV_OV_extra_auto_programs_desc": "קבוצה של תוכניות אוטומטיות מוגדרות מראש. תוכניות אוטומטיות עוזרות לך לקבל את התוצאה הטובה ביותר עבור סוג האוכל או המנה שנבחרו.",
+    "CL_DV_OV_extra_browning_programs": "תוכניות בראונינג",
+    "CL_DV_OV_extra_browning_programs_desc": "השתמש בתוכניות השחמה שפותחו במיוחד. הגדר את רמת ההשחמה הרצויה הרצויה כתוצאה מהמנה שלך.",
+    "CL_DV_OV_extra_cleaning": "ניקוי",
+    "CL_DV_OV_extra_cleaning_desc": "תוכניות ניקוי שלב אחר שלב והוראות כיצד לשמור על התנור במצב אופטימלי.",
+    "CL_DV_OV_extra_stage_cooking": "בישול שלב",
+    "CL_DV_OV_extra_stage_cooking_desc": "צור תוכניות בישול מותאמות אישית, תוך שימוש עד 5 שלבים שונים.",
+    "CL_DV_OV_extra_defrost_desc": "קבוצה של תוכניות מוגדרות מראש להפשרה נכונה של מזון כדי להבטיח את האיכות לאחר הקפאתו.",
+    "CL_DV_OV_extra_warming_desc": "לחמם מחדש מזון שבושל בעבר באמצעות תוכניות התנור המוגדרות מראש. שומר על מקסימום טעם ומרקם.",
+    "CL_DV_OV_extra_non_food": "ללא אוכל",
+    "CL_DV_OV_extra_non_food_desc": "חממו את הצלחות שלכם, אבנים חמות או עיקרו בקבוקים עם תוכניות מיוחדות.",
+    "CL_DV_OV_extra_preserving_desc": "שימור מזון עוזר לגרום למזון שלך להחזיק מעמד זמן רב יותר תוך שמירה על הערך התזונתי, המרקם והטעם.",
+    "CL_DV_OV_extra_fast_cool": "מגניב מהיר",
+    "CL_DV_OV_extra_fast_cool_desc": "מקרר את התנור מהר ככל האפשר לאחר סיום האפייה או שניתן להשתמש בו כדי להמשיך במהירות בהכנת מזון אחר.",
+    "CL_DV_OV_extra_celsius_grill_plate": "צלחת גריל צלזיוס",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "קבוצה של תוכניות תנור מוגדרות מראש במיוחד לאפייה עם צלחת גריל צלזיוס.",
+    "CL_DV_OV_explore_all_extra": "חקור את כל התוספות",
+    "CL_DV_OV_extras": "תוספות",
+    "CL_CF_CS_midi_hih_setup_1": "הפעל את המכשיר.",
+    "CL_CF_CS_midi_hih_setup_2": "הקש והחזק את סמל ה-Wi-Fi למשך כ-5 שניות עד להופעת \"CSt\".",
+    "CL_CF_CS_midi_hih_setup_3": "המכשיר מוכן כעת לחיבור למשך 5 דקות.\n לחץ על NEXT כדי להמשיך.",
+    "CL_CF_CS_midi_hih_pair_2": "הקש והחזק את סמל ה-Wi-Fi למשך כ-8 שניות עד להופעת \"PAr\".",
+    "CL_CF_CS_midi_hih_pair_3": "המכשיר מוכן כעת להתאמה למשך 3 דקות.\n לחץ על NEXT כדי להמשיך.",
+    "ac_dimmer_air_des": "כבה את ה-LED כדי למנוע מנורות LED להפריע למנוחה שלך בלילה",
+    "e_verify_code": "הזן קוד אימות",
+    "CL_CF_CS_td76_and_wm86_pair_4": "רשת המכשיר פתוחה כעת לחיבור למשך 3 דקות.\n לחץ על NEXT כדי להמשיך.",
+    "CL_DV_OV_24_set_language": "הגדר שפה",
+    "CL_DV_OV_24_time_date": "זמן - תאריך",
+    "CL_CF_CS_dw005_cs_step1": "ודא שה-Bluetooth שלך מופעל בטלפון שלך. לאחר מכן הפעל את המכשיר והקש על כפתור ההגדרות.",
+    "CL_CF_CS_dw005_cs_step2": "נווט אל \"הגדרות מתקדמות\" על ידי לחיצה על לחצני החצים. לחץ על לחצן ההגדרות כדי להיכנס.",
+    "CL_CF_CS_dw005_cs_step3": "הזן קוד PIN על ידי לחיצה על רצף הכפתורים הבא: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "בתפריט \"הגדרות מתקדמות\" עבור אל \"WiFi\" ולחץ על כפתור ההגדרות כדי להיכנס. בתוך תפריט \"Wifi\" ודא ש-WiFi מופעל. אם לא, לחץ על לחצן ההגדרות כדי להפעיל.",
+    "CL_CF_CS_dw005_cs_step5": "בעודך בתפריט \"WiFi\" עבור אל \"הגדרת חיבור\" ולחץ על כפתור ההגדרות כדי להפעיל. ",
+    "CL_CF_CS_dw005_cs_step6": "רשת המכשיר פתוחה כעת לחיבור למשך 5 דקות.\n לחץ על NEXT כדי להמשיך.",
+    "CL_CF_CS_dw005_pair_step1": "ודא שה-Bluetooth שלך מופעל בטלפון שלך. לאחר מכן הפעל את המכשיר והקש על כפתור ההגדרות.",
+    "CL_CF_CS_dw005_pair_step2": "נווט אל \"הגדרות מתקדמות\" על ידי לחיצה על לחצני החצים. לחץ על לחצן ההגדרות כדי להיכנס.",
+    "CL_CF_CS_dw005_pair_step3": "הזן קוד PIN על ידי לחיצה על רצף הכפתורים הבא: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "בתפריט \"הגדרות מתקדמות\" עבור לתפריט \"WiFi\" ולחץ על כפתור ההגדרות כדי להיכנס. לאחר מכן עבור אל \"הוסף מכשיר\" ולחץ על כפתור ההגדרות כדי להפעיל.",
+    "CL_CF_CS_dw005_pair_step5": "רשת המכשיר פתוחה כעת להוספת מכשיר למשך 3 דקות.\n לחץ על NEXT כדי להמשיך.",
+    "CL_DV_DW_save_date_invalid": "חודש סוף לא יכול להיות קטן מחודש ההתחלה!",
+    "CL_DV_OV_send_to_devices": "שלח למכשירים"
 }
