--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "यदि \"02\" प्रदर्शित होता है, तो इस चरण को छोड़ दें।\nयदि \"0\" प्रदर्शित होता है, तो डिवाइस पर वाई-फाई सक्षम करने के लिए गहन कूलिंग/फ्रीजिंग कुंजी को टैप करें।\nडिस्प्ले संक्षेप में \"01\" दिखाएगा और स्वचालित रूप से \"02\" में बदल जाएगा।",
     "cooling_config_wifi_step3": "तीर कुंजियों से नेविगेट करें और \"S\" चुनें।\nगहन शीतलन/फ्रीजिंग कुंजी को टैप करके \"एस\" की पुष्टि करें।\nगहन शीतलन/फ्रीजिंग कुंजी झपकने लगेगी। डिवाइस नेटवर्क अब 3 मिनट के लिए कनेक्शन के लिए खुला है।",
     "cooling_config_wifi_step1_pair": "डिवाइस को सामान्य परिचालन स्थितियों पर सेट करें। जब तक आपको बीप न सुनाई दे, तब तक वाई-फ़ाई सिंबल को 3 सेकंड तक टैप करके रखें। वाई-फाई प्रतीक झपकना शुरू हो जाएगा और \"05\" दिखाई देगा। आपने नेटवर्क कनेक्शन मेनू दर्ज किया।",
-    "cooling_config_wifi_step2_pair": "तीर कुंजियों से नेविगेट करें और \"P\" चुनें।\nगहन शीतलन/फ्रीजिंग कुंजी को टैप करके \"पी\" की पुष्टि करें।\nगहन शीतलन/फ्रीजिंग कुंजी झपकने लगेगी। डिवाइस नेटवर्क अब 5 मिनट के लिए पेयरिंग के लिए खुला है।",
+    "cooling_config_wifi_step2_pair": "तीर कुंजियों से नेविगेट करें और \"P\" चुनें। गहन शीतलन/फ्रीजिंग कुंजी को टैप करके \"P\" की पुष्टि करें। गहन शीतलन/फ्रीजिंग कुंजी ब्लिंक करना शुरू कर देगी। डिवाइस नेटवर्क अब 3 मिनट के लिए युग्मन के लिए खुला है। जारी रखने के लिए NEXT पर क्लिक करें।",
     "dw_config_wifi_step1": "उपकरण चालू करें. सेटिंग पर तीर कुंजियों से नेविगेट करें. सेटिंग्स दर्ज करने के लिए मेनू आइकन दबाएँ।",
     "dw_config_wifi_step2": "सेटिंग्स मेनू में नेटवर्क ढूंढें और प्रवेश करने के लिए मेनू कुंजी से पुष्टि करें।",
     "dw_config_wifi_step3": "\"सक्रिय SoftAP\" पर जाएँ और मेनू कुंजी से पुष्टि करें। इस उपकरण का नेटवर्क अब 5 मिनट के लिए कनेक्ट करने के लिए खुला है।\nजारी रखने के लिए अगले पर क्लिक करें।",
@@ -1630,7 +1630,7 @@
     "STR_PROG_UPPER": "ऊपरी आधा",
     "STR_PROG_ANTI_ODOUR": "विरोधी गंध",
     "STR_PROG_SANI": "शनि",
-    "STR_PROG_SANI_QUICK": "SANI त्वरित",
+    "STR_PROG_SANI_QUICK": "सानी क्विक",
     "air_energy_hint": "नोट: बिजली की खपत के आँकड़े फ़ंक्शन केवल मोनो-टाइप एयर कंडीशनर के लिए मान्य हैं, लेकिन मल्टी-टाइप एयर कंडीशनर के लिए नहीं।",
     "now": "अब",
     "washer_atag_delay_start_in": "धुलाई में देरी हुई। शुरू करें",
@@ -3415,6 +3415,7 @@
     "use_humidity": "आर्द्रता को नियंत्रित करने के लिए आर्द्रता बॉक्स का उपयोग करें",
     "same_day": "उसी दिन",
     "w_temp_set": "कौन सा तापमान सेट करना है?",
+    "asko": "आस्को",
     "eco_meter": "इको मीटर",
     "asko_eco_meter_desc": "## ऊर्जा, पानी और डिटर्जेंट की खपत के मामले में चुने गए कार्यक्रम और अतिरिक्त विकल्पों के आधार पर आपके पर्यावरणीय प्रभाव को निर्धारित करने के लिए एक उपयोगी स्मार्ट संकेतक है।",
     "wm86_autodose_desc": "इसे संघर्ष में डालने के बजाय वॉशिंग मशीन को डिटर्जेंट की सही मात्रा मापने दें। ऑटो डोज़ सिस्टम वाली हमारी वॉशिंग मशीनें वाश लोड, गंदगी के स्तर, पानी की कठोरता, प्रोग्राम के प्रकार और तापमान के अनुसार डिटर्जेंट को मापती हैं। हमेशा सही मात्रा और अब ओवरडोज़ नहीं। यहाँ आप ऑटो डोज़ के लिए अपनी डिफ़ॉल्ट सेटिंग समायोजित कर सकते हैं।",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "कोई प्रीहीट नहीं",
     "CL_DV_OV_fast_preheat_desc": "फास्ट प्रीहीट आपके ओवन को प्रीहीट करने का सबसे तेज़ तरीका है। इसमें लगभग 7 मिनट लगते हैं।",
     "CL_DV_OV_preheat_desc": "प्रीहीट आपके ओवन को डिश के हिसाब से गर्म करने का सबसे अच्छा तरीका है। इसमें लगभग 10 मिनट लगते हैं।",
-    "CL_DV_OV_no_preheat_desc": "हमेशा अपने ओवन को पहले से गरम करना ज़रूरी नहीं है। उदाहरण के लिए, कुछ खाद्य पदार्थों को दोबारा गर्म करने के लिए।"
+    "CL_DV_OV_no_preheat_desc": "हमेशा अपने ओवन को पहले से गरम करना ज़रूरी नहीं है। उदाहरण के लिए, कुछ खाद्य पदार्थों को दोबारा गर्म करने के लिए।",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "एआई ऊर्जा नेविगेशन को सक्षम करने से ऊर्जा की खपत कम हो सकती है, लेकिन यह शीतलन की गति को भी धीमा कर सकती है।",
+    "CL_DV_RF_ice_maker_mode": "बर्फ निर्माता मोड",
+    "CL_CF_SD_smart_delay": "स्मार्ट विलंब",
+    "CL_CF_SD_settings_subtitle": "विलंब मोड का उपयोग करते समय उपकरण ऑफ-पीक घंटों का उपयोग करेगा।",
+    "CL_CF_SD_add_zone": "क्षेत्र जोड़ें",
+    "CL_CF_SD_new_tariff_zone": "नए टैरिफ क्षेत्र ##",
+    "CL_CF_SD_add_tariff": "टैरिफ जोड़ें",
+    "CL_CF_SD_duplicate": "डुप्लिकेट",
+    "CL_CF_SD_delete_zone": "क्षेत्र हटाएं ",
+    "CL_CF_SD_tariff_zones_n": "टैरिफ क्षेत्र ##",
+    "CL_CF_SD_tariff_n": "टैरिफ ##",
+    "CL_CF_SD_price": "कीमत",
+    "CL_CF_SD_off_peak_delay": "ऑफ-पीक विलंब",
+    "CL_CF_SD_delay_subtitle": "विलंब मोड का उपयोग करते समय उपकरण ऑफ-पीक घंटों का उपयोग करेगा।\n यदि End के साथ संयोजन का उपयोग किया जाता है तो एक पूर्व शर्त लागू होती है।",
+    "CL_CF_SD_off_peak_delay_not_set": "ऑफ-पीक विलंब सेट नहीं किया गया",
+    "CL_CF_SD_to_start_desc": "फ़ंक्शन का उपयोग शुरू करने के लिए आपको इसे सेटिंग्स में सेट करना होगा।",
+    "CL_CF_SD_best": "श्रेष्ठ",
+    "CL_CF_SD_delete_title": "क्या आप आश्वस्त है कि आपको डिलीट करना है ##?",
+    "CL_DV_OV_number_of_trays": "ट्रे की संख्या",
+    "CL_DV_OV_baking_trays": "बेकिंग ट्रे",
+    "CL_DV_OV_1_tray": "1 ट्रे",
+    "CL_DV_OV_2_trays": "2 ट्रे",
+    "CL_DV_OV_multi_tray": "मल्टी ट्रे",
+    "CL_DV_OV_multi": "मल्टी",
+    "CL_DV_RF_ice_off": "बर्फ बंद",
+    "CL_DV_RF_ion_preservation": "हाई-नैनो",
+    "CL_DV_RF_ai_energy": "एआई ऊर्जा-बचत",
+    "CL_DV_RF_adaptive_temperature": "आत्म रूपांतरण",
+    "CL_DV_RF_normal_ice_making": "साधारण बर्फ बनाना",
+    "CL_DV_RF_quick_ice_making": "तेजी से बर्फ बनाना",
+    "CL_DV_OV_extra_auto_programs": "ऑटो प्रोग्राम",
+    "CL_DV_OV_extra_auto_programs_desc": "पूर्वनिर्धारित स्वचालित कार्यक्रमों का एक सेट। स्वचालित कार्यक्रम आपको चयनित प्रकार के भोजन या व्यंजन के लिए सर्वोत्तम परिणाम प्राप्त करने में मदद करता है।",
+    "CL_DV_OV_extra_browning_programs": "ब्राउनिंग कार्यक्रम",
+    "CL_DV_OV_extra_browning_programs_desc": "विशेष रूप से विकसित ब्राउनिंग प्रोग्राम का उपयोग करें। अपने पकवान के लिए इच्छित ब्राउनिंग स्तर सेट करें।",
+    "CL_DV_OV_extra_cleaning": "सफाई",
+    "CL_DV_OV_extra_cleaning_desc": "अपने ओवन को सर्वोत्तम स्थिति में रखने के लिए चरण-दर-चरण सफाई कार्यक्रम और निर्देश।",
+    "CL_DV_OV_extra_stage_cooking": "स्टेज पर खाना पकाना",
+    "CL_DV_OV_extra_stage_cooking_desc": "5 विभिन्न चरणों का उपयोग करके कस्टम खाना पकाने के कार्यक्रम बनाएं।",
+    "CL_DV_OV_extra_defrost_desc": "खाद्य पदार्थों को सही ढंग से पिघलाने तथा जमा देने के बाद उनकी गुणवत्ता सुनिश्चित करने के लिए पूर्वनिर्धारित कार्यक्रमों का एक सेट।",
+    "CL_DV_OV_extra_warming_desc": "पहले से पकाए गए खाद्य पदार्थों को पूर्वनिर्धारित ओवन प्रोग्राम का उपयोग करके दोबारा गर्म करें। अधिकतम स्वाद और बनावट बनाए रखता है।",
+    "CL_DV_OV_extra_non_food": "गैर खाद्य",
+    "CL_DV_OV_extra_non_food_desc": "विशेष कार्यक्रमों के साथ अपनी प्लेटों, गर्म पत्थरों को गर्म करें या बोतलों को जीवाणुरहित करें।",
+    "CL_DV_OV_extra_preserving_desc": "भोजन को संरक्षित करने से आपके भोजन का पोषण मूल्य, बनावट और स्वाद बरकरार रखने के साथ-साथ उसे लंबे समय तक रखने में मदद मिलती है।",
+    "CL_DV_OV_extra_fast_cool": "तेज़ ठंडा",
+    "CL_DV_OV_extra_fast_cool_desc": "बेकिंग समाप्त होने के बाद ओवन को यथाशीघ्र ठंडा कर देता है या इसका उपयोग अन्य खाद्य तैयारी को शीघ्रता से जारी रखने के लिए किया जा सकता है।",
+    "CL_DV_OV_extra_celsius_grill_plate": "सेल्सियस ग्रिल प्लेट",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "सेल्सियस ग्रिल प्लेट के साथ बेकिंग के लिए विशेष रूप से पूर्वनिर्धारित ओवन प्रोग्रामों का एक सेट।",
+    "CL_DV_OV_explore_all_extra": "सभी अतिरिक्त चीजों का अन्वेषण करें",
+    "CL_DV_OV_extras": "अतिरिक्त",
+    "CL_CF_CS_midi_hih_setup_1": "डिवाइस चालू करें.",
+    "CL_CF_CS_midi_hih_setup_2": "वाई-फाई आइकन को लगभग 5 सेकंड तक टैप करके रखें जब तक \"CSt\" दिखाई न दे।",
+    "CL_CF_CS_midi_hih_setup_3": "डिवाइस अब 5 मिनट के लिए कनेक्शन के लिए तैयार है।\n जारी रखने के लिए अगले पर क्लिक करें।",
+    "CL_CF_CS_midi_hih_pair_2": "वाई-फाई आइकन को लगभग 8 सेकंड तक टैप करके रखें जब तक \"PAr\" दिखाई न दे।",
+    "CL_CF_CS_midi_hih_pair_3": "डिवाइस अब 3 मिनट के लिए पेयरिंग के लिए तैयार है।\n जारी रखने के लिए अगले पर क्लिक करें।",
+    "ac_dimmer_air_des": "रात में एलईडी लाइट से आपके आराम में खलल न पड़े, इसके लिए एलईडी बंद कर दें",
+    "e_verify_code": "सत्यापन कोड दर्ज करें",
+    "CL_CF_CS_td76_and_wm86_pair_4": "डिवाइस नेटवर्क अब 3 मिनट के लिए कनेक्शन के लिए खुला है।\n जारी रखने के लिए अगले पर क्लिक करें।",
+    "CL_DV_OV_24_set_language": "भाषा सेट करें",
+    "CL_DV_OV_24_time_date": "समय - दिनांक",
+    "CL_CF_CS_dw005_cs_step1": "सुनिश्चित करें कि आपके फ़ोन पर ब्लूटूथ सक्रिय है। फिर अपना उपकरण चालू करें और सेटिंग बटन पर टैप करें।",
+    "CL_CF_CS_dw005_cs_step2": "तीर बटन दबाकर “उन्नत सेटिंग्स” पर जाएँ। प्रवेश करने के लिए सेटिंग्स बटन दबाएँ।",
+    "CL_CF_CS_dw005_cs_step3": "निम्नलिखित बटनों का क्रम दबाकर पिन कोड दर्ज करें: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "“उन्नत सेटिंग” मेनू में “वाई-फाई” पर जाएँ और प्रवेश करने के लिए सेटिंग बटन दबाएँ। “वाई-फाई” मेनू के अंदर सुनिश्चित करें कि वाई-फाई सक्षम है। यदि नहीं, तो सक्षम करने के लिए सेटिंग बटन दबाएँ।",
+    "CL_CF_CS_dw005_cs_step5": "\"वाईफाई\" मेनू में रहते हुए \"कनेक्शन सेटअप\" पर जाएं और सक्रिय करने के लिए सेटिंग्स बटन दबाएं। ",
+    "CL_CF_CS_dw005_cs_step6": "डिवाइस नेटवर्क अब 5 मिनट के लिए कनेक्शन के लिए खुला है।\n जारी रखने के लिए अगले पर क्लिक करें।",
+    "CL_CF_CS_dw005_pair_step1": "सुनिश्चित करें कि आपके फ़ोन पर ब्लूटूथ सक्रिय है। फिर अपना उपकरण चालू करें और सेटिंग बटन पर टैप करें।",
+    "CL_CF_CS_dw005_pair_step2": "तीर बटन दबाकर “उन्नत सेटिंग्स” पर जाएँ। प्रवेश करने के लिए सेटिंग्स बटन दबाएँ।",
+    "CL_CF_CS_dw005_pair_step3": "निम्नलिखित बटनों का क्रम दबाकर पिन कोड दर्ज करें: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "“उन्नत सेटिंग” मेनू में “वाई-फाई” मेनू पर जाएँ और सेटिंग बटन दबाकर प्रवेश करें। फिर “डिवाइस जोड़ें” पर जाएँ और सक्रिय करने के लिए सेटिंग बटन दबाएँ।",
+    "CL_CF_CS_dw005_pair_step5": "डिवाइस नेटवर्क अब डिवाइस जोड़ने के लिए 3 मिनट तक खुला है।\n जारी रखने के लिए अगले पर क्लिक करें।",
+    "CL_DV_DW_save_date_invalid": "अंतिम महीना आरंभिक महीने से छोटा नहीं हो सकता!",
+    "CL_DV_OV_send_to_devices": "डिवाइस पर भेजें"
 }
