--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "Želite li omogućiti Wi-Fi na aparatu, dodirnite\ntipku za intenzivno hlađenje ili zamrzavanje. Na\nzaslonu se na kraće vrijeme prikaže '01', a zatim se prikaz automatski promijeni u \n'02'.\nWi-Fi mreža je pripremljena na spajanje.",
     "cooling_config_wifi_step3": "Strelicama odaberite 'S'.\nPotvrdite 'S' tako da dodirnete tipku za intenzivno\nhlađenje ili zamrzavanje.\nTipka za intenzivno hlađenje ili zamrzavanje počne\nbljeskati. Mreža ovog aparata je\nsada 3 minuta spremna za spajanje.\nKliknite DALJE za nastavak.",
     "cooling_config_wifi_step1_pair": "Prebacite aparat u normalan rad.\nDodirnite Wi-Fi ikonu i držite je približno\n3 sekunde.\nSimbol Wi-Fi počne bljeskati a\nna zaslonu se pojavi '0'. Otvorili ste izbornik za mrežne\nveze.",
-    "cooling_config_wifi_step2_pair": "Strelicama odaberite 'P'.\nPotvrdite 'P' tako da dodirnete tipku za intenzivno\nhlađenje ili zamrzavanje.\nTipka za intenzivno hlađenje ili zamrzavanje počne\nbljeskati. Mreža ovog aparata je\nsada 5 minuta spremna za spajanje.\nKliknite DALJE za nastavak.",
+    "cooling_config_wifi_step2_pair": "Krećite se tipkama sa strelicama i odaberite \"P\". Potvrdite \"P\" pritiskom na tipku za intenzivno hlađenje/zamrzavanje. Tipka za intenzivno hlađenje/zamrzavanje počet će treperiti. Mreža uređaja sada je otvorena za uparivanje 3 minute. Kliknite DALJE za nastavak.",
     "dw_config_wifi_step1": "UKLJUČITE aparat. Strelicama\nodaberite postavke. Pritisnite ikonu IZBORNIK kako biste\notvorili postavke.",
     "dw_config_wifi_step2": "U izborniku s postavkama potražite MREŽU i\npotvrdite s tipkom IZBORNIK.",
     "dw_config_wifi_step3": "Odaberite \"Select SoftAP\" i potvrdite pritiskom na\ntipku izbornik. Mreža ovog\naparata je sada 5 minute spremna za spajanje.\nKliknite DALJE za nastavak.",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "Donja polovica",
     "STR_PROG_UPPER": "Gornja polovica",
     "STR_PROG_ANTI_ODOUR": "Protiv mirisa",
-    "STR_PROG_SANI": "SANI",
-    "STR_PROG_SANI_QUICK": "SANI brzo",
+    "STR_PROG_SANI": "Sani",
+    "STR_PROG_SANI_QUICK": "Sani Quick",
     "air_energy_hint": "Napomena: Funkcija statistike potrošnje energije vrijedi samo za jednostruki klima uređaj, ali ne i za višenamjenski klima uređaj.",
     "now": "Sada",
     "washer_atag_delay_start_in": "Pranje odgođeno. Počni U",
@@ -3415,6 +3415,7 @@
     "use_humidity": "Koristite kutiju za vlažnost za regulaciju vlažnosti",
     "same_day": "Isti dan",
     "w_temp_set": "Koju temperaturu postaviti?",
+    "asko": "ASKO",
     "eco_meter": "Eko mjerač",
     "asko_eco_meter_desc": "## je koristan pametni indikator za određivanje vašeg utjecaja na okoliš na temelju odabranog programa i dodatnih opcija kada je riječ o potrošnji energije, vode i deterdženta.",
     "wm86_autodose_desc": "Olakšajte si i dozvolite perilici da izmjeri točnu dozu deterdženta. Naše perilice rublja sa sustavom automatskoga doziranja deterdžent doziraju prema količini pranja, razini zaprljanosti, tvrdoći vode, vrsti programa i temperaturi. Uvijek savršena doza. Ovdje možete prilagoditi zadane postavke za automatsko doziranje.",
@@ -3743,7 +3744,7 @@
     "asko_td_beddings_Towels": "Posteljina / ručnici",
     "asko_td_down_bulky_items": "Paperje/glomazni komadi",
     "asko_td_quick_pro_cotton": "Quick Pro pamuk",
-    "asko_td_time_program": "Vremenski program",
+    "asko_td_time_program": "Time program",
     "asko_td_activewear": "Odjeća za aktivnosti",
     "asko_td_jeans": "Traperice",
     "asko_td_shirts_blouses": "Košulja / bluze",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Bez predgrijavanja",
     "CL_DV_OV_fast_preheat_desc": "Brzo prethodno zagrijavanje najbrži je način za zagrijavanje pećnice. Traje otprilike 7 minuta.",
     "CL_DV_OV_preheat_desc": "Prethodno zagrijavanje je najbolji način da prethodno zagrijete pećnicu s obzirom na jelo. Traje otprilike 10 minuta.",
-    "CL_DV_OV_no_preheat_desc": "Nije uvijek potrebno prethodno zagrijati pećnicu. Na primjer za podgrijavanje određene hrane."
+    "CL_DV_OV_no_preheat_desc": "Nije uvijek potrebno prethodno zagrijati pećnicu. Na primjer za podgrijavanje određene hrane.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Omogućavanje AI Energy Navigation može smanjiti potrošnju energije, ali također može usporiti brzinu hlađenja.",
+    "CL_DV_RF_ice_maker_mode": "Način rada ledomata",
+    "CL_CF_SD_smart_delay": "Pametna odgoda",
+    "CL_CF_SD_settings_subtitle": "Uređaj će koristiti sate izvan najvećeg opterećenja kada koristi način rada s odgodom.",
+    "CL_CF_SD_add_zone": "Dodaj zonu",
+    "CL_CF_SD_new_tariff_zone": "Nove tarifne zone ##",
+    "CL_CF_SD_add_tariff": "Dodaj tarifu",
+    "CL_CF_SD_duplicate": "Duplikat",
+    "CL_CF_SD_delete_zone": "Izbriši zonu ",
+    "CL_CF_SD_tariff_zones_n": "Tarifne zone ##",
+    "CL_CF_SD_tariff_n": "Tarifa ##",
+    "CL_CF_SD_price": "Cijena",
+    "CL_CF_SD_off_peak_delay": "Kašnjenje izvan špice",
+    "CL_CF_SD_delay_subtitle": "Uređaj će koristiti sate izvan najvećeg opterećenja kada koristi način rada s odgodom.\n Ako koristite kombinaciju s End at primjenjuje se preduvjet.",
+    "CL_CF_SD_off_peak_delay_not_set": "Odgoda izvan vršnog opterećenja nije postavljena",
+    "CL_CF_SD_to_start_desc": "Kako biste počeli koristiti funkciju, morate je postaviti u postavkama.",
+    "CL_CF_SD_best": "Najbolje",
+    "CL_CF_SD_delete_title": "Jeste li sigurni da želite izbrisati ##?",
+    "CL_DV_OV_number_of_trays": "Broj ladica",
+    "CL_DV_OV_baking_trays": "PILHE ZA PEČENJE",
+    "CL_DV_OV_1_tray": "1 pladanj",
+    "CL_DV_OV_2_trays": "2 pladnja",
+    "CL_DV_OV_multi_tray": "Multi pleh",
+    "CL_DV_OV_multi": "Multi",
+    "CL_DV_RF_ice_off": "Led ISKLJUČEN",
+    "CL_DV_RF_ion_preservation": "HI-NANO",
+    "CL_DV_RF_ai_energy": "AI ušteda energije",
+    "CL_DV_RF_adaptive_temperature": "Samoprilagodba",
+    "CL_DV_RF_normal_ice_making": "Obična izrada leda",
+    "CL_DV_RF_quick_ice_making": "Brza izrada leda",
+    "CL_DV_OV_extra_auto_programs": "Auto programi",
+    "CL_DV_OV_extra_auto_programs_desc": "Skup unaprijed definiranih automatskih programa. Automatski programi pomažu vam da dobijete najbolji rezultat za odabranu vrstu hrane ili jela.",
+    "CL_DV_OV_extra_browning_programs": "Programi za smeđivanje",
+    "CL_DV_OV_extra_browning_programs_desc": "Koristite posebno razvijene programe za pečenje. Postavite željenu razinu pečenja za svoje jelo.",
+    "CL_DV_OV_extra_cleaning": "Čišćenje",
+    "CL_DV_OV_extra_cleaning_desc": "Programi čišćenja korak po korak i upute kako svoju pećnicu održavati u optimalnom stanju.",
+    "CL_DV_OV_extra_stage_cooking": "Scensko kuhanje",
+    "CL_DV_OV_extra_stage_cooking_desc": "Stvorite prilagođene programe kuhanja, koristeći do 5 različitih faza.",
+    "CL_DV_OV_extra_defrost_desc": "Skup unaprijed definiranih programa za ispravno odmrzavanje hrane kako bi se osigurala kvaliteta nakon što je zamrznuta.",
+    "CL_DV_OV_extra_warming_desc": "Zagrijte prethodno skuhanu hranu pomoću unaprijed definiranih programa pećnice. Zadržava maksimalan okus i teksturu.",
+    "CL_DV_OV_extra_non_food": "Nehrana",
+    "CL_DV_OV_extra_non_food_desc": "Zagrijte svoje tanjure, vruće kamenje ili sterilizirajte boce posebnim programima.",
+    "CL_DV_OV_extra_preserving_desc": "Konzerviranje hrane pomaže da vaša hrana dulje traje dok zadržava nutritivnu vrijednost, teksturu i okus.",
+    "CL_DV_OV_extra_fast_cool": "Brzo hlađenje",
+    "CL_DV_OV_extra_fast_cool_desc": "Hladi pećnicu što je brže moguće nakon završetka pečenja ili se može koristiti za brzi nastavak druge pripreme hrane.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Celzijeva ploča za roštilj",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Skup unaprijed definiranih programa pećnice posebno za pečenje s Celsius pločom za roštilj.",
+    "CL_DV_OV_explore_all_extra": "ISTRAŽITE SVE DODATKE",
+    "CL_DV_OV_extras": "Dodaci",
+    "CL_CF_CS_midi_hih_setup_1": "Uključite uređaj.",
+    "CL_CF_CS_midi_hih_setup_2": "Dodirnite i držite Wi-Fi ikonu otprilike 5 sekundi dok se ne pojavi \"CSt\".",
+    "CL_CF_CS_midi_hih_setup_3": "Uređaj je sada spreman za povezivanje 5 minuta.\n Pritisnite DALJE za nastavak.",
+    "CL_CF_CS_midi_hih_pair_2": "Dodirnite i držite Wi-Fi ikonu otprilike 8 sekundi dok se ne pojavi \"PAr\".",
+    "CL_CF_CS_midi_hih_pair_3": "Uređaj je sada spreman za uparivanje 3 minute.\n Kliknite DALJE za nastavak.",
+    "ac_dimmer_air_des": "Isključite LED kako biste izbjegli da vam LED svjetlo ometa odmor noću",
+    "e_verify_code": "Unesite kontrolni kod",
+    "CL_CF_CS_td76_and_wm86_pair_4": "Mreža uređaja sada je otvorena za povezivanje 3 minute.\n Pritisnite DALJE za nastavak.",
+    "CL_DV_OV_24_set_language": "Postavite jezik",
+    "CL_DV_OV_24_time_date": "Vrijeme - Datum",
+    "CL_CF_CS_dw005_cs_step1": "Provjerite je li vaš Bluetooth aktiviran na vašem telefonu. Zatim uključite svoj uređaj i dodirnite gumb za postavke.",
+    "CL_CF_CS_dw005_cs_step2": "Idite na \"Napredne postavke\" pritiskom na tipke sa strelicama. Pritisnite gumb postavki za ulazak.",
+    "CL_CF_CS_dw005_cs_step3": "Unesite PIN kod pritiskom na sljedeći niz tipki: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "U izborniku \"Napredne postavke\" idite na \"WiFi\" i pritisnite gumb postavki za ulaz. Unutar izbornika \"Wifi\" provjerite je li WiFi omogućen. Ako nije, pritisnite gumb postavki da biste omogućili.",
+    "CL_CF_CS_dw005_cs_step5": "Dok ste još u izborniku “WiFi” idite na “Postavljanje veze” i pritisnite gumb postavki za aktivaciju. ",
+    "CL_CF_CS_dw005_cs_step6": "Mreža uređaja sada je otvorena za povezivanje 5 minuta.\n Pritisnite DALJE za nastavak.",
+    "CL_CF_CS_dw005_pair_step1": "Provjerite je li vaš Bluetooth aktiviran na vašem telefonu. Zatim uključite svoj uređaj i dodirnite gumb za postavke.",
+    "CL_CF_CS_dw005_pair_step2": "Idite na \"Napredne postavke\" pritiskom na tipke sa strelicama. Pritisnite gumb postavki za ulazak.",
+    "CL_CF_CS_dw005_pair_step3": "Unesite PIN kod pritiskom na sljedeći niz tipki: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "U izborniku \"Napredne postavke\" idite na izbornik \"WiFi\" i pritisnite gumb postavki za ulaz. Zatim idite na \"Dodaj uređaj\" i pritisnite gumb postavki za aktivaciju.",
+    "CL_CF_CS_dw005_pair_step5": "Mreža uređaja sada je otvorena za dodavanje uređaja 3 minute.\n Pritisnite DALJE za nastavak.",
+    "CL_DV_DW_save_date_invalid": "Krajnji mjesec ne može biti manji od početnog mjeseca!",
+    "CL_DV_OV_send_to_devices": "POŠALJI NA UREĐAJE"
 }
