--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -156,7 +156,7 @@
     "ac_temperature_unit": "Satuan Suhu",
     "ac_manual_examination": "Diagnosis",
     "ac_last_examination_date": "Terakhir",
-    "ac_auto": "Oto",
+    "ac_auto": "Otomatis",
     "ac_air_supply": "Kipas",
     "ac_dehumidify": "Kering",
     "ac_cold": "Dingin",
@@ -556,7 +556,7 @@
     "end_time_invalid_alert": "Waktu yang dipilih tidak boleh lebih lambat dari waktu saat ini.",
     "ECO": "ECO",
     "RINSE": "BILAS DAN TAHAN",
-    "AUTO": "MOBIL",
+    "AUTO": "OTOMATIS",
     "DAILY": "SEHARI-HARI",
     "NORMAL": "NORMAL",
     "TIME": "WAKTU",
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "Jika \"02\" ditampilkan, lewati langkah ini.\nJika \"0\" ditampilkan, ketuk tombol pendinginan/pembekuan intensif untuk mengaktifkan Wi-Fi di perangkat.\nLayar akan menampilkan \"01\" sebentar dan berubah menjadi \"02\" secara otomatis.",
     "cooling_config_wifi_step3": "Navigasi dengan tombol panah dan pilih \"S\".\nKonfirmasikan \"S\" dengan mengetuk tombol pendinginan/pembekuan intensif.\nTombol pendinginan/pembekuan intensif akan mulai berkedip. Jaringan perangkat sekarang terbuka untuk koneksi selama 3 menit.",
     "cooling_config_wifi_step1_pair": "Atur perangkat ke kondisi pengoperasian normal. Ketuk dan tahan simbol Wi-Fi selama 3 detik hingga Anda mendengar bunyi bip. Simbol Wi-Fi akan mulai berkedip dan \"05\" akan muncul. Anda masuk ke menu koneksi jaringan.",
-    "cooling_config_wifi_step2_pair": "Navigasi dengan tombol panah dan pilih \"P\".\nKonfirmasikan \"P\" dengan mengetuk tombol pendinginan/pembekuan intensif.\nTombol pendinginan/pembekuan intensif akan mulai berkedip. Jaringan perangkat sekarang terbuka untuk dipasangkan selama 5 menit.",
+    "cooling_config_wifi_step2_pair": "Navigasi dengan tombol panah dan pilih \"P\". Konfirmasikan \"P\" dengan mengetuk tombol pendinginan/pembekuan intensif. Tombol pendinginan/pembekuan intensif akan mulai berkedip. Jaringan perangkat kini terbuka untuk pemasangan selama 3 menit. Klik LANJUTKAN untuk melanjutkan.",
     "dw_config_wifi_step1": "Nyalakan alat. Navigasi dengan tombol panah ke pengaturan. Tekan ikon MENU untuk masuk ke pengaturan.",
     "dw_config_wifi_step2": "Dalam menu pengaturan temukan JARINGAN dan konfirmasi dengan tombol menu untuk masuk.",
     "dw_config_wifi_step3": "Arahkan ke \"Aktifkan SoftAP\" dan konfirmasi dengan tombol menu. Jaringan alat ini sekarang terbuka untuk dihubungkan, selama 5 menit.\nKlik BERIKUTNYA untuk melanjutkan.",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "Setengah bagian bawah",
     "STR_PROG_UPPER": "Separuh atas",
     "STR_PROG_ANTI_ODOUR": "Anti bau",
-    "STR_PROG_SANI": "SANI",
-    "STR_PROG_SANI_QUICK": "SANI Cepat",
+    "STR_PROG_SANI": "Sani",
+    "STR_PROG_SANI_QUICK": "Sani Cepat",
     "air_energy_hint": "Catatan: Fungsi statistik konsumsi daya hanya berlaku untuk AC tipe Mono, tetapi tidak untuk AC tipe Multi.",
     "now": "Sekarang",
     "washer_atag_delay_start_in": "Pencucian tertunda. Mulai masuk",
@@ -3415,6 +3415,7 @@
     "use_humidity": "Gunakan kotak kelembapan untuk mengatur kelembapan",
     "same_day": "Di hari yang sama",
     "w_temp_set": "Suhu berapa yang perlu diatur?",
+    "asko": "ASKO",
     "eco_meter": "Meteran Ramah Lingkungan",
     "asko_eco_meter_desc": "## adalah indikator cerdas yang berguna untuk menentukan dampak lingkungan Anda berdasarkan program yang dipilih dan opsi tambahan terkait konsumsi energi, air, dan deterjen.",
     "wm86_autodose_desc": "Alih-alih membuatnya sulit, biarkan mesin cuci mengukur dosis deterjen yang tepat. Mesin cuci kami dengan sistem Dosis Otomatis mengukur deterjen berdasarkan beban cucian, tingkat kekotoran, kesadahan air, jenis program, dan suhu. Dosis selalu tepat dan tidak ada lagi dosis berlebih. Di sini Anda dapat menyesuaikan pengaturan default untuk Dosis Otomatis.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Tidak ada pemanasan awal",
     "CL_DV_OV_fast_preheat_desc": "Fast Preheat adalah cara tercepat untuk memanaskan oven Anda. Proses ini memakan waktu sekitar 7 menit.",
     "CL_DV_OV_preheat_desc": "Pemanasan awal adalah cara terbaik untuk memanaskan oven Anda dengan mempertimbangkan hidangannya. Diperlukan waktu sekitar 10 menit.",
-    "CL_DV_OV_no_preheat_desc": "Tidak selalu perlu memanaskan oven terlebih dahulu. Misalnya untuk memanaskan kembali makanan tertentu."
+    "CL_DV_OV_no_preheat_desc": "Tidak selalu perlu memanaskan oven terlebih dahulu. Misalnya untuk memanaskan kembali makanan tertentu.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Mengaktifkan Navigasi Energi AI dapat mengurangi konsumsi energi, tetapi juga dapat memperlambat kecepatan pendinginan.",
+    "CL_DV_RF_ice_maker_mode": "Mode pembuat es",
+    "CL_CF_SD_smart_delay": "Penundaan Cerdas",
+    "CL_CF_SD_settings_subtitle": "Peralatan akan menggunakan jam non-sibuk saat menggunakan mode tunda.",
+    "CL_CF_SD_add_zone": "Tambahkan Zona",
+    "CL_CF_SD_new_tariff_zone": "Zona Tarif Baru ##",
+    "CL_CF_SD_add_tariff": "Tambahkan Tarif",
+    "CL_CF_SD_duplicate": "Duplikat",
+    "CL_CF_SD_delete_zone": "Hapus zona ",
+    "CL_CF_SD_tariff_zones_n": "Zona tarif ##",
+    "CL_CF_SD_tariff_n": "Tarif ##",
+    "CL_CF_SD_price": "Harga",
+    "CL_CF_SD_off_peak_delay": "Penundaan di luar jam sibuk",
+    "CL_CF_SD_delay_subtitle": "Peralatan akan menggunakan jam non-sibuk saat menggunakan mode tunda.\n Jika menggunakan kombinasi dengan Akhir pada suatu prasyarat diterapkan.",
+    "CL_CF_SD_off_peak_delay_not_set": "Penundaan di luar jam sibuk tidak diatur",
+    "CL_CF_SD_to_start_desc": "Untuk mulai menggunakan fungsi ini, Anda perlu mengaturnya di pengaturan.",
+    "CL_CF_SD_best": "Terbaik",
+    "CL_CF_SD_delete_title": "Apakah Anda yakin ingin menghapus ##?",
+    "CL_DV_OV_number_of_trays": "Jumlah baki",
+    "CL_DV_OV_baking_trays": "Nampan Pemanggang",
+    "CL_DV_OV_1_tray": "1 nampan",
+    "CL_DV_OV_2_trays": "2 nampan",
+    "CL_DV_OV_multi_tray": "Baki multi",
+    "CL_DV_OV_multi": "Multi",
+    "CL_DV_RF_ice_off": "Es MATI",
+    "CL_DV_RF_ion_preservation": "HI-NANO",
+    "CL_DV_RF_ai_energy": "AI Hemat Energi",
+    "CL_DV_RF_adaptive_temperature": "Adaptasi Diri",
+    "CL_DV_RF_normal_ice_making": "Pembuatan Es Biasa",
+    "CL_DV_RF_quick_ice_making": "Pembuatan Es Cepat",
+    "CL_DV_OV_extra_auto_programs": "Program otomatis",
+    "CL_DV_OV_extra_auto_programs_desc": "Seperangkat program otomatis yang telah ditetapkan sebelumnya. Program otomatis membantu Anda memperoleh hasil terbaik untuk jenis makanan atau hidangan yang dipilih.",
+    "CL_DV_OV_extra_browning_programs": "Program Browning",
+    "CL_DV_OV_extra_browning_programs_desc": "Gunakan program pencoklatan yang dikembangkan secara khusus. Atur tingkat kecokelatan yang Anda inginkan untuk hidangan Anda.",
+    "CL_DV_OV_extra_cleaning": "Pembersihan",
+    "CL_DV_OV_extra_cleaning_desc": "Program pembersihan dan petunjuk langkah demi langkah tentang cara menjaga oven Anda dalam kondisi optimal.",
+    "CL_DV_OV_extra_stage_cooking": "Memasak di panggung",
+    "CL_DV_OV_extra_stage_cooking_desc": "Buat program memasak khusus, menggunakan hingga 5 tahap berbeda.",
+    "CL_DV_OV_extra_defrost_desc": "Seperangkat program yang telah ditetapkan sebelumnya untuk mencairkan makanan dengan benar guna memastikan kualitasnya setelah dibekukan.",
+    "CL_DV_OV_extra_warming_desc": "Panaskan kembali makanan yang telah dimasak sebelumnya menggunakan program oven yang telah ditetapkan. Mempertahankan rasa dan tekstur yang maksimal.",
+    "CL_DV_OV_extra_non_food": "Bukan makanan",
+    "CL_DV_OV_extra_non_food_desc": "Hangatkan piring, batu panas, atau sterilkan botol dengan program khusus.",
+    "CL_DV_OV_extra_preserving_desc": "Mengawetkan makanan membantu membuat makanan Anda bertahan lebih lama sambil mempertahankan nilai gizi, tekstur, dan rasa.",
+    "CL_DV_OV_extra_fast_cool": "Cepat dingin",
+    "CL_DV_OV_extra_fast_cool_desc": "Mendinginkan oven secepat mungkin setelah pemanggangan selesai atau dapat digunakan untuk melanjutkan persiapan makanan lainnya dengan cepat.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Pelat Pemanggang Celsius",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Seperangkat program oven yang telah ditetapkan khusus untuk memanggang dengan Celsius Grill Plate.",
+    "CL_DV_OV_explore_all_extra": "JELAJAHI SEMUA EKSTRA",
+    "CL_DV_OV_extras": "Tambahan",
+    "CL_CF_CS_midi_hih_setup_1": "Nyalakan perangkat.",
+    "CL_CF_CS_midi_hih_setup_2": "Ketuk dan tahan ikon Wi-Fi selama sekitar 5 detik hingga \"CSt\" muncul.",
+    "CL_CF_CS_midi_hih_setup_3": "Perangkat sekarang siap disambungkan selama 5 menit.\n Klik LANJUTKAN untuk melanjutkan.",
+    "CL_CF_CS_midi_hih_pair_2": "Ketuk dan tahan ikon Wi-Fi selama sekitar 8 detik hingga \"PAr\" muncul.",
+    "CL_CF_CS_midi_hih_pair_3": "Perangkat sekarang siap dipasangkan selama 3 menit.\n Klik LANJUTKAN untuk melanjutkan.",
+    "ac_dimmer_air_des": "Matikan LED untuk menghindari lampu LED mengganggu istirahat Anda di malam hari",
+    "e_verify_code": "Masukkan kode verifikasi",
+    "CL_CF_CS_td76_and_wm86_pair_4": "Jaringan perangkat sekarang terbuka untuk koneksi selama 3 menit.\n Klik LANJUTKAN untuk melanjutkan.",
+    "CL_DV_OV_24_set_language": "Mengatur bahasa",
+    "CL_DV_OV_24_time_date": "Waktu - Tanggal",
+    "CL_CF_CS_dw005_cs_step1": "Pastikan Bluetooth di ponsel Anda sudah aktif. Kemudian, nyalakan perangkat Anda dan ketuk tombol pengaturan.",
+    "CL_CF_CS_dw005_cs_step2": "Navigasi ke \"Pengaturan lanjutan\" dengan menekan tombol panah. Tekan tombol pengaturan untuk masuk.",
+    "CL_CF_CS_dw005_cs_step3": "Masukkan kode PIN dengan menekan urutan tombol berikut: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "Di menu \"Pengaturan lanjutan\", buka \"WiFi\" dan tekan tombol pengaturan untuk masuk. Di dalam menu \"Wifi\", pastikan WiFi diaktifkan. Jika tidak, tekan tombol pengaturan untuk mengaktifkannya.",
+    "CL_CF_CS_dw005_cs_step5": "Saat masih dalam menu “WiFi”, buka “Pengaturan koneksi” dan tekan tombol pengaturan untuk mengaktifkan. ",
+    "CL_CF_CS_dw005_cs_step6": "Jaringan perangkat sekarang terbuka untuk koneksi selama 5 menit.\n Klik LANJUTKAN untuk melanjutkan.",
+    "CL_CF_CS_dw005_pair_step1": "Pastikan Bluetooth di ponsel Anda sudah aktif. Kemudian, nyalakan perangkat Anda dan ketuk tombol pengaturan.",
+    "CL_CF_CS_dw005_pair_step2": "Navigasi ke \"Pengaturan lanjutan\" dengan menekan tombol panah. Tekan tombol pengaturan untuk masuk.",
+    "CL_CF_CS_dw005_pair_step3": "Masukkan kode PIN dengan menekan urutan tombol berikut: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "Pada menu “Pengaturan lanjutan”, buka menu “WiFi” dan tekan tombol pengaturan untuk masuk. Kemudian, buka “Tambah perangkat” dan tekan tombol pengaturan untuk mengaktifkan.",
+    "CL_CF_CS_dw005_pair_step5": "Jaringan perangkat sekarang terbuka untuk menambahkan perangkat selama 3 menit.\n Klik LANJUTKAN untuk melanjutkan.",
+    "CL_DV_DW_save_date_invalid": "Bulan akhir tidak boleh lebih kecil dari bulan awal!",
+    "CL_DV_OV_send_to_devices": "KIRIM KE PERANGKAT"
 }
