--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "Per abilitare il Wi-Fi sull'apparecchio, tocca il tasto\nraffreddamento intensivo o congelamento. Il\ndischermo mostrerà a breve '01' e cambierà automaticamente in\n'02'.\nIl Wi-Fi è pronto per la connessione.",
     "cooling_config_wifi_step3": "Navigare con i tasti freccia per scegliere 'S'.\nConfermare 'S' toccando il tasto\nraffreddamento o congelamento intensivo.\nIl tasto raffreddamento o congelamento intensivo si avvia\nlampeggia; la rete di questo apparecchio è\nora disponibile per la connessione, per 3 minuti.\nFare clic su NEXT per continuare.",
     "cooling_config_wifi_step1_pair": "Imposta l'apparecchio sul funzionamento normale.\nTocca l'icona Wi-Fi per circa 3\nsecondi.\nIl simbolo Wi-Fi inizierà a lampeggiare e '0'\napparirà sul display. Sei entrato nel menu di connessione\nrete.",
-    "cooling_config_wifi_step2_pair": "Navigare con i tasti freccia per scegliere 'P'.\nConfermare 'P' toccando il tasto\nraffreddamento o congelamento intensivo.\nIl tasto raffreddamento o congelamento intensivo si avvia\nlampeggia; la rete di questo apparecchio è\nora disponibile per la connessione, per 5 minuti.\nFare clic su NEXT per continuare.",
+    "cooling_config_wifi_step2_pair": "Navigare con i tasti freccia e selezionare \"P\". Confermare \"P\" toccando il tasto di raffreddamento/congelamento intensivo. Il tasto di raffreddamento/congelamento intensivo inizierà a lampeggiare. La rete del dispositivo è ora aperta per l'associazione per 3 minuti. Fare clic su AVANTI per continuare.",
     "dw_config_wifi_step1": "Accendere l'apparecchio. Naviga con i tasti freccia\n fino alle impostazioni. Premere l'icona MENU per accedere\nle impostazioni.",
     "dw_config_wifi_step2": "Nel menu delle impostazioni, trova NETWORK e\nconferma con il tasto menu per accedere.",
     "dw_config_wifi_step3": "Passare a \"Seleziona SoftAP\" e confermare\ncon il tasto menu. La rete di questo\napparecchio è ora disponibile per la connessione, per 5\nminuti.\nFai clic su NEXT per continuare.",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "Cesto inferiore",
     "STR_PROG_UPPER": "Cesto superiore",
     "STR_PROG_ANTI_ODOUR": "Anti-odore",
-    "STR_PROG_SANI": "SANI",
-    "STR_PROG_SANI_QUICK": "SANI rapido",
+    "STR_PROG_SANI": "Sani",
+    "STR_PROG_SANI_QUICK": "Sani veloce",
     "air_energy_hint": "Nota: la funzione di statistica del consumo energetico è valida solo per il condizionatore d'aria di tipo Mono, ma non per il condizionatore d'aria di tipo Multi.",
     "now": "Ora",
     "washer_atag_delay_start_in": "Lavaggio ritardato. Inizia dentro",
@@ -3353,9 +3353,9 @@
     "after_sale_unsupported_ri_tips": "Siamo spiacenti, ma la segnalazione di un problema per questo dispositivo non è al momento disponibile. Il nostro team sta lavorando per fornire presto supporto per questo dispositivo.",
     "degerming": "Disinfezione",
     "no_spin": "Nessuna rotazione",
-    "wm_program_mode_normal_desc": "Questa modalità è predefinita e non apporterà alcuna modifica al programma scelto.",
-    "wm_program_mode_green_desc": "Lavaggio che risparmia energia; tempo di lavaggio più lungo, minor consumo di acqua.",
-    "wm_program_mode_speed_desc": "Lavaggio che fa risparmiare tempo; tempi di lavaggio più brevi, maggiore consumo di acqua ed energia). Nota: nel programma Cotone, consigliamo un mezzo carico.",
+    "wm_program_mode_normal_desc": "Questa modalità è predefinita e non apporta alcuna modifica al programma scelto.",
+    "wm_program_mode_green_desc": "Lavaggio che fa risparmiare energia; tempo di lavaggio più lungo, minor consumo d'acqua.",
+    "wm_program_mode_speed_desc": "Lavaggio a risparmio di tempo; tempi di lavaggio più brevi, maggiore consumo di acqua e di energia). Nota: nel programma Cotone, si consiglia un mezzo carico.",
     "wm_program_mode_night_desc": "Lavaggio che riduce il rumore e prolunga i tempi di lavaggio.",
     "wm_program_mode_intensive_desc": "Lavaggio che migliora le prestazioni di pulizia, con acqua extra e tempo di lavaggio prolungato.",
     "default": "Predefinita",
@@ -3367,11 +3367,11 @@
     "send_notifi_example_key": "Esempio: invia “Il condizionatore è acceso”",
     "add_this_routine_to_home_page_key": "Aggiungere questa routine alla homepage?",
     "add_trigger_key": "Aggiungi trigger",
-    "select_city_key": "Seleziona città",
+    "select_city_key": "Seleziona Città",
     "add_routines_instrcuction_key": "Aggiungi routine e crea routine con i tuoi dispositivi",
     "every_day_at_key ": "Ogni giorno alle ##",
-    "automation_condition_des_condition_key": "quando ## @@ **",
-    "automation_condition_des_is_key": "quando ## è @@ **",
+    "automation_condition_des_condition_key": "Quando ## @@ **",
+    "automation_condition_des_is_key": "Quando ## è @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
     "enter_city_key": "Cerca città",
@@ -3380,19 +3380,19 @@
     "no_scene_key": "nessuna scena",
     "add_new_scene_key": "aggiungi una nuova scena",
     "wm_stain_program_type_temp": "TIPO DI MACCHIA, TESSUTO E TEMPERATURA",
-    "wm_stain_program_desc": "Seleziona il tipo di macchia e il tessuto/la temperatura di seguito. La lavatrice sceglierà quindi automaticamente il programma ottimale.",
+    "wm_stain_program_desc": "Selezionare di seguito il tipo di macchia e il tessuto/la temperatura. La lavatrice sceglierà automaticamente il programma ottimale.",
     "stain_type": "Tipo di macchia",
     "fabric_temperature": "Tessuto e temperatura",
     "high_water_level": "Livello dell'acqua alto",
     "small_load": "Piccolo carico",
-    "small_load_tips": "Utilizzare questa funzione quando si lava un carico piccolo (max 2,5 kg). Ciò ridurrà la durata del programma e consentirà di risparmiare energia.",
+    "small_load_tips": "Utilizzare questa funzione quando si lava un carico piccolo (massimo 2,5 kg). In questo modo si riduce la durata del programma e si risparmia energia.",
     "himit2": "Hi-Mit II",
-    "himit2_setup1": "Assicurati che l'adattatore Himit sia acceso, premi e tieni premuto il pulsante di reset per 3 secondi finché la luce WLAN non lampeggia.",
-    "himit2_setup2": "Hi-Mit II è collegato tramite cavo di rete.",
+    "himit2_setup1": "Assicurarsi che l'adattatore Himit sia acceso, tenere premuto il pulsante di reset per 3 secondi fino a quando la spia WLAN lampeggia.",
+    "himit2_setup2": "L'Hi-Mit II è collegato a un cavo di rete.",
     "choose_net_method": "Scegli il metodo di rete",
-    "wifi": "Wifi",
+    "wifi": "Wi-Fi",
     "wired": "Cablato",
-    "appliance_been_found": "È stato trovato un dispositivo, selezionare il dispositivo da aggiungere.",
+    "appliance_been_found": "È stato trovato un elettrodomestico. Seleziona il dispositivo da aggiungere.",
     "wifi_id": "ID WiFi:",
     "dw_remote_control_content": "Per attivarlo, premere il pulsante \"Remote\" sul pannello di controllo dell'apparecchio.",
     "dw_offline_title": "Il tuo apparecchio è offline. Controlla:",
@@ -3400,9 +3400,9 @@
     "dw_offline_content2": "Il tuo Wi-Fi è abilitato e connesso.",
     "dw_offline_content3": "Se è stata modificata di recente, controlla la password del tuo Wi-Fi.",
     "security_upgrade2": "AGGIORNAMENTO DELLA SICUREZZA",
-    "security_upgrade2_content": "Abbiamo aggiornato i sistemi di sicurezza e abilitato un Single Sign-On per tutte le nostre piattaforme. L'azione è stata intrapresa per migliorare la protezione delle nostre piattaforme digitali e consentirti di spostarti senza problemi tra i nostri marchi. Come parte dell'aggiornamento della sicurezza, ti chiediamo gentilmente di reimpostare la password del tuo account a partire dal 15 luglio 2023. Se hai già reimpostato la password, non sono necessarie nuove azioni. Se non hai un account, devi prima registrarti. Grazie.",
+    "security_upgrade2_content": "Abbiamo potenziato i sistemi di sicurezza e attivato un accesso unico per tutte le nostre piattaforme. L'azione è stata intrapresa per migliorare la protezione delle nostre piattaforme digitali e per consentirvi di spostarvi senza problemi tra i nostri marchi. Come parte dell'aggiornamento della sicurezza, siete pregati di reimpostare la password del vostro account a partire dal 15 luglio 2023. Se la password è già stata reimpostata, non sono necessarie nuove azioni. Se non avete un account, dovete prima registrarvi. Grazie.",
     "article_number_not_valid": "Il numero dell'articolo non è valido",
-    "auto_super_rinse": "Superrisciacquo automatico",
+    "auto_super_rinse": "Super risciacquo automatico",
     "auto_super_rinse_desc": "Questa funzione aiuta a garantire che i vestiti vengano puliti a fondo, senza lasciare residui di detersivo o sporco.",
     "enable_auto_super_rinse": "Abilita/disabilita il super risciacquo automatico",
     "dw_super_rinse": "Super risciacquo",
@@ -3415,9 +3415,10 @@
     "use_humidity": "Utilizzare la scatola dell'umidità per regolare l'umidità",
     "same_day": "Lo stesso giorno",
     "w_temp_set": "Che temperatura impostare?",
+    "asko": "ASKO",
     "eco_meter": "Ecometro",
     "asko_eco_meter_desc": "## è un utile indicatore intelligente per determinare il tuo impatto ambientale in base al programma scelto e alle opzioni extra in termini di consumo di energia, acqua e detersivo.",
-    "wm86_autodose_desc": "Invece di farla diventare una lotta, lascia che la lavatrice misuri esattamente il giusto dosaggio di detersivo. Le nostre lavatrici con sistema Auto Dose misurano il detersivo in base al carico di lavaggio, al livello di sporco, alla durezza dell'acqua, al tipo di programma e alla temperatura. Dosaggio sempre perfetto e niente più sovradosaggi. Qui puoi regolare le impostazioni predefinite per Auto Dose.",
+    "wm86_autodose_desc": "Invece di fare fatica, lasciate che la lavatrice misuri esattamente il giusto dosaggio di detersivo. Le nostre lavatrici con sistema Auto Dose misurano il detersivo in base al carico di lavaggio, al livello di sporco, alla durezza dell'acqua, al tipo di programma e alla temperatura. Un dosaggio sempre perfetto e niente più sovradosaggi. Qui è possibile regolare le impostazioni predefinite per il dosaggio automatico.",
     "enable_auto_dose": "Abilita/disabilita la dose automatica",
     "enable_auto_dose_desc": "Questo abiliterà/disabiliterà la funzione sul tuo dispositivo.",
     "tank_refilled_tips": "Nota: ## deve essere riempito",
@@ -3500,7 +3501,7 @@
     "humidity_sensor": "Sensore di umidità",
     "auxiliary_thermal_temperature_sensor": "Sensore di temperatura termica ausiliaria",
     "filter_status": "Stato del filtro",
-    "display_board_and_master_communication": "Tabellone e comunicazione master",
+    "display_board_and_master_communication": "Scheda di visualizzazione e comunicazione master",
     "door_status": "Stato della porta",
     "inverter_board": "Scheda inverter",
     "clean_status": "Stato pulito",
@@ -3514,7 +3515,7 @@
     "fridge_refr_var_room_sens_failure": "Sensore del cassetto Cool Fresh",
     "td_paused_tips": "L'asciugatura in xx è in pausa.",
     "drying_is_stopping": "L'asciugatura si sta arrestando.",
-    "drying_stoppint_tips": "L'asciugatura in xx è in fase di arresto. È possibile inviare un altro programma all'asciugatrice quando il programma corrente viene interrotto.",
+    "drying_stoppint_tips": "L'asciugatura in xx è in fase di arresto. È possibile inviare un altro programma all'asciugatrice quando il programma corrente è fermo.",
     "tuya_device_bind_failed": "Il dispositivo(i) non può essere abbinato all’App. Si prega di riprovare o riavviare l’App.",
     "tuya_device_bind_more_than_8": "Un codice QR può aggiungere solo fino a 8 dispositivi.",
     "found_x_inverter": "Trovato *** inverter.",
@@ -3565,7 +3566,7 @@
     "start_the_program_and_insert_dish": "Avviare il programma e inserire il piatto dopo il preriscaldamento.",
     "browse_more_recipes": "Scopri altre ricette",
     "no_scheduling_set": "Nessuna pianificazione stabilita",
-    "add_new": "Aggiungi nuovo",
+    "add_new": "Aggiungi Nuovo",
     "chef_recipe": "Ricetta dello Chef",
     "recipe_assistant": "Assistente alle ricette",
     "shopping_list": "Lista della spesa",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Nessun preriscaldamento",
     "CL_DV_OV_fast_preheat_desc": "Fast Preheat è il modo più rapido per preriscaldare il forno. Ci vogliono circa 7 minuti.",
     "CL_DV_OV_preheat_desc": "Preriscaldare è il modo migliore per preriscaldare il forno considerando il piatto. Ci vogliono circa 10 minuti.",
-    "CL_DV_OV_no_preheat_desc": "Non è sempre necessario preriscaldare il forno. Ad esempio per riscaldare determinati cibi."
+    "CL_DV_OV_no_preheat_desc": "Non è sempre necessario preriscaldare il forno. Ad esempio per riscaldare determinati cibi.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Abilitare l'AI Energy Navigation può ridurre il consumo energetico, ma può anche rallentare la velocità di raffreddamento.",
+    "CL_DV_RF_ice_maker_mode": "Modalità macchina per il ghiaccio",
+    "CL_CF_SD_smart_delay": "Ritardo intelligente",
+    "CL_CF_SD_settings_subtitle": "Quando si attiva la modalità ritardata, l'elettrodomestico utilizzerà le ore non di punta.",
+    "CL_CF_SD_add_zone": "Aggiungi zona",
+    "CL_CF_SD_new_tariff_zone": "Nuove zone tariffarie ##",
+    "CL_CF_SD_add_tariff": "Aggiungi tariffa",
+    "CL_CF_SD_duplicate": "Duplicato",
+    "CL_CF_SD_delete_zone": "Elimina zona ",
+    "CL_CF_SD_tariff_zones_n": "Zone tariffarie ##",
+    "CL_CF_SD_tariff_n": "Tariffa ##",
+    "CL_CF_SD_price": "Prezzo",
+    "CL_CF_SD_off_peak_delay": "Ritardo fuori orario di punta",
+    "CL_CF_SD_delay_subtitle": "Quando si attiva la modalità ritardata, l'elettrodomestico utilizzerà le ore non di punta.\n Se si utilizza una combinazione con End, viene applicata una precondizione.",
+    "CL_CF_SD_off_peak_delay_not_set": "Ritardo fuori orario di punta non impostato",
+    "CL_CF_SD_to_start_desc": "Per iniziare a utilizzare la funzione è necessario configurarla nelle impostazioni.",
+    "CL_CF_SD_best": "Migliore",
+    "CL_CF_SD_delete_title": "Sei sicuro di voler eliminare ##?",
+    "CL_DV_OV_number_of_trays": "Numero di vassoi",
+    "CL_DV_OV_baking_trays": "TEGLIE DA FORNO",
+    "CL_DV_OV_1_tray": "1 vassoio",
+    "CL_DV_OV_2_trays": "2 vassoi",
+    "CL_DV_OV_multi_tray": "Vassoio multiplo",
+    "CL_DV_OV_multi": "Multi",
+    "CL_DV_RF_ice_off": "Ghiaccio OFF",
+    "CL_DV_RF_ion_preservation": "HI-NANO",
+    "CL_DV_RF_ai_energy": "Risparmio energetico tramite intelligenza artificiale",
+    "CL_DV_RF_adaptive_temperature": "Auto-adattamento",
+    "CL_DV_RF_normal_ice_making": "Produzione di ghiaccio ordinaria",
+    "CL_DV_RF_quick_ice_making": "Produzione veloce di ghiaccio",
+    "CL_DV_OV_extra_auto_programs": "Programmi automatici",
+    "CL_DV_OV_extra_auto_programs_desc": "Un set di programmi automatici predefiniti. I programmi automatici ti aiutano ad avere il miglior risultato per il tipo di cibo o piatto selezionato.",
+    "CL_DV_OV_extra_browning_programs": "Programmi di doratura",
+    "CL_DV_OV_extra_browning_programs_desc": "Utilizzare programmi di doratura appositamente sviluppati. Impostare il livello di doratura desiderato come risultato per il piatto.",
+    "CL_DV_OV_extra_cleaning": "Pulizia",
+    "CL_DV_OV_extra_cleaning_desc": "Programmi di pulizia passo dopo passo e istruzioni su come mantenere il forno in condizioni ottimali.",
+    "CL_DV_OV_extra_stage_cooking": "Cottura in scena",
+    "CL_DV_OV_extra_stage_cooking_desc": "Crea programmi di cottura personalizzati, utilizzando fino a 5 fasi diverse.",
+    "CL_DV_OV_extra_defrost_desc": "Un set di programmi predefiniti per scongelare correttamente gli alimenti, garantendone la qualità dopo il congelamento.",
+    "CL_DV_OV_extra_warming_desc": "Riscalda cibi cotti in precedenza utilizzando i programmi del forno predefiniti. Mantiene il massimo sapore e consistenza.",
+    "CL_DV_OV_extra_non_food": "Non alimentare",
+    "CL_DV_OV_extra_non_food_desc": "Riscalda i piatti, usa pietre calde o sterilizza i biberon con programmi speciali.",
+    "CL_DV_OV_extra_preserving_desc": "Conservare gli alimenti aiuta a farli durare più a lungo, mantenendo inalterati il valore nutrizionale, la consistenza e il sapore.",
+    "CL_DV_OV_extra_fast_cool": "Raffreddamento rapido",
+    "CL_DV_OV_extra_fast_cool_desc": "Raffredda il forno il più velocemente possibile una volta terminata la cottura oppure può essere utilizzato per continuare rapidamente la preparazione di altri alimenti.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Piastra grill Celsius",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Un set di programmi predefiniti per il forno, specifici per la cottura con la piastra Celsius Grill.",
+    "CL_DV_OV_explore_all_extra": "ESPLORA TUTTI GLI EXTRA",
+    "CL_DV_OV_extras": "Extra",
+    "CL_CF_CS_midi_hih_setup_1": "Accendi il dispositivo.",
+    "CL_CF_CS_midi_hih_setup_2": "Toccare e tenere premuta l'icona Wi-Fi per circa 5 secondi finché non viene visualizzato \"CSt\".",
+    "CL_CF_CS_midi_hih_setup_3": "Il dispositivo è ora pronto per la connessione per 5 minuti.\n Fare clic su AVANTI per continuare.",
+    "CL_CF_CS_midi_hih_pair_2": "Toccare e tenere premuta l'icona Wi-Fi per circa 8 secondi finché non viene visualizzato \"PAr\".",
+    "CL_CF_CS_midi_hih_pair_3": "Il dispositivo è ora pronto per l'associazione per 3 minuti.\n Fare clic su AVANTI per continuare.",
+    "ac_dimmer_air_des": "Spegni il LED per evitare che la luce del LED disturbi il tuo riposo notturno",
+    "e_verify_code": "Inserisci il codice di verifica",
+    "CL_CF_CS_td76_and_wm86_pair_4": "La rete del dispositivo è ora aperta alla connessione per 3 minuti.\n Fare clic su AVANTI per continuare.",
+    "CL_DV_OV_24_set_language": "Imposta la lingua",
+    "CL_DV_OV_24_time_date": "Ora - Data",
+    "CL_CF_CS_dw005_cs_step1": "Assicurati che il Bluetooth sia attivato sul tuo telefono. Quindi accendi il tuo apparecchio e tocca il pulsante delle impostazioni.",
+    "CL_CF_CS_dw005_cs_step2": "Vai a \"Impostazioni avanzate\" premendo i pulsanti freccia. Premi il pulsante Impostazioni per entrare.",
+    "CL_CF_CS_dw005_cs_step3": "Inserire il codice PIN premendo la seguente sequenza di pulsanti: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "Nel menu \"Impostazioni avanzate\" vai su \"WiFi\" e premi il pulsante delle impostazioni per entrare. All'interno del menu \"Wifi\" assicurati che il WiFi sia abilitato. In caso contrario, premi il pulsante delle impostazioni per abilitarlo.",
+    "CL_CF_CS_dw005_cs_step5": "Mentre sei ancora nel menu \"WiFi\", vai su \"Impostazione connessione\" e premi il pulsante delle impostazioni per attivare. ",
+    "CL_CF_CS_dw005_cs_step6": "La rete del dispositivo è ora aperta alla connessione per 5 minuti.\n Fare clic su AVANTI per continuare.",
+    "CL_CF_CS_dw005_pair_step1": "Assicurati che il Bluetooth sia attivato sul tuo telefono. Quindi accendi il tuo apparecchio e tocca il pulsante delle impostazioni.",
+    "CL_CF_CS_dw005_pair_step2": "Vai a \"Impostazioni avanzate\" premendo i pulsanti freccia. Premi il pulsante Impostazioni per entrare.",
+    "CL_CF_CS_dw005_pair_step3": "Inserire il codice PIN premendo la seguente sequenza di pulsanti: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "Nel menu \"Impostazioni avanzate\" vai al menu \"WiFi\" e premi il pulsante delle impostazioni per entrare. Poi vai su \"Aggiungi dispositivo\" e premi il pulsante delle impostazioni per attivare.",
+    "CL_CF_CS_dw005_pair_step5": "La rete del dispositivo è ora aperta per l'aggiunta di dispositivi per 3 minuti.\n Fare clic su AVANTI per continuare.",
+    "CL_DV_DW_save_date_invalid": "Il mese di fine non può essere inferiore al mese di inizio!",
+    "CL_DV_OV_send_to_devices": "INVIA AI DISPOSITIVI"
 }
