--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "「02」が表示されている場合は、この手順はスキップしてください。\n「0」が表示されている場合は、集中冷却/凍結キーをタップして、端末のWi-Fiを有効にしてください。\nディスプレイに「01」が一瞬表示され、自動的に「02」に変わります。",
     "cooling_config_wifi_step3": "矢印キーで移動し、「S」を選択します。\n集中冷却/凍結キーをタップして「S」を確定します。\n集中冷却/冷凍キーが点滅します。 デバイス ネットワークは 3 分間接続できるようになります。",
     "cooling_config_wifi_step1_pair": "デバイスを通常の動作条件に設定します。 ビープ音が聞こえるまで、Wi-Fi シンボルを 3 秒間長押しします。 Wi-Fiマークが点滅し、「05」が表示されます。 ネットワーク接続メニューに入りました。",
-    "cooling_config_wifi_step2_pair": "矢印キーで移動し、「P」を選択します。\n集中冷却/凍結キーをタップして「P」を確定します。\n集中冷却/冷凍キーが点滅します。 デバイス ネットワークは、5 分間ペアリングできるようになります。",
+    "cooling_config_wifi_step2_pair": "矢印キーで移動し、「P」を選択します。 集中冷却/冷凍キーをタップして「P」を確認します。 集中冷却/冷凍キーが点滅し始めます。 デバイス ネットワークは 3 分間ペアリングのために開かれます。 [次へ] をクリックして続行します。",
     "dw_config_wifi_step1": "アプライアンスの電源をオンにします。 矢印キーを使用して設定に移動します。 MENU アイコンを押して設定に入ります。",
     "dw_config_wifi_step2": "設定メニューで「ネットワーク」を見つけ、メニューキーで確定して入力します。",
     "dw_config_wifi_step3": "「SoftAP のアクティブ化」に移動し、メニュー キーで確認します。 このアプライアンスのネットワークは、5 分間接続できるようになりました。\n「次へ」をクリックして続行します。",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "下半分",
     "STR_PROG_UPPER": "上半分",
     "STR_PROG_ANTI_ODOUR": "臭い防止",
-    "STR_PROG_SANI": "サニタリー",
-    "STR_PROG_SANI_QUICK": "サニタリークイック",
+    "STR_PROG_SANI": "サニ",
+    "STR_PROG_SANI_QUICK": "サニクイック",
     "air_energy_hint": "注：消費電力統計機能は、モノタイプのエアコンでのみ有効ですが、マルチタイプのエアコンでは無効です。",
     "now": "今",
     "washer_atag_delay_start_in": "洗濯は遅れる。",
@@ -3415,6 +3415,7 @@
     "use_humidity": "湿度調整には湿度ボックスを使用します",
     "same_day": "同日",
     "w_temp_set": "どの温度を設定しますか?",
+    "asko": "アスコ",
     "eco_meter": "エコメーター",
     "asko_eco_meter_desc": "## は、エネルギー、水、洗剤の消費に関して、選択したプログラムと追加オプションに基づいて環境への影響を判断するのに役立つスマートな指標です。",
     "wm86_autodose_desc": "苦労する代わりに、洗濯機に洗剤の正確な適量を測定させましょう。自動投入システムを備えた当社の洗濯機は、洗濯物の量、汚れのレベル、水の硬度、プログラムの種類、温度に応じて洗剤の量を測定します。常に最適な量で、過剰投入はもうありません。ここで、自動投入のデフォルト設定を調整できます。",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "予熱なし",
     "CL_DV_OV_fast_preheat_desc": "高速予熱はオーブンを予熱する最も早い方法です。所要時間は約 7 分です。",
     "CL_DV_OV_preheat_desc": "料理を考慮してオーブンを予熱するには、予熱が最適です。所要時間は約 10 分です。",
-    "CL_DV_OV_no_preheat_desc": "オーブンを予熱する必要は必ずしもありません。たとえば、特定の食品を再加熱する場合などです。"
+    "CL_DV_OV_no_preheat_desc": "オーブンを予熱する必要は必ずしもありません。たとえば、特定の食品を再加熱する場合などです。",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "AI エネルギーナビゲーションを有効にするとエネルギー消費を削減できますが、冷却速度が遅くなる可能性もあります。",
+    "CL_DV_RF_ice_maker_mode": "製氷機モード",
+    "CL_CF_SD_smart_delay": "スマートディレイ",
+    "CL_CF_SD_settings_subtitle": "遅延モードを使用する場合、アプライアンスはオフピーク時間を使用します。",
+    "CL_CF_SD_add_zone": "ゾーンを追加",
+    "CL_CF_SD_new_tariff_zone": "新しい関税地域 ##",
+    "CL_CF_SD_add_tariff": "関税を追加",
+    "CL_CF_SD_duplicate": "重複",
+    "CL_CF_SD_delete_zone": "ゾーンを削除 ",
+    "CL_CF_SD_tariff_zones_n": "関税地域 ##",
+    "CL_CF_SD_tariff_n": "関税 ##",
+    "CL_CF_SD_price": "価格",
+    "CL_CF_SD_off_peak_delay": "オフピークの遅延",
+    "CL_CF_SD_delay_subtitle": "遅延モードを使用する場合、アプライアンスはオフピーク時間を使用します。\n End at と組み合わせて使用する場合は前提条件が適用されます。",
+    "CL_CF_SD_off_peak_delay_not_set": "オフピーク遅延が設定されていません",
+    "CL_CF_SD_to_start_desc": "機能を使用するには、設定で設定する必要があります。",
+    "CL_CF_SD_best": "最高",
+    "CL_CF_SD_delete_title": "## を削除してもよろしいですか?",
+    "CL_DV_OV_number_of_trays": "トレイの数",
+    "CL_DV_OV_baking_trays": "ベーキングトレイ",
+    "CL_DV_OV_1_tray": "トレイ1個",
+    "CL_DV_OV_2_trays": "トレイ2個",
+    "CL_DV_OV_multi_tray": "マルチトレイ",
+    "CL_DV_OV_multi": "マルチ",
+    "CL_DV_RF_ice_off": "アイスオフ",
+    "CL_DV_RF_ion_preservation": "ハイナノ",
+    "CL_DV_RF_ai_energy": "AI省エネ",
+    "CL_DV_RF_adaptive_temperature": "自己適応",
+    "CL_DV_RF_normal_ice_making": "通常の製氷",
+    "CL_DV_RF_quick_ice_making": "高速製氷",
+    "CL_DV_OV_extra_auto_programs": "自動プログラム",
+    "CL_DV_OV_extra_auto_programs_desc": "事前に定義された自動プログラムのセット。自動プログラムは、選択した種類の食品や料理に最適な結果をもたらすのに役立ちます。",
+    "CL_DV_OV_extra_browning_programs": "ブラウニングプログラム",
+    "CL_DV_OV_extra_browning_programs_desc": "特別に開発された焼き色付けプログラムを使用します。料理の仕上がりに応じて、希望する焼き色付けレベルを設定します。",
+    "CL_DV_OV_extra_cleaning": "クリーニング",
+    "CL_DV_OV_extra_cleaning_desc": "オーブンを最適な状態に保つためのステップバイステップのクリーニング プログラムと手順。",
+    "CL_DV_OV_extra_stage_cooking": "ステージクッキング",
+    "CL_DV_OV_extra_stage_cooking_desc": "最大 5 つの異なるステージを使用して、カスタム調理プログラムを作成します。",
+    "CL_DV_OV_extra_defrost_desc": "冷凍後の食品の品質を保証するために、食品を正しく解凍するための定義済みプログラムのセット。",
+    "CL_DV_OV_extra_warming_desc": "事前に定義されたオーブン プログラムを使用して、以前に調理した食品を再加熱します。風味と食感を最大限に保ちます。",
+    "CL_DV_OV_extra_non_food": "食品以外",
+    "CL_DV_OV_extra_non_food_desc": "特別なプログラムを使用して、お皿や熱い石を温めたり、ボトルを殺菌したりできます。",
+    "CL_DV_OV_extra_preserving_desc": "食品を保存すると、栄養価、食感、風味を維持しながら食品を長持ちさせることができます。",
+    "CL_DV_OV_extra_fast_cool": "急速冷却",
+    "CL_DV_OV_extra_fast_cool_desc": "焼き上がった後、できるだけ早くオーブンを冷却したり、他の料理の準備をすぐに続けるために使用したりできます。",
+    "CL_DV_OV_extra_celsius_grill_plate": "セルシウス グリルプレート",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Celsius グリル プレートで焼くための、事前に定義されたオーブン プログラムのセット。",
+    "CL_DV_OV_explore_all_extra": "すべての追加機能を見る",
+    "CL_DV_OV_extras": "追加情報",
+    "CL_CF_CS_midi_hih_setup_1": "デバイスの電源をオンにします。",
+    "CL_CF_CS_midi_hih_setup_2": "「CSt」が表示されるまで、Wi-Fi アイコンを約 5 秒間タップし続けます。",
+    "CL_CF_CS_midi_hih_setup_3": "デバイスは 5 分間接続できる状態になりました。\n続行するには「次へ」をクリックします。",
+    "CL_CF_CS_midi_hih_pair_2": "「PAr」が表示されるまで、Wi-Fi アイコンを約 8 秒間タップし続けます。",
+    "CL_CF_CS_midi_hih_pair_3": "デバイスは 3 分間ペアリングする準備ができました。\n続行するには「次へ」をクリックします。",
+    "ac_dimmer_air_des": "夜間の休息を妨げるLEDライトを避けるためにLEDをオフにしてください",
+    "e_verify_code": "認証コードを入力してください",
+    "CL_CF_CS_td76_and_wm86_pair_4": "デバイス ネットワークは 3 分間接続可能になりました。\n続行するには「次へ」をクリックします。",
+    "CL_DV_OV_24_set_language": "言語を設定する",
+    "CL_DV_OV_24_time_date": "時間 - 日付",
+    "CL_CF_CS_dw005_cs_step1": "お使いの携帯電話で Bluetooth が有効になっていることを確認してください。次に、機器の電源をオンにして、設定ボタンをタップします。",
+    "CL_CF_CS_dw005_cs_step2": "矢印ボタンを押して「詳細設定」に移動します。設定ボタンを押して入ります。",
+    "CL_CF_CS_dw005_cs_step3": "次のボタンの順序で押して PIN コードを入力します: I、II、I、III。",
+    "CL_CF_CS_dw005_cs_step4": "「詳細設定」メニューで「WiFi」に移動し、設定ボタンを押して入ります。「WiFi」メニュー内で、WiFiが有効になっていることを確認します。有効になっていない場合は、設定ボタンを押して有効にします。",
+    "CL_CF_CS_dw005_cs_step5": "「WiFi」メニューを開いたまま「接続設定」に進み、設定ボタンを押して有効にします。 ",
+    "CL_CF_CS_dw005_cs_step6": "デバイス ネットワークは 5 分間接続可能になりました。\n続行するには「次へ」をクリックします。",
+    "CL_CF_CS_dw005_pair_step1": "お使いの携帯電話で Bluetooth が有効になっていることを確認してください。次に、機器の電源をオンにして、設定ボタンをタップします。",
+    "CL_CF_CS_dw005_pair_step2": "矢印ボタンを押して「詳細設定」に移動します。設定ボタンを押して入ります。",
+    "CL_CF_CS_dw005_pair_step3": "次のボタンの順序で押して PIN コードを入力します: I、II、I、III。",
+    "CL_CF_CS_dw005_pair_step4": "「詳細設定」メニューで「WiFi」メニューに移動し、設定ボタンを押して入ります。次に「デバイスの追加」に移動し、設定ボタンを押して有効にします。",
+    "CL_CF_CS_dw005_pair_step5": "デバイス ネットワークは現在 3 分間デバイスを追加するために開いています。\n続行するには「次へ」をクリックします。",
+    "CL_DV_DW_save_date_invalid": "終了月は開始月より小さくできません。",
+    "CL_DV_OV_send_to_devices": "デバイスに送信"
 }
