--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "\"02\"가 표시되면 이 단계를 건너뜁니다.\n\"0\"이 표시되면 집중냉방/냉동 버튼을 눌러 기기의 Wi-Fi를 활성화하세요.\n디스플레이에 \"01\"이 잠시 표시되었다가 자동으로 \"02\"로 변경됩니다.",
     "cooling_config_wifi_step3": "화살표 키를 사용하여 탐색하고 \"S\"를 선택합니다.\n집중냉방/냉동 키를 눌러 \"S\"를 확인하세요.\n집중냉방/냉동 버튼이 깜박이기 시작합니다. 이제 장치 네트워크가 3분 동안 연결을 위해 열려 있습니다.",
     "cooling_config_wifi_step1_pair": "장치를 정상적인 작동 조건으로 설정하십시오. 신호음이 들릴 때까지 Wi-Fi 기호를 3초간 길게 탭하세요. Wi-Fi 기호가 깜박이기 시작하고 \"05\"가 나타납니다. 네트워크 연결 메뉴에 들어갔습니다.",
-    "cooling_config_wifi_step2_pair": "화살표 키를 사용하여 탐색하고 \"P\"를 선택합니다.\n집중냉방/냉동 키를 눌러 \"P\"를 확인하세요.\n집중냉방/냉동 버튼이 깜박이기 시작합니다. 이제 장치 네트워크가 5분 동안 페어링을 위해 열려 있습니다.",
+    "cooling_config_wifi_step2_pair": "화살표 키로 탐색하고 \"P\"를 선택합니다. 집중 냉각/냉동 키를 탭하여 \"P\"를 확인합니다. 집중 냉각/냉동 키가 깜박이기 시작합니다. 이제 장치 네트워크가 3분 동안 페어링을 위해 열려 있습니다. 다음을 클릭하여 계속합니다.",
     "dw_config_wifi_step1": "기기를 켜십시오. 화살표 키를 사용하여 설정으로 이동합니다. 메뉴 아이콘을 눌러 설정으로 들어갑니다.",
     "dw_config_wifi_step2": "설정 메뉴에서 NETWORK를 찾아 메뉴 키로 확인하여 들어갑니다.",
     "dw_config_wifi_step3": "\"SoftAP 활성화\"로 이동하고 메뉴 키로 확인합니다. 이제 이 어플라이언스의 네트워크가 5분 동안 열려 연결됩니다.\n계속하려면 다음을 클릭하세요.",
@@ -1630,7 +1630,7 @@
     "STR_PROG_UPPER": "상반부",
     "STR_PROG_ANTI_ODOUR": "냄새 방지",
     "STR_PROG_SANI": "사니",
-    "STR_PROG_SANI_QUICK": "SANI 퀵",
+    "STR_PROG_SANI_QUICK": "사니 퀵",
     "air_energy_hint": "참고: 전력 소비 통계 기능은 모노형 에어컨에만 유효하며, 멀티형 에어컨에는 유효하지 않습니다.",
     "now": "지금",
     "washer_atag_delay_start_in": "세탁이 지연되었습니다. 에서 시작",
@@ -3415,6 +3415,7 @@
     "use_humidity": "습도 조절을 위해 습도 상자를 사용하십시오.",
     "same_day": "당일",
     "w_temp_set": "온도를 어디까지 설정할까요? (Ondo-reul eodikkaji seonghap halkkayo?)",
+    "asko": "아스코",
     "eco_meter": "에코미터",
     "asko_eco_meter_desc": "##은 에너지, 물, 세제 소비와 관련하여 선택한 프로그램과 추가 옵션을 기반으로 환경에 미치는 영향을 판단하는 데 유용한 스마트 지표입니다.",
     "wm86_autodose_desc": "힘들게 세탁기를 돌리는 대신 세탁기가 세제의 정확한 양을 측정하게 하세요. 자동 투여 시스템이 있는 세탁기는 세탁물, 오염도, 물의 경도, 프로그램 유형 및 온도에 따라 세제를 측정합니다. 항상 완벽한 투여량이고 더 이상 과용하지 않습니다. 여기서 자동 투여에 대한 기본 설정을 조정할 수 있습니다.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "예열 없음",
     "CL_DV_OV_fast_preheat_desc": "빠른 예열은 오븐을 예열하는 가장 빠른 방법입니다. 약 7분이 걸립니다.",
     "CL_DV_OV_preheat_desc": "예열은 요리를 고려하면 오븐을 예열하는 가장 좋은 방법입니다. 약 10분이 걸립니다.",
-    "CL_DV_OV_no_preheat_desc": "오븐을 항상 예열할 필요는 없습니다. 예를 들어, 특정 음식을 다시 데울 때."
+    "CL_DV_OV_no_preheat_desc": "오븐을 항상 예열할 필요는 없습니다. 예를 들어, 특정 음식을 다시 데울 때.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "AI 에너지 내비게이션을 활성화하면 에너지 소비는 줄일 수 있지만 냉각 속도가 느려질 수도 있습니다.",
+    "CL_DV_RF_ice_maker_mode": "제빙기 모드",
+    "CL_CF_SD_smart_delay": "스마트 딜레이",
+    "CL_CF_SD_settings_subtitle": "지연 모드를 사용하는 경우, 기기는 비수요 시간대를 사용합니다.",
+    "CL_CF_SD_add_zone": "영역 추가",
+    "CL_CF_SD_new_tariff_zone": "새로운 관세 구역 ##",
+    "CL_CF_SD_add_tariff": "관세 추가",
+    "CL_CF_SD_duplicate": "복제하다",
+    "CL_CF_SD_delete_zone": "영역 삭제 ",
+    "CL_CF_SD_tariff_zones_n": "관세 구역 ##",
+    "CL_CF_SD_tariff_n": "관세 ##",
+    "CL_CF_SD_price": "가격",
+    "CL_CF_SD_off_peak_delay": "비수요시간 지연",
+    "CL_CF_SD_delay_subtitle": "지연 모드를 사용하는 경우, 기기는 비수요 시간대를 사용합니다.\n End와 조합하여 사용하는 경우 전제 조건이 적용됩니다.",
+    "CL_CF_SD_off_peak_delay_not_set": "비수요시간 지연이 설정되지 않았습니다",
+    "CL_CF_SD_to_start_desc": "해당 기능을 사용하려면 설정에서 해당 기능을 설정해야 합니다.",
+    "CL_CF_SD_best": "최상의",
+    "CL_CF_SD_delete_title": "##을 삭제하시겠습니까?",
+    "CL_DV_OV_number_of_trays": "트레이 수",
+    "CL_DV_OV_baking_trays": "베이킹 트레이",
+    "CL_DV_OV_1_tray": "1 트레이",
+    "CL_DV_OV_2_trays": "2개의 트레이",
+    "CL_DV_OV_multi_tray": "멀티 트레이",
+    "CL_DV_OV_multi": "멀티",
+    "CL_DV_RF_ice_off": "얼음 끄기",
+    "CL_DV_RF_ion_preservation": "하이나노",
+    "CL_DV_RF_ai_energy": "AI 에너지 절약",
+    "CL_DV_RF_adaptive_temperature": "자기 적응",
+    "CL_DV_RF_normal_ice_making": "일반 제빙",
+    "CL_DV_RF_quick_ice_making": "빠른 얼음 만들기",
+    "CL_DV_OV_extra_auto_programs": "자동 프로그램",
+    "CL_DV_OV_extra_auto_programs_desc": "미리 정의된 자동 프로그램 세트. 자동 프로그램은 선택한 음식이나 요리 유형에 대해 최상의 결과를 얻는 데 도움이 됩니다.",
+    "CL_DV_OV_extra_browning_programs": "브라우닝 프로그램",
+    "CL_DV_OV_extra_browning_programs_desc": "특별히 개발된 브라우닝 프로그램을 사용하세요. 요리의 결과에 따라 원하는 브라우닝 레벨을 설정하세요.",
+    "CL_DV_OV_extra_cleaning": "청소",
+    "CL_DV_OV_extra_cleaning_desc": "오븐을 최적의 상태로 유지하기 위한 단계별 세척 프로그램과 지침입니다.",
+    "CL_DV_OV_extra_stage_cooking": "무대 요리",
+    "CL_DV_OV_extra_stage_cooking_desc": "최대 5개의 다양한 단계를 사용하여 맞춤형 요리 프로그램을 만들어보세요.",
+    "CL_DV_OV_extra_defrost_desc": "냉동 후 식품의 품질을 보장하기 위해 식품을 올바르게 해동하는 미리 정의된 프로그램 세트입니다.",
+    "CL_DV_OV_extra_warming_desc": "미리 정의된 오븐 프로그램을 사용하여 이전에 조리한 음식을 다시 데웁니다. 최대의 풍미와 질감을 유지합니다.",
+    "CL_DV_OV_extra_non_food": "비식품",
+    "CL_DV_OV_extra_non_food_desc": "특별 프로그램을 사용해 접시와 돌을 데우고, 병을 소독하세요.",
+    "CL_DV_OV_extra_preserving_desc": "식품 보존은 영양가, 질감, 맛을 유지하면서도 음식을 더 오래 보관하는 데 도움이 됩니다.",
+    "CL_DV_OV_extra_fast_cool": "빠른 냉각",
+    "CL_DV_OV_extra_fast_cool_desc": "베이킹이 끝난 후 가능한 한 빨리 오븐을 식히거나 다른 음식 준비를 빠르게 계속하는 데 사용할 수 있습니다.",
+    "CL_DV_OV_extra_celsius_grill_plate": "셀시우스 그릴 플레이트",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "셀시우스 그릴 플레이트를 사용하여 굽는 데 특화된 사전 정의된 오븐 프로그램 세트입니다.",
+    "CL_DV_OV_explore_all_extra": "모든 추가 기능 탐색",
+    "CL_DV_OV_extras": "추가 사항",
+    "CL_CF_CS_midi_hih_setup_1": "장치를 켭니다.",
+    "CL_CF_CS_midi_hih_setup_2": "\"CSt\"가 나타날 때까지 약 5초간 Wi-Fi 아이콘을 탭하여 길게 누릅니다.",
+    "CL_CF_CS_midi_hih_setup_3": "이제 장치를 5분간 연결할 준비가 되었습니다.\n 계속하려면 다음을 클릭하세요.",
+    "CL_CF_CS_midi_hih_pair_2": "\"PAr\"가 나타날 때까지 약 8초간 Wi-Fi 아이콘을 탭하여 길게 누릅니다.",
+    "CL_CF_CS_midi_hih_pair_3": "이제 3분 동안 페어링을 할 준비가 되었습니다.\n 계속하려면 다음을 클릭하세요.",
+    "ac_dimmer_air_des": "밤에 LED 조명이 수면을 방해하지 않도록 LED를 끄세요.",
+    "e_verify_code": "인증코드를 입력하세요",
+    "CL_CF_CS_td76_and_wm86_pair_4": "이제 장치 네트워크가 3분 동안 연결을 위해 열려 있습니다.\n 계속하려면 다음을 클릭하세요.",
+    "CL_DV_OV_24_set_language": "언어 설정",
+    "CL_DV_OV_24_time_date": "시간 - 날짜",
+    "CL_CF_CS_dw005_cs_step1": "휴대폰에서 Bluetooth가 활성화되어 있는지 확인하세요. 그런 다음 기기를 켜고 설정 버튼을 탭하세요.",
+    "CL_CF_CS_dw005_cs_step2": "화살표 버튼을 눌러 \"고급 설정\"으로 이동합니다. 설정 버튼을 눌러 들어갑니다.",
+    "CL_CF_CS_dw005_cs_step3": "다음 순서의 버튼을 눌러 PIN 코드를 입력하세요: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "\"고급 설정\" 메뉴에서 \"WiFi\"로 가서 설정 버튼을 눌러 들어갑니다. \"Wifi\" 메뉴 내부에서 WiFi가 활성화되어 있는지 확인합니다. 그렇지 않은 경우 설정 버튼을 눌러 활성화합니다.",
+    "CL_CF_CS_dw005_cs_step5": "\"WiFi\" 메뉴에서 \"연결 설정\"으로 이동한 후 설정 버튼을 눌러 활성화하세요. ",
+    "CL_CF_CS_dw005_cs_step6": "이제 장치 네트워크가 5분 동안 연결을 위해 열려 있습니다.\n 계속하려면 다음을 클릭하세요.",
+    "CL_CF_CS_dw005_pair_step1": "휴대폰에서 Bluetooth가 활성화되어 있는지 확인하세요. 그런 다음 기기를 켜고 설정 버튼을 탭하세요.",
+    "CL_CF_CS_dw005_pair_step2": "화살표 버튼을 눌러 \"고급 설정\"으로 이동합니다. 설정 버튼을 눌러 들어갑니다.",
+    "CL_CF_CS_dw005_pair_step3": "다음 순서의 버튼을 눌러 PIN 코드를 입력하세요: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "\"고급 설정\" 메뉴에서 \"WiFi\" 메뉴로 가서 설정 버튼을 눌러 들어갑니다. 그런 다음 \"장치 추가\"로 가서 설정 버튼을 눌러 활성화합니다.",
+    "CL_CF_CS_dw005_pair_step5": "이제 장치 네트워크가 3분 동안 장치 추가를 위해 열려 있습니다.\n 계속하려면 다음을 클릭하세요.",
+    "CL_DV_DW_save_date_invalid": "종료 월은 시작 월보다 작을 수 없습니다!",
+    "CL_DV_OV_send_to_devices": "기기로 보내기"
 }
