--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "Jika \"02\" dipaparkan, langkau langkah ini.\nJika \"0\" dipaparkan, ketik kekunci penyejukan/pembekuan intensif untuk mendayakan Wi-Fi pada peranti.\nPaparan akan menunjukkan \"01\" secara ringkas dan bertukar kepada \"02\" secara automatik.",
     "cooling_config_wifi_step3": "Navigasi dengan kekunci anak panah dan pilih \"S\".\nSahkan \"S\" dengan mengetik kekunci penyejukan/pembekuan intensif.\nKunci penyejukan/pembekuan intensif akan mula berkelip. Rangkaian peranti kini dibuka untuk sambungan selama 3 minit.",
     "cooling_config_wifi_step1_pair": "Tetapkan peranti kepada keadaan operasi biasa. Ketik dan tahan simbol Wi-Fi selama 3 saat sehingga anda mendengar bunyi bip. Simbol Wi-Fi akan mula berkelip, dan \"05\" akan muncul. Anda telah memasuki menu sambungan rangkaian.",
-    "cooling_config_wifi_step2_pair": "Navigasi dengan kekunci anak panah dan pilih \"P\".\nSahkan \"P\" dengan mengetik kekunci penyejukan/pembekuan intensif.\nKunci penyejukan/pembekuan intensif akan mula berkelip. Rangkaian peranti kini dibuka untuk berpasangan selama 5 minit.",
+    "cooling_config_wifi_step2_pair": "Navigasi dengan kekunci anak panah dan pilih \"P\". Sahkan \"P\" dengan mengetik kekunci penyejukan/pembekuan intensif. Kunci penyejukan/pembekuan intensif akan mula berkelip. Rangkaian peranti kini dibuka untuk berpasangan selama 3 minit. Klik SETERUSNYA untuk meneruskan.",
     "dw_config_wifi_step1": "HIDUPKAN perkakas. Navigasi dengan kekunci anak panah ke tetapan. Tekan ikon MENU untuk memasukkan tetapan.",
     "dw_config_wifi_step2": "Dalam menu tetapan, cari NETWORK dan sahkan dengan kekunci menu untuk masuk.",
     "dw_config_wifi_step3": "Navigasi ke \"Aktifkan SoftAP\" dan sahkan dengan kekunci menu. Rangkaian perkakas ini kini dibuka untuk disambungkan, selama 5 minit.\nKlik SETERUSNYA untuk meneruskan.",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "Separuh bawah",
     "STR_PROG_UPPER": "Separuh atas",
     "STR_PROG_ANTI_ODOUR": "Anti-bau",
-    "STR_PROG_SANI": "SANI",
-    "STR_PROG_SANI_QUICK": "SANI Cepat",
+    "STR_PROG_SANI": "Sani",
+    "STR_PROG_SANI_QUICK": "Sani Cepat",
     "air_energy_hint": "Nota: Fungsi statistik penggunaan kuasa hanya sah untuk penghawa dingin jenis Mono, tetapi bukan untuk penghawa dingin Pelbagai jenis.",
     "now": "Sekarang",
     "washer_atag_delay_start_in": "Basuh tertangguh. Mula masuk",
@@ -3415,6 +3415,7 @@
     "use_humidity": "Gunakan kotak kelembapan untuk mengawal kelembapan",
     "same_day": "Pada hari yang sama",
     "w_temp_set": "Suhu apa yang perlu ditetapkan?",
+    "asko": "ASKO",
     "eco_meter": "Eco Meter",
     "asko_eco_meter_desc": "## ialah penunjuk pintar yang berguna untuk menentukan kesan alam sekitar anda berdasarkan program yang dipilih dan pilihan tambahan apabila melibatkan penggunaan tenaga, air dan detergen.",
     "wm86_autodose_desc": "Daripada bersusah payah, biarkan mesin basuh mengukur dengan tepat dos detergen yang betul. Mesin basuh kami dengan sistem Auto Dose mengukur detergen terhadap beban cucian, tahap kekotoran, kekerasan air, jenis program dan suhu. Dos sentiasa sempurna dan tiada lagi dos berlebihan. Di sini anda boleh melaraskan tetapan lalai anda untuk Auto Dos.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Tiada pemanasan awal",
     "CL_DV_OV_fast_preheat_desc": "Prapanas Cepat ialah cara terpantas untuk memanaskan ketuhar anda. Ia mengambil masa lebih kurang 7 minit.",
     "CL_DV_OV_preheat_desc": "Panaskan adalah cara terbaik untuk memanaskan ketuhar anda dengan mengambil kira hidangan. Ia mengambil masa kira-kira 10 minit.",
-    "CL_DV_OV_no_preheat_desc": "Ia tidak selalu diperlukan untuk memanaskan ketuhar anda. Contohnya untuk memanaskan semula makanan tertentu."
+    "CL_DV_OV_no_preheat_desc": "Ia tidak selalu diperlukan untuk memanaskan ketuhar anda. Contohnya untuk memanaskan semula makanan tertentu.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Mendayakan Navigasi Tenaga AI boleh mengurangkan penggunaan tenaga, tetapi ia juga boleh memperlahankan kelajuan penyejukan.",
+    "CL_DV_RF_ice_maker_mode": "Mod pembuat ais",
+    "CL_CF_SD_smart_delay": "Kelewatan Pintar",
+    "CL_CF_SD_settings_subtitle": "Perkakas akan menggunakan waktu luar puncak apabila menggunakan mod tunda.",
+    "CL_CF_SD_add_zone": "Tambah Zon",
+    "CL_CF_SD_new_tariff_zone": "Zon Tarif Baharu ##",
+    "CL_CF_SD_add_tariff": "Tambah Tarif",
+    "CL_CF_SD_duplicate": "Pendua",
+    "CL_CF_SD_delete_zone": "Padam zon ",
+    "CL_CF_SD_tariff_zones_n": "Zon tarif ##",
+    "CL_CF_SD_tariff_n": "Tarif ##",
+    "CL_CF_SD_price": "harga",
+    "CL_CF_SD_off_peak_delay": "Kelewatan luar puncak",
+    "CL_CF_SD_delay_subtitle": "Perkakas akan menggunakan waktu luar puncak apabila menggunakan mod tunda.\n Jika menggunakan gabungan dengan Tamat pada prasyarat digunakan.",
+    "CL_CF_SD_off_peak_delay_not_set": "Kelewatan luar puncak tidak ditetapkan",
+    "CL_CF_SD_to_start_desc": "Untuk mula menggunakan fungsi anda perlu menyediakannya dalam tetapan.",
+    "CL_CF_SD_best": "Terbaik",
+    "CL_CF_SD_delete_title": "Adakah anda pasti mahu memadamkan ##?",
+    "CL_DV_OV_number_of_trays": "Bilangan dulang",
+    "CL_DV_OV_baking_trays": "DULANG PEMBAKAR",
+    "CL_DV_OV_1_tray": "1 dulang",
+    "CL_DV_OV_2_trays": "2 dulang",
+    "CL_DV_OV_multi_tray": "Dulang berbilang",
+    "CL_DV_OV_multi": "Berbilang",
+    "CL_DV_RF_ice_off": "Ais DIMATIKAN",
+    "CL_DV_RF_ion_preservation": "HI-NANO",
+    "CL_DV_RF_ai_energy": "AI Penjimatan Tenaga",
+    "CL_DV_RF_adaptive_temperature": "Penyesuaian Diri",
+    "CL_DV_RF_normal_ice_making": "Pembuatan Ais Biasa",
+    "CL_DV_RF_quick_ice_making": "Cepat Membuat Ais",
+    "CL_DV_OV_extra_auto_programs": "Program auto",
+    "CL_DV_OV_extra_auto_programs_desc": "Satu set atur cara automatik yang dipratentukan. Program automatik membantu anda memperoleh hasil terbaik untuk jenis makanan atau hidangan yang dipilih.",
+    "CL_DV_OV_extra_browning_programs": "Program Browning",
+    "CL_DV_OV_extra_browning_programs_desc": "Gunakan program pemerangan yang dibangunkan khas. Tetapkan tahap keperangan yang anda inginkan sebagai hasil untuk hidangan anda.",
+    "CL_DV_OV_extra_cleaning": "Pembersihan",
+    "CL_DV_OV_extra_cleaning_desc": "Program pembersihan langkah demi langkah dan arahan tentang cara memastikan ketuhar anda dalam keadaan optimum.",
+    "CL_DV_OV_extra_stage_cooking": "Memasak pentas",
+    "CL_DV_OV_extra_stage_cooking_desc": "Buat program memasak tersuai, menggunakan sehingga 5 peringkat berbeza.",
+    "CL_DV_OV_extra_defrost_desc": "Satu set program yang dipratentukan untuk mencairkan makanan dengan betul untuk memastikan kualiti selepas ia dibekukan.",
+    "CL_DV_OV_extra_warming_desc": "Panaskan semula makanan yang telah dimasak sebelum ini menggunakan program ketuhar yang telah ditetapkan. Mengekalkan rasa dan tekstur maksimum.",
+    "CL_DV_OV_extra_non_food": "Bukan makanan",
+    "CL_DV_OV_extra_non_food_desc": "Panaskan pinggan anda, batu panas atau sterilkan botol dengan program khas.",
+    "CL_DV_OV_extra_preserving_desc": "Mengawet makanan membantu menjadikan makanan anda tahan lebih lama sambil mengekalkan nilai pemakanan, tekstur dan rasa.",
+    "CL_DV_OV_extra_fast_cool": "Cepat sejuk",
+    "CL_DV_OV_extra_fast_cool_desc": "Sejukkan ketuhar secepat mungkin selepas dibakar selesai atau boleh digunakan untuk meneruskan penyediaan makanan lain dengan cepat.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Plat Panggangan Celcius",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Satu set atur cara ketuhar yang dipratentukan khusus untuk membakar dengan Plat Panggangan Celsius.",
+    "CL_DV_OV_explore_all_extra": "TEROKA SEMUA TAMBAHAN",
+    "CL_DV_OV_extras": "Tambahan",
+    "CL_CF_CS_midi_hih_setup_1": "Hidupkan peranti.",
+    "CL_CF_CS_midi_hih_setup_2": "Ketik dan tahan ikon Wi-Fi selama lebih kurang 5 saat sehingga \"CSt\" muncul.",
+    "CL_CF_CS_midi_hih_setup_3": "Peranti kini sedia untuk disambungkan selama 5 minit.\n Klik SETERUSNYA untuk meneruskan.",
+    "CL_CF_CS_midi_hih_pair_2": "Ketik dan tahan ikon Wi-Fi selama lebih kurang 8 saat sehingga \"PAR\" muncul.",
+    "CL_CF_CS_midi_hih_pair_3": "Peranti kini sedia untuk berpasangan selama 3 minit.\n Klik SETERUSNYA untuk meneruskan.",
+    "ac_dimmer_air_des": "Matikan LED untuk mengelakkan lampu LED mengganggu rehat anda pada waktu malam",
+    "e_verify_code": "Masukkan kod pengesahan",
+    "CL_CF_CS_td76_and_wm86_pair_4": "Rangkaian peranti kini dibuka untuk sambungan selama 3 minit.\n Klik SETERUSNYA untuk meneruskan.",
+    "CL_DV_OV_24_set_language": "Tetapkan bahasa",
+    "CL_DV_OV_24_time_date": "Masa - Tarikh",
+    "CL_CF_CS_dw005_cs_step1": "Pastikan Bluetooth anda diaktifkan pada telefon anda. Kemudian hidupkan perkakas anda dan ketik butang tetapan.",
+    "CL_CF_CS_dw005_cs_step2": "Navigasi ke \"Tetapan lanjutan\" dengan menekan butang anak panah. Tekan butang tetapan untuk masuk.",
+    "CL_CF_CS_dw005_cs_step3": "Masukkan kod PIN dengan menekan urutan butang berikut: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "Dalam menu \"Tetapan lanjutan\" pergi ke \"WiFi\" dan tekan butang tetapan untuk masuk. Di dalam menu \"Wifi\" pastikan WiFi didayakan. Jika tidak, tekan butang tetapan untuk membolehkan.",
+    "CL_CF_CS_dw005_cs_step5": "Semasa masih dalam menu \"WiFi\" pergi ke \"Persediaan sambungan\" dan tekan butang tetapan untuk mengaktifkan. ",
+    "CL_CF_CS_dw005_cs_step6": "Rangkaian peranti kini dibuka untuk sambungan selama 5 minit.\n Klik SETERUSNYA untuk meneruskan.",
+    "CL_CF_CS_dw005_pair_step1": "Pastikan Bluetooth anda diaktifkan pada telefon anda. Kemudian hidupkan perkakas anda dan ketik butang tetapan.",
+    "CL_CF_CS_dw005_pair_step2": "Navigasi ke \"Tetapan lanjutan\" dengan menekan butang anak panah. Tekan butang tetapan untuk masuk.",
+    "CL_CF_CS_dw005_pair_step3": "Masukkan kod PIN dengan menekan urutan butang berikut: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "Dalam menu \"Tetapan lanjutan\" pergi ke menu \"WiFi\" dan tekan butang tetapan untuk masuk. Kemudian pergi ke \"Tambah peranti\" dan tekan butang tetapan untuk mengaktifkan.",
+    "CL_CF_CS_dw005_pair_step5": "Rangkaian peranti kini dibuka untuk menambah peranti selama 3 minit.\n Klik SETERUSNYA untuk meneruskan.",
+    "CL_DV_DW_save_date_invalid": "Bulan akhir tidak boleh lebih kecil daripada bulan permulaan!",
+    "CL_DV_OV_send_to_devices": "HANTAR KE PERANTI"
 }
