--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "Om het apparaat met het Wi-Fi te verbinden drukt u op de toets 'intensief koelen of vriezen'. Het display toont kort de status '01'  en verandert automatisch in '02'. Het apparaat is klaar om verbinding te maken met uw Wi-Finetwerk.",
     "cooling_config_wifi_step3": "Navigeer met de pijltjestoetsen om 'S' te kiezen. Bevestig 'S' door de toets 'intensief koelen of vriezen' aan te raken. De toets 'intensief koelen of vriezen' begint te knipperen: het netwerk van dit apparaat is nu, gedurende 3 minuten, open om verbinding mee te maken. Klik op VOLGENDE om verder te gaan.",
     "cooling_config_wifi_step1_pair": "Druk ongeveer 3 seconden op het Wi-Fi symbool. Het Wi-Fi symbool begint te knipperen en status '0' verschijnt op het display. U bent in het netwerkverbindingsmenu.",
-    "cooling_config_wifi_step2_pair": "Navigeer met de pijltjestoetsen om 'P' te kiezen. Bevestig 'P' door de toets 'intensief koelen of vriezen' aan te raken. De toets 'intensief koelen of vriezen' begint te knipperen: het netwerk van dit apparaat is nu, gedurende 5 minuten, open om verbinding mee te maken. Klik op VOLGENDE om verder te gaan.",
+    "cooling_config_wifi_step2_pair": "Navigeer met de pijltjestoetsen en selecteer \"P\". Bevestig \"P\" door op de intensieve koel-/vriestoets te tikken. De intensieve koel-/vriestoets begint te knipperen. Het netwerk van het apparaat is nu 3 minuten open voor koppeling. Klik op VOLGENDE om door te gaan.",
     "dw_config_wifi_step1": "Schakel het apparaat in. Navigeer met de pijltjestoetsen naar de instellingen. Druk op de programmamodusknop om de instellingen te openen.",
     "dw_config_wifi_step2": "Navigeer in het instellingenmenu naar NETWERK en bevestig met de programmamodusknop om de instellingen te openen.",
     "dw_config_wifi_step3": "Navigeer naar \"Selecteer SoftAP\" en bevestig met de programmamodusknop. Het netwerk van dit apparaat is nu, gedurende 2 minuten, open om verbinding mee te maken. Klik op VOLGENDE om door te gaan.",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "Onderkorf",
     "STR_PROG_UPPER": "Bovenkorf",
     "STR_PROG_ANTI_ODOUR": "Anti-geur",
-    "STR_PROG_SANI": "SANI",
-    "STR_PROG_SANI_QUICK": "SANI Snel",
+    "STR_PROG_SANI": "Sani",
+    "STR_PROG_SANI_QUICK": "Sani Snel",
     "air_energy_hint": "Opmerking: de functie voor statistieken over energieverbruik is alleen geldig voor airconditioners van het monotype, maar niet voor airconditioners van het type multi.",
     "now": "Nu",
     "washer_atag_delay_start_in": "Was uitgesteld. Start in",
@@ -2518,7 +2518,7 @@
     "wcc_lock": "Slot",
     "wcc_door_alarm": "Deur alarm",
     "confirm_access": "TOEGANG BEVESTIGEN",
-    "delete_account_email_code_tips": "We hebben een e-mail met verificatiecode verzonden naar %s. \\Voer de verificatiecode uit de e-mail in om de toegang te bevestigen. \\De ontvangen code is 10 minuten geldig.",
+    "delete_account_email_code_tips": "We hebben een e-mail met verificatiecode verzonden naar %s. Voer de verificatiecode uit de e-mail in om de toegang te bevestigen. De ontvangen code is 10 minuten geldig.",
     "resend_code": "Code opnieuw verzenden",
     "manuals_oven_name": "Oven & fornuis",
     "manuals_rf_name": "Koelkast & vriezer",
@@ -3415,6 +3415,7 @@
     "use_humidity": "Gebruik de vochtigheidsbox om de vochtigheid te regelen",
     "same_day": "Op dezelfde dag",
     "w_temp_set": "Welke temperatuur moet ik instellen?",
+    "asko": "ASKO",
     "eco_meter": "Eco-meter",
     "asko_eco_meter_desc": "## is een handige slimme indicator om uw milieu-impact te bepalen op basis van het gekozen programma en extra opties als het gaat om energie-, water- en wasmiddelverbruik.",
     "wm86_autodose_desc": "In plaats van er een strijd van te maken, laat de wasmachine precies de juiste dosering wasmiddel afmeten. Onze wasmachines met Auto Dose-systeem meten het wasmiddel op basis van de waslading, vuilheidsgraad, waterhardheid, programmatype en temperatuur. Altijd de perfecte dosering en geen overdosering meer. Hier kunt u uw standaardinstellingen voor Auto Dose aanpassen.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Geen voorverwarmen",
     "CL_DV_OV_fast_preheat_desc": "Fast Preheat is de snelste manier om uw oven voor te verwarmen. Het duurt ongeveer 7 minuten.",
     "CL_DV_OV_preheat_desc": "Voorverwarmen is de beste manier om uw oven voor te verwarmen, gezien het gerecht. Het duurt ongeveer 10 minuten.",
-    "CL_DV_OV_no_preheat_desc": "Het is niet altijd nodig om uw oven voor te verwarmen. Bijvoorbeeld om bepaalde gerechten op te warmen."
+    "CL_DV_OV_no_preheat_desc": "Het is niet altijd nodig om uw oven voor te verwarmen. Bijvoorbeeld om bepaalde gerechten op te warmen.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Door AI-energienavigatie in te schakelen, kunt u het energieverbruik verminderen, maar het kan ook de koelsnelheid vertragen.",
+    "CL_DV_RF_ice_maker_mode": "IJsmakermodus",
+    "CL_CF_SD_smart_delay": "Slimme vertraging",
+    "CL_CF_SD_settings_subtitle": "Het apparaat maakt gebruik van daluren wanneer de vertragingsmodus wordt gebruikt.",
+    "CL_CF_SD_add_zone": "Zone toevoegen",
+    "CL_CF_SD_new_tariff_zone": "Nieuwe tariefzones ##",
+    "CL_CF_SD_add_tariff": "Tarief toevoegen",
+    "CL_CF_SD_duplicate": "Duplicaat",
+    "CL_CF_SD_delete_zone": "Zone verwijderen ",
+    "CL_CF_SD_tariff_zones_n": "Tariefzones ##",
+    "CL_CF_SD_tariff_n": "Tarief ##",
+    "CL_CF_SD_price": "Prijs",
+    "CL_CF_SD_off_peak_delay": "Vertraging buiten de spits",
+    "CL_CF_SD_delay_subtitle": "Het apparaat maakt gebruik van daluren wanneer de vertragingsmodus wordt gebruikt.\n Als u een combinatie met End gebruikt, wordt er een voorwaarde toegepast.",
+    "CL_CF_SD_off_peak_delay_not_set": "Dalurenvertraging niet ingesteld",
+    "CL_CF_SD_to_start_desc": "Om de functie te kunnen gebruiken, moet u deze in de instellingen instellen.",
+    "CL_CF_SD_best": "Best",
+    "CL_CF_SD_delete_title": "Weet u zeker dat u ## wilt verwijderen?",
+    "CL_DV_OV_number_of_trays": "Aantal trays",
+    "CL_DV_OV_baking_trays": "BAKPLATEN",
+    "CL_DV_OV_1_tray": "1 bakje",
+    "CL_DV_OV_2_trays": "2 bakken",
+    "CL_DV_OV_multi_tray": "Meerdere laden",
+    "CL_DV_OV_multi": "Multi",
+    "CL_DV_RF_ice_off": "IJs UIT",
+    "CL_DV_RF_ion_preservation": "Hallo-NANO",
+    "CL_DV_RF_ai_energy": "AI Energiebesparing",
+    "CL_DV_RF_adaptive_temperature": "Zelf-aanpassing",
+    "CL_DV_RF_normal_ice_making": "Gewoon ijs maken",
+    "CL_DV_RF_quick_ice_making": "Snel ijs maken",
+    "CL_DV_OV_extra_auto_programs": "Automatische programma's",
+    "CL_DV_OV_extra_auto_programs_desc": "Een set vooraf gedefinieerde automatische programma's. Automatische programma's helpen u het beste resultaat te krijgen voor het geselecteerde type voedsel of gerecht.",
+    "CL_DV_OV_extra_browning_programs": "Browning-programma's",
+    "CL_DV_OV_extra_browning_programs_desc": "Gebruik speciaal ontwikkelde bruiningsprogramma's. Stel het gewenste bruiningsniveau in dat u wenst als resultaat voor uw gerecht.",
+    "CL_DV_OV_extra_cleaning": "Schoonmaak",
+    "CL_DV_OV_extra_cleaning_desc": "Stapsgewijze reinigingsprogramma's en instructies over hoe u uw oven in optimale conditie houdt.",
+    "CL_DV_OV_extra_stage_cooking": "Toneel koken",
+    "CL_DV_OV_extra_stage_cooking_desc": "Maak aangepaste kookprogramma's met maximaal 5 verschillende fasen.",
+    "CL_DV_OV_extra_defrost_desc": "Een reeks vooraf gedefinieerde programma's om voedsel op de juiste manier te ontdooien, zodat de kwaliteit ervan na het invriezen gewaarborgd blijft.",
+    "CL_DV_OV_extra_warming_desc": "Verwarm eerder gekookte gerechten opnieuw met behulp van de vooraf ingestelde ovenprogramma's. Behoudt maximale smaak en textuur.",
+    "CL_DV_OV_extra_non_food": "Niet-eetbaar",
+    "CL_DV_OV_extra_non_food_desc": "Verwarm uw borden, hete stenen of steriliseer flessen met speciale programma's.",
+    "CL_DV_OV_extra_preserving_desc": "Door voedsel te conserveren, blijft het langer houdbaar, terwijl de voedingswaarde, textuur en smaak behouden blijven.",
+    "CL_DV_OV_extra_fast_cool": "Snel afkoelen",
+    "CL_DV_OV_extra_fast_cool_desc": "Koelt de oven zo snel mogelijk af nadat het bakken is voltooid of kan worden gebruikt om snel door te gaan met de bereiding van ander voedsel.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Celsius Grillplaat",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Een set vooraf ingestelde ovenprogramma's speciaal voor het bakken met de Celsius Grillplaat.",
+    "CL_DV_OV_explore_all_extra": "ONTDEK ALLE EXTRA'S",
+    "CL_DV_OV_extras": "Extra's",
+    "CL_CF_CS_midi_hih_setup_1": "Zet het apparaat aan.",
+    "CL_CF_CS_midi_hih_setup_2": "Houd het Wi-Fi-pictogram ongeveer 5 seconden ingedrukt totdat 'CSt' verschijnt.",
+    "CL_CF_CS_midi_hih_setup_3": "Het apparaat is nu 5 minuten klaar voor verbinding.\n Klik op VOLGENDE om verder te gaan.",
+    "CL_CF_CS_midi_hih_pair_2": "Houd het Wi-Fi-pictogram ongeveer 8 seconden ingedrukt totdat 'PAr' verschijnt.",
+    "CL_CF_CS_midi_hih_pair_3": "Het apparaat is nu 3 minuten lang klaar om te koppelen.\n Klik op VOLGENDE om verder te gaan.",
+    "ac_dimmer_air_des": "Schakel de LED uit om te voorkomen dat het LED-licht uw nachtrust verstoort",
+    "e_verify_code": "Voer verificatiecode in",
+    "CL_CF_CS_td76_and_wm86_pair_4": "Het apparaatnetwerk is nu 3 minuten lang open voor verbinding.\n Klik op VOLGENDE om verder te gaan.",
+    "CL_DV_OV_24_set_language": "Taal instellen",
+    "CL_DV_OV_24_time_date": "Tijd - Datum",
+    "CL_CF_CS_dw005_cs_step1": "Zorg ervoor dat Bluetooth op uw telefoon is geactiveerd. Zet vervolgens uw apparaat aan en tik op de instellingenknop.",
+    "CL_CF_CS_dw005_cs_step2": "Navigeer naar \"Geavanceerde instellingen\" door op de pijltjestoetsen te drukken. Druk op de instellingenknop om binnen te gaan.",
+    "CL_CF_CS_dw005_cs_step3": "Voer de pincode in door op de volgende toetsenreeks te drukken: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "Ga in het menu “Geavanceerde instellingen” naar “WiFi” en druk op de instellingenknop om binnen te gaan. Zorg ervoor dat WiFi in het menu “Wifi” is ingeschakeld. Als dat niet zo is, druk dan op de instellingenknop om WiFi in te schakelen.",
+    "CL_CF_CS_dw005_cs_step5": "Ga in het menu “WiFi” naar “Verbindingsinstellingen” en druk op de instellingenknop om te activeren. ",
+    "CL_CF_CS_dw005_cs_step6": "Het apparaatnetwerk is nu 5 minuten lang open voor verbinding.\n Klik op VOLGENDE om verder te gaan.",
+    "CL_CF_CS_dw005_pair_step1": "Zorg ervoor dat Bluetooth op uw telefoon is geactiveerd. Zet vervolgens uw apparaat aan en tik op de instellingenknop.",
+    "CL_CF_CS_dw005_pair_step2": "Navigeer naar \"Geavanceerde instellingen\" door op de pijltjestoetsen te drukken. Druk op de instellingenknop om binnen te gaan.",
+    "CL_CF_CS_dw005_pair_step3": "Voer de pincode in door op de volgende toetsenreeks te drukken: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "Ga in het menu “Geavanceerde instellingen” naar het menu “WiFi” en druk op de instellingenknop om binnen te gaan. Ga vervolgens naar “Apparaat toevoegen” en druk op de instellingenknop om te activeren.",
+    "CL_CF_CS_dw005_pair_step5": "Het apparaatnetwerk is nu 3 minuten lang open voor het toevoegen van apparaten.\n Klik op VOLGENDE om verder te gaan.",
+    "CL_DV_DW_save_date_invalid": "De eindmaand kan niet kleiner zijn dan de beginmaand!",
+    "CL_DV_OV_send_to_devices": "VERZENDEN NAAR APPARATEN"
 }
