--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "Aby włączyć Wi-Fi w urządzeniu, wciśnij przycisk\nintensywnego chłodzenia lub zamrażania. Na wyświetlaczu pojawi się na chwilę \"01\" i automatycznie\nzmieni się na \"02\".\nWi-Fi jest gotowe do połączenia.",
     "cooling_config_wifi_step3": "Za pomocą klawiszy strzałek wybierz \"S\".\nPotwierdź \"S\", wciskając przycisk intensywnego\nchłodzenia lub zamrażania.\nPrzycisk intensywnego chłodzenia lub zamrażania zacznie\nmigać; sieć tego urządzenia jest\nteraz otwarta do połączenia przez 3 minut.\nKliknij przycisk NEXT, aby kontynuować.",
     "cooling_config_wifi_step1_pair": "Ustaw urządzenie na normalny tryb pracy.\nDotknij ikonę Wi-Fi przez około 3\nsekundy.\nSymbol Wi-Fi zacznie migać, a na wyświetlaczu\npojawi się \"0\". Wszedłeś do menu\npołączenia z siecią.",
-    "cooling_config_wifi_step2_pair": "Za pomocą klawiszy strzałek wybierz \"P\".\nPotwierdź \"P\", wciskając przycisk intensywnego\nchłodzenia lub zamrażania.\nPrzycisk intensywnego chłodzenia lub zamrażania zacznie\nmigać; sieć tego urządzenia jest\nteraz otwarta do połączenia przez 5 minut.\nKliknij przycisk DALEJ, aby kontynuować.",
+    "cooling_config_wifi_step2_pair": "Nawiguj za pomocą klawiszy strzałek i wybierz „P”. Potwierdź „P”, dotykając klawisza intensywnego chłodzenia/zamrażania. Klawisz intensywnego chłodzenia/zamrażania zacznie migać. Sieć urządzeń jest teraz otwarta do parowania przez 3 minuty. Kliknij DALEJ, aby kontynuować.",
     "dw_config_wifi_step1": "Włącz urządzenie. Przejdź za pomocą klawiszy\nstrzałek do ustawień. Naciśnij ikonę MENU, aby wejść\ndo ustawień.",
     "dw_config_wifi_step2": "W menu ustawień znajdź pozycję SIEĆ i potwierdź przyciskiem menu, aby wejść.",
     "dw_config_wifi_step3": "Przejdź do opcji \"Select SoftAP\" i potwierdź\nklawiszem menu. Sieć urządzenia jest\nteraz otwarta do połączenia przez 5\nminuty.\nKliknij przycisk DALEJ, aby kontynuować.",
@@ -800,7 +800,7 @@
     "device_status_drying": "Suszenie",
     "device_status_air": "Powietrze",
     "device_status_program_end": "Koniec programu",
-    "device_status_delay": "Opóźnianie",
+    "device_status_delay": "Opóźnienie",
     "wm_power_off_tips": "Proszę włączyć pralkę",
     "wm_finish_at": "Zakończ przy",
     "wm_detergent_empty": "Pojemnik na detergent jest pusty, kontynuować proces?",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "Dolny kosz",
     "STR_PROG_UPPER": "Górny kosz",
     "STR_PROG_ANTI_ODOUR": "Przeciwzapachowy",
-    "STR_PROG_SANI": "SANI",
-    "STR_PROG_SANI_QUICK": "SANI Quick",
+    "STR_PROG_SANI": "Sani",
+    "STR_PROG_SANI_QUICK": "Sani Szybko",
     "air_energy_hint": "Uwaga: Funkcja statystyki zużycia energii jest dostępna tylko dla klimatyzatora typu Mono, ale nie dla klimatyzatora typu Multi.",
     "now": "Teraz",
     "washer_atag_delay_start_in": "Pranie opóźnione. Zacząć w",
@@ -2518,7 +2518,7 @@
     "wcc_lock": "Zamek",
     "wcc_door_alarm": "Alarm drzwi",
     "confirm_access": "POTWIERDŹ DOSTĘP",
-    "delete_account_email_code_tips": "Wysłaliśmy wiadomość e-mail z kodem weryfikacyjnym do %s. \\Wprowadź kod weryfikacyjny z wiadomości e-mail, aby potwierdzić dostęp. \\Otrzymany kod jest ważny przez 10 minut.",
+    "delete_account_email_code_tips": "Wysłaliśmy wiadomość e-mail z kodem weryfikacyjnym do %s. Wprowadź kod weryfikacyjny z wiadomości e-mail, aby potwierdzić dostęp. Otrzymany kod jest ważny przez 10 minut.",
     "resend_code": "Wyślij ponownie kod",
     "manuals_oven_name": "Piekarnik i kuchenka",
     "manuals_rf_name": "Lodówka i zamrażarka",
@@ -3415,6 +3415,7 @@
     "use_humidity": "Użyj skrzynki nawilżającej, aby regulować wilgotność",
     "same_day": "Tego samego dnia",
     "w_temp_set": "Jaką temperaturę ustawić?",
+    "asko": "ZAPYTAJ",
     "eco_meter": "Licznik ekologiczny",
     "asko_eco_meter_desc": "## to pomocny, inteligentny wskaźnik umożliwiający określenie wpływu na środowisko w oparciu o wybrany program i dodatkowe opcje dotyczące zużycia energii, wody i detergentu.",
     "wm86_autodose_desc": "Zamiast walczyć, pozwól pralce dokładnie odmierzyć odpowiednią dawkę detergentu. Nasze pralki z systemem Auto Dose mierzą detergent w zależności od wsadu prania, poziomu zabrudzenia, twardości wody, rodzaju programu i temperatury. Zawsze idealne dozowanie i koniec z przedawkowaniem. Tutaj możesz dostosować domyślne ustawienia dla Auto Dose.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Bez podgrzewania",
     "CL_DV_OV_fast_preheat_desc": "Fast Preheat to najszybszy sposób na rozgrzanie piekarnika. Zajmuje to około 7 minut.",
     "CL_DV_OV_preheat_desc": "Rozgrzanie wstępne jest najlepszym sposobem na rozgrzanie piekarnika, biorąc pod uwagę potrawę. Zajmuje to około 10 minut.",
-    "CL_DV_OV_no_preheat_desc": "Nie zawsze trzeba podgrzewać piekarnik. Na przykład do podgrzewania niektórych potraw."
+    "CL_DV_OV_no_preheat_desc": "Nie zawsze trzeba podgrzewać piekarnik. Na przykład do podgrzewania niektórych potraw.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Włączenie nawigacji energetycznej AI może zmniejszyć zużycie energii, ale może też spowolnić szybkość chłodzenia.",
+    "CL_DV_RF_ice_maker_mode": "Tryb wytwarzania lodu",
+    "CL_CF_SD_smart_delay": "Inteligentne opóźnienie",
+    "CL_CF_SD_settings_subtitle": "W przypadku użycia trybu opóźnienia urządzenie będzie korzystać z godzin poza szczytem.",
+    "CL_CF_SD_add_zone": "Dodaj strefę",
+    "CL_CF_SD_new_tariff_zone": "Nowe strefy taryfowe ##",
+    "CL_CF_SD_add_tariff": "Dodaj taryfę",
+    "CL_CF_SD_duplicate": "Duplikat",
+    "CL_CF_SD_delete_zone": "Usuń strefę ",
+    "CL_CF_SD_tariff_zones_n": "Strefy taryfowe ##",
+    "CL_CF_SD_tariff_n": "Taryfa ##",
+    "CL_CF_SD_price": "Cena",
+    "CL_CF_SD_off_peak_delay": "Opóźnienie poza godzinami szczytu",
+    "CL_CF_SD_delay_subtitle": "W przypadku użycia trybu opóźnienia urządzenie będzie korzystać z godzin poza szczytem.\n W przypadku użycia kombinacji z End, stosowany jest warunek wstępny.",
+    "CL_CF_SD_off_peak_delay_not_set": "Opóźnienie poza szczytem nie zostało ustawione",
+    "CL_CF_SD_to_start_desc": "Aby rozpocząć korzystanie z tej funkcji należy ją skonfigurować w ustawieniach.",
+    "CL_CF_SD_best": "To, co najlepsze",
+    "CL_CF_SD_delete_title": "Czy na pewno chcesz usunąć ##?",
+    "CL_DV_OV_number_of_trays": "Liczba tacek",
+    "CL_DV_OV_baking_trays": "TACKI DO PIECZENIA",
+    "CL_DV_OV_1_tray": "1 tacka",
+    "CL_DV_OV_2_trays": "2 tace",
+    "CL_DV_OV_multi_tray": "Wielotacowy",
+    "CL_DV_OV_multi": "Wielo",
+    "CL_DV_RF_ice_off": "Lód WYŁĄCZONY",
+    "CL_DV_RF_ion_preservation": "HI-NANO",
+    "CL_DV_RF_ai_energy": "Oszczędność energii dzięki AI",
+    "CL_DV_RF_adaptive_temperature": "Samoadaptacja",
+    "CL_DV_RF_normal_ice_making": "Zwykła produkcja lodu",
+    "CL_DV_RF_quick_ice_making": "Szybkie wytwarzanie lodu",
+    "CL_DV_OV_extra_auto_programs": "Programy automatyczne",
+    "CL_DV_OV_extra_auto_programs_desc": "Zestaw predefiniowanych programów automatycznych. Programy automatyczne pomagają uzyskać najlepszy wynik dla wybranego rodzaju żywności lub dania.",
+    "CL_DV_OV_extra_browning_programs": "Programy Browninga",
+    "CL_DV_OV_extra_browning_programs_desc": "Użyj specjalnie opracowanych programów brązowienia. Ustaw pożądany poziom brązowienia, jaki chcesz uzyskać dla swojego dania.",
+    "CL_DV_OV_extra_cleaning": "Czyszczenie",
+    "CL_DV_OV_extra_cleaning_desc": "Programy czyszczenia krok po kroku i instrukcje, jak utrzymać piekarnik w optymalnym stanie.",
+    "CL_DV_OV_extra_stage_cooking": "Gotowanie na scenie",
+    "CL_DV_OV_extra_stage_cooking_desc": "Twórz spersonalizowane programy gotowania, wykorzystując do 5 różnych etapów.",
+    "CL_DV_OV_extra_defrost_desc": "Zestaw predefiniowanych programów umożliwiających prawidłowe rozmrażanie żywności, co pozwala zapewnić jej odpowiednią jakość po zamrożeniu.",
+    "CL_DV_OV_extra_warming_desc": "Podgrzewaj wcześniej ugotowane potrawy, korzystając z predefiniowanych programów piekarnika. Zachowuje maksymalny smak i konsystencję.",
+    "CL_DV_OV_extra_non_food": "Nieżywność",
+    "CL_DV_OV_extra_non_food_desc": "Podgrzewaj talerze, gorące kamienie lub sterylizuj butelki dzięki specjalnym programom.",
+    "CL_DV_OV_extra_preserving_desc": "Konserwowanie żywności sprawia, że nadaje się ona do spożycia na dłużej, zachowując jednocześnie wartość odżywczą, konsystencję i smak.",
+    "CL_DV_OV_extra_fast_cool": "Szybkie chłodzenie",
+    "CL_DV_OV_extra_fast_cool_desc": "Pozwala jak najszybciej schłodzić piekarnik po zakończeniu pieczenia lub wykorzystać go do szybkiego kontynuowania przygotowywania innej potrawy.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Płyta grillowa Celsius",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Zestaw predefiniowanych programów piekarnika przeznaczonych specjalnie do pieczenia na płycie grillowej Celsius.",
+    "CL_DV_OV_explore_all_extra": "ODKRYJ WSZYSTKIE DODATKOWE",
+    "CL_DV_OV_extras": "Dodatki",
+    "CL_CF_CS_midi_hih_setup_1": "Włącz urządzenie.",
+    "CL_CF_CS_midi_hih_setup_2": "Dotknij ikony Wi-Fi i przytrzymaj ją przez około 5 sekund, aż pojawi się komunikat „CSt”.",
+    "CL_CF_CS_midi_hih_setup_3": "Urządzenie będzie teraz gotowe do podłączenia. Trwa to 5 minut.\n Kliknij DALEJ, aby kontynuować.",
+    "CL_CF_CS_midi_hih_pair_2": "Dotknij ikony Wi-Fi i przytrzymaj ją przez około 8 sekund, aż pojawi się komunikat „PAr”.",
+    "CL_CF_CS_midi_hih_pair_3": "Urządzenie będzie teraz gotowe do sparowania. Trwa to 3 minuty.\n Kliknij DALEJ, aby kontynuować.",
+    "ac_dimmer_air_des": "Wyłącz diodę LED, aby światło nie zakłócało Twojego snu w nocy",
+    "e_verify_code": "Wprowadź kod weryfikacyjny",
+    "CL_CF_CS_td76_and_wm86_pair_4": "Sieć urządzeń będzie teraz otwarta i możliwa do nawiązania przez 3 minuty.\n Kliknij DALEJ, aby kontynuować.",
+    "CL_DV_OV_24_set_language": "Ustaw język",
+    "CL_DV_OV_24_time_date": "Czas - Data",
+    "CL_CF_CS_dw005_cs_step1": "Upewnij się, że Bluetooth jest włączony w Twoim telefonie. Następnie włącz urządzenie i dotknij przycisku ustawień.",
+    "CL_CF_CS_dw005_cs_step2": "Przejdź do „Ustawień zaawansowanych” naciskając przyciski strzałek. Naciśnij przycisk ustawień, aby wejść.",
+    "CL_CF_CS_dw005_cs_step3": "Wprowadź kod PIN naciskając następującą sekwencję przycisków: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "W menu „Advanced settings” przejdź do „WiFi” i naciśnij przycisk ustawień, aby wejść. W menu „Wifi” upewnij się, że WiFi jest włączone. Jeśli nie, naciśnij przycisk ustawień, aby je włączyć.",
+    "CL_CF_CS_dw005_cs_step5": "Będąc nadal w menu „WiFi” przejdź do „Ustawień połączenia” i naciśnij przycisk ustawień, aby aktywować. ",
+    "CL_CF_CS_dw005_cs_step6": "Sieć urządzeń będzie teraz otwarta i będzie można na nią nawiązać połączenie przez 5 minut.\n Kliknij DALEJ, aby kontynuować.",
+    "CL_CF_CS_dw005_pair_step1": "Upewnij się, że Bluetooth jest włączony w Twoim telefonie. Następnie włącz urządzenie i dotknij przycisku ustawień.",
+    "CL_CF_CS_dw005_pair_step2": "Przejdź do „Ustawień zaawansowanych” naciskając przyciski strzałek. Naciśnij przycisk ustawień, aby wejść.",
+    "CL_CF_CS_dw005_pair_step3": "Wprowadź kod PIN naciskając następującą sekwencję przycisków: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "W menu „Ustawienia zaawansowane” przejdź do menu „WiFi” i naciśnij przycisk ustawień, aby wejść. Następnie przejdź do „Dodaj urządzenie” i naciśnij przycisk ustawień, aby aktywować.",
+    "CL_CF_CS_dw005_pair_step5": "Sieć urządzeń będzie teraz otwarta i będzie można dodawać urządzenia. Będzie to trwało 3 minuty.\n Kliknij DALEJ, aby kontynuować.",
+    "CL_DV_DW_save_date_invalid": "Miesiąc końcowy nie może być krótszy niż miesiąc początkowy!",
+    "CL_DV_OV_send_to_devices": "WYŚLIJ DO URZĄDZEŃ"
 }
