--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "Para ativar o Wi-Fi no aparelho, toque na tecla\nde arrefecimento ou congelamento intensivo. O visor\napresentará brevemente'01'e mudará para\n'02'automaticamente.\nO Wi-Fi está pronto para ligação.",
     "cooling_config_wifi_step3": "Navegue com as teclas de seta para escolher'S'.\nConfirme'S'tocando na tecla de arrefecimento ou congelamento\nintensivo.\nA tecla de arrefecimento ou congelamento intensivo começa\na piscar; a rede deste aparelho está\nagora aberta para ligação durante 3 minutos.\nClique em SEGUINTE para continuar.",
     "cooling_config_wifi_step1_pair": "Coloque o aparelho no funcionamento normal.\nToque no ícone Wi-Fi durante aproximadamente 3\nsegundos.\nO símbolo Wi-Fi começa a piscar e'0'\né apresentado no visor. Entrou no menu de ligação\nà rede.",
-    "cooling_config_wifi_step2_pair": "Navegue com as teclas de seta para escolher'P'.\nConfirme'P'tocando na tecla de arrefecimento ou congelamento\nintensivo.\nA tecla de arrefecimento ou congelamento intensivo começa\na piscar; a rede deste aparelho está\nagora aberta para ligação durante 5 minutos.\nClique em SEGUINTE para continuar.",
+    "cooling_config_wifi_step2_pair": "Navegue com as teclas de seta e selecione \"P\". Confirme \"P\" tocando na tecla de resfriamento/congelamento intensivo. A tecla de resfriamento/congelamento intensivo começará a piscar. A rede do dispositivo agora está aberta para pareamento por 3 minutos. Clique em PRÓXIMO para continuar.",
     "dw_config_wifi_step1": "Ligue o aparelho. Navegue com as teclas\nde seta para as configurações. Prima o ícone MENU para aceder\nàs configurações.",
     "dw_config_wifi_step2": "No menu de configurações, localize REDE e\nconfirme com a tecla de menu para aceder.",
     "dw_config_wifi_step3": "Navegue para\"Select SoftAP\"e confirme\ncom a tecla de menu. A rede deste\naparelho está agora aberta para ligação durante 5\nminutos.\nClique em SEGUINTE para continuar.",
@@ -796,11 +796,11 @@
     "device_status_washing": "Lavando",
     "device_status_rinsing": "Exaguando",
     "device_status_soften": "Amolecimento",
-    "device_status_spin": "Centrifugação",
+    "device_status_spin": "A centrifugar",
     "device_status_drying": "Secando",
     "device_status_air": "Ar",
     "device_status_program_end": "Terminado",
-    "device_status_delay": "Em progresso",
+    "device_status_delay": "Em diferido",
     "wm_power_off_tips": "Ligue a máquina de lavar",
     "wm_finish_at": "Terminar às",
     "wm_detergent_empty": "O compartimento do detergente está vazio. Quer continuar?",
@@ -1042,7 +1042,7 @@
     "dry": "Secagem",
     "level": "Nível",
     "detergent": "Detergente",
-    "softener": "Amaciante",
+    "softener": "Amaciador",
     "pause": "PAUSA",
     "shut_down": "DESLIGAR",
     "wash_machine_will_be_shut_down": "O aparelho será desligado.",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "Meia carga inf",
     "STR_PROG_UPPER": "Meia carga sup",
     "STR_PROG_ANTI_ODOUR": "Anti-odor",
-    "STR_PROG_SANI": "SANI",
-    "STR_PROG_SANI_QUICK": "SANI Rápido",
+    "STR_PROG_SANI": "Sani",
+    "STR_PROG_SANI_QUICK": "Sani Rápido",
     "air_energy_hint": "Nota: A função de estatísticas de consumo de energia só é válida para ar condicionado Mono-tipo, mas não para ar condicionado Multi-tipo.",
     "now": "Agora",
     "washer_atag_delay_start_in": "Lavagem atrasada. Começar",
@@ -3415,6 +3415,7 @@
     "use_humidity": "Use caixa de umidade para regular a umidade",
     "same_day": "No mesmo dia",
     "w_temp_set": "Qual temperatura definir?",
+    "asko": "ASKO",
     "eco_meter": "Medidor ecológico",
     "asko_eco_meter_desc": "## é um indicador inteligente útil para determinar o seu impacto ambiental com base no programa escolhido e em opções extra quando se trata de consumo de energia, água e detergente.",
     "wm86_autodose_desc": "Em vez de fazer isso com dificuldade, deixe a máquina de lavar medir exatamente a dosagem correta de detergente. Nossas máquinas de lavar com sistema Auto Dose medem o detergente em relação à carga de lavagem, nível de sujeira, dureza da água, tipo de programa e temperatura. Dosagem sempre perfeita e sem mais overdose. Aqui você pode ajustar suas configurações padrão para Auto Dose.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Sem pré-aquecimento",
     "CL_DV_OV_fast_preheat_desc": "O Fast Preheat é a maneira mais rápida de pré-aquecer seu forno. Leva aproximadamente 7 minutos.",
     "CL_DV_OV_preheat_desc": "Preheat é a melhor maneira de pré-aquecer seu forno considerando o prato. Leva aproximadamente 10 minutos.",
-    "CL_DV_OV_no_preheat_desc": "Nem sempre é necessário pré-aquecer seu forno. Por exemplo, para reaquecer certos alimentos."
+    "CL_DV_OV_no_preheat_desc": "Nem sempre é necessário pré-aquecer seu forno. Por exemplo, para reaquecer certos alimentos.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Habilitar a Navegação de Energia por IA pode reduzir o consumo de energia, mas também pode diminuir a velocidade de resfriamento.",
+    "CL_DV_RF_ice_maker_mode": "Modo de máquina de gelo",
+    "CL_CF_SD_smart_delay": "Atraso Inteligente",
+    "CL_CF_SD_settings_subtitle": "O aparelho utilizará horários de menor demanda ao utilizar o modo de atraso.",
+    "CL_CF_SD_add_zone": "Adicionar Zona",
+    "CL_CF_SD_new_tariff_zone": "Novas zonas tarifárias ##",
+    "CL_CF_SD_add_tariff": "Adicionar Tarifa",
+    "CL_CF_SD_duplicate": "Duplicado",
+    "CL_CF_SD_delete_zone": "Excluir zona ",
+    "CL_CF_SD_tariff_zones_n": "Zonas tarifárias ##",
+    "CL_CF_SD_tariff_n": "Tarifa ##",
+    "CL_CF_SD_price": "Preço",
+    "CL_CF_SD_off_peak_delay": "Atraso fora de pico",
+    "CL_CF_SD_delay_subtitle": "O aparelho utilizará horários de menor demanda ao utilizar o modo de atraso.\n Se usar uma combinação com End, uma pré-condição será aplicada.",
+    "CL_CF_SD_off_peak_delay_not_set": "Atraso fora de pico não definido",
+    "CL_CF_SD_to_start_desc": "Para começar a usar a função, você precisa configurá-la nas configurações.",
+    "CL_CF_SD_best": "Melhor",
+    "CL_CF_SD_delete_title": "Tem certeza de que deseja excluir ##?",
+    "CL_DV_OV_number_of_trays": "Número de bandejas",
+    "CL_DV_OV_baking_trays": "BANDEJAS DE ASSAR",
+    "CL_DV_OV_1_tray": "1 bandeja",
+    "CL_DV_OV_2_trays": "2 bandejas",
+    "CL_DV_OV_multi_tray": "Bandeja múltipla",
+    "CL_DV_OV_multi": "Múltiplo",
+    "CL_DV_RF_ice_off": "Gelo desligado",
+    "CL_DV_RF_ion_preservation": "HI-NANO",
+    "CL_DV_RF_ai_energy": "Economia de energia com IA",
+    "CL_DV_RF_adaptive_temperature": "Autoadaptação",
+    "CL_DV_RF_normal_ice_making": "Fabricação de gelo comum",
+    "CL_DV_RF_quick_ice_making": "Fabricação rápida de gelo",
+    "CL_DV_OV_extra_auto_programs": "Programas automáticos",
+    "CL_DV_OV_extra_auto_programs_desc": "Um conjunto de programas automáticos predefinidos. Programas automáticos ajudam você a ter o melhor resultado para o tipo de comida ou prato selecionado.",
+    "CL_DV_OV_extra_browning_programs": "Programas de Browning",
+    "CL_DV_OV_extra_browning_programs_desc": "Use programas de escurecimento especialmente desenvolvidos. Defina o nível de escurecimento desejado como resultado para seu prato.",
+    "CL_DV_OV_extra_cleaning": "Limpeza",
+    "CL_DV_OV_extra_cleaning_desc": "Programas de limpeza passo a passo e instruções sobre como manter seu forno em condições ideais.",
+    "CL_DV_OV_extra_stage_cooking": "Cozinha de palco",
+    "CL_DV_OV_extra_stage_cooking_desc": "Crie programas de cozimento personalizados, usando até 5 etapas diferentes.",
+    "CL_DV_OV_extra_defrost_desc": "Um conjunto de programas predefinidos para descongelar corretamente os alimentos e garantir a qualidade após o congelamento.",
+    "CL_DV_OV_extra_warming_desc": "Reaqueça alimentos previamente cozidos usando os programas de forno predefinidos. Mantém o máximo de sabor e textura.",
+    "CL_DV_OV_extra_non_food": "Não alimentar",
+    "CL_DV_OV_extra_non_food_desc": "Aqueça seus pratos, use pedras quentes ou esterilize mamadeiras com programas especiais.",
+    "CL_DV_OV_extra_preserving_desc": "Conservar alimentos ajuda a fazer com que eles durem mais, mantendo o valor nutricional, a textura e o sabor.",
+    "CL_DV_OV_extra_fast_cool": "Rápido e frio",
+    "CL_DV_OV_extra_fast_cool_desc": "Resfria o forno o mais rápido possível após o término do cozimento ou pode ser usado para continuar rapidamente o preparo de outros alimentos.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Placa de grelha Celsius",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Um conjunto de programas de forno predefinidos especificamente para assar com a Celsius Grill Plate.",
+    "CL_DV_OV_explore_all_extra": "EXPLORE TODOS OS EXTRAS",
+    "CL_DV_OV_extras": "Extras",
+    "CL_CF_CS_midi_hih_setup_1": "Ligue o dispositivo.",
+    "CL_CF_CS_midi_hih_setup_2": "Toque e segure o ícone Wi-Fi por aproximadamente 5 segundos até que \"CSt\" apareça.",
+    "CL_CF_CS_midi_hih_setup_3": "O dispositivo agora está pronto para conexão por 5 minutos.\n Clique em PRÓXIMO para continuar.",
+    "CL_CF_CS_midi_hih_pair_2": "Toque e segure o ícone Wi-Fi por aproximadamente 8 segundos até que \"PAr\" apareça.",
+    "CL_CF_CS_midi_hih_pair_3": "O dispositivo agora está pronto para pareamento por 3 minutos.\n Clique em PRÓXIMO para continuar.",
+    "ac_dimmer_air_des": "Desligue o LED para evitar que a luz do LED atrapalhe seu descanso à noite",
+    "e_verify_code": "Insira o código de verificação",
+    "CL_CF_CS_td76_and_wm86_pair_4": "A rede do dispositivo agora está aberta para conexão por 3 minutos.\n Clique em PRÓXIMO para continuar.",
+    "CL_DV_OV_24_set_language": "Definir idioma",
+    "CL_DV_OV_24_time_date": "Hora - Data",
+    "CL_CF_CS_dw005_cs_step1": "Certifique-se de que seu Bluetooth esteja ativado em seu telefone. Em seguida, ligue seu aparelho e toque no botão de configurações.",
+    "CL_CF_CS_dw005_cs_step2": "Navegue até “Configurações avançadas” pressionando os botões de seta. Pressione o botão de configurações para entrar.",
+    "CL_CF_CS_dw005_cs_step3": "Digite o código PIN pressionando a seguinte sequência de botões: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "No menu “Configurações avançadas”, vá em “WiFi” e pressione o botão de configurações para entrar. Dentro do menu “Wifi”, certifique-se de que o WiFi esteja habilitado. Caso contrário, pressione o botão de configurações para habilitar.",
+    "CL_CF_CS_dw005_cs_step5": "Ainda no menu “WiFi” vá em “Configuração de conexão” e pressione o botão de configurações para ativar. ",
+    "CL_CF_CS_dw005_cs_step6": "A rede do dispositivo agora está aberta para conexão por 5 minutos.\n Clique em PRÓXIMO para continuar.",
+    "CL_CF_CS_dw005_pair_step1": "Certifique-se de que seu Bluetooth esteja ativado em seu telefone. Em seguida, ligue seu aparelho e toque no botão de configurações.",
+    "CL_CF_CS_dw005_pair_step2": "Navegue até “Configurações avançadas” pressionando os botões de seta. Pressione o botão de configurações para entrar.",
+    "CL_CF_CS_dw005_pair_step3": "Digite o código PIN pressionando a seguinte sequência de botões: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "No menu “Configurações avançadas” vá até o menu “WiFi” e pressione o botão de configurações para entrar. Depois vá até “Adicionar dispositivo” e pressione o botão de configurações para ativar.",
+    "CL_CF_CS_dw005_pair_step5": "A rede do dispositivo agora está aberta para adicionar dispositivos por 3 minutos.\n Clique em PRÓXIMO para continuar.",
+    "CL_DV_DW_save_date_invalid": "O mês final não pode ser menor que o mês inicial!",
+    "CL_DV_OV_send_to_devices": "ENVIAR PARA DISPOSITIVOS"
 }
