--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -579,7 +579,7 @@
     "Service": "Обслуживание",
     "Production": "Выполнение",
     "Running": "Работает",
-    "Paused": "Пауза",
+    "Paused": "Приостановлено",
     "water_hardness": "Жёсткость воды",
     "sound_level": "ГРОМКОСТЬ ЗВУКА",
     "auto_door_opening": "Автоматическое открывание двери",
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "Если на дисплее отображается «02», пропустите этот шаг. Если отображается «0», нажмите клавишу интенсивного охлаждения или быстрого замораживания, чтобы включить Wi-Fi на приборе. На дисплее на короткое время отобразится «01» и автоматически изменится на «02». Wi-Fi готов к подключению.",
     "cooling_config_wifi_step3": "Перемещайтесь с помощью клавиш со стрелками и выберите «S».\nПодтвердите «S», нажав кнопку интенсивного охлаждения/заморозки.\nКлавиша интенсивного охлаждения/заморозки начнет мигать. Сеть устройства теперь открыта для подключения в течение 3 минут.",
     "cooling_config_wifi_step1_pair": "Переведите прибор в нормальный режим работы. Нажмите и удерживайте 3 секунды значок Wi-Fi. Начнет мигать индикатор Wi-Fi, и на дисплее появится символ «0». Вы вошли в меню подключения к сети.",
-    "cooling_config_wifi_step2_pair": "С помощью клавиш со стрелками выберите «P». Подтвердите «P», нажав клавишу интенсивного охлаждения или быстрого замораживания. Клавиша интенсивного охлаждения или замораживания начинает мигать. Сеть этого прибора открыта для подключения в течение 5 минут. Нажмите «ДАЛЕЕ», чтобы продолжить.",
+    "cooling_config_wifi_step2_pair": "Перемещайтесь с помощью клавиш со стрелками и выберите «P». Подтвердите «P», нажав клавишу интенсивного охлаждения/заморозки. Клавиша интенсивного охлаждения/заморозки начнет мигать. Теперь сеть устройства открыта для сопряжения в течение 3 минут. Нажмите «ДАЛЕЕ», чтобы продолжить.",
     "dw_config_wifi_step1": "Включите прибор. Перейдите к настройкам с помощью клавиш со стрелками. Нажмите значок МЕНЮ, чтобы войти в настройки.",
     "dw_config_wifi_step2": "В меню настроек найдите СЕТЬ и нажмите клавишу меню, чтобы войти.",
     "dw_config_wifi_step3": "Перейдите к «Select SoftAP» и подтвердите клавишей меню. Сеть этого прибора открыта для подключения в течение 2 минут. Нажмите «ДАЛЕЕ», чтобы продолжить.",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "Нижняя корзина",
     "STR_PROG_UPPER": "Верхняя корзина",
     "STR_PROG_ANTI_ODOUR": "Проветривание",
-    "STR_PROG_SANI": "Sani",
-    "STR_PROG_SANI_QUICK": "Sani Быстрая",
+    "STR_PROG_SANI": "Сани",
+    "STR_PROG_SANI_QUICK": "Сани Квик",
     "air_energy_hint": "Примечание. Функция статистики энергопотребления доступна только для моносплитных кондиционеров, для мультисплитных недоступна.",
     "now": "Сейчас",
     "washer_atag_delay_start_in": "Мытье отложено. Начало в",
@@ -3415,6 +3415,7 @@
     "use_humidity": "Используйте коробку влажности для регулирования влажности.",
     "same_day": "В тот же день",
     "w_temp_set": "Какую температуру установить?",
+    "asko": "АСКО",
     "eco_meter": "Эко метр",
     "asko_eco_meter_desc": "## — это полезный интеллектуальный индикатор, позволяющий определить ваше воздействие на окружающую среду на основе выбранной программы и дополнительных опций, когда речь идет о потреблении энергии, воды и моющих средств.",
     "wm86_autodose_desc": "Вместо того, чтобы доводить дело до борьбы, позвольте стиральной машине точно измерить правильную дозировку моющего средства. Наши стиральные машины с системой Auto Dose измеряют моющее средство в зависимости от загрузки белья, уровня загрязнения, жесткости воды, типа программы и температуры. Всегда идеальная дозировка и больше никаких передозировок. Здесь вы можете настроить параметры по умолчанию для Auto Dose.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Без предварительного нагрева",
     "CL_DV_OV_fast_preheat_desc": "Fast Preheat — самый быстрый способ разогреть духовку. Это займет около 7 минут.",
     "CL_DV_OV_preheat_desc": "Предварительный нагрев — лучший способ разогреть духовку, учитывая блюдо. Это займет около 10 минут.",
-    "CL_DV_OV_no_preheat_desc": "Не всегда нужно предварительно разогревать духовку. Например, для разогрева определенных блюд."
+    "CL_DV_OV_no_preheat_desc": "Не всегда нужно предварительно разогревать духовку. Например, для разогрева определенных блюд.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Включение функции AI Energy Navigation может снизить потребление энергии, но также может замедлить скорость охлаждения.",
+    "CL_DV_RF_ice_maker_mode": "Режим льдогенератора",
+    "CL_CF_SD_smart_delay": "Умная задержка",
+    "CL_CF_SD_settings_subtitle": "При использовании режима задержки устройство будет использовать часы пониженной нагрузки.",
+    "CL_CF_SD_add_zone": "Добавить зону",
+    "CL_CF_SD_new_tariff_zone": "Новые тарифные зоны ##",
+    "CL_CF_SD_add_tariff": "Добавить тариф",
+    "CL_CF_SD_duplicate": "Дубликат",
+    "CL_CF_SD_delete_zone": "Удалить зону ",
+    "CL_CF_SD_tariff_zones_n": "Тарифные зоны ##",
+    "CL_CF_SD_tariff_n": "Тариф ##",
+    "CL_CF_SD_price": "Цена",
+    "CL_CF_SD_off_peak_delay": "Задержка в непиковый период",
+    "CL_CF_SD_delay_subtitle": "При использовании режима задержки устройство будет использовать часы пониженной нагрузки.\n При использовании комбинации с End в применяется предварительное условие.",
+    "CL_CF_SD_off_peak_delay_not_set": "Задержка в непиковый период не установлена",
+    "CL_CF_SD_to_start_desc": "Чтобы начать использовать функцию, ее необходимо настроить в настройках.",
+    "CL_CF_SD_best": "Лучший",
+    "CL_CF_SD_delete_title": "Вы уверены, что хотите удалить ##?",
+    "CL_DV_OV_number_of_trays": "Количество лотков",
+    "CL_DV_OV_baking_trays": "ПРОТИВНИ ДЛЯ ВЫПЕЧКИ",
+    "CL_DV_OV_1_tray": "1 поднос",
+    "CL_DV_OV_2_trays": "2 подноса",
+    "CL_DV_OV_multi_tray": "Много лотков",
+    "CL_DV_OV_multi": "Мульти",
+    "CL_DV_RF_ice_off": "Лед ВЫКЛ",
+    "CL_DV_RF_ion_preservation": "HI-НАНО",
+    "CL_DV_RF_ai_energy": "Энергосбережение с помощью искусственного интеллекта",
+    "CL_DV_RF_adaptive_temperature": "Самоадаптация",
+    "CL_DV_RF_normal_ice_making": "Обычное приготовление льда",
+    "CL_DV_RF_quick_ice_making": "Быстрое приготовление льда",
+    "CL_DV_OV_extra_auto_programs": "Авто программы",
+    "CL_DV_OV_extra_auto_programs_desc": "Набор предустановленных автоматических программ. Автоматические программы помогают получить наилучший результат для выбранного типа пищи или блюда.",
+    "CL_DV_OV_extra_browning_programs": "программы Браунинга",
+    "CL_DV_OV_extra_browning_programs_desc": "Используйте специально разработанные программы поджаривания. Установите желаемую степень поджаривания, которую вы хотите получить в результате для вашего блюда.",
+    "CL_DV_OV_extra_cleaning": "Уборка",
+    "CL_DV_OV_extra_cleaning_desc": "Пошаговые программы очистки и инструкции по поддержанию духовки в оптимальном состоянии.",
+    "CL_DV_OV_extra_stage_cooking": "Поэтапная готовка",
+    "CL_DV_OV_extra_stage_cooking_desc": "Создавайте индивидуальные программы приготовления, используя до 5 различных этапов.",
+    "CL_DV_OV_extra_defrost_desc": "Набор предустановленных программ для правильной разморозки продуктов, гарантирующих их качество после заморозки.",
+    "CL_DV_OV_extra_warming_desc": "Разогревает ранее приготовленные блюда с помощью предустановленных программ духовки. Сохраняет максимальный вкус и текстуру.",
+    "CL_DV_OV_extra_non_food": "Непродовольственные товары",
+    "CL_DV_OV_extra_non_food_desc": "Подогревайте тарелки, горячие камни или стерилизуйте бутылочки с помощью специальных программ.",
+    "CL_DV_OV_extra_preserving_desc": "Консервирование продуктов питания помогает продлить срок их хранения, сохраняя при этом их пищевую ценность, текстуру и вкус.",
+    "CL_DV_OV_extra_fast_cool": "Быстрое охлаждение",
+    "CL_DV_OV_extra_fast_cool_desc": "Позволяет максимально быстро остудить духовку после завершения выпечки или может использоваться для быстрого продолжения приготовления других блюд.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Жарочная пластина по Цельсию",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Набор предустановленных программ для духового шкафа, специально предназначенных для выпечки на гриле Celsius Grill Plate.",
+    "CL_DV_OV_explore_all_extra": "УЗНАЙТЕ ВСЕ ДОПОЛНИТЕЛЬНЫЕ СВЕДЕНИЯ",
+    "CL_DV_OV_extras": "Дополнительные материалы",
+    "CL_CF_CS_midi_hih_setup_1": "Включите устройство.",
+    "CL_CF_CS_midi_hih_setup_2": "Нажмите и удерживайте значок Wi-Fi примерно 5 секунд, пока не появится «CSt».",
+    "CL_CF_CS_midi_hih_setup_3": "Теперь устройство готово к подключению в течение 5 минут.\n Нажмите ДАЛЕЕ, чтобы продолжить.",
+    "CL_CF_CS_midi_hih_pair_2": "Нажмите и удерживайте значок Wi-Fi примерно 8 секунд, пока не появится «PAr».",
+    "CL_CF_CS_midi_hih_pair_3": "Теперь устройство готово к сопряжению в течение 3 минут.\n Нажмите ДАЛЕЕ, чтобы продолжить.",
+    "ac_dimmer_air_des": "Выключите светодиод, чтобы он не мешал вашему сну ночью.",
+    "e_verify_code": "Введите проверочный код",
+    "CL_CF_CS_td76_and_wm86_pair_4": "Теперь сеть устройства открыта для подключения в течение 3 минут.\n Нажмите ДАЛЕЕ, чтобы продолжить.",
+    "CL_DV_OV_24_set_language": "Установить язык",
+    "CL_DV_OV_24_time_date": "Время - Дата",
+    "CL_CF_CS_dw005_cs_step1": "Убедитесь, что Bluetooth активирован на вашем телефоне. Затем включите устройство и нажмите кнопку настроек.",
+    "CL_CF_CS_dw005_cs_step2": "Перейдите к «Расширенным настройкам», нажимая кнопки со стрелками. Нажмите кнопку настроек, чтобы войти.",
+    "CL_CF_CS_dw005_cs_step3": "Введите ПИН-код, нажав следующую последовательность кнопок: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "В меню «Дополнительные настройки» перейдите в «WiFi» и нажмите кнопку настроек, чтобы войти. Внутри меню «WiFi» убедитесь, что WiFi включен. Если нет, нажмите кнопку настроек, чтобы включить.",
+    "CL_CF_CS_dw005_cs_step5": "Находясь в меню «WiFi», перейдите в раздел «Настройка подключения» и нажмите кнопку настроек для активации. ",
+    "CL_CF_CS_dw005_cs_step6": "Теперь сеть устройства открыта для подключения в течение 5 минут.\n Нажмите ДАЛЕЕ, чтобы продолжить.",
+    "CL_CF_CS_dw005_pair_step1": "Убедитесь, что Bluetooth активирован на вашем телефоне. Затем включите устройство и нажмите кнопку настроек.",
+    "CL_CF_CS_dw005_pair_step2": "Перейдите к «Расширенным настройкам», нажимая кнопки со стрелками. Нажмите кнопку настроек, чтобы войти.",
+    "CL_CF_CS_dw005_pair_step3": "Введите ПИН-код, нажав следующую последовательность кнопок: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "В меню «Расширенные настройки» перейдите в меню «WiFi» и нажмите кнопку настроек для входа. Затем перейдите в «Добавить устройство» и нажмите кнопку настроек для активации.",
+    "CL_CF_CS_dw005_pair_step5": "Сеть устройств теперь открыта для добавления устройств в течение 3 минут.\n Нажмите ДАЛЕЕ, чтобы продолжить.",
+    "CL_DV_DW_save_date_invalid": "Конечный месяц не может быть меньше начального месяца!",
+    "CL_DV_OV_send_to_devices": "ОТПРАВИТЬ НА УСТРОЙСТВА"
 }
