--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "Ak chcete povoliť Wi-Fi na zariadení, dotknite sa\ntlačidla intenzívneho chladenia alebo tlačidla mrazenia. Na \ndispleji sa nakrátko zobrazí '01' a automaticky sa zmení na \n'02' .\nWi-Fi je pripravená na pripojenie.",
     "cooling_config_wifi_step3": "Pomocou tlačidiel so šípkami vyberte 'S'.\nPotvrďte 'S' dotknutím sa tlačidla intenzívneho\nchladenia alebo tlačidla mrazenia.\nTlačidlo intenzívneho chladenia alebo tlačidlo mrazenia začne\nblikať; sieť tohto zariadenia je\nteraz na 3 minút otvorená na pripojenie.\nPre pokračovanie kliknite na NEXT.",
     "cooling_config_wifi_step1_pair": "Nastavte spotrebič na normálnu prevádzku.\nDotknite sa ikony Wi-Fi asi na 3\nsekundy.\nSymbol Wi-Fi začne blikať a na displeji sa zobrazí '0'\n. Otvorili ste ponuku sieťového\npripojenia.",
-    "cooling_config_wifi_step2_pair": "Pomocou tlačidiel so šípkami vyberte 'P'.\nPotvrďte 'P' dotknutím sa tlačidla intenzívneho\nchladenia alebo tlačidla mrazenia.\nTlačidlo intenzívneho chladenia alebo tlačidlo mrazenia začne\nblikať; sieť tohto zariadenia je\nteraz na 5 minút otvorená na pripojenie.\nPre pokračovanie kliknite na NEXT.",
+    "cooling_config_wifi_step2_pair": "Navigujte pomocou šípok a vyberte \"P\". Potvrďte „P“ klepnutím na tlačidlo intenzívneho chladenia/mrazenia. Tlačidlo intenzívneho chladenia/mrazenia začne blikať. Sieť zariadenia je teraz otvorená na párovanie na 3 minúty. Pokračujte kliknutím na NEXT.",
     "dw_config_wifi_step1": "Zapnite (ON) spotrebič. Navigujte pomocou tlačidiel so šípkami\nna nastavenia. Stlačením ikony MENU prejdete\ndo nastavení.",
     "dw_config_wifi_step2": "V ponuke nastavenia nájdite NETWORK a\npotvrďte ho tlačidlom menu pre vstup.",
     "dw_config_wifi_step3": "Prejdite na \"Select SoftAP\" a potvrďte\ntlačidlom menu. Sieť tohto\nzariadenia je teraz otvorená 5\nminúty na pripojenie .\nPre pokračovanie kliknite na NEXT.",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "Dolná polovica",
     "STR_PROG_UPPER": "Horná polovica",
     "STR_PROG_ANTI_ODOUR": "Proti zápachu",
-    "STR_PROG_SANI": "SANI",
-    "STR_PROG_SANI_QUICK": "SANI Rýchly",
+    "STR_PROG_SANI": "Sani",
+    "STR_PROG_SANI_QUICK": "Sani Quick",
     "air_energy_hint": "Poznámka: Funkcia štatistiky spotreby energie je platná len pre klimatizáciu typu Mono, nie však pre klimatizáciu typu Multi.",
     "now": "Teraz",
     "washer_atag_delay_start_in": "Umývanie odložené. Začínať o",
@@ -3415,6 +3415,7 @@
     "use_humidity": "Na reguláciu vlhkosti použite vlhkostný box",
     "same_day": "V ten istý deň",
     "w_temp_set": "Akú teplotu nastaviť?",
+    "asko": "ASKO",
     "eco_meter": "Eco meter",
     "asko_eco_meter_desc": "## je užitočný inteligentný indikátor na určenie vášho vplyvu na životné prostredie na základe zvoleného programu a doplnkových možností, pokiaľ ide o spotrebu energie, vody a pracieho prostriedku.",
     "wm86_autodose_desc": "Namiesto toho, aby ste museli bojovať, nechajte práčku odmerať presne tú správnu dávku pracieho prostriedku. Naše práčky so systémom Auto Dose merajú prací prostriedok podľa náplne prania, stupňa znečistenia, tvrdosti vody, typu programu a teploty. Vždy dokonalé dávkovanie a už žiadne predávkovanie. Tu môžete upraviť predvolené nastavenia pre automatickú dávku.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Bez predhrievania",
     "CL_DV_OV_fast_preheat_desc": "Rýchle predhriatie je najrýchlejší spôsob predhriatia vašej rúry. Trvá to približne 7 minút.",
     "CL_DV_OV_preheat_desc": "Predhrievanie je najlepší spôsob, ako predhriať rúru vzhľadom na pokrm. Trvá to približne 10 minút.",
-    "CL_DV_OV_no_preheat_desc": "Nie vždy je potrebné predhrievať rúru. Napríklad na ohrievanie určitých potravín."
+    "CL_DV_OV_no_preheat_desc": "Nie vždy je potrebné predhrievať rúru. Napríklad na ohrievanie určitých potravín.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Povolenie AI Energy Navigation môže znížiť spotrebu energie, ale môže tiež spomaliť rýchlosť chladenia.",
+    "CL_DV_RF_ice_maker_mode": "Režim výrobníka ľadu",
+    "CL_CF_SD_smart_delay": "Inteligentné oneskorenie",
+    "CL_CF_SD_settings_subtitle": "Pri použití režimu oneskorenia bude spotrebič používať hodiny mimo špičky.",
+    "CL_CF_SD_add_zone": "Pridať zónu",
+    "CL_CF_SD_new_tariff_zone": "Nové tarifné zóny ##",
+    "CL_CF_SD_add_tariff": "Pridať tarifu",
+    "CL_CF_SD_duplicate": "Duplicitné",
+    "CL_CF_SD_delete_zone": "Vymazať zónu ",
+    "CL_CF_SD_tariff_zones_n": "tarifné zóny ##",
+    "CL_CF_SD_tariff_n": "tarifa ##",
+    "CL_CF_SD_price": "Cena",
+    "CL_CF_SD_off_peak_delay": "Oneskorenie mimo špičky",
+    "CL_CF_SD_delay_subtitle": "Pri použití režimu oneskorenia bude spotrebič používať hodiny mimo špičky.\n Ak sa použije kombinácia s End at, použije sa predbežná podmienka.",
+    "CL_CF_SD_off_peak_delay_not_set": "Oneskorenie mimo špičky nie je nastavené",
+    "CL_CF_SD_to_start_desc": "Ak chcete začať používať funkciu, musíte ju nastaviť v nastaveniach.",
+    "CL_CF_SD_best": "Najlepšie",
+    "CL_CF_SD_delete_title": "Naozaj chcete odstrániť ##?",
+    "CL_DV_OV_number_of_trays": "Počet zásobníkov",
+    "CL_DV_OV_baking_trays": "Plechy na pečenie",
+    "CL_DV_OV_1_tray": "1 zásobník",
+    "CL_DV_OV_2_trays": "2 podnosy",
+    "CL_DV_OV_multi_tray": "Viacnásobný zásobník",
+    "CL_DV_OV_multi": "Viacnásobné",
+    "CL_DV_RF_ice_off": "Ľad vypnutý",
+    "CL_DV_RF_ion_preservation": "HI-NANO",
+    "CL_DV_RF_ai_energy": "AI Úspora energie",
+    "CL_DV_RF_adaptive_temperature": "Sebaprispôsobenie",
+    "CL_DV_RF_normal_ice_making": "Obyčajná výroba ľadu",
+    "CL_DV_RF_quick_ice_making": "Rýchla výroba ľadu",
+    "CL_DV_OV_extra_auto_programs": "Automatické programy",
+    "CL_DV_OV_extra_auto_programs_desc": "Sada preddefinovaných automatických programov. Automatické programy vám pomôžu dosiahnuť najlepší výsledok pre vybraný typ jedla alebo pokrmu.",
+    "CL_DV_OV_extra_browning_programs": "Browning programy",
+    "CL_DV_OV_extra_browning_programs_desc": "Používajte špeciálne vyvinuté programy zhnednutia. Nastavte požadovanú úroveň zhnednutia, ktorú si želáte pre svoj pokrm.",
+    "CL_DV_OV_extra_cleaning": "Upratovanie",
+    "CL_DV_OV_extra_cleaning_desc": "Programy čistenia krok za krokom a pokyny, ako udržať vašu rúru v optimálnom stave.",
+    "CL_DV_OV_extra_stage_cooking": "Etapové varenie",
+    "CL_DV_OV_extra_stage_cooking_desc": "Vytvorte si vlastné programy varenia s použitím až 5 rôznych fáz.",
+    "CL_DV_OV_extra_defrost_desc": "Sada preddefinovaných programov na správne rozmrazovanie potravín, aby sa zabezpečila ich kvalita po zmrazení.",
+    "CL_DV_OV_extra_warming_desc": "Zohrejte predtým uvarené jedlá pomocou preddefinovaných programov rúry. Zachováva maximálnu chuť a textúru.",
+    "CL_DV_OV_extra_non_food": "Bez jedla",
+    "CL_DV_OV_extra_non_food_desc": "Ohrejte si taniere, horúce kamene alebo sterilizujte fľaše pomocou špeciálnych programov.",
+    "CL_DV_OV_extra_preserving_desc": "Konzervovanie potravín pomáha predĺžiť životnosť potravín pri zachovaní nutričnej hodnoty, textúry a chuti.",
+    "CL_DV_OV_extra_fast_cool": "Rýchle vychladnutie",
+    "CL_DV_OV_extra_fast_cool_desc": "Po dokončení pečenia čo najrýchlejšie ochladzuje rúru alebo sa dá použiť na rýchle pokračovanie ďalšej prípravy jedla.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Celziova grilovacia doska",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Sada preddefinovaných programov rúry špeciálne na pečenie s Celziovou grilovacou doskou.",
+    "CL_DV_OV_explore_all_extra": "PRESKÚMAJTE VŠETKY EXTRA",
+    "CL_DV_OV_extras": "Extra",
+    "CL_CF_CS_midi_hih_setup_1": "Zapnite zariadenie.",
+    "CL_CF_CS_midi_hih_setup_2": "Klepnite na ikonu Wi-Fi a podržte ju približne 5 sekúnd, kým sa nezobrazí „CSt“.",
+    "CL_CF_CS_midi_hih_setup_3": "Zariadenie je teraz pripravené na pripojenie na 5 minút.\n Pokračujte kliknutím na NEXT.",
+    "CL_CF_CS_midi_hih_pair_2": "Klepnite na ikonu Wi-Fi a podržte ju približne 8 sekúnd, kým sa nezobrazí „PAr“.",
+    "CL_CF_CS_midi_hih_pair_3": "Zariadenie je teraz pripravené na párovanie na 3 minúty.\n Pokračujte kliknutím na NEXT.",
+    "ac_dimmer_air_des": "Vypnite LED, aby vám LED svetlo nerušilo nočný odpočinok",
+    "e_verify_code": "Zadajte overovací kód",
+    "CL_CF_CS_td76_and_wm86_pair_4": "Sieť zariadenia je teraz otvorená na pripojenie na 3 minúty.\n Pokračujte kliknutím na NEXT.",
+    "CL_DV_OV_24_set_language": "Nastaviť jazyk",
+    "CL_DV_OV_24_time_date": "Čas – Dátum",
+    "CL_CF_CS_dw005_cs_step1": "Uistite sa, že máte v telefóne aktivované Bluetooth. Potom zapnite spotrebič a klepnite na tlačidlo nastavení.",
+    "CL_CF_CS_dw005_cs_step2": "Pomocou tlačidiel so šípkami prejdite na položku „Rozšírené nastavenia“. Pre vstup stlačte tlačidlo nastavení.",
+    "CL_CF_CS_dw005_cs_step3": "Zadajte PIN kód stlačením nasledujúcej postupnosti tlačidiel: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "V ponuke „Rozšírené nastavenia“ prejdite na položku „WiFi“ a stlačením tlačidla nastavení vstúpte. V ponuke „Wifi“ sa uistite, že je povolené WiFi. Ak nie, aktivujte ho stlačením tlačidla nastavení.",
+    "CL_CF_CS_dw005_cs_step5": "Kým ste stále v ponuke „WiFi“, prejdite na „Nastavenie pripojenia“ a aktivujte ho stlačením tlačidla nastavení. ",
+    "CL_CF_CS_dw005_cs_step6": "Sieť zariadenia je teraz otvorená na pripojenie na 5 minút.\n Pokračujte kliknutím na NEXT.",
+    "CL_CF_CS_dw005_pair_step1": "Uistite sa, že máte v telefóne aktivované Bluetooth. Potom zapnite spotrebič a klepnite na tlačidlo nastavení.",
+    "CL_CF_CS_dw005_pair_step2": "Pomocou tlačidiel so šípkami prejdite na položku „Rozšírené nastavenia“. Pre vstup stlačte tlačidlo nastavení.",
+    "CL_CF_CS_dw005_pair_step3": "Zadajte PIN kód stlačením nasledujúcej postupnosti tlačidiel: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "V ponuke „Rozšírené nastavenia“ prejdite do ponuky „WiFi“ a stlačením tlačidla nastavení vstúpte. Potom prejdite na „Pridať zariadenie“ a aktivujte stlačením tlačidla nastavení.",
+    "CL_CF_CS_dw005_pair_step5": "Sieť zariadení je teraz otvorená na pridanie zariadenia na 3 minúty.\n Pokračujte kliknutím na NEXT.",
+    "CL_DV_DW_save_date_invalid": "Koncový mesiac nemôže byť menší ako začiatočný mesiac!",
+    "CL_DV_OV_send_to_devices": "ODOSLAŤ DO ZARIADENÍ"
 }
