--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -432,7 +432,7 @@
     "tap_add_name_hint": "Tapnite za vnos imena",
     "laundry_room": "Pralnica",
     "add_washing_machine_pair": "1. Ko je stroj izklopljen, pritisnite in držite oba skrajna desna gumba ter hkrati vklopite stroj. 2. Pritisnite gumb \"Settings\" (Nastavitve), da vstopite v meni Setting (Nastavitve), in preklopite gumb na razdelek \"Wi-Fi settings\" (Nastavitve Wi-Fi). V razdelek vstopite tako, da pritisnete gumb. 3. V razdelku \"Wi-Fi settings\" (Nastavitve Wi-Fi) preklopite gumb, da najdete, in pritisnite gumb \"Add device\" (Dodaj napravo). 4. Za dodajanje naprave imate na voljo 3 minute.",
-    "light": "Lahko",
+    "light": "Luč",
     "timer": "Časovnik",
     "fan_level": "Moč ventilatorja",
     "light_intensity": "Intenzivnost razsvetljave",
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "Če želite omogočiti Wi-Fi na aparatu, se dotaknite\ntipke za intenzivno hlajenje ali zamrzovanje. Na\nprikazovalniku se za kratek čas prikaže '01', nato pa se prikaz samodejno spremeni v\n'02'.\nOmrežje Wi-Fi je pripravljeno na povezavo.",
     "cooling_config_wifi_step3": "S puščicama izberite 'S'.\nPotrdite 'S', tako da se dotaknete tipke za intenzivno\nhlajenje ali zamrzovanje.\nTipka za intenzivno hlajenje ali zamrzovanje začne\nutripati. Omrežje tega aparata je\nzdaj 3 minut pripravljeno za povezovanje.\nKliknite NAPREJ za nadaljevanje.",
     "cooling_config_wifi_step1_pair": "Napravo nastavite na običajne pogoje delovanja. Tapnite simbol Wi-Fi in ga držite 3 sekunde, dokler ne zaslišite zvočnega signala. Simbol Wi-Fi bo začel utripati in prikazal se bo napis \"05\". Vstopili ste v meni za omrežno povezavo.",
-    "cooling_config_wifi_step2_pair": "S puščicama izberite 'P'.\nPotrdite 'P', tako da se dotaknete tipke za intenzivno\nhlajenje ali zamrzovanje.\nTipka za intenzivno hlajenje ali zamrzovanje začne\nutripati. Omrežje tega aparata je\nzdaj 5 minut pripravljeno za povezovanje.\nKliknite NAPREJ za nadaljevanje.",
+    "cooling_config_wifi_step2_pair": "Krmarite s puščičnimi tipkami in izberite \"P\". Potrdite \"P\" tako, da tapnete tipko za intenzivno hlajenje/zamrzovanje. Tipka za intenzivno hlajenje/zamrzovanje bo začela utripati. Omrežje naprave je zdaj odprto za seznanjanje 3 minute. Za nadaljevanje kliknite NAPREJ.",
     "dw_config_wifi_step1": "VKLOPITE aparat. S puščicama\nizberite nastavitve. Pritisnite ikono MENI, da\nodprete nastavitve.",
     "dw_config_wifi_step2": "V meniju z nastavitvami poiščite OMREŽJE in potrdite z menijsko tipko.",
     "dw_config_wifi_step3": "Pomaknite se do »Aktiviraj SoftAP« in potrdite z menijsko tipko. Omrežje te naprave je zdaj odprto za povezavo za 5 minut.\n Za nadaljevanje kliknite NAPREJ.",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "Spodnja polovica",
     "STR_PROG_UPPER": "Zgonja polovica",
     "STR_PROG_ANTI_ODOUR": "Proti neprijetnim vonjavam",
-    "STR_PROG_SANI": "SANI",
-    "STR_PROG_SANI_QUICK": "SANI hitro",
+    "STR_PROG_SANI": "Sani",
+    "STR_PROG_SANI_QUICK": "Sani Quick",
     "air_energy_hint": "Opomba: Funkcija statistike porabe energije velja samo za klimatsko napravo mono tipa, ne pa tudi za večnamensko klimatsko napravo.",
     "now": "Zdaj",
     "washer_atag_delay_start_in": "Pranje z zamudo. Začnite v",
@@ -3415,6 +3415,7 @@
     "use_humidity": "Za uravnavanje vlažnosti uporabite škatlo za vlažnost",
     "same_day": "Isti dan",
     "w_temp_set": "Kakšno temperaturo nastaviti?",
+    "asko": "ASKO",
     "eco_meter": "Eco Meter",
     "asko_eco_meter_desc": "## je koristen pametni indikator za določanje vašega vpliva na okolje na podlagi izbranega programa in dodatnih možnosti, ko gre za porabo energije, vode in detergenta.",
     "wm86_autodose_desc": "Namesto da bi se trudili, pustite pralnemu stroju, da izmeri točno pravi odmerek pralnega sredstva. Naši pralni stroji s sistemom Auto Dose merijo količino pralnega sredstva glede na količino perila, stopnjo umazanosti, trdoto vode, vrsto programa in temperaturo. Vedno popoln odmerek in nič več prevelikega odmerjanja. Tukaj lahko prilagodite privzete nastavitve za funkcijo Auto Dose.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Brez predgretja",
     "CL_DV_OV_fast_preheat_desc": "Fast Preheat je najhitrejši način za predgretje vaše pečice. Traja približno 7 minut.",
     "CL_DV_OV_preheat_desc": "Predgretje je najboljši način za predgretje pečice glede na posodo. Traja približno 10 minut.",
-    "CL_DV_OV_no_preheat_desc": "Pečice ni vedno potrebno predgreti. Na primer za pogrevanje določenih živil."
+    "CL_DV_OV_no_preheat_desc": "Pečice ni vedno potrebno predgreti. Na primer za pogrevanje določenih živil.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Če omogočite AI Energy Navigation, lahko zmanjšate porabo energije, lahko pa tudi upočasnite hitrost hlajenja.",
+    "CL_DV_RF_ice_maker_mode": "Način izdelovalca ledu",
+    "CL_CF_SD_smart_delay": "Pametna zamuda",
+    "CL_CF_SD_settings_subtitle": "Naprava bo pri uporabi načina z zamikom uporabljala ure izven prometne obremenitve.",
+    "CL_CF_SD_add_zone": "Dodaj cono",
+    "CL_CF_SD_new_tariff_zone": "Nova tarifna območja ##",
+    "CL_CF_SD_add_tariff": "Dodaj tarifo",
+    "CL_CF_SD_duplicate": "Dvojnik",
+    "CL_CF_SD_delete_zone": "Izbriši območje ",
+    "CL_CF_SD_tariff_zones_n": "Tarifne cone ##",
+    "CL_CF_SD_tariff_n": "Tarifa ##",
+    "CL_CF_SD_price": "Cena",
+    "CL_CF_SD_off_peak_delay": "Zakasnitev izven konic",
+    "CL_CF_SD_delay_subtitle": "Naprava bo pri uporabi načina z zamikom uporabljala ure izven prometne obremenitve.\n Če uporabljate kombinacijo s Konec ob uporabi predpogoja.",
+    "CL_CF_SD_off_peak_delay_not_set": "Zakasnitev izven obremenitve ni nastavljena",
+    "CL_CF_SD_to_start_desc": "Za začetek uporabe funkcije jo morate nastaviti v nastavitvah.",
+    "CL_CF_SD_best": "najboljše",
+    "CL_CF_SD_delete_title": "Ali ste prepričani, da želite izbrisati ##?",
+    "CL_DV_OV_number_of_trays": "Število pladnjev",
+    "CL_DV_OV_baking_trays": "PEKAČI",
+    "CL_DV_OV_1_tray": "1 pladenj",
+    "CL_DV_OV_2_trays": "2 pladnja",
+    "CL_DV_OV_multi_tray": "Več pladenj",
+    "CL_DV_OV_multi": "Multi",
+    "CL_DV_RF_ice_off": "Led IZKLOP",
+    "CL_DV_RF_ion_preservation": "HI-NANO",
+    "CL_DV_RF_ai_energy": "AI Varčevanje z energijo",
+    "CL_DV_RF_adaptive_temperature": "Samoprilagajanje",
+    "CL_DV_RF_normal_ice_making": "Navadna izdelava ledu",
+    "CL_DV_RF_quick_ice_making": "Hitra izdelava ledu",
+    "CL_DV_OV_extra_auto_programs": "Avtomatski programi",
+    "CL_DV_OV_extra_auto_programs_desc": "Nabor vnaprej določenih samodejnih programov. Samodejni programi vam pomagajo doseči najboljši rezultat za izbrano vrsto hrane ali jedi.",
+    "CL_DV_OV_extra_browning_programs": "Programi za porjavitev",
+    "CL_DV_OV_extra_browning_programs_desc": "Uporabite posebej razvite programe za pečenje. Nastavite želeno stopnjo zapečenosti, ki jo želite za svojo jed.",
+    "CL_DV_OV_extra_cleaning": "Čiščenje",
+    "CL_DV_OV_extra_cleaning_desc": "Programi čiščenja po korakih in navodila, kako ohraniti svojo pečico v optimalnem stanju.",
+    "CL_DV_OV_extra_stage_cooking": "Odrsko kuhanje",
+    "CL_DV_OV_extra_stage_cooking_desc": "Ustvarite programe kuhanja po meri z uporabo do 5 različnih stopenj.",
+    "CL_DV_OV_extra_defrost_desc": "Nabor vnaprej določenih programov za pravilno odmrzovanje živil za zagotovitev kakovosti po tem, ko so bila zamrznjena.",
+    "CL_DV_OV_extra_warming_desc": "Prej kuhana živila pogrejte z vnaprej določenimi programi pečice. Ohranja največji okus in teksturo.",
+    "CL_DV_OV_extra_non_food": "Nehrana",
+    "CL_DV_OV_extra_non_food_desc": "Pogrejte krožnike, vroče kamne ali sterilizirajte steklenice s posebnimi programi.",
+    "CL_DV_OV_extra_preserving_desc": "Konzerviranje hrane pripomore k daljši obstojnosti hrane, hkrati pa ohranja hranilno vrednost, teksturo in okus.",
+    "CL_DV_OV_extra_fast_cool": "Hitro ohlajanje",
+    "CL_DV_OV_extra_fast_cool_desc": "Ohladi pečico čim hitreje po končani peki ali pa se lahko uporablja za hitro nadaljevanje druge priprave hrane.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Žar plošča Celzija",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Nabor vnaprej določenih programov pečice posebej za peko s ploščo za žar Celsius.",
+    "CL_DV_OV_explore_all_extra": "RAZIŠČITE VSE DODATKE",
+    "CL_DV_OV_extras": "Dodatki",
+    "CL_CF_CS_midi_hih_setup_1": "Vklopite napravo.",
+    "CL_CF_CS_midi_hih_setup_2": "Tapnite ikono Wi-Fi in jo držite približno 5 sekund, dokler se ne prikaže »CSt«.",
+    "CL_CF_CS_midi_hih_setup_3": "Naprava je zdaj pripravljena za povezavo 5 minut.\n Za nadaljevanje kliknite NAPREJ.",
+    "CL_CF_CS_midi_hih_pair_2": "Dotaknite se ikone Wi-Fi in jo držite približno 8 sekund, dokler se ne prikaže »PAr«.",
+    "CL_CF_CS_midi_hih_pair_3": "Naprava je zdaj pripravljena za seznanjanje 3 minute.\n Za nadaljevanje kliknite NAPREJ.",
+    "ac_dimmer_air_des": "Izklopite LED, da LED lučka ne bo motila vašega počitka ponoči",
+    "e_verify_code": "Vnesite potrditveno kodo",
+    "CL_CF_CS_td76_and_wm86_pair_4": "Omrežje naprave je zdaj odprto za povezavo 3 minute.\n Za nadaljevanje kliknite NAPREJ.",
+    "CL_DV_OV_24_set_language": "Nastavite jezik",
+    "CL_DV_OV_24_time_date": "Čas – Datum",
+    "CL_CF_CS_dw005_cs_step1": "Prepričajte se, da je Bluetooth v vašem telefonu aktiviran. Nato vklopite napravo in tapnite gumb za nastavitve.",
+    "CL_CF_CS_dw005_cs_step2": "Pomaknite se do »Napredne nastavitve« s pritiskom na puščične gumbe. Za vstop pritisnite gumb za nastavitve.",
+    "CL_CF_CS_dw005_cs_step3": "PIN kodo vnesite s pritiskom na naslednje zaporedje tipk: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "V meniju »Napredne nastavitve« pojdite na »WiFi« in pritisnite gumb za nastavitve za vstop. Znotraj menija »Wifi« se prepričajte, da je WiFi omogočen. Če ne, pritisnite gumb za nastavitve, da omogočite.",
+    "CL_CF_CS_dw005_cs_step5": "Ko ste še vedno v meniju »WiFi«, pojdite na »Nastavitev povezave« in pritisnite gumb za nastavitve, da aktivirate. ",
+    "CL_CF_CS_dw005_cs_step6": "Omrežje naprave je zdaj odprto za povezavo 5 minut.\n Za nadaljevanje kliknite NAPREJ.",
+    "CL_CF_CS_dw005_pair_step1": "Prepričajte se, da je Bluetooth v vašem telefonu aktiviran. Nato vklopite napravo in tapnite gumb za nastavitve.",
+    "CL_CF_CS_dw005_pair_step2": "Pomaknite se do »Napredne nastavitve« s pritiskom na puščične gumbe. Za vstop pritisnite gumb za nastavitve.",
+    "CL_CF_CS_dw005_pair_step3": "PIN kodo vnesite s pritiskom na naslednje zaporedje tipk: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "V meniju »Napredne nastavitve« pojdite na meni »WiFi« in pritisnite gumb za nastavitve za vstop. Nato pojdite na »Dodaj napravo« in pritisnite gumb za nastavitve, da aktivirate.",
+    "CL_CF_CS_dw005_pair_step5": "Omrežje naprave je zdaj odprto za dodajanje naprave 3 minute.\n Za nadaljevanje kliknite NAPREJ.",
+    "CL_DV_DW_save_date_invalid": "Končni mesec ne sme biti manjši od začetnega!",
+    "CL_DV_OV_send_to_devices": "POŠLJI V NAPRAVE"
 }
