--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "För att aktivera Wi-Fi på produkten trycker du på\nknappen för intensiv kyla eller snabbinfrysning. Displayen\nvisar snart'01'och ändras till\n'02'automatiskt.\nWi-Fi är nu klart för anslutning.",
     "cooling_config_wifi_step3": "Använd piltangenterna för att välja'S'.\nBekräfta'S'med ett tryck på knappen för\nintensiv kyla eller snabbinfrysning.\nKnappen för intensiv kyla/snabbinfrysning\nblinkar. Produktens nätverk är nu öppet\nför anslutning i 3 minuter.\nKlicka på NÄSTA för att gå vidare.",
     "cooling_config_wifi_step1_pair": "Sätt produkten i normalläge.\nTryck på ikonen för Wi-Fi i cirka 3\nsekunder.\nWi-Fi symbolen börjar blinka och'0'\nvisas på displayen. Du är nu i menyn\nför nätverksanslutning.",
-    "cooling_config_wifi_step2_pair": "Använd piltangenterna för att välja'P'.\nBekräfta'P'med ett tryck på knappen för\nintensiv kyla eller snabbinfrysning.\nKnappen för intensiv kyla/snabbinfrysning\nblinkar. Produktens nätverk är nu öppet\nför anslutning i 5 minuter.\nKlicka på NÄSTA för att gå vidare.",
+    "cooling_config_wifi_step2_pair": "Navigera med piltangenterna och välj \"P\". Bekräfta \"P\" genom att trycka på knappen för intensiv kylning/frysning. Knappen för intensiv kylning/frysning börjar blinka. Enhetsnätverket är nu öppet för ihopkoppling i 3 minuter. Klicka på NÄSTA för att fortsätta.",
     "dw_config_wifi_step1": "Slå på produkten. Gå med piltangenterna\ntill inställningar. Tryck på MENY-ikonen för att\nöppna inställningarna.",
     "dw_config_wifi_step2": "Hitta NÄTVERK i inställningsmenyn och\nbekräfta med menyknappen för att öppna.",
     "dw_config_wifi_step3": "Gå till\"Select SoftAP\"och bekräfta med\nmenyknappen. Nätverket för denna\nprodukt är nu öppet för anslutning i 5\nminuter.\nKlicka på NÄSTA för att gå vidare.",
@@ -793,14 +793,14 @@
     "device_status_not_available": "Inte tillgänglig",
     "device_status_weight": "Väger",
     "device_status_prewashing": "Förtvättar",
-    "device_status_washing": "Tvättar",
+    "device_status_washing": "Tvättning",
     "device_status_rinsing": "Sköljning",
     "device_status_soften": "Uppmjukning",
     "device_status_spin": "Centrifugerar",
     "device_status_drying": "Torkar",
     "device_status_air": "Luft",
     "device_status_program_end": "Program slut",
-    "device_status_delay": "Fördröjer",
+    "device_status_delay": "Fördröjning",
     "wm_power_off_tips": "Slå på tvättmaskinen",
     "wm_finish_at": "Avsluta kl",
     "wm_detergent_empty": "Tvättmedlet är tomt, fortsätta processen?",
@@ -1041,8 +1041,8 @@
     "time_save": "Tidsbesparing",
     "dry": "Torr",
     "level": "nivå",
-    "detergent": "Rengöringsmedel",
-    "softener": "Mjukgörare",
+    "detergent": "Tvättmedel",
+    "softener": "Sköljmedel",
     "pause": "PAUS",
     "shut_down": "STÄNGA AV",
     "wash_machine_will_be_shut_down": "Tvättmaskinen kommer att stängas av.",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "Underkorg",
     "STR_PROG_UPPER": "Överkorg",
     "STR_PROG_ANTI_ODOUR": "Anti-odör",
-    "STR_PROG_SANI": "SANI",
-    "STR_PROG_SANI_QUICK": "SANI snabb",
+    "STR_PROG_SANI": "Sani",
+    "STR_PROG_SANI_QUICK": "Sani snabb",
     "air_energy_hint": "Obs: Funktionen för strömförbrukningsstatistik är endast giltig för luftkonditionering av monotyp, men inte för luftkonditionering av flera typer.",
     "now": "Nu",
     "washer_atag_delay_start_in": "Tvätt försenad. Starta i",
@@ -3415,6 +3415,7 @@
     "use_humidity": "Använd fuktlåda för att reglera luftfuktig",
     "same_day": "Samma dag",
     "w_temp_set": "Vilken temperatur ska jag ställa in?",
+    "asko": "ASKO",
     "eco_meter": "Ekomätare",
     "asko_eco_meter_desc": "## är en användbar smart indikator för att bestämma din miljöpåverkan baserat på valt program och extra alternativ när det gäller energi-, vatten- och tvättmedelsförbrukning.",
     "wm86_autodose_desc": "Istället för att göra det till en kamp, ​​låt tvättmaskinen mäta exakt rätt dosering av tvättmedel. Våra tvättmaskiner med Auto Dose-system mäter tvättmedlet mot tvättmängd, smutsnivå, vattnets hårdhet, programtyp och temperatur. Alltid perfekt dosering och ingen mer överdosering. Här kan du justera dina standardinställningar för Auto Dose.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Ingen förvärmning",
     "CL_DV_OV_fast_preheat_desc": "Snabb förvärmning är det snabbaste sättet att förvärma din ugn. Det tar cirka 7 minuter.",
     "CL_DV_OV_preheat_desc": "Förvärmning är det bästa sättet att förvärma ugnen med tanke på rätten. Det tar cirka 10 minuter.",
-    "CL_DV_OV_no_preheat_desc": "Det är inte alltid nödvändigt att förvärma din ugn. Till exempel för att värma upp vissa livsmedel."
+    "CL_DV_OV_no_preheat_desc": "Det är inte alltid nödvändigt att förvärma din ugn. Till exempel för att värma upp vissa livsmedel.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Att aktivera AI Energy Navigation kan minska energiförbrukningen, men det kan också sakta ner kylningshastigheten.",
+    "CL_DV_RF_ice_maker_mode": "Ismaskinsläge",
+    "CL_CF_SD_smart_delay": "Smart fördröjning",
+    "CL_CF_SD_settings_subtitle": "Apparaten kommer att använda lågtrafik när fördröjningsläget används.",
+    "CL_CF_SD_add_zone": "Lägg till zon",
+    "CL_CF_SD_new_tariff_zone": "Nya tullzoner ##",
+    "CL_CF_SD_add_tariff": "Lägg till taxa",
+    "CL_CF_SD_duplicate": "Duplicera",
+    "CL_CF_SD_delete_zone": "Ta bort zon ",
+    "CL_CF_SD_tariff_zones_n": "Tariffzoner ##",
+    "CL_CF_SD_tariff_n": "Tariff ##",
+    "CL_CF_SD_price": "Pris",
+    "CL_CF_SD_off_peak_delay": "Lågtrafik fördröjning",
+    "CL_CF_SD_delay_subtitle": "Apparaten kommer att använda lågtrafik när fördröjningsläget används.\n Om du använder en kombination med End tillämpas en förutsättning.",
+    "CL_CF_SD_off_peak_delay_not_set": "Lågtrafikfördröjning inte inställd",
+    "CL_CF_SD_to_start_desc": "För att börja använda funktionen måste du ställa in den i inställningarna.",
+    "CL_CF_SD_best": "Bäst",
+    "CL_CF_SD_delete_title": "Är du säker på att du vill ta bort ##?",
+    "CL_DV_OV_number_of_trays": "Antal brickor",
+    "CL_DV_OV_baking_trays": "BAKPLATTOR",
+    "CL_DV_OV_1_tray": "1 bricka",
+    "CL_DV_OV_2_trays": "2 brickor",
+    "CL_DV_OV_multi_tray": "Multibricka",
+    "CL_DV_OV_multi": "Mång",
+    "CL_DV_RF_ice_off": "Is AV",
+    "CL_DV_RF_ion_preservation": "HI-NANO",
+    "CL_DV_RF_ai_energy": "AI energibesparande",
+    "CL_DV_RF_adaptive_temperature": "Självanpassning",
+    "CL_DV_RF_normal_ice_making": "Vanlig istillverkning",
+    "CL_DV_RF_quick_ice_making": "Snabb istillverkning",
+    "CL_DV_OV_extra_auto_programs": "Autoprogram",
+    "CL_DV_OV_extra_auto_programs_desc": "En uppsättning fördefinierade automatiska program. Automatiska program hjälper dig att få det bästa resultatet för den valda typen av mat eller rätt.",
+    "CL_DV_OV_extra_browning_programs": "Browning program",
+    "CL_DV_OV_extra_browning_programs_desc": "Använd speciellt utvecklade bryningsprogram. Ställ in den brunningsnivå du önskar som resultat för din maträtt.",
+    "CL_DV_OV_extra_cleaning": "Rengöring",
+    "CL_DV_OV_extra_cleaning_desc": "Steg-för-steg rengöringsprogram och instruktioner om hur du håller din ugn i optimalt skick.",
+    "CL_DV_OV_extra_stage_cooking": "Scenisk matlagning",
+    "CL_DV_OV_extra_stage_cooking_desc": "Skapa anpassade matlagningsprogram med upp till 5 olika steg.",
+    "CL_DV_OV_extra_defrost_desc": "En uppsättning fördefinierade program för att korrekt tina mat för att säkerställa kvaliteten efter att den har frysts.",
+    "CL_DV_OV_extra_warming_desc": "Värm upp tidigare tillagad mat med de fördefinierade ugnsprogrammen. Behåller maximal smak och konsistens.",
+    "CL_DV_OV_extra_non_food": "Icke mat",
+    "CL_DV_OV_extra_non_food_desc": "Värm dina tallrikar, varma stenar eller sterilisera flaskor med specialprogram.",
+    "CL_DV_OV_extra_preserving_desc": "Att konservera maten hjälper till att få din mat att hålla längre samtidigt som näringsvärdet, konsistensen och smaken bibehålls.",
+    "CL_DV_OV_extra_fast_cool": "Snabbt coolt",
+    "CL_DV_OV_extra_fast_cool_desc": "Kylar ugnen så snabbt som möjligt efter att bakningen är klar eller kan användas för att snabbt fortsätta annan matlagning.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Celsius grillplatta",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "En uppsättning fördefinierade ugnsprogram speciellt för bakning med Celsius Grillplatta.",
+    "CL_DV_OV_explore_all_extra": "UTFORSKA ALLA EXTRA",
+    "CL_DV_OV_extras": "Extras",
+    "CL_CF_CS_midi_hih_setup_1": "Slå på enheten.",
+    "CL_CF_CS_midi_hih_setup_2": "Tryck och håll ner Wi-Fi-ikonen i cirka 5 sekunder tills \"CSt\" visas.",
+    "CL_CF_CS_midi_hih_setup_3": "Enheten är nu klar för anslutning i 5 minuter.\n Klicka på NÄSTA för att fortsätta.",
+    "CL_CF_CS_midi_hih_pair_2": "Tryck och håll ner Wi-Fi-ikonen i cirka 8 sekunder tills \"PAr\" visas.",
+    "CL_CF_CS_midi_hih_pair_3": "Enheten är nu redo för ihopkoppling i 3 minuter.\n Klicka på NÄSTA för att fortsätta.",
+    "ac_dimmer_air_des": "Stäng av lysdioden för att undvika att LED-ljuset stör din vila på natten",
+    "e_verify_code": "Ange verifieringskod",
+    "CL_CF_CS_td76_and_wm86_pair_4": "Enhetens nätverk är nu öppet för anslutning i 3 minuter.\n Klicka på NÄSTA för att fortsätta.",
+    "CL_DV_OV_24_set_language": "Ställ in språk",
+    "CL_DV_OV_24_time_date": "Tid - Datum",
+    "CL_CF_CS_dw005_cs_step1": "Se till att din Bluetooth är aktiverad på din telefon. Slå sedan på apparaten och tryck på inställningsknappen.",
+    "CL_CF_CS_dw005_cs_step2": "Navigera till \"Avancerade inställningar\" genom att trycka på pilknapparna. Tryck på inställningsknappen för att gå in.",
+    "CL_CF_CS_dw005_cs_step3": "Ange PIN-koden genom att trycka på följande knappsekvens: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "I menyn \"Avancerade inställningar\" gå till \"WiFi\" och tryck på inställningsknappen för att komma in. Se till att WiFi är aktiverat i menyn \"Wifi\". Om inte, tryck på inställningsknappen för att aktivera.",
+    "CL_CF_CS_dw005_cs_step5": "Medan du fortfarande är i \"WiFi\"-menyn, gå till \"Connection setup\" och tryck på inställningsknappen för att aktivera. ",
+    "CL_CF_CS_dw005_cs_step6": "Enhetens nätverk är nu öppet för anslutning i 5 minuter.\n Klicka på NÄSTA för att fortsätta.",
+    "CL_CF_CS_dw005_pair_step1": "Se till att din Bluetooth är aktiverad på din telefon. Slå sedan på apparaten och tryck på inställningsknappen.",
+    "CL_CF_CS_dw005_pair_step2": "Navigera till \"Avancerade inställningar\" genom att trycka på pilknapparna. Tryck på inställningsknappen för att gå in.",
+    "CL_CF_CS_dw005_pair_step3": "Ange PIN-koden genom att trycka på följande knappsekvens: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "I menyn \"Avancerade inställningar\" gå till menyn \"WiFi\" och tryck på inställningsknappen för att komma in. Gå sedan till \"Lägg till enhet\" och tryck på inställningsknappen för att aktivera.",
+    "CL_CF_CS_dw005_pair_step5": "Enhetsnätverket är nu öppet för att lägga till enhet i 3 minuter.\n Klicka på NÄSTA för att fortsätta.",
+    "CL_DV_DW_save_date_invalid": "Slutmånaden kan inte vara mindre än startmånaden!",
+    "CL_DV_OV_send_to_devices": "SKICKA TILL ENHETER"
 }
