--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "หาก \"02\" แสดงขึ้น ให้ข้ามขั้นตอนนี้\nหาก \"0\" ปรากฏขึ้น ให้แตะปุ่มทำความเย็น/แช่แข็งแบบเข้มข้นเพื่อเปิดใช้งาน Wi-Fi บนอุปกรณ์\nจอแสดงผลจะแสดง \"01\" ชั่วครู่และเปลี่ยนเป็น \"02\" โดยอัตโนมัติ",
     "cooling_config_wifi_step3": "นำทางด้วยปุ่มลูกศรและเลือก \"S\"\nยืนยัน \"S\" โดยแตะปุ่มทำความเย็น/แช่แข็งแบบเข้มข้น\nปุ่มเร่งความเย็น/แช่แข็งจะเริ่มกะพริบ ขณะนี้เครือข่ายอุปกรณ์เปิดให้เชื่อมต่อได้ 3 นาที",
     "cooling_config_wifi_step1_pair": "ตั้งค่าอุปกรณ์ให้อยู่ในสภาวะการทำงานปกติ แตะสัญลักษณ์ Wi-Fi ค้างไว้ 3 วินาทีจนกว่าคุณจะได้ยินเสียงบี๊บ สัญลักษณ์ Wi-Fi จะเริ่มกะพริบ และ \"05\" จะปรากฏขึ้น คุณเข้าสู่เมนูการเชื่อมต่อเครือข่าย",
-    "cooling_config_wifi_step2_pair": "นำทางด้วยปุ่มลูกศรและเลือก \"P\"\nยืนยัน \"P\" โดยแตะปุ่มทำความเย็น/แช่แข็งแบบเข้มข้น\nปุ่มเร่งความเย็น/แช่แข็งจะเริ่มกะพริบ ขณะนี้เครือข่ายอุปกรณ์เปิดให้จับคู่เป็นเวลา 5 นาที",
+    "cooling_config_wifi_step2_pair": "ใช้ปุ่มลูกศรเพื่อนำทางและเลือก \"P\" ยืนยัน \"P\" โดยแตะปุ่มทำความเย็น/แช่แข็งอย่างเข้มข้น ปุ่มทำความเย็น/แช่แข็งอย่างเข้มข้นจะเริ่มกะพริบ เครือข่ายอุปกรณ์จะเปิดให้จับคู่เป็นเวลา 3 นาที คลิกถัดไปเพื่อดำเนินการต่อ",
     "dw_config_wifi_step1": "เปิดเครื่อง นำทางด้วยปุ่มลูกศรเพื่อตั้งค่า กดไอคอน MENU เพื่อเข้าสู่การตั้งค่า",
     "dw_config_wifi_step2": "ในเมนูการตั้งค่า ให้ค้นหา NETWORK และยืนยันด้วยปุ่มเมนูเพื่อเข้าสู่",
     "dw_config_wifi_step3": "ไปที่ \"เปิดใช้งาน SoftAP\" และยืนยันด้วยปุ่มเมนู เครือข่ายของอุปกรณ์นี้เปิดอยู่เพื่อเชื่อมต่อเป็นเวลา 5 นาที\nคลิกถัดไปเพื่อดำเนินการต่อ",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "ครึ่งล่าง",
     "STR_PROG_UPPER": "ครึ่งบน",
     "STR_PROG_ANTI_ODOUR": "ต่อต้านกลิ่น",
-    "STR_PROG_SANI": "ซานิ",
-    "STR_PROG_SANI_QUICK": "ซานิ ด่วน",
+    "STR_PROG_SANI": "ซานี่",
+    "STR_PROG_SANI_QUICK": "ซานี่ ควิก",
     "air_energy_hint": "หมายเหตุ: ฟังก์ชันสถิติการใช้พลังงานใช้ได้เฉพาะกับเครื่องปรับอากาศแบบโมโน แต่ใช้ไม่ได้กับเครื่องปรับอากาศแบบหลายรุ่น",
     "now": "ตอนนี้",
     "washer_atag_delay_start_in": "การซักล่าช้า เริ่มใน",
@@ -3415,6 +3415,7 @@
     "use_humidity": "ใช้กล่องความชื้นเพื่อควบคุมความชื้น",
     "same_day": "ในวันเดียวกัน",
     "w_temp_set": "ควรตั้งอุณหภูมิไว้ที่เท่าไร",
+    "asko": "อาสโก",
     "eco_meter": "อีโคมิเตอร์",
     "asko_eco_meter_desc": "## เป็นตัวบ่งชี้อัจฉริยะที่เป็นประโยชน์ในการระบุผลกระทบต่อสิ่งแวดล้อมของคุณตามโปรแกรมที่เลือกและตัวเลือกพิเศษในเรื่องการใช้พลังงาน น้ำ และผงซักฟอก",
     "wm86_autodose_desc": "แทนที่จะต้องดิ้นรน ให้เครื่องซักผ้าวัดปริมาณผงซักฟอกให้ถูกต้อง เครื่องซักผ้าของเรามีระบบวัดปริมาณผงซักฟอกอัตโนมัติ โดยวัดปริมาณผงซักฟอกตามปริมาณผ้าที่ซัก ระดับความสกปรก ความกระด้างของน้ำ ประเภทของโปรแกรม และอุณหภูมิ คำนวณปริมาณผงซักฟอกให้เหมาะสมเสมอและไม่ต้องใส่ผงซักฟอกมากเกินไป คุณสามารถปรับการตั้งค่าเริ่มต้นสำหรับการวัดปริมาณผงซักฟอกอัตโนมัติได้ที่นี่",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "ไม่ต้องอุ่นเครื่องล่วงหน้า",
     "CL_DV_OV_fast_preheat_desc": "การอุ่นล่วงหน้าอย่างรวดเร็วเป็นวิธีอุ่นล่วงหน้าเตาอบที่เร็วที่สุด ใช้เวลาประมาณ 7 นาที",
     "CL_DV_OV_preheat_desc": "การอุ่นล่วงหน้าเป็นวิธีที่ดีที่สุดในการอุ่นเตาอบโดยคำนึงถึงอาหาร ใช้เวลาประมาณ 10 นาที",
-    "CL_DV_OV_no_preheat_desc": "ไม่จำเป็นต้องอุ่นเตาอบล่วงหน้าเสมอไป เช่น อุ่นอาหารบางชนิด"
+    "CL_DV_OV_no_preheat_desc": "ไม่จำเป็นต้องอุ่นเตาอบล่วงหน้าเสมอไป เช่น อุ่นอาหารบางชนิด",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "การเปิดใช้งาน AI Energy Navigation สามารถลดการใช้พลังงานได้ แต่ก็สามารถทำให้ความเร็วในการทำความเย็นช้าลงได้เช่นกัน",
+    "CL_DV_RF_ice_maker_mode": "โหมดทำน้ำแข็ง",
+    "CL_CF_SD_smart_delay": "สมาร์ทดีเลย์",
+    "CL_CF_SD_settings_subtitle": "เครื่องใช้ไฟฟ้าจะใช้ชั่วโมงนอกชั่วโมงพีคเมื่อใช้โหมดหน่วงเวลา",
+    "CL_CF_SD_add_zone": "เพิ่มโซน",
+    "CL_CF_SD_new_tariff_zone": "เขตภาษีศุลกากรใหม่ ##",
+    "CL_CF_SD_add_tariff": "เพิ่มอัตราค่าธรรมเนียม",
+    "CL_CF_SD_duplicate": "ทำซ้ำ",
+    "CL_CF_SD_delete_zone": "ลบโซน ",
+    "CL_CF_SD_tariff_zones_n": "เขตภาษีศุลกากร ##",
+    "CL_CF_SD_tariff_n": "ค่าธรรมเนียม ##",
+    "CL_CF_SD_price": "ราคา",
+    "CL_CF_SD_off_peak_delay": "ความล่าช้านอกช่วงพีค",
+    "CL_CF_SD_delay_subtitle": "เครื่องใช้ไฟฟ้าจะใช้ชั่วโมงนอกชั่วโมงพีคเมื่อใช้โหมดหน่วงเวลา\n หากใช้การรวมกันกับ End at มีเงื่อนไขเบื้องต้น",
+    "CL_CF_SD_off_peak_delay_not_set": "ไม่ได้ตั้งค่าความล่าช้าในช่วงนอกเวลาเร่งด่วน",
+    "CL_CF_SD_to_start_desc": "ในการเริ่มใช้ฟังก์ชันนี้ คุณจะต้องตั้งค่าในการตั้งค่า",
+    "CL_CF_SD_best": "ดีที่สุด",
+    "CL_CF_SD_delete_title": "คุณแน่ใจว่าต้องการลบ ## หรือไม่?",
+    "CL_DV_OV_number_of_trays": "จำนวนถาด",
+    "CL_DV_OV_baking_trays": "ถาดอบ",
+    "CL_DV_OV_1_tray": "ถาด 1 ใบ",
+    "CL_DV_OV_2_trays": "ถาด 2 ถาด",
+    "CL_DV_OV_multi_tray": "ถาดหลายชั้น",
+    "CL_DV_OV_multi": "มัลติ",
+    "CL_DV_RF_ice_off": "ปิดน้ำแข็ง",
+    "CL_DV_RF_ion_preservation": "ไฮ-นาโน",
+    "CL_DV_RF_ai_energy": "AI ประหยัดพลังงาน",
+    "CL_DV_RF_adaptive_temperature": "การปรับตัวของตนเอง",
+    "CL_DV_RF_normal_ice_making": "การทำน้ำแข็งแบบธรรมดา",
+    "CL_DV_RF_quick_ice_making": "การทำน้ำแข็งอย่างรวดเร็ว",
+    "CL_DV_OV_extra_auto_programs": "โปรแกรมอัตโนมัติ",
+    "CL_DV_OV_extra_auto_programs_desc": "ชุดโปรแกรมอัตโนมัติที่กำหนดไว้ล่วงหน้า โปรแกรมอัตโนมัติช่วยให้คุณได้รับผลลัพธ์ที่ดีที่สุดสำหรับประเภทอาหารหรือจานที่เลือก",
+    "CL_DV_OV_extra_browning_programs": "โปรแกรม บราวนิ่ง",
+    "CL_DV_OV_extra_browning_programs_desc": "ใช้โปรแกรมเพิ่มความเกรียมที่พัฒนาขึ้นเป็นพิเศษ ตั้งค่าระดับความเกรียมที่ต้องการสำหรับอาหารของคุณ",
+    "CL_DV_OV_extra_cleaning": "การทำความสะอาด",
+    "CL_DV_OV_extra_cleaning_desc": "โปรแกรมทำความสะอาดทีละขั้นตอนและคำแนะนำเกี่ยวกับวิธีดูแลเตาอบของคุณให้อยู่ในสภาพที่ดีที่สุด",
+    "CL_DV_OV_extra_stage_cooking": "การปรุงอาหารบนเวที",
+    "CL_DV_OV_extra_stage_cooking_desc": "สร้างโปรแกรมการทำอาหารที่กำหนดเองได้โดยใช้ขั้นตอนที่แตกต่างกันถึง 5 ขั้นตอน",
+    "CL_DV_OV_extra_defrost_desc": "ชุดโปรแกรมที่กำหนดไว้ล่วงหน้าสำหรับละลายอาหารอย่างถูกต้องเพื่อให้แน่ใจถึงคุณภาพหลังจากแช่แข็ง",
+    "CL_DV_OV_extra_warming_desc": "อุ่นอาหารที่ปรุงสุกแล้วโดยใช้โปรแกรมเตาอบที่กำหนดไว้ล่วงหน้า ช่วยคงรสชาติและเนื้อสัมผัสไว้ได้ดีที่สุด",
+    "CL_DV_OV_extra_non_food": "ไม่ใช่อาหาร",
+    "CL_DV_OV_extra_non_food_desc": "อุ่นจาน หินร้อน หรือฆ่าเชื้อขวดนมด้วยโปรแกรมพิเศษ",
+    "CL_DV_OV_extra_preserving_desc": "การถนอมอาหารช่วยให้เก็บอาหารได้นานขึ้นในขณะที่ยังคงคุณค่าทางโภชนาการ เนื้อสัมผัส และรสชาติเอาไว้",
+    "CL_DV_OV_extra_fast_cool": "เย็นเร็ว",
+    "CL_DV_OV_extra_fast_cool_desc": "ช่วยให้เตาอบเย็นลงโดยเร็วที่สุดหลังจากการอบเสร็จสิ้น หรือสามารถใช้เตรียมอาหารอื่น ๆ ต่อไปได้อย่างรวดเร็ว",
+    "CL_DV_OV_extra_celsius_grill_plate": "เซลเซียส กริลล์เพลท",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "ชุดโปรแกรมเตาอบที่กำหนดไว้ล่วงหน้าสำหรับการอบด้วย Celsius Grill Plate โดยเฉพาะ",
+    "CL_DV_OV_explore_all_extra": "สำรวจสิ่งพิเศษทั้งหมด",
+    "CL_DV_OV_extras": "พิเศษ",
+    "CL_CF_CS_midi_hih_setup_1": "เปิดอุปกรณ์",
+    "CL_CF_CS_midi_hih_setup_2": "แตะและกดไอคอน Wi-Fi ค้างไว้ประมาณ 5 วินาทีจนกระทั่ง \"CSt\" ปรากฏขึ้น",
+    "CL_CF_CS_midi_hih_setup_3": "อุปกรณ์พร้อมสำหรับการเชื่อมต่อเป็นเวลา 5 นาทีแล้ว\n คลิกถัดไปเพื่อดำเนินการต่อ",
+    "CL_CF_CS_midi_hih_pair_2": "แตะและกดไอคอน Wi-Fi ค้างไว้ประมาณ 8 วินาทีจนกระทั่ง \"PAr\" ปรากฏขึ้น",
+    "CL_CF_CS_midi_hih_pair_3": "ตอนนี้อุปกรณ์พร้อมสำหรับการจับคู่เป็นเวลา 3 นาที\n คลิกถัดไปเพื่อดำเนินการต่อ",
+    "ac_dimmer_air_des": "ปิดไฟ LED เพื่อหลีกเลี่ยงแสง LED ที่รบกวนการพักผ่อนของคุณในเวลากลางคืน",
+    "e_verify_code": "กรอกรหัสยืนยัน",
+    "CL_CF_CS_td76_and_wm86_pair_4": "เครือข่ายอุปกรณ์เปิดเชื่อมต่อเป็นเวลา 3 นาที\n คลิกถัดไปเพื่อดำเนินการต่อ",
+    "CL_DV_OV_24_set_language": "ตั้งค่าภาษา",
+    "CL_DV_OV_24_time_date": "เวลา - วันที่",
+    "CL_CF_CS_dw005_cs_step1": "ตรวจสอบให้แน่ใจว่าได้เปิดใช้งานบลูทูธบนโทรศัพท์ของคุณแล้ว จากนั้นเปิดอุปกรณ์ของคุณและแตะปุ่มการตั้งค่า",
+    "CL_CF_CS_dw005_cs_step2": "ไปที่ “การตั้งค่าขั้นสูง” โดยกดปุ่มลูกศร กดปุ่มการตั้งค่าเพื่อเข้าสู่",
+    "CL_CF_CS_dw005_cs_step3": "กรอกรหัส PIN โดยกดปุ่มตามลำดับต่อไปนี้: I, II, I, III",
+    "CL_CF_CS_dw005_cs_step4": "ในเมนู \"Advanced settings\" ให้ไปที่ \"WiFi\" แล้วกดปุ่ม settings เพื่อเข้าไป ภายในเมนู \"Wifi\" ให้ตรวจสอบว่าได้เปิดใช้งาน WiFi แล้ว หากยังไม่ได้เปิดใช้งาน ให้กดปุ่ม settings เพื่อเปิดใช้งาน",
+    "CL_CF_CS_dw005_cs_step5": "ในขณะที่ยังอยู่ที่เมนู “WiFi” ให้ไปที่ “การตั้งค่าการเชื่อมต่อ” และกดปุ่มการตั้งค่าเพื่อเปิดใช้งาน ",
+    "CL_CF_CS_dw005_cs_step6": "เครือข่ายอุปกรณ์จะเปิดให้เชื่อมต่อประมาณ 5 นาที\n คลิกถัดไปเพื่อดำเนินการต่อ",
+    "CL_CF_CS_dw005_pair_step1": "ตรวจสอบให้แน่ใจว่าได้เปิดใช้งานบลูทูธบนโทรศัพท์ของคุณแล้ว จากนั้นเปิดอุปกรณ์ของคุณและแตะปุ่มการตั้งค่า",
+    "CL_CF_CS_dw005_pair_step2": "ไปที่ “การตั้งค่าขั้นสูง” โดยกดปุ่มลูกศร กดปุ่มการตั้งค่าเพื่อเข้าสู่",
+    "CL_CF_CS_dw005_pair_step3": "กรอกรหัส PIN โดยกดปุ่มตามลำดับต่อไปนี้: I, II, I, III",
+    "CL_CF_CS_dw005_pair_step4": "ในเมนู “Advanced settings” ให้ไปที่เมนู “WiFi” แล้วกดปุ่มตั้งค่าเพื่อเข้าไป จากนั้นไปที่ “Add device” แล้วกดปุ่มตั้งค่าเพื่อเปิดใช้งาน",
+    "CL_CF_CS_dw005_pair_step5": "เครือข่ายอุปกรณ์เปิดอยู่เพื่อเพิ่มอุปกรณ์เป็นเวลา 3 นาที\n คลิกถัดไปเพื่อดำเนินการต่อ",
+    "CL_DV_DW_save_date_invalid": "เดือนสิ้นสุดไม่อาจเล็กกว่าเดือนเริ่มต้นได้!",
+    "CL_DV_OV_send_to_devices": "ส่งไปยังอุปกรณ์"
 }
