--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "Cihazda Wi-Fi'yi etkinleştirmek için yoğun soğutma veya dondurma tuşuna dokunun. Ekranda kısa süre içinde '01' görüntülenecek ve otomatik olarak '02' olarak değişecektir. Wi-Fi bağlantı için hazır.",
     "cooling_config_wifi_step3": "Ok tuşlarıyla gezinin ve \"S\"yi seçin.\nYoğun soğutma/dondurma tuşuna dokunarak \"S\"yi onaylayın.\nYoğun soğutma/dondurma tuşu yanıp sönmeye başlayacaktır. Cihaz ağı artık 3 dakika boyunca bağlantıya açıktır.",
     "cooling_config_wifi_step1_pair": "Cihazı normal çalışmaya ayarlayın. Wi-Fi simgesine yaklaşık 3 saniye dokunun. Wi-Fi sembolü yanıp sönmeye başlar ve ekranda '0' görünür. Ağ bağlantısı menüsüne girdiniz.",
-    "cooling_config_wifi_step2_pair": "'P'yi seçmek için ok tuşlarıyla gezinin. Yoğun soğutma veya dondurma tuşuna dokunarak 'P'yi onaylayın. Yoğun soğutma veya dondurma tuşu yanıp sönmeye başlar; Bu cihazın ağı şimdi 5 dakikalığına bağlanmaya açık. Devam etmek için İLERİ'ye tıklayın.",
+    "cooling_config_wifi_step2_pair": "Ok tuşlarıyla gezinin ve \"P\"yi seçin. Yoğun soğutma/dondurma tuşuna dokunarak \"P\"yi onaylayın. Yoğun soğutma/dondurma tuşu yanıp sönmeye başlayacaktır. Cihaz ağı artık 3 dakika boyunca eşleştirme için açıktır. Devam etmek için İLERİ'ye tıklayın.",
     "dw_config_wifi_step1": "Cihazı AÇIN. Ok tuşlarıyla ayarlara gidin. Ayarlara girmek için MENÜ simgesine basın.",
     "dw_config_wifi_step2": "Ayarlar menüsünde AĞ öğesini bulun ve girmek için menü tuşu ile onaylayın.",
     "dw_config_wifi_step3": "\"SoftAP Seç\"e gidin ve menü tuşuyla onaylayın. Bu cihazın ağı şimdi 2 dakikalığına bağlanmaya açık. Devam etmek için İLERİ'ye tıklayın.",
@@ -1630,7 +1630,7 @@
     "STR_PROG_UPPER": "Üst yarı",
     "STR_PROG_ANTI_ODOUR": "koku önleyici",
     "STR_PROG_SANI": "Sani",
-    "STR_PROG_SANI_QUICK": "Sani hızlı",
+    "STR_PROG_SANI_QUICK": "Sani Hızlı",
     "air_energy_hint": "Not: Güç tüketimi istatistikleri işlevi yalnızca Mono tipi klima için geçerlidir, Multi tip klima için geçerli değildir.",
     "now": "Şimdi",
     "washer_atag_delay_start_in": "Yıkama Gecikmeli. Başla.",
@@ -3415,6 +3415,7 @@
     "use_humidity": "Nemi düzenlemek için nem kutusunu kullanın",
     "same_day": "Aynı gün",
     "w_temp_set": "Hangi sıcaklığı ayarlayacağım?",
+    "asko": "ASKO",
     "eco_meter": "Eko Metre",
     "asko_eco_meter_desc": "##, seçilen programa ve enerji, su ve deterjan tüketimine ilişkin ekstra seçeneklere göre çevresel etkinizi belirlemek için yararlı bir akıllı göstergedir.",
     "wm86_autodose_desc": "Mücadele etmek yerine çamaşır makinesinin deterjanın tam olarak doğru dozajını ölçmesine izin verin. Otomatik Dozaj sistemine sahip çamaşır makinelerimiz deterjanı yıkama yüküne, kirlilik seviyesine, su sertliğine, program türüne ve sıcaklığa göre ölçer. Her zaman mükemmel dozaj ve artık aşırı doz yok. Burada Otomatik Dozaj için varsayılan ayarlarınızı ayarlayabilirsiniz.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Ön ısıtma yok",
     "CL_DV_OV_fast_preheat_desc": "Hızlı Ön Isıtma, fırınınızı önceden ısıtmanın en hızlı yoludur. Yaklaşık 7 dakika sürer.",
     "CL_DV_OV_preheat_desc": "Yemeğinizi önceden ısıtmanın en iyi yolu fırınınızı önceden ısıtmak için ön ısıtmadır. Yaklaşık 10 dakika sürer.",
-    "CL_DV_OV_no_preheat_desc": "Fırınınızı önceden ısıtmanız her zaman gerekmez. Örneğin belirli yiyecekleri yeniden ısıtmak için."
+    "CL_DV_OV_no_preheat_desc": "Fırınınızı önceden ısıtmanız her zaman gerekmez. Örneğin belirli yiyecekleri yeniden ısıtmak için.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Yapay Zeka Enerji Navigasyonunun etkinleştirilmesi enerji tüketimini azaltabilir, ancak aynı zamanda soğutma hızını da yavaşlatabilir.",
+    "CL_DV_RF_ice_maker_mode": "Buz yapıcı modu",
+    "CL_CF_SD_smart_delay": "Akıllı Gecikme",
+    "CL_CF_SD_settings_subtitle": "Gecikme modunu kullandığınızda cihaz düşük tüketim saatlerini kullanacaktır.",
+    "CL_CF_SD_add_zone": "Bölge Ekle",
+    "CL_CF_SD_new_tariff_zone": "Yeni Tarife Bölgeleri ##",
+    "CL_CF_SD_add_tariff": "Tarife Ekle",
+    "CL_CF_SD_duplicate": "Kopyalamak",
+    "CL_CF_SD_delete_zone": "Bölgeyi sil ",
+    "CL_CF_SD_tariff_zones_n": "Tarife bölgeleri ##",
+    "CL_CF_SD_tariff_n": "Tarife ##",
+    "CL_CF_SD_price": "Fiyat",
+    "CL_CF_SD_off_peak_delay": "Düşük yoğunluklu gecikme",
+    "CL_CF_SD_delay_subtitle": "Gecikme modunu kullandığınızda cihaz düşük tüketim saatlerini kullanacaktır.\n End ile bir kombinasyon kullanılıyorsa ön koşul uygulanır.",
+    "CL_CF_SD_off_peak_delay_not_set": "Düşük yoğunluklu gecikme ayarlanmadı",
+    "CL_CF_SD_to_start_desc": "Fonksiyonu kullanmaya başlamak için ayarlardan ayarlamanız gerekiyor.",
+    "CL_CF_SD_best": "En iyi",
+    "CL_CF_SD_delete_title": "##'i silmek istediğinizden emin misiniz?",
+    "CL_DV_OV_number_of_trays": "Tepsi sayısı",
+    "CL_DV_OV_baking_trays": "FIRIN TEPSİLERİ",
+    "CL_DV_OV_1_tray": "1 tepsi",
+    "CL_DV_OV_2_trays": "2 tepsi",
+    "CL_DV_OV_multi_tray": "Çoklu tepsi",
+    "CL_DV_OV_multi": "Çok",
+    "CL_DV_RF_ice_off": "Buz KAPALI",
+    "CL_DV_RF_ion_preservation": "Merhaba-NANO",
+    "CL_DV_RF_ai_energy": "AI Enerji Tasarrufu",
+    "CL_DV_RF_adaptive_temperature": "Kendini uyarlama",
+    "CL_DV_RF_normal_ice_making": "Sıradan Buz Yapımı",
+    "CL_DV_RF_quick_ice_making": "Hızlı Buz Yapımı",
+    "CL_DV_OV_extra_auto_programs": "Otomatik programlar",
+    "CL_DV_OV_extra_auto_programs_desc": "Önceden tanımlanmış otomatik programlar kümesi. Otomatik programlar, seçilen yiyecek veya yemek türü için en iyi sonucu elde etmenize yardımcı olur.",
+    "CL_DV_OV_extra_browning_programs": "Browning programları",
+    "CL_DV_OV_extra_browning_programs_desc": "Özel olarak geliştirilmiş kızartma programlarını kullanın. Yemeğiniz için istediğiniz kızartma seviyesini istediğiniz sonuca göre ayarlayın.",
+    "CL_DV_OV_extra_cleaning": "Temizlik",
+    "CL_DV_OV_extra_cleaning_desc": "Fırınınızı en iyi durumda tutmak için adım adım temizleme programları ve talimatlar.",
+    "CL_DV_OV_extra_stage_cooking": "Sahne pişirme",
+    "CL_DV_OV_extra_stage_cooking_desc": "5 farklı aşamaya kadar kullanarak özel pişirme programları oluşturun.",
+    "CL_DV_OV_extra_defrost_desc": "Dondurulduktan sonra gıdaların kalitesinin korunmasını sağlamak için doğru şekilde çözdürülmesini sağlayan önceden tanımlanmış programlar kümesi.",
+    "CL_DV_OV_extra_warming_desc": "Önceden pişirilmiş yiyecekleri önceden tanımlanmış fırın programlarını kullanarak yeniden ısıtın. Maksimum lezzet ve dokuyu korur.",
+    "CL_DV_OV_extra_non_food": "Gıda dışı",
+    "CL_DV_OV_extra_non_food_desc": "Özel programlarla tabaklarınızı ısıtın, taşlarınızı ısıtın veya biberonlarınızı sterilize edin.",
+    "CL_DV_OV_extra_preserving_desc": "Gıdaları korumak, besin değerini, dokusunu ve lezzetini koruyarak gıdalarınızın daha uzun süre dayanmasına yardımcı olur.",
+    "CL_DV_OV_extra_fast_cool": "Hızlı serin",
+    "CL_DV_OV_extra_fast_cool_desc": "Pişirme işlemi bittikten sonra fırını mümkün olduğunca çabuk soğutur veya diğer yiyecek hazırlama işlemlerine hızla devam etmek için kullanılabilir.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Celsius Izgara Plakası",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Celsius Grill Plate ile pişirmeye özel önceden tanımlanmış fırın programları seti.",
+    "CL_DV_OV_explore_all_extra": "TÜM EKSTRALARI KEŞFEDİN",
+    "CL_DV_OV_extras": "Ekstralar",
+    "CL_CF_CS_midi_hih_setup_1": "Cihazı açın.",
+    "CL_CF_CS_midi_hih_setup_2": "\"CSt\" yazısı görünene kadar Wi-Fi simgesine yaklaşık 5 saniye basılı tutun.",
+    "CL_CF_CS_midi_hih_setup_3": "Cihazınız artık 5 dakika boyunca bağlantıya hazır olacaktır.\n Devam etmek için İLERİ’ye tıklayın.",
+    "CL_CF_CS_midi_hih_pair_2": "\"PAr\" yazısı görünene kadar Wi-Fi simgesine yaklaşık 8 saniye basılı tutun.",
+    "CL_CF_CS_midi_hih_pair_3": "Cihaz artık 3 dakika boyunca eşleştirmeye hazır.\n Devam etmek için İLERİ’ye tıklayın.",
+    "ac_dimmer_air_des": "Gece uykunuzu bozacak LED ışığını önlemek için LED'i kapatın",
+    "e_verify_code": "Doğrulama kodunu girin",
+    "CL_CF_CS_td76_and_wm86_pair_4": "Cihaz ağı artık 3 dakika boyunca bağlantıya açık olacak.\n Devam etmek için İLERİ’ye tıklayın.",
+    "CL_DV_OV_24_set_language": "Dil ayarla",
+    "CL_DV_OV_24_time_date": "Zaman - Tarih",
+    "CL_CF_CS_dw005_cs_step1": "Telefonunuzda Bluetooth'unuzun aktif olduğundan emin olun. Ardından cihazınızı açın ve ayarlar düğmesine dokunun.",
+    "CL_CF_CS_dw005_cs_step2": "Ok düğmelerine basarak “Gelişmiş ayarlar”a gidin. Giriş yapmak için ayarlar düğmesine basın.",
+    "CL_CF_CS_dw005_cs_step3": "Aşağıdaki tuş sırasına basarak PIN kodunuzu girin: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "“Gelişmiş ayarlar” menüsünde “WiFi”ye gidin ve girmek için ayarlar düğmesine basın. “Wifi” menüsünde WiFi’nin etkin olduğundan emin olun. Değilse, etkinleştirmek için ayarlar düğmesine basın.",
+    "CL_CF_CS_dw005_cs_step5": "Hala “WiFi” menüsündeyken “Bağlantı Kurulumu”na gidin ve etkinleştirmek için ayarlar tuşuna basın. ",
+    "CL_CF_CS_dw005_cs_step6": "Cihaz ağı artık 5 dakikalığına bağlantıya açık olacak.\n Devam etmek için İLERİ’ye tıklayın.",
+    "CL_CF_CS_dw005_pair_step1": "Telefonunuzda Bluetooth'unuzun aktif olduğundan emin olun. Ardından cihazınızı açın ve ayarlar düğmesine dokunun.",
+    "CL_CF_CS_dw005_pair_step2": "Ok düğmelerine basarak “Gelişmiş ayarlar”a gidin. Giriş yapmak için ayarlar düğmesine basın.",
+    "CL_CF_CS_dw005_pair_step3": "Aşağıdaki tuş sırasına basarak PIN kodunuzu girin: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "“Gelişmiş ayarlar” menüsünde “WiFi” menüsüne gidin ve girmek için ayarlar düğmesine basın. Ardından “Cihaz ekle”ye gidin ve etkinleştirmek için ayarlar düğmesine basın.",
+    "CL_CF_CS_dw005_pair_step5": "Cihaz ağı artık 3 dakikalığına cihaz eklemeye açık.\n Devam etmek için İLERİ’ye tıklayın.",
+    "CL_DV_DW_save_date_invalid": "Bitiş ayı başlangıç ayından küçük olamaz!",
+    "CL_DV_OV_send_to_devices": "CİHAZLARA GÖNDER"
 }
