--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "Якщо відображається «02», пропустіть цей крок.\nЯкщо відображається «0», торкніться кнопки інтенсивного охолодження або заморожування, щоб увімкнути Wi-Fi на пристрої.",
     "cooling_config_wifi_step3": "За допомогою кнопок зі стрілками виберіть «S».\nПідтвердьте «S», натиснувши кнопку інтенсивного охолодження або заморожування.\nКнопка інтенсивного охолодження або заморожування почне блимати. Мережа цього приладу стане відкритою для підключення на 3 хвилин.",
     "cooling_config_wifi_step1_pair": "Переведіть прилад у звичайний режим роботи. Торкніться символу Wi-Fi і утримуйте протягом приблизно 3 секунд, поки не почуєте звуковий сигнал. Піктограма Wi-Fi почне блимати, з’явиться напис «05». Ви відкрили меню підключення до мережі.",
-    "cooling_config_wifi_step2_pair": "За допомогою кнопок зі стрілками виберіть «P».\nПідтвердьте «P», натиснувши кнопку інтенсивного охолодження або заморожування.\nКнопка інтенсивного охолодження або заморожування почне блимати. Мережа цього приладу стане відкритою для підключення на 5 хвилин.\nНатисніть «ДАЛІ», щоб продовжити.",
+    "cooling_config_wifi_step2_pair": "Переміщуйтеся за допомогою клавіш зі стрілками та виберіть «P». Підтвердьте «P», натиснувши кнопку інтенсивного охолодження/заморожування. Клавіша інтенсивного охолодження/заморожування почне блимати. Тепер мережа пристрою відкрита для сполучення протягом 3 хвилин. Натисніть ДАЛІ, щоб продовжити.",
     "dw_config_wifi_step1": "Увімкніть прилад. За допомогою кнопок зі стрілками перейдіть до налаштувань. Натисніть піктограму «МЕНЮ», щоб відкрити налаштування.",
     "dw_config_wifi_step2": "У меню налаштувань знайдіть елемент «МЕРЕЖА» та підтвердьте вибір за допомогою кнопки меню, щоб відкрити.",
     "dw_config_wifi_step3": "Знайдіть елемент «Вибрати SoftAP» і підтвердьте вибір за допомогою кнопки меню. Мережа цього приладу стане відкритою для підключення на 2 хвилини. Натисніть «ДАЛІ», щоб продовжити.",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "Нижня половина",
     "STR_PROG_UPPER": "Верхня половина",
     "STR_PROG_ANTI_ODOUR": "Видалення запаху",
-    "STR_PROG_SANI": "САНІТАРНИЙ РЕЖИМ",
-    "STR_PROG_SANI_QUICK": "Швидкий САНІТАРНИЙ режим",
+    "STR_PROG_SANI": "Сані",
+    "STR_PROG_SANI_QUICK": "Сані Квік",
     "air_energy_hint": "Примітка: функція статистики споживання електроенергії дійсна лише для кондиціонерів типу Mono, але не для кондиціонерів Multitype.",
     "now": "Зараз",
     "washer_atag_delay_start_in": "Миття відкладено. Пуск за",
@@ -3415,6 +3415,7 @@
     "use_humidity": "Використовуйте коробку для регулювання вологості",
     "same_day": "В той же день",
     "w_temp_set": "Яку температуру встановити?",
+    "asko": "АСКО",
     "eco_meter": "Еколічильник",
     "asko_eco_meter_desc": "## — це корисний інтелектуальний індикатор для визначення вашого впливу на навколишнє середовище на основі вибраної програми та додаткових опцій, коли йдеться про споживання енергії, води та миючих засобів.",
     "wm86_autodose_desc": "Замість того, щоб боротися, дозвольте пральній машині відміряти правильну дозу миючого засобу. Наші пральні машини з системою автоматичного дозування вимірюють миючий засіб залежно від завантаження білизни, рівня забруднення, жорсткості води, типу програми та температури. Завжди ідеальне дозування і жодного передозування. Тут ви можете налаштувати параметри за замовчуванням для автоматичної дози.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Без попереднього розігріву",
     "CL_DV_OV_fast_preheat_desc": "Швидке розігрівання — це найшвидший спосіб попередньо розігріти духовку. Це займає приблизно 7 хвилин.",
     "CL_DV_OV_preheat_desc": "Попередній нагрів — найкращий спосіб розігріти духовку з огляду на страву. Це займає приблизно 10 хвилин.",
-    "CL_DV_OV_no_preheat_desc": "Не завжди потрібно розігрівати духовку. Наприклад, для розігрівання деяких страв."
+    "CL_DV_OV_no_preheat_desc": "Не завжди потрібно розігрівати духовку. Наприклад, для розігрівання деяких страв.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Увімкнення AI Energy Navigation може зменшити споживання енергії, але також може сповільнити швидкість охолодження.",
+    "CL_DV_RF_ice_maker_mode": "Режим льодогенератора",
+    "CL_CF_SD_smart_delay": "Розумна затримка",
+    "CL_CF_SD_settings_subtitle": "У разі використання режиму затримки прилад використовуватиме непікові години.",
+    "CL_CF_SD_add_zone": "Додати зону",
+    "CL_CF_SD_new_tariff_zone": "Нові тарифні зони ##",
+    "CL_CF_SD_add_tariff": "Додати тариф",
+    "CL_CF_SD_duplicate": "дублікат",
+    "CL_CF_SD_delete_zone": "Видалити зону ",
+    "CL_CF_SD_tariff_zones_n": "Тарифні зони ##",
+    "CL_CF_SD_tariff_n": "Тариф ##",
+    "CL_CF_SD_price": "Ціна",
+    "CL_CF_SD_off_peak_delay": "Непікова затримка",
+    "CL_CF_SD_delay_subtitle": "У разі використання режиму затримки прилад використовуватиме непікові години.\n Якщо використовується комбінація з End at, застосовується передумова.",
+    "CL_CF_SD_off_peak_delay_not_set": "Не встановлено затримку в непіковий режим",
+    "CL_CF_SD_to_start_desc": "Щоб почати користуватися функцією, її необхідно налаштувати в налаштуваннях.",
+    "CL_CF_SD_best": "Найкращий",
+    "CL_CF_SD_delete_title": "Ви впевнені, що хочете видалити ##?",
+    "CL_DV_OV_number_of_trays": "Кількість лотків",
+    "CL_DV_OV_baking_trays": "ФОРТИ ДЛЯ ВИПІЧАННЯ",
+    "CL_DV_OV_1_tray": "1 лоток",
+    "CL_DV_OV_2_trays": "2 лотка",
+    "CL_DV_OV_multi_tray": "Мультилоток",
+    "CL_DV_OV_multi": "Мульти",
+    "CL_DV_RF_ice_off": "Лід ВИМКНЕНО",
+    "CL_DV_RF_ion_preservation": "HI-NANO",
+    "CL_DV_RF_ai_energy": "ШІ енергозбереження",
+    "CL_DV_RF_adaptive_temperature": "Самоадаптація",
+    "CL_DV_RF_normal_ice_making": "Звичайне виготовлення льоду",
+    "CL_DV_RF_quick_ice_making": "Приготування швидкого льоду",
+    "CL_DV_OV_extra_auto_programs": "Авто програми",
+    "CL_DV_OV_extra_auto_programs_desc": "Набір попередньо визначених автоматичних програм. Автоматичні програми допомагають отримати найкращий результат для вибраного виду їжі чи страви.",
+    "CL_DV_OV_extra_browning_programs": "Програми Браунінг",
+    "CL_DV_OV_extra_browning_programs_desc": "Використовуйте спеціально розроблені програми підсмажування. Встановіть бажаний рівень підрум’янювання для вашої страви.",
+    "CL_DV_OV_extra_cleaning": "прибирання",
+    "CL_DV_OV_extra_cleaning_desc": "Покрокові програми очищення та інструкції, як підтримувати духовку в оптимальному стані.",
+    "CL_DV_OV_extra_stage_cooking": "Етап приготування",
+    "CL_DV_OV_extra_stage_cooking_desc": "Створюйте індивідуальні програми приготування, використовуючи до 5 різних етапів.",
+    "CL_DV_OV_extra_defrost_desc": "Набір попередньо визначених програм для правильного розморожування продуктів для забезпечення якості після їх заморожування.",
+    "CL_DV_OV_extra_warming_desc": "Розігрійте раніше приготовані страви за допомогою попередньо визначених програм духовки. Зберігає максимальний смак і текстуру.",
+    "CL_DV_OV_extra_non_food": "Нехарчові",
+    "CL_DV_OV_extra_non_food_desc": "Розігрійте тарілки, гарячі камені або стерилізуйте пляшки за допомогою спеціальних програм.",
+    "CL_DV_OV_extra_preserving_desc": "Консервування їжі допомагає довше зберігати їжу, зберігаючи харчову цінність, текстуру та смак.",
+    "CL_DV_OV_extra_fast_cool": "Швидке охолодження",
+    "CL_DV_OV_extra_fast_cool_desc": "Охолоджує духовку якомога швидше після завершення випікання або може використовуватися для швидкого продовження приготування інших страв.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Плита для гриля за Цельсієм",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Набір попередньо визначених програм духової шафи спеціально для випікання з пластиною для гриля Celsius.",
+    "CL_DV_OV_explore_all_extra": "ДОСЛІДЖУЙТЕ ВСІ ДОДАТКОВІ",
+    "CL_DV_OV_extras": "Екстра",
+    "CL_CF_CS_midi_hih_setup_1": "Увімкніть пристрій.",
+    "CL_CF_CS_midi_hih_setup_2": "Натисніть і утримуйте значок Wi-Fi приблизно 5 секунд, доки не з’явиться «CSt».",
+    "CL_CF_CS_midi_hih_setup_3": "Тепер пристрій готовий до підключення протягом 5 хвилин.\n Натисніть ДАЛІ, щоб продовжити.",
+    "CL_CF_CS_midi_hih_pair_2": "Натисніть і утримуйте значок Wi-Fi приблизно 8 секунд, доки не з’явиться напис «PAr».",
+    "CL_CF_CS_midi_hih_pair_3": "Тепер пристрій готовий до сполучення протягом 3 хвилин.\n Натисніть ДАЛІ, щоб продовжити.",
+    "ac_dimmer_air_des": "Вимкніть світлодіод, щоб світлодіодне світло не заважало вам відпочивати вночі",
+    "e_verify_code": "Введіть код підтвердження",
+    "CL_CF_CS_td76_and_wm86_pair_4": "Тепер мережа пристрою відкрита для підключення протягом 3 хвилин.\n Натисніть ДАЛІ, щоб продовжити.",
+    "CL_DV_OV_24_set_language": "Встановити мову",
+    "CL_DV_OV_24_time_date": "Час - Дата",
+    "CL_CF_CS_dw005_cs_step1": "Переконайтеся, що на вашому телефоні активовано Bluetooth. Потім увімкніть пристрій і натисніть кнопку налаштувань.",
+    "CL_CF_CS_dw005_cs_step2": "Перейдіть до «Розширених налаштувань», натискаючи кнопки зі стрілками. Натисніть кнопку налаштувань, щоб увійти.",
+    "CL_CF_CS_dw005_cs_step3": "Введіть PIN-код, натиснувши наступну послідовність кнопок: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "У меню «Додаткові налаштування» перейдіть до «Wi-Fi» і натисніть кнопку налаштувань, щоб увійти. У меню «Wifi» переконайтеся, що Wi-Fi увімкнено. Якщо ні, натисніть кнопку налаштувань, щоб увімкнути.",
+    "CL_CF_CS_dw005_cs_step5": "Перебуваючи в меню «WiFi», перейдіть до «Налаштування підключення» та натисніть кнопку налаштувань, щоб активувати. ",
+    "CL_CF_CS_dw005_cs_step6": "Тепер мережа пристрою відкрита для підключення протягом 5 хвилин.\n Натисніть ДАЛІ, щоб продовжити.",
+    "CL_CF_CS_dw005_pair_step1": "Переконайтеся, що на вашому телефоні активовано Bluetooth. Потім увімкніть пристрій і натисніть кнопку налаштувань.",
+    "CL_CF_CS_dw005_pair_step2": "Перейдіть до «Розширених налаштувань», натискаючи кнопки зі стрілками. Натисніть кнопку налаштувань, щоб увійти.",
+    "CL_CF_CS_dw005_pair_step3": "Введіть PIN-код, натиснувши таку послідовність кнопок: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "У меню «Додаткові налаштування» перейдіть до меню «WiFi» і натисніть кнопку налаштувань, щоб увійти. Потім перейдіть до «Додати пристрій» і натисніть кнопку налаштувань, щоб активувати.",
+    "CL_CF_CS_dw005_pair_step5": "Мережа пристрою тепер відкрита для додавання пристрою протягом 3 хвилин.\n Натисніть ДАЛІ, щоб продовжити.",
+    "CL_DV_DW_save_date_invalid": "Кінцевий місяць не може бути меншим за початковий!",
+    "CL_DV_OV_send_to_devices": "НАДІСЛАТИ НА ПРИСТРОЇ"
 }
