--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "Để bật Wi-Fi trên thiết bị, hãy chạm vào phím làm mát hoặc đóng băng sâu. Màn hình sẽ nhanh chóng hiển thị '01' và tự động thay đổi thành '02'. Wi-Fi đã sẵn sàng để kết nối.",
     "cooling_config_wifi_step3": "Điều hướng bằng các phím mũi tên để chọn 'S'. Xác nhận 'S' bằng cách chạm vào phím làm mát hoặc đóng băng sâu. Phím làm mát hoặc đóng băng sâu bắt đầu nhấp nháy; mạng của thiết bị này hiện đang mở trong 3 phút để kết nối. Nhấp vào NEXT (TIẾP THEO) để tiếp tục.",
     "cooling_config_wifi_step1_pair": "Đặt thiết bị về chế độ vận hành bình thường. Chạm vào biểu tượng Wi-Fi trong khoảng 3 giây. Biểu tượng Wi-Fi bắt đầu nhấp nháy và '0' xuất hiện trên màn hình. Bạn đã vào menu kết nối mạng.",
-    "cooling_config_wifi_step2_pair": "Điều hướng bằng các phím mũi tên để chọn 'P'. Xác nhận 'P' bằng cách chạm vào phím làm mát hoặc đóng băng sâu. Phím làm mát hoặc đóng băng sâu bắt đầu nhấp nháy; mạng của thiết bị này hiện đang mở trong 5 phút để kết nối. Nhấp vào NEXT (TIẾP THEO) để tiếp tục.",
+    "cooling_config_wifi_step2_pair": "Điều hướng bằng các phím mũi tên và chọn \"P\". Xác nhận \"P\" bằng cách nhấn phím làm mát/đông lạnh chuyên sâu. Phím làm mát/đông lạnh chuyên sâu sẽ bắt đầu nhấp nháy. Mạng thiết bị hiện đã mở để ghép nối trong 3 phút. Nhấp vào TIẾP THEO để tiếp tục.",
     "dw_config_wifi_step1": "BẬT thiết bị. Điều hướng bằng các phím mũi tên để cài đặt. Nhấn biểu tượng MENU để vào phần cài đặt.",
     "dw_config_wifi_step2": "Trong menu cài đặt, tìm MẠNG và xác nhận bằng phím menu để vào.",
     "dw_config_wifi_step3": "Điều hướng đến \"Select SoftAP\" (Chọn SoftAP) và xác nhận bằng phím menu. Mạng của thiết bị này hiện đang mở trong 2 phút để kết nối. Nhấp vào NEXT (TIẾP THEO) để tiếp tục.",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "Nửa dưới",
     "STR_PROG_UPPER": "Nửa trên",
     "STR_PROG_ANTI_ODOUR": "Khử mùi",
-    "STR_PROG_SANI": "VỆ SINH",
-    "STR_PROG_SANI_QUICK": "VỆ SINH NHANH",
+    "STR_PROG_SANI": "Sani",
+    "STR_PROG_SANI_QUICK": "Sani nhanh",
     "air_energy_hint": "Lưu ý: Chức năng thống kê điện năng tiêu thụ chỉ có giá trị đối với máy điều hòa một chiều, không áp dụng cho Máy điều hòa hai chiều.",
     "now": "Bây giờ",
     "washer_atag_delay_start_in": "Giặt bị trễ. Bắt đầu vào",
@@ -3415,6 +3415,7 @@
     "use_humidity": "Sử dụng hộp độ ẩm để điều chỉnh độ ẩm",
     "same_day": "Trong cùng một ngày",
     "w_temp_set": "Cài đặt nhiệt độ nào?",
+    "asko": "ASKO",
     "eco_meter": "Đồng hồ sinh thái",
     "asko_eco_meter_desc": "## là một chỉ báo thông minh hữu ích để xác định tác động môi trường của bạn dựa trên chương trình đã chọn và các tùy chọn bổ sung khi nói đến mức tiêu thụ năng lượng, nước và chất tẩy rửa.",
     "wm86_autodose_desc": "Thay vì phải vật lộn, hãy để máy giặt đo chính xác liều lượng chất tẩy rửa. Máy giặt của chúng tôi có hệ thống Tự động định lượng sẽ đo chất tẩy rửa theo khối lượng giặt, mức độ bẩn, độ cứng của nước, loại chương trình và nhiệt độ. Luôn luôn định lượng hoàn hảo và không còn tình trạng quá liều. Tại đây, bạn có thể điều chỉnh cài đặt mặc định của mình cho Tự động định lượng.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Không cần làm nóng trước",
     "CL_DV_OV_fast_preheat_desc": "Làm nóng nhanh là cách nhanh nhất để làm nóng lò nướng của bạn. Mất khoảng 7 phút.",
     "CL_DV_OV_preheat_desc": "Làm nóng trước là cách tốt nhất để làm nóng lò nướng của bạn khi xem xét đến món ăn. Mất khoảng 10 phút.",
-    "CL_DV_OV_no_preheat_desc": "Không phải lúc nào cũng cần phải làm nóng lò nướng trước. Ví dụ như khi hâm nóng một số loại thực phẩm nhất định."
+    "CL_DV_OV_no_preheat_desc": "Không phải lúc nào cũng cần phải làm nóng lò nướng trước. Ví dụ như khi hâm nóng một số loại thực phẩm nhất định.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Việc bật AI Energy Navigation có thể giảm mức tiêu thụ năng lượng, nhưng cũng có thể làm chậm tốc độ làm mát.",
+    "CL_DV_RF_ice_maker_mode": "Chế độ làm đá",
+    "CL_CF_SD_smart_delay": "Trì hoãn thông minh",
+    "CL_CF_SD_settings_subtitle": "Thiết bị sẽ sử dụng giờ ngoài giờ cao điểm khi sử dụng chế độ trễ.",
+    "CL_CF_SD_add_zone": "Thêm vùng",
+    "CL_CF_SD_new_tariff_zone": "Khu vực thuế quan mới ##",
+    "CL_CF_SD_add_tariff": "Thêm Thuế quan",
+    "CL_CF_SD_duplicate": "Nhân bản",
+    "CL_CF_SD_delete_zone": "Xóa vùng ",
+    "CL_CF_SD_tariff_zones_n": "Khu vực thuế quan ##",
+    "CL_CF_SD_tariff_n": "Biểu thuế ##",
+    "CL_CF_SD_price": "Giá",
+    "CL_CF_SD_off_peak_delay": "Sự chậm trễ ngoài giờ cao điểm",
+    "CL_CF_SD_delay_subtitle": "Thiết bị sẽ sử dụng giờ ngoài giờ cao điểm khi sử dụng chế độ trễ.\n Nếu sử dụng kết hợp với End thì điều kiện tiên quyết sẽ được áp dụng.",
+    "CL_CF_SD_off_peak_delay_not_set": "Không đặt độ trễ ngoài giờ cao điểm",
+    "CL_CF_SD_to_start_desc": "Để bắt đầu sử dụng chức năng này, bạn cần thiết lập nó trong phần cài đặt.",
+    "CL_CF_SD_best": "Tốt nhất",
+    "CL_CF_SD_delete_title": "Bạn có chắc chắn muốn xóa ## không?",
+    "CL_DV_OV_number_of_trays": "Số lượng khay",
+    "CL_DV_OV_baking_trays": "KHUÔN NƯỚNG",
+    "CL_DV_OV_1_tray": "1 khay",
+    "CL_DV_OV_2_trays": "2 khay",
+    "CL_DV_OV_multi_tray": "Khay đa năng",
+    "CL_DV_OV_multi": "Đa",
+    "CL_DV_RF_ice_off": "Đá TẮT",
+    "CL_DV_RF_ion_preservation": "HI NANO",
+    "CL_DV_RF_ai_energy": "Tiết kiệm năng lượng AI",
+    "CL_DV_RF_adaptive_temperature": "Tự thích nghi",
+    "CL_DV_RF_normal_ice_making": "Làm đá thông thường",
+    "CL_DV_RF_quick_ice_making": "Làm đá nhanh",
+    "CL_DV_OV_extra_auto_programs": "Chương trình tự động",
+    "CL_DV_OV_extra_auto_programs_desc": "Một bộ chương trình tự động được thiết lập trước. Các chương trình tự động giúp bạn có được kết quả tốt nhất cho loại thực phẩm hoặc món ăn đã chọn.",
+    "CL_DV_OV_extra_browning_programs": "Chương trình Browning",
+    "CL_DV_OV_extra_browning_programs_desc": "Sử dụng chương trình làm nâu được phát triển đặc biệt. Thiết lập mức độ nâu mong muốn cho món ăn của bạn.",
+    "CL_DV_OV_extra_cleaning": "Vệ sinh",
+    "CL_DV_OV_extra_cleaning_desc": "Chương trình vệ sinh từng bước và hướng dẫn cách giữ lò nướng luôn ở tình trạng tốt nhất.",
+    "CL_DV_OV_extra_stage_cooking": "Giai đoạn nấu ăn",
+    "CL_DV_OV_extra_stage_cooking_desc": "Tạo chương trình nấu ăn tùy chỉnh, sử dụng tối đa 5 giai đoạn khác nhau.",
+    "CL_DV_OV_extra_defrost_desc": "Một bộ chương trình được thiết lập sẵn để rã đông thực phẩm đúng cách nhằm đảm bảo chất lượng sau khi đông lạnh.",
+    "CL_DV_OV_extra_warming_desc": "Làm nóng lại thực phẩm đã nấu trước đó bằng các chương trình lò nướng được thiết lập sẵn. Giữ được hương vị và kết cấu tối đa.",
+    "CL_DV_OV_extra_non_food": "Không phải thực phẩm",
+    "CL_DV_OV_extra_non_food_desc": "Làm nóng đĩa, đá nóng hoặc khử trùng bình sữa bằng các chương trình đặc biệt.",
+    "CL_DV_OV_extra_preserving_desc": "Bảo quản thực phẩm giúp thực phẩm của bạn để được lâu hơn mà vẫn giữ được giá trị dinh dưỡng, kết cấu và hương vị.",
+    "CL_DV_OV_extra_fast_cool": "Làm mát nhanh",
+    "CL_DV_OV_extra_fast_cool_desc": "Làm nguội lò nhanh nhất có thể sau khi nướng xong hoặc có thể sử dụng để tiếp tục chế biến thực phẩm khác một cách nhanh chóng.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Tấm nướng Celsius",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Một bộ chương trình lò nướng được thiết lập sẵn dành riêng cho việc nướng bằng Tấm nướng Celsius.",
+    "CL_DV_OV_explore_all_extra": "KHÁM PHÁ TẤT CẢ CÁC THÊM",
+    "CL_DV_OV_extras": "Thêm vào",
+    "CL_CF_CS_midi_hih_setup_1": "Bật thiết bị.",
+    "CL_CF_CS_midi_hih_setup_2": "Chạm và giữ biểu tượng Wi-Fi trong khoảng 5 giây cho đến khi \"CSt\" xuất hiện.",
+    "CL_CF_CS_midi_hih_setup_3": "Thiết bị hiện đã sẵn sàng kết nối trong 5 phút.\n Nhấp vào TIẾP THEO để tiếp tục.",
+    "CL_CF_CS_midi_hih_pair_2": "Chạm và giữ biểu tượng Wi-Fi trong khoảng 8 giây cho đến khi \"PAr\" xuất hiện.",
+    "CL_CF_CS_midi_hih_pair_3": "Thiết bị hiện đã sẵn sàng để ghép nối trong 3 phút.\n Nhấp vào TIẾP THEO để tiếp tục.",
+    "ac_dimmer_air_des": "Tắt đèn LED để tránh ánh sáng LED làm phiền giấc ngủ của bạn vào ban đêm",
+    "e_verify_code": "Nhập mã xác minh",
+    "CL_CF_CS_td76_and_wm86_pair_4": "Mạng thiết bị hiện đã mở để kết nối trong 3 phút.\n Nhấp vào TIẾP THEO để tiếp tục.",
+    "CL_DV_OV_24_set_language": "Thiết lập ngôn ngữ",
+    "CL_DV_OV_24_time_date": "Thời gian - Ngày tháng",
+    "CL_CF_CS_dw005_cs_step1": "Đảm bảo Bluetooth của bạn được kích hoạt trên điện thoại. Sau đó bật thiết bị và chạm vào nút cài đặt.",
+    "CL_CF_CS_dw005_cs_step2": "Điều hướng đến “Cài đặt nâng cao” bằng cách nhấn các nút mũi tên. Nhấn nút cài đặt để vào.",
+    "CL_CF_CS_dw005_cs_step3": "Nhập mã PIN bằng cách nhấn chuỗi nút sau: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "Trong menu “Cài đặt nâng cao”, hãy vào “WiFi” và nhấn nút cài đặt để vào. Trong menu “Wifi”, hãy đảm bảo WiFi đã được bật. Nếu chưa, hãy nhấn nút cài đặt để bật.",
+    "CL_CF_CS_dw005_cs_step5": "Khi vẫn ở trong menu “WiFi”, hãy vào “Thiết lập kết nối” và nhấn nút cài đặt để kích hoạt. ",
+    "CL_CF_CS_dw005_cs_step6": "Mạng thiết bị hiện đã mở để kết nối trong 5 phút.\n Nhấp vào TIẾP THEO để tiếp tục.",
+    "CL_CF_CS_dw005_pair_step1": "Đảm bảo Bluetooth của bạn được kích hoạt trên điện thoại. Sau đó bật thiết bị và chạm vào nút cài đặt.",
+    "CL_CF_CS_dw005_pair_step2": "Điều hướng đến “Cài đặt nâng cao” bằng cách nhấn các nút mũi tên. Nhấn nút cài đặt để vào.",
+    "CL_CF_CS_dw005_pair_step3": "Nhập mã PIN bằng cách nhấn chuỗi nút sau: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "Trong menu “Cài đặt nâng cao”, hãy vào menu “WiFi” và nhấn nút cài đặt để vào. Sau đó, hãy vào “Thêm thiết bị” và nhấn nút cài đặt để kích hoạt.",
+    "CL_CF_CS_dw005_pair_step5": "Mạng thiết bị hiện đã mở để thêm thiết bị trong 3 phút.\n Nhấp vào TIẾP THEO để tiếp tục.",
+    "CL_DV_DW_save_date_invalid": "Tháng cuối không thể nhỏ hơn tháng đầu!",
+    "CL_DV_OV_send_to_devices": "GỬI ĐẾN THIẾT BỊ"
 }
