--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "If \"02\" is displayed, skip this step.\nIf \"0\" is displayed, tap the intensive cooling/freezing key to enable Wi-Fi on the device.\nThe display will briefly show \"01\" and change to \"02\" automatically.\nWi-Fi is ready for connection.",
     "cooling_config_wifi_step3": "Navigate with the arrow keys and select \"S\".\nConfirm \"S\" by tapping the intensive cooling/freezing key.\nThe intensive cooling/freezing key will start to blink. The device network is now open for connection for 3 minutes.",
     "cooling_config_wifi_step1_pair": "Set the device to normal operating conditions. Tap and hold the Wi-Fi symbol for 3 seconds until you hear a beep. The Wi-Fi symbol will start to blink, and \"05\" will appear. You entered the network connection menu.",
-    "cooling_config_wifi_step2_pair": "Navigate with the arrow keys and select \"P\".\nConfirm \"P\" by tapping the intensive cooling/freezing key.\nThe intensive cooling/freezing key will start to blink. The device network is now open for pairing for 5 minutes. \nClick NEXT to continue.",
+    "cooling_config_wifi_step2_pair": "Navigate with the arrow keys and select \"P\". Confirm \"P\" by tapping the intensive cooling/freezing key. The intensive cooling/freezing key will start to blink. The device network is now open for pairing for 3 minutes. Click NEXT to continue.",
     "dw_config_wifi_step1": "Turn ON the appliance. Navigate with arrow keys to settings. Press MENU icon to enter the settings.",
     "dw_config_wifi_step2": "In settings menu find NETWORK and confirm with menu key to enter.",
     "dw_config_wifi_step3": "Navigate to “Activate SoftAP” and confirm with menu key. The network of this appliance is now open to connect to, for 5 minutes.\nClick NEXT to continue.",
@@ -1286,7 +1286,7 @@
     "chart_apr": "Apr",
     "chart_may": "May",
     "chart_jun": "Jun",
-    "chart_july": "July",
+    "chart_july": "Jul",
     "chart_aug": "Aug",
     "chart_sept": "Sept",
     "chart_oct": "Oct",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "Lower half",
     "STR_PROG_UPPER": "Upper half",
     "STR_PROG_ANTI_ODOUR": "Anti-odour",
-    "STR_PROG_SANI": "SANI",
-    "STR_PROG_SANI_QUICK": "SANI Quick",
+    "STR_PROG_SANI": "Sani",
+    "STR_PROG_SANI_QUICK": "Sani Quick",
     "air_energy_hint": "Note: The power consumption statistics function is only valid for Mono-type air conditioner, but not for Multi-type air conditioner.",
     "now": "Now",
     "washer_atag_delay_start_in": "Wash delayed. Start in",
@@ -2765,7 +2765,7 @@
     "fw_up_to_date": "Up-to-Date",
     "fw_update_installed": "You have the latest updates installed.",
     "start_update": "start update",
-    "nodata_statistics": "No data available",
+    "nodata_statistics": "No statistics available",
     "nodata_statistics_content": "Statistics for the selected moment can’t be displayed. This could be due to a power outage or an error on the temperature sensor. Please check your wine cabinet.\n\nYou can find possible solutions in the user manual. If the problem is recurring, please contact our service.",
     "nodata_statistics_to_manual": "go to user manual",
     "asko_offline": "Your appliance is offline",
@@ -3415,6 +3415,7 @@
     "use_humidity": "Use humidity box to regulate humidity",
     "same_day": "On same day",
     "w_temp_set": "What temperature to set?",
+    "asko": "ASKO",
     "eco_meter": "Eco Meter",
     "asko_eco_meter_desc": "## is a helpful smart indicator to determinate your environmental impact based on chosen program and extra options when it comes to energy, water and detergent consumption.",
     "wm86_autodose_desc": "Instead of making it to a struggle let the washing machine measure exactly the right dosage of detergent. Our washing machines with Auto Dose system measure the detergent against wash load, dirtiness level, water hardness, program type and temperature. Always perfect dosage and no more overdosing. Here you can adjust your default settings for Auto Dose.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "No preheat",
     "CL_DV_OV_fast_preheat_desc": "Fast Preheat is the quickest way to preheat your oven. It takes approximately 7 minutes.",
     "CL_DV_OV_preheat_desc": "Preheat is the best way to preheat your oven considering the dish. It takes approximately 10 minutes.",
-    "CL_DV_OV_no_preheat_desc": "It is not always needed to preheat your oven. For example for reheating certain foods."
+    "CL_DV_OV_no_preheat_desc": "It is not always needed to preheat your oven. For example for reheating certain foods.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Enabling AI Energy Navigation can reduce energy consumption, but it can also slow down cooling speed.",
+    "CL_DV_RF_ice_maker_mode": "Ice maker mode",
+    "CL_CF_SD_smart_delay": "Smart Delay",
+    "CL_CF_SD_settings_subtitle": "Appliance will use off-peak hours when using delay mode.",
+    "CL_CF_SD_add_zone": "Add Zone",
+    "CL_CF_SD_new_tariff_zone": "New Tariff zones ##",
+    "CL_CF_SD_add_tariff": "Add Tariff",
+    "CL_CF_SD_duplicate": "Duplicate",
+    "CL_CF_SD_delete_zone": "Delete zone ",
+    "CL_CF_SD_tariff_zones_n": "Tariff zones ##",
+    "CL_CF_SD_tariff_n": "Tariff ##",
+    "CL_CF_SD_price": "Price",
+    "CL_CF_SD_off_peak_delay": "Off-peak delay",
+    "CL_CF_SD_delay_subtitle": "Appliance will use off-peak hours when using delay mode. \nIf using a combination with End at a precondition is applied.",
+    "CL_CF_SD_off_peak_delay_not_set": "Off-peak delay not set",
+    "CL_CF_SD_to_start_desc": "To start using the function you need to set it up in the settings.",
+    "CL_CF_SD_best": "Best",
+    "CL_CF_SD_delete_title": "Are you sure you want to delete ##?",
+    "CL_DV_OV_number_of_trays": "Number of trays",
+    "CL_DV_OV_baking_trays": "BAKING TRAYS",
+    "CL_DV_OV_1_tray": "1 tray",
+    "CL_DV_OV_2_trays": "2 trays",
+    "CL_DV_OV_multi_tray": "Multi tray",
+    "CL_DV_OV_multi": "Multi",
+    "CL_DV_RF_ice_off": "Ice OFF",
+    "CL_DV_RF_ion_preservation": "HI-NANO",
+    "CL_DV_RF_ai_energy": "AI Energy-Saving",
+    "CL_DV_RF_adaptive_temperature": "Self-Adaption",
+    "CL_DV_RF_normal_ice_making": "Ordinary Ice Making",
+    "CL_DV_RF_quick_ice_making": "Fast Ice Making",
+    "CL_DV_OV_extra_auto_programs": "Auto programs",
+    "CL_DV_OV_extra_auto_programs_desc": "A set of predefined automatic programs. Automatic programs helps you have the best result for the selected type of food or dish.",
+    "CL_DV_OV_extra_browning_programs": "Browning programs",
+    "CL_DV_OV_extra_browning_programs_desc": "Use specially developed browning programs. Set the desired browning level you wish as result for your dish.",
+    "CL_DV_OV_extra_cleaning": "Cleaning",
+    "CL_DV_OV_extra_cleaning_desc": "Step-by-step cleaning programs and instructions on how to keep your oven in optimal condition.",
+    "CL_DV_OV_extra_stage_cooking": "Stage cooking",
+    "CL_DV_OV_extra_stage_cooking_desc": "Create custom cooking programs, using up to 5 different stages.",
+    "CL_DV_OV_extra_defrost_desc": "A set of predefined programs to correctly thaw foods to ensure the quality after it has been frozen.",
+    "CL_DV_OV_extra_warming_desc": "Reheat previously cooked foods using  the predefined oven programs. Keeps maximum flavor and texture.",
+    "CL_DV_OV_extra_non_food": "Non food",
+    "CL_DV_OV_extra_non_food_desc": "Warm your plates, hot stones or sterilise bottles with special programs.",
+    "CL_DV_OV_extra_preserving_desc": "Preserving food helps to make your food last longer while maintaining nutritional value, texture and flavour.",
+    "CL_DV_OV_extra_fast_cool": "Fast cool",
+    "CL_DV_OV_extra_fast_cool_desc": "Cools down the oven as fast as possible after baking is finished or can be used to quickly continue other food preparation.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Celsius Grill Plate",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "A set of predefined oven programs specifically for baking with the Celsius Grill Plate.",
+    "CL_DV_OV_explore_all_extra": "EXPLORE ALL EXTRA’S",
+    "CL_DV_OV_extras": "Extra’s",
+    "CL_CF_CS_midi_hih_setup_1": "Turn on the device.",
+    "CL_CF_CS_midi_hih_setup_2": "Tap and hold the Wi-Fi icon for approximately 5 seconds until \"CSt\" appears.",
+    "CL_CF_CS_midi_hih_setup_3": "The device is now ready for connection for 5 minutes.\nClick NEXT to continue.",
+    "CL_CF_CS_midi_hih_pair_2": "Tap and hold the Wi-Fi icon for approximately 8 seconds until \"PAr\" appears.",
+    "CL_CF_CS_midi_hih_pair_3": "The device is now ready for pairing for 3 minutes.\nClick NEXT to continue.",
+    "ac_dimmer_air_des": "Turn off the LED to avoid the LED light disturbing your rest at night",
+    "e_verify_code": "Enter verification code",
+    "CL_CF_CS_td76_and_wm86_pair_4": "The device network is now open for connection for 3 minutes.\nClick NEXT to continue.",
+    "CL_DV_OV_24_set_language": "Set language",
+    "CL_DV_OV_24_time_date": "Time - Date",
+    "CL_CF_CS_dw005_cs_step1": "Make sure your Bluetooth is activated on your phone. Then turn on your appliance and tap the settings button.",
+    "CL_CF_CS_dw005_cs_step2": "Navigate to “Advanced settings” by pressing the arrow buttons. Press the settings button to enter.",
+    "CL_CF_CS_dw005_cs_step3": "Enter PIN code by pressing the following sequence of buttons: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "In the “Advanced settings” menu go to “WiFi” and press the settings button to enter. Inside the “Wifi” menu make sure WiFi is enabled. If not, press the settings button to enable.",
+    "CL_CF_CS_dw005_cs_step5": "While still in the “WiFi” menu go to “Connection setup” and press the settings button to activate. ",
+    "CL_CF_CS_dw005_cs_step6": "The device network is now open for connection for 5 minutes.\nClick NEXT to continue.",
+    "CL_CF_CS_dw005_pair_step1": "Make sure your Bluetooth is activated on your phone. Then turn on your appliance and tap the settings button.",
+    "CL_CF_CS_dw005_pair_step2": "Navigate to “Advanced settings” by pressing the arrow buttons. Press the settings button to enter.",
+    "CL_CF_CS_dw005_pair_step3": "Enter PIN code by pressing the following sequence of buttons: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "In the “Advanced settings” menu go to the “WiFi” menu and press the settings button to enter. Then go to “Add device” and press the settings button to activate.",
+    "CL_CF_CS_dw005_pair_step5": "The device network is now open for adding device for 3 minutes.\nClick NEXT to continue.",
+    "CL_DV_DW_save_date_invalid": "End month can not be smaller than start month!",
+    "CL_DV_OV_send_to_devices": "SEND TO DEVICES"
 }
