--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -619,7 +619,7 @@
     "cooling_config_wifi_step2": "A Wi-Fi engedélyezéséhez érintse meg az intenzív hűtés vagy fagyasztás gombot. A kijelzőn hamarosan megjelenik a „01” és automatikusan '02 értékre vált. A Wi-Fi készen áll a csatlakozásra.",
     "cooling_config_wifi_step3": "A nyíl gombok segítségével navigáljon az \"S\" kiválasztására. Hagyja jóvá az \"S\" kiválasztását az intenzív hűtés vagy fagyasztás gomb érintésével. Az intenzív hűtés vagy fagyasztás gomb villogni kezd; a készülék hálózata ezzel készen áll a csatlakozásra, 3 percen keresztül. A folytatáshoz kattintson a NEXT-re.",
     "cooling_config_wifi_step1_pair": "Állítsa a készüléket normál működés üzemmódba Érintse meg és tartsa benyomva a  Wi-Fi ikont  körülbelül 3 másodpercig. A Wi-Fi ikon villogni kezd és a kijelzőn a \"O' jelenik meg. Ezzel belépett a hálózati csatlakozás menübe.",
-    "cooling_config_wifi_step2_pair": "A nyíl gombok segítségével navigáljon a \"P\" kiválasztására. Hagyja jóvá a \"P\" kiválasztását az intenzív hűtés vagy fagyasztás gomb érintésével. Az intenzív hűtés vagy fagyasztás gomb villogni kezd; a készülék hálózata ezzel készen áll a csatlakozásra, 5 percen keresztül. A folytatáshoz kattintson a NEXT-re.",
+    "cooling_config_wifi_step2_pair": "Navigáljon a nyílbillentyűkkel, és válassza a „P” lehetőséget. Erősítse meg a \"P\"-t az intenzív hűtés/fagyasztás gomb megérintésével. Az intenzív hűtés/fagyasztás gomb villogni kezd. Az eszköz hálózata most 3 percig párosításra nyitva áll. A folytatáshoz kattintson a KÖVETKEZŐ gombra.",
     "dw_config_wifi_step1": "Kapcsolja BE a készüléket. A nyíl gombok segítségével navigáljon a beállításokra. Nyomja meg a MENÜ ikont a beállításokba való belépéshez.",
     "dw_config_wifi_step2": "A beállítások menüben keresse meg a HÁLÓZAT-ot és hagyja jóvá a menü gombbal a belépéshez.",
     "dw_config_wifi_step3": "Navigáljon a \"SoftAP\"\\ kiválasztásához és hagyja jóvá a menü gombbal. A  készülék hálózata ezzel készen áll a csatlakozásra, a következő 5 percben. A folytatáshoz kattintson a NEXT-re.",
@@ -1629,8 +1629,8 @@
     "STR_PROG_LOWER": "Alsó fél",
     "STR_PROG_UPPER": "Felső fele",
     "STR_PROG_ANTI_ODOUR": "Szagellenes",
-    "STR_PROG_SANI": "SANI",
-    "STR_PROG_SANI_QUICK": "SANI Gyors",
+    "STR_PROG_SANI": "Sani",
+    "STR_PROG_SANI_QUICK": "Sani Quick",
     "air_energy_hint": "Megjegyzés: Az energiafogyasztási statisztika funkció csak a mono típusú klímaberendezésekre érvényes, a többtípusú klímaberendezésekre nem.",
     "now": "Most",
     "washer_atag_delay_start_in": "Mosás késik. Kezdje be",
@@ -3415,6 +3415,7 @@
     "use_humidity": "A páratartalom szabályozásához használjon páratartalom dobozt",
     "same_day": "Ugyanazon a napon",
     "w_temp_set": "Milyen hőmérsékletre állítsam? (Milyen hőmérsékletre állítsam?)",
+    "asko": "ASKO",
     "eco_meter": "Eco mérő",
     "asko_eco_meter_desc": "A ## egy hasznos intelligens indikátor, amellyel meghatározhatja környezeti hatását a kiválasztott program és extra opciók alapján, ha energia-, víz- és mosószer-fogyasztásról van szó.",
     "wm86_autodose_desc": "Ahelyett, hogy küzdeni kezdene, hagyja, hogy a mosógép pontosan a megfelelő adag mosószert mérje ki. Az Auto Dose rendszerrel felszerelt mosógépeink a mosószer mennyiségét, szennyezettségét, vízkeménységét, programtípusát és hőmérsékletét mérik. Mindig tökéletes adagolás és nincs több túladagolás. Itt állíthatja be az automatikus adagolás alapértelmezett beállításait.",
@@ -4053,5 +4054,77 @@
     "CL_DV_OV_no_preheat": "Nincs előmelegítés",
     "CL_DV_OV_fast_preheat_desc": "A gyors előmelegítés a sütő előmelegítésének leggyorsabb módja. Körülbelül 7 percet vesz igénybe.",
     "CL_DV_OV_preheat_desc": "Az előmelegítés a legjobb módja a sütő előmelegítésének, figyelembe véve az ételt. Körülbelül 10 percet vesz igénybe.",
-    "CL_DV_OV_no_preheat_desc": "Nem mindig szükséges előmelegíteni a sütőt. Például bizonyos ételek melegítésére."
+    "CL_DV_OV_no_preheat_desc": "Nem mindig szükséges előmelegíteni a sütőt. Például bizonyos ételek melegítésére.",
+    "CL_DV_RF_ai_energy_mode_confirm_info": "Az AI Energy Navigation engedélyezése csökkentheti az energiafogyasztást, de lelassíthatja a hűtési sebességet is.",
+    "CL_DV_RF_ice_maker_mode": "Jégkészítő mód",
+    "CL_CF_SD_smart_delay": "Intelligens késleltetés",
+    "CL_CF_SD_settings_subtitle": "A készülék a csúcsidőn kívüli órákat használja a késleltetési mód használatakor.",
+    "CL_CF_SD_add_zone": "Zóna hozzáadása",
+    "CL_CF_SD_new_tariff_zone": "Új tarifazónák ##",
+    "CL_CF_SD_add_tariff": "Tarifa hozzáadása",
+    "CL_CF_SD_duplicate": "Másolat",
+    "CL_CF_SD_delete_zone": "Zóna törlése ",
+    "CL_CF_SD_tariff_zones_n": "Vámzónák ##",
+    "CL_CF_SD_tariff_n": "tarifa ##",
+    "CL_CF_SD_price": "Ár",
+    "CL_CF_SD_off_peak_delay": "Csúcsidőn kívüli késleltetés",
+    "CL_CF_SD_delay_subtitle": "A készülék a csúcsidőn kívüli órákat használja a késleltetési mód használatakor.\n Ha az Endrel kombinációt egy előfeltételnél alkalmazzuk.",
+    "CL_CF_SD_off_peak_delay_not_set": "Csúcsidőn kívüli késleltetés nincs beállítva",
+    "CL_CF_SD_to_start_desc": "A funkció használatának megkezdéséhez be kell állítania a beállításokban.",
+    "CL_CF_SD_best": "Legjobb",
+    "CL_CF_SD_delete_title": "Biztosan törli a ##-t?",
+    "CL_DV_OV_number_of_trays": "Tálcák száma",
+    "CL_DV_OV_baking_trays": "SÜTŐTÉPEK",
+    "CL_DV_OV_1_tray": "1 tálca",
+    "CL_DV_OV_2_trays": "2 tálca",
+    "CL_DV_OV_multi_tray": "Több tálca",
+    "CL_DV_OV_multi": "Több",
+    "CL_DV_RF_ice_off": "Jég KI",
+    "CL_DV_RF_ion_preservation": "HI-NANO",
+    "CL_DV_RF_ai_energy": "AI energiatakarékos",
+    "CL_DV_RF_adaptive_temperature": "Önalkalmazkodás",
+    "CL_DV_RF_normal_ice_making": "Közönséges jégkészítés",
+    "CL_DV_RF_quick_ice_making": "Gyors jégkészítés",
+    "CL_DV_OV_extra_auto_programs": "Automatikus programok",
+    "CL_DV_OV_extra_auto_programs_desc": "Előre meghatározott automatikus programok készlete. Az automatikus programok segítségével a legjobb eredményt érheti el a kiválasztott ételtípushoz vagy ételhez.",
+    "CL_DV_OV_extra_browning_programs": "Browning programok",
+    "CL_DV_OV_extra_browning_programs_desc": "Használjon speciálisan kifejlesztett barnító programokat. Állítsa be a kívánt barnulási szintet az ételhez.",
+    "CL_DV_OV_extra_cleaning": "Tisztítás",
+    "CL_DV_OV_extra_cleaning_desc": "Lépésről lépésre tisztító programok és utasítások a sütő optimális állapotának megőrzéséhez.",
+    "CL_DV_OV_extra_stage_cooking": "Színpadi főzés",
+    "CL_DV_OV_extra_stage_cooking_desc": "Hozzon létre egyedi főzési programokat akár 5 különböző fokozat használatával.",
+    "CL_DV_OV_extra_defrost_desc": "Előre definiált programok készlete az élelmiszerek megfelelő felolvasztásához, így biztosítva a minőséget a fagyasztás után.",
+    "CL_DV_OV_extra_warming_desc": "Melegítse újra a korábban elkészített ételeket az előre meghatározott sütőprogramokkal. Megőrzi a maximális ízt és állagot.",
+    "CL_DV_OV_extra_non_food": "Nem élelmiszer",
+    "CL_DV_OV_extra_non_food_desc": "Melegítse fel tányérjait, forró köveket vagy sterilizálja az üvegeket speciális programokkal.",
+    "CL_DV_OV_extra_preserving_desc": "Az élelmiszerek tartósítása segít megőrizni az étel tartósságát, miközben megőrzi a tápértéket, az állagot és az ízt.",
+    "CL_DV_OV_extra_fast_cool": "Gyors hűtés",
+    "CL_DV_OV_extra_fast_cool_desc": "A sütés befejezése után a lehető leggyorsabban lehűti a sütőt, vagy más ételkészítés gyors folytatására is használható.",
+    "CL_DV_OV_extra_celsius_grill_plate": "Celsius grill tányér",
+    "CL_DV_OV_extra_celsius_grill_plate_desc": "Előre definiált sütőprogramok készlete, kifejezetten a Celsius grilllappal történő sütéshez.",
+    "CL_DV_OV_explore_all_extra": "FEDEZZE FEL AZ ÖSSZES EXTRÁT",
+    "CL_DV_OV_extras": "Extra",
+    "CL_CF_CS_midi_hih_setup_1": "Kapcsolja be a készüléket.",
+    "CL_CF_CS_midi_hih_setup_2": "Érintse meg és tartsa lenyomva a Wi-Fi ikont körülbelül 5 másodpercig, amíg a „CSt” meg nem jelenik.",
+    "CL_CF_CS_midi_hih_setup_3": "A készülék most 5 percig készen áll a csatlakozásra.\n A folytatáshoz kattintson a KÖVETKEZŐ gombra.",
+    "CL_CF_CS_midi_hih_pair_2": "Érintse meg és tartsa lenyomva a Wi-Fi ikont körülbelül 8 másodpercig, amíg a „PAr” meg nem jelenik.",
+    "CL_CF_CS_midi_hih_pair_3": "A készülék most 3 percig készen áll a párosításra.\n A folytatáshoz kattintson a KÖVETKEZŐ gombra.",
+    "ac_dimmer_air_des": "Kapcsolja ki a LED-et, hogy ne zavarja az éjszakai pihenést",
+    "e_verify_code": "Írja be az ellenőrző kódot",
+    "CL_CF_CS_td76_and_wm86_pair_4": "Az eszköz hálózata most már 3 percig nyitva áll a csatlakozásra.\n A folytatáshoz kattintson a KÖVETKEZŐ gombra.",
+    "CL_DV_OV_24_set_language": "Nyelv beállítása",
+    "CL_DV_OV_24_time_date": "Idő – Dátum",
+    "CL_CF_CS_dw005_cs_step1": "Győződjön meg arról, hogy a Bluetooth be van kapcsolva a telefonon. Ezután kapcsolja be a készüléket, és érintse meg a beállítások gombot.",
+    "CL_CF_CS_dw005_cs_step2": "A nyílgombok megnyomásával lépjen a „Speciális beállítások” elemre. Nyomja meg a beállítások gombot a belépéshez.",
+    "CL_CF_CS_dw005_cs_step3": "Írja be a PIN kódot a következő gombok megnyomásával: I, II, I, III.",
+    "CL_CF_CS_dw005_cs_step4": "A „Speciális beállítások” menüben lépjen a „WiFi” elemre, és a belépéshez nyomja meg a beállítások gombot. A „Wifi” menüben ellenőrizze, hogy a WiFi engedélyezve van-e. Ha nem, nyomja meg a beállítások gombot az engedélyezéshez.",
+    "CL_CF_CS_dw005_cs_step5": "Még mindig a „WiFi” menüben lépjen a „Kapcsolat beállítása” menüpontra, és nyomja meg a beállítások gombot az aktiváláshoz. ",
+    "CL_CF_CS_dw005_cs_step6": "Az eszköz hálózata most már 5 percig nyitva áll a csatlakozásra.\n A folytatáshoz kattintson a KÖVETKEZŐ gombra.",
+    "CL_CF_CS_dw005_pair_step1": "Győződjön meg arról, hogy a Bluetooth be van kapcsolva a telefonon. Ezután kapcsolja be a készüléket, és érintse meg a beállítások gombot.",
+    "CL_CF_CS_dw005_pair_step2": "A nyílgombok megnyomásával lépjen a „Speciális beállítások” elemre. Nyomja meg a beállítások gombot a belépéshez.",
+    "CL_CF_CS_dw005_pair_step3": "Írja be a PIN kódot a következő gombok megnyomásával: I, II, I, III.",
+    "CL_CF_CS_dw005_pair_step4": "A „Speciális beállítások” menüben lépjen a „WiFi” menübe, és nyomja meg a beállítások gombot a belépéshez. Ezután lépjen az „Eszköz hozzáadása” elemre, és nyomja meg a beállítások gombot az aktiváláshoz.",
+    "CL_CF_CS_dw005_pair_step5": "Az eszközhálózat most 3 percre készen áll az eszköz hozzáadására.\n A folytatáshoz kattintson a KÖVETKEZŐ gombra.",
+    "CL_DV_DW_save_date_invalid": "A záró hónap nem lehet kisebb, mint a kezdő hónap!",
+    "CL_DV_OV_send_to_devices": "KÜLDÉS ESZKÖZÖKRE"
 }
